--- a/docs/journal/20170110.md
+++ b/docs/journal/20170110.md
@@ -2,7 +2,51 @@
 
 ## 概要
 
-2017-01-10の作業内容をまとめています。
+2017-01-10の作業内容をまとめています。このジャーナルでは、プロジェクトのDockerコンテナ環境の初期セットアップに関する作業を記録しています。
+
+## Docker環境構成図
+
+```plantuml
+@startuml "Baukis-Kai Docker環境構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(docker_env, "Docker環境") {
+    Container(web, "Webアプリケーション", "Ruby on Rails", "顧客管理システム")
+    ContainerDb(db, "データベース", "MySQL", "アプリケーションデータ")
+    Container(proxy, "リバースプロキシ", "Nginx", "静的ファイル配信・リクエスト転送")
+}
+
+Rel(developer, web, "開発")
+Rel(web, db, "データ操作", "ActiveRecord")
+Rel(proxy, web, "リクエスト転送", "HTTP")
+Rel_U(developer, proxy, "アクセス", "HTTP")
+
+@enduml
+```
+
+## 作業内容
+
+### Dockerコンテナ環境の構築
+
+アプリケーションの開発・実行環境を統一し、環境構築の手間を削減するため、Docker環境を導入しました。これにより、開発者の環境に依存せず、一貫した環境でアプリケーションを開発・実行できるようになります。
+
+#### 変更点の概要
+
+1. Dockerfileの作成
+   - Ruby 2.4ベースのイメージを使用
+   - 必要なパッケージのインストール
+   - アプリケーションの依存関係のセットアップ
+
+2. docker-compose.ymlの作成
+   - Webアプリケーションコンテナの設定
+   - MySQLデータベースコンテナの設定
+   - Nginxプロキシコンテナの設定
+   - コンテナ間の依存関係の定義
+
+3. READMEの更新
+   - Docker環境のセットアップ手順の追加
 
 ## コミット: c8234a0
 
@@ -50,16 +94,16 @@ index 567bfe4..3c0f78e 100644
 @@ -20,6 +20,12 @@ vagrant up
  vagrant ssh
  ```
- 
+
 +### Dockerのセットアップ
 +```
 +cd /vagrant/
 +docker-compose build
 +```
 +
- 
+
  ## アプリケーション開発
- 
+
 diff --git a/docker-compose.yml b/docker-compose.yml
 new file mode 100644
 index 0000000..52da61d
@@ -137,7 +181,7 @@ index a1c0839..567bfe4 100644
 --- a/README.md
 +++ b/README.md
 @@ -14,6 +14,12 @@ Baukis 改
- 
+
  # 構成 #
  ## アプリケーション環境構築
 +### Vagarntのセットアップ
@@ -146,9 +190,9 @@ index a1c0839..567bfe4 100644
 +vagrant ssh
 +```
 +
- 
+
  ## アプリケーション開発
- 
+
 diff --git a/Vagrantfile b/Vagrantfile
 new file mode 100644
 index 0000000..70088df
@@ -214,11 +258,11 @@ index 7db80e4..a1c0839 100644
 -# README
 +Baukis 改
 +===================
- 
+
 -This README would normally document whatever steps are necessary to get the
 -application up and running.
 +# 目的 #
- 
+
 -Things you may want to cover:
 +# 前提 #
 +| ソフトウェア   | バージョン   | 備考        |
@@ -228,20 +272,20 @@ index 7db80e4..a1c0839 100644
 +| vagrant        |1.8.7    |             |
 +| docker         |1.12.5    |             |
 +| docker-compose |1.8.0    |             |
- 
+
 -* Ruby version
 +# 構成 #
 +## アプリケーション環境構築
- 
+
 -* System dependencies
 +## アプリケーション開発
- 
+
 -* Configuration
 +## アプリケーション配置
- 
+
 -* Database creation
 +# 参照 #
- 
+
 -* Database initialization
 -
 -* How to run the test suite
@@ -2222,4 +2266,3 @@ index 0000000..e69de29
 ' NewClass --> ExistingClass
 @enduml
 ```
-
