--- a/docs/journal/20170114.md
+++ b/docs/journal/20170114.md
@@ -2,7 +2,104 @@
 
 ## 概要
 
-2017-01-14の作業内容をまとめています。
+2017-01-14の作業内容をまとめています。このジャーナルでは、アプリケーションのビジュアルデザインとフロントエンド実装に関する作業を記録しています。
+
+## アプリケーション構造図
+
+```plantuml
+@startuml "Baukis-Kai アプリケーション構造"
+!include <C4/C4_Container>
+
+Person(user, "ユーザー", "システム利用者")
+
+System_Boundary(app, "Baukis-Kai アプリケーション") {
+    Container(staff_interface, "職員インターフェース", "Rails", "職員向け機能")
+    Container(admin_interface, "管理者インターフェース", "Rails", "管理者向け機能")
+    Container(customer_interface, "顧客インターフェース", "Rails", "顧客向け機能")
+
+    Container(controllers, "コントローラ", "Ruby", "リクエスト処理")
+    Container(views, "ビュー", "ERB", "画面表示")
+    Container(helpers, "ヘルパー", "Ruby", "表示ロジック")
+    Container(assets, "アセット", "SCSS/JS", "スタイルとインタラクション")
+}
+
+Rel(user, staff_interface, "利用", "HTTP")
+Rel(user, admin_interface, "利用", "HTTP")
+Rel(user, customer_interface, "利用", "HTTP")
+
+Rel(staff_interface, controllers, "リクエスト処理")
+Rel(admin_interface, controllers, "リクエスト処理")
+Rel(customer_interface, controllers, "リクエスト処理")
+
+Rel(controllers, views, "レンダリング")
+Rel(views, helpers, "利用")
+Rel(views, assets, "利用")
+
+@enduml
+```
+
+## 作業内容
+
+### ビジュアルデザインの実装
+
+アプリケーションのビジュアルデザインを実装するため、ルーティング設定、コントローラ作成、ビューテンプレート作成、スタイルシート設定などを行いました。これにより、職員・管理者・顧客それぞれのインターフェースの基本的な見た目が整いました。
+
+#### 変更点の概要
+
+1. ルーティングとコントローラの設定
+   - 3つの名前空間（staff, admin, customer）の設定
+   - 各名前空間のトップページコントローラとアクションの作成
+
+2. ビューテンプレートの作成
+   - 各インターフェースのトップページテンプレート
+   - 共通レイアウトとパーシャル（ヘッダー・フッター）
+   - ヘルパーメソッドによるタイトル表示
+
+3. スタイルシートの設定
+   - SCSS/Sassの導入
+   - インターフェースごとのスタイルシート切り替え
+   - 色と寸法の変数化
+
+### フロントエンド構造
+
+```plantuml
+@startuml "Baukis-Kai フロントエンド構造"
+package "アセット" {
+    package "スタイルシート" {
+        [staff.css] --> [staff/layout.css.scss]
+        [staff.css] --> [staff/container.css.scss]
+        [staff/layout.css.scss] --> [staff/_colors.css.scss]
+        [staff/layout.css.scss] --> [staff/_dimensions.css.scss]
+        [staff/container.css.scss] --> [staff/_colors.css.scss]
+        [staff/container.css.scss] --> [staff/_dimensions.css.scss]
+    }
+
+    package "JavaScript" {
+        [application.js]
+    }
+}
+
+package "ビュー" {
+    [layouts/staff.html.erb] --> [shared/_header.html.erb]
+    [layouts/staff.html.erb] --> [shared/_footer.html.erb]
+    [layouts/staff.html.erb] ..> [staff.css] : 読み込み
+    [layouts/staff.html.erb] ..> [application.js] : 読み込み
+    [staff/top/index.html.erb] ..> [layouts/staff.html.erb] : 使用
+}
+
+package "ヘルパー" {
+    [application_helper.rb] ..> [layouts/staff.html.erb] : 利用される
+}
+
+package "コントローラ" {
+    [staff/top_controller.rb] ..> [staff/top/index.html.erb] : レンダリング
+}
+
+package "ルーティング" {
+    [routes.rb] ..> [staff/top_controller.rb] : ルーティング
+}
+@enduml
+```
 
 ## コミット: 9dfbc1a
 
@@ -58,7 +155,7 @@ index d638edf..901cb2a 100644
 @@ -1,11 +1,12 @@
  @import "colors";
 +@import "dimensions";
- 
+
  div.wrapper {
    div.container {
      h1 {
@@ -77,7 +174,7 @@ index 19e9e46..3682fa0 100644
 @@ -1,4 +1,5 @@
  @import "colors";
 +@import "dimensions";
- 
+
  html, body {
    margin: 0;
 @@ -10,11 +11,11 @@ div.wrapper {
@@ -414,7 +511,7 @@ index 22b35e1..3746378 100644
 @@ -290,5 +290,8 @@ DEPENDENCIES
    web-console (>= 3.3.0)
    yard
- 
+
 +RUBY VERSION
 +   ruby 2.4.0p0
 +
@@ -503,7 +600,7 @@ index 65895dc..5790280 100644
 +    <%= stylesheet_link_tag    'staff', media: 'all', 'data-turbolinks-track': 'reload' %>
      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
    </head>
- 
+
 diff --git a/baukis-kai.iml b/baukis-kai.iml
 index e1c054c..1808fb8 100644
 --- a/baukis-kai.iml
@@ -733,7 +830,7 @@ index 01ef3e6..9bc9783 100644
 --- a/config/initializers/assets.rb
 +++ b/config/initializers/assets.rb
 @@ -8,4 +8,4 @@ Rails.application.config.assets.version = '1.0'
- 
+
  # Precompile additional assets.
  # application.js, application.css, and all non-JS/CSS in app/assets folder are already added.
 -# Rails.application.config.assets.precompile += %w( search.js )
@@ -781,7 +878,7 @@ index 7c65ac3..4cc0dcd 100644
 @@ -90,6 +90,16 @@ git push heroku master
  + 部分テンプレート
  + ヘルパーメソッドの定義
- 
+
 +#### Sass/SCSS
 ++ アセットパイプライン
 ++ Sass/SCSSとは
@@ -828,7 +925,7 @@ index 218c068..7c65ac3 100644
  ===================
 -[![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt) 
 +[![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt)
- 
+
  # 目的 #
  [実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)をRails5での実装及びフロント部分にモダンCSS設計(BEM)を組み込む
 @@ -41,7 +41,7 @@ Baukis 改
@@ -934,7 +1031,7 @@ index 3986591..729a430 100644
 +++ b/app/views/layouts/application.html.erb
 @@ -9,6 +9,12 @@
    </head>
- 
+
    <body>
 -    <%= yield %>
 +    <div class="wrapper">
@@ -1175,4 +1272,3 @@ index a0fc0b4..218c068 100644
  ### ユーザー認証
 
 ```
-
