--- a/docs/journal/20170116.md
+++ b/docs/journal/20170116.md
@@ -2,7 +2,56 @@
 
 ## 概要
 
-2017-01-16の作業内容をまとめています。
+2017-01-16の作業内容をまとめています。このジャーナルでは、フロントエンドフレームワークの導入とモダンCSS設計（BEM）の実装に関する作業を記録しています。
+
+## フロントエンド構成図
+
+```plantuml
+@startuml "Baukis-Kai フロントエンド構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "フロントエンド開発者")
+
+System_Boundary(frontend, "フロントエンド構成") {
+    Container(bootstrap, "Bootstrap", "CSS/JSフレームワーク", "レスポンシブデザイン")
+    Container(bem, "BEM", "CSS設計手法", "Block-Element-Modifier")
+
+    Container(scss, "SCSS", "CSSプリプロセッサ", "変数・ネスト・ミックスイン")
+    Container(js, "JavaScript", "フロントエンド処理", "インタラクション")
+
+    Container(components, "コンポーネント", "再利用可能なUI部品", "ヘッダー・フッター・フォームなど")
+    Container(layouts, "レイアウト", "ページ構造", "グリッドシステム")
+}
+
+Rel(developer, bootstrap, "利用")
+Rel(developer, bem, "適用")
+Rel(bootstrap, scss, "実装")
+Rel(bootstrap, js, "実装")
+Rel(bem, components, "構造化")
+Rel(bootstrap, layouts, "構築")
+Rel(scss, components, "スタイル定義")
+Rel(js, components, "機能追加")
+
+@enduml
+```
+
+## 作業内容
+
+### Bootstrapの導入とBEM設計の適用
+
+フロントエンド開発の効率化と一貫性を確保するため、Bootstrapフレームワークを導入し、BEM（Block-Element-Modifier）設計手法を適用しました。これにより、保守性の高いCSSコードとレスポンシブなUIを実現しています。
+
+#### 変更点の概要
+
+1. Bootstrapの導入
+   - bootstrap-sassとbootstrap_formのGem追加
+   - JavaScriptとSCSSの設定
+   - カスタマイズ用SCSSファイルの作成
+
+2. BEM設計の適用
+   - コンポーネントベースのSCSS構造
+   - Block、Element、Modifierの命名規則の適用
+   - SCSSファイルの整理と構造化
 
 ## コミット: b512963
 
@@ -169,7 +218,7 @@ index 02d93af..8e0ff1d 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -63,7 +63,9 @@
- 
+
  //font-awesome
  @import "font-awesome";
 -
@@ -268,7 +317,7 @@ index 1c180af..1dba71a 100644
 @@ -1,7 +1,6 @@
  <% @title = '職員トップページ' %>
  <h1><%= @title %></h1>
- 
+
 -
  <div class="ImageSlide Section">
    <ul id="Slide" class="ImageSlide__main">
@@ -281,7 +330,7 @@ index 1c180af..1dba71a 100644
 +        <div class="EntryPanel__foot"><%= link_to('READ MORE',staff_campaign_index_url,class:"button") %></div>
        </div>
      </div>
- 
+
 @@ -51,7 +50,7 @@
          <div class="EntryPanel__body">
            今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
@@ -296,7 +345,7 @@ index 1c180af..1dba71a 100644
      </div>
    </div>
 +</section>
- 
+
 -  <section class="Section l-column">
 -    <div class="Section__head">
 -      <h2 class="sectionLabel">News</h2>
@@ -351,7 +400,7 @@ index 1c180af..1dba71a 100644
 +    </li>
 +  </ol>
  </section>
- 
+
  <div class="l-column u-mt60px u-mb100px">
 @@ -148,4 +147,4 @@
        <%= image_tag('top/top_banner_2.jpg', class:'l-fitImg', alt:'Dummy banner') %>
@@ -451,7 +500,7 @@ index cd2af85..5ff7e11 100644
 +// Reset
 +// ===========================
  @import "./lib/sanitize";
- 
+
  :root, html, body {
 @@ -19,4 +24,4 @@ a {
  a:hover {
@@ -777,7 +826,7 @@ index be59a6b..0880b2c 100644
      flex-direction: column;
    }
  }
- 
+
 +
  .SpMenu {
    @include mq-sp {
@@ -906,7 +955,7 @@ index f277178..4ca79c0 100644
 @@ -25,6 +26,7 @@
    }
  }
- 
+
 +// ロゴ
  .logo {
    display: inline-block;
@@ -1051,7 +1100,7 @@ index 942bff5..28f311a 100644
 -  font-weight: normal;
 -  font-size: 34px;
 -}
- 
+
 -//記事の中見出し
 -.articleLabelM {
 -  padding: 40px 0 20px;
@@ -1083,7 +1132,7 @@ index 942bff5..28f311a 100644
 +    flex-basis: 100%;
    }
  }
- 
+
 -.l-main {
 -  flex: 0 2 auto;
 -  margin: 0 $space-unit;
@@ -1123,7 +1172,7 @@ index f8d93f1..7538487 100644
 @@ -10,7 +16,7 @@
    }
  }
- 
+
 -//リスト
 +// リスト
  .textList {
@@ -1132,7 +1181,7 @@ index f8d93f1..7538487 100644
 @@ -19,7 +25,7 @@
    }
  }
- 
+
 -//サムネイル付きのアイテム
 +// サムネイル付きのアイテム
  .ThumbnailItem {
@@ -1333,9 +1382,9 @@ index ec7aaf4..02d93af 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -71,6 +71,8 @@
- 
+
  @import "./pages/campaign";
- 
+
 +@import "./pages/article";
 +
  // ===========================
@@ -1594,13 +1643,13 @@ index 0bc16a4..ec7aaf4 100644
 @@ -58,6 +58,9 @@
  // おしらせ一覧
  @import "./components/newsList";
- 
+
 +// フォーム
 +@import "./components/form";
 +
  //font-awesome
  @import "font-awesome";
- 
+
 diff --git a/app/controllers/staff/campaign_controller.rb b/app/controllers/staff/campaign_controller.rb
 index fc13aa9..8ed36b0 100644
 --- a/app/controllers/staff/campaign_controller.rb
@@ -1648,7 +1697,7 @@ index 8c661b4..cd671b9 100644
      get 'campaign/index'
 +    get 'campaign_submit', to: 'campaign#submit'
    end
- 
+
    namespace :admin do
 
 ```
@@ -1700,7 +1749,7 @@ index 4811499..0bc16a4 100644
 @@ -66,6 +66,8 @@
  // ===========================
  @import "./pages/index";
- 
+
 +@import "./pages/campaign";
 +
  // ===========================
@@ -1764,7 +1813,7 @@ index 4aba120..ecf30b4 100644
 @@ -23,6 +23,7 @@
    </div>
  </div>
- 
+
 +
  <section class="Section l-column">
    <div class="Section__head">
@@ -2034,7 +2083,7 @@ index de42cfb..8c661b4 100644
      root 'top#index'
 +    get 'campaign/index'
    end
- 
+
    namespace :admin do
 
 ```
@@ -2126,7 +2175,7 @@ index e46d703..ffd10d2 100644
 +++ b/app/assets/javascripts/main.js
 @@ -1,5 +1,27 @@
  /* main.js */
- 
+
 +/* メニュー */
 +(function(){
 +    function toggle(targetDOM, _className, callback) {
@@ -2490,7 +2539,7 @@ index 8aa72f1..68b8185 100644
 +  <title><%= document_title %></title>
 +  <%= csrf_meta_tags %>
 +</head>
- 
+
 -  <body>
 -    <div id="wrapper">
 -      <%= render 'shared/header' %>
@@ -2664,7 +2713,7 @@ index b47a24b..4811499 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -60,10 +60,17 @@
- 
+
  //font-awesome
  @import "font-awesome";
 +
@@ -2672,7 +2721,7 @@ index b47a24b..4811499 100644
  // Pages
  // ===========================
  @import "./pages/index";
- 
+
 +// ===========================
 +// Utils
 +// ===========================
@@ -2702,7 +2751,7 @@ index 4463fe4..864a6dd 100644
 @@ -139,7 +139,7 @@
    </section>
  </section>
- 
+
 -<div class="l-column">
 +<div class="l-column u-mt60px u-mb100px">
    <div class="l-row">
@@ -2915,7 +2964,7 @@ index a3a27c9..b47a24b 100644
  @import "./base/variables";
 +@import "./base/mixins";
  @import "./base/reset";
- 
+
  // ===========================
 diff --git a/app/views/shared/_header.html.erb b/app/views/shared/_header.html.erb
 index 824585b..260d38f 100644
@@ -3117,7 +3166,7 @@ index d6db270..a3a27c9 100644
 @@ -33,6 +33,9 @@
  // セクション分け
  @import "./components/common/section";
- 
+
 +// SNS
 +@import "./components/common/sns";
 +
@@ -3127,7 +3176,7 @@ index d6db270..a3a27c9 100644
 @@ -50,6 +53,8 @@
  // おしらせ一覧
  @import "./components/newsList";
- 
+
 +//font-awesome
 +@import "font-awesome";
  // ===========================
@@ -3168,7 +3217,7 @@ index 32da682..7e44e86 100644
 @@ -1,6 +1,32 @@
  <% @title = '職員トップページ' %>
  <h1><%= @title %></h1>
- 
+
 +
 +<div class="ImageSlide Section">
 +  <ul id="Slide" class="ImageSlide__main">
@@ -3284,7 +3333,7 @@ index daff4eb..d6db270 100644
 +//----------------------------
 +// ヘッダー
  @import "./components/common/header";
- 
+
  // メニュー
  @import "./components/common/menu";
 +
@@ -3328,7 +3377,7 @@ index daff4eb..d6db270 100644
 +// Pages
 +// ===========================
 +@import "./pages/index";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -3453,7 +3502,7 @@ index c9a0f84..daff4eb 100644
  @import "./components/newsList";
 +// フッター
 +@import "./components/common/footer";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -3551,7 +3600,7 @@ index 8828b6a..c9a0f84 100644
  @import "components/iconPanel";
 +// おしらせ一覧
 +@import "./components/newsList";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -3562,7 +3611,7 @@ index 65d1ae3..32da682 100644
 @@ -1,31 +1,6 @@
  <% @title = '職員トップページ' %>
  <h1><%= @title %></h1>
- 
+
 -<div class="ImageSlide Section">
 -  <ul id="Slide" class="ImageSlide__main">
 -    <li class="ImageSlide__item js-slide-item">
@@ -3594,7 +3643,7 @@ index 65d1ae3..32da682 100644
 @@ -56,8 +31,6 @@
    </div>
  </section>
- 
+
 -
 -
  <section class="Section">
@@ -3709,7 +3758,7 @@ index 24992b5..8828b6a 100644
  @import "pages/index";
 +// アイコンパネル
 +@import "components/iconPanel";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -3719,8 +3768,8 @@ index b7e02ae..65d1ae3 100644
 +++ b/app/views/staff/top/index.html.erb
 @@ -57,9 +57,10 @@
  </section>
- 
- 
+
+
 +
  <section class="Section">
    <h2 class="sectionLabel l-column">Content</h2>
@@ -3809,7 +3858,7 @@ index 96feba5..24992b5 100644
  @import "components/overlayPanel";
 +// Indexページ
 +@import "pages/index";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -3958,7 +4007,7 @@ index 34e2ea5..96feba5 100644
  @import "components/parts/labels";
 +// オーバーレイパネル
 +@import "components/overlayPanel";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -3969,7 +4018,7 @@ index 293e7b6..d967ca8 100644
 @@ -56,6 +56,25 @@
    </div>
  </section>
- 
+
 +
  <section class="Section">
    <h2 class="sectionLabel l-column">Content</h2>
@@ -4076,7 +4125,7 @@ index 4d7a3cf..34e2ea5 100644
  @import "./components/common/section";
 +// ラベル
 +@import "components/parts/labels";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -4086,7 +4135,7 @@ index 6850873..293e7b6 100644
 +++ b/app/views/staff/top/index.html.erb
 @@ -57,5 +57,5 @@
  </section>
- 
+
  <section class="Section">
 -
 +  <h2 class="sectionLabel l-column">Content</h2>
@@ -6351,7 +6400,7 @@ index 128740f..4d7a3cf 100644
  // カルーセル
  @import "components/imageSlide";
 +@import "./components/common/section";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -6362,7 +6411,7 @@ index 8d5a22b..dc1b8da 100644
 @@ -1,32 +1,32 @@
  <% @title = '職員トップページ' %>
  <h1><%= @title %></h1>
- 
+
 -<div class="ImageSlide">
 +<div class="ImageSlide Section">
    <ul id="Slide" class="ImageSlide__main">
@@ -6394,7 +6443,7 @@ index 8d5a22b..dc1b8da 100644
 +    <span class="ImageSlide__dot js-slide-point">image3</span>
    </div>
  </div>
- 
+
 -<section class="l-column">
 +<section class="Section l-column">
    <div class="l-row">
@@ -6493,7 +6542,7 @@ index 2aee186..8d5a22b 100644
 +    <span class="ImageSlide__dot">image3</span>
    </div>
  </div>
- 
+
 @@ -51,4 +54,4 @@
        </div>
      </div>
@@ -6727,7 +6776,7 @@ index 662cb0b..128740f 100644
  @import "components/parts/layouts";
 +// カルーセル
 +@import "components/imageSlide";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -6877,7 +6926,7 @@ index b3bac9e..549cdcf 100644
 -      <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
      </div>
 -  </div>
- 
+
 -  <div class="EntryPanel">
 -    <div class="EntryPanel__sub">
 -      <%= image_tag('top/entry2.jpg',class: 'EntryPanel__thumb' , width: '275' , height: '250') %>
@@ -6940,7 +6989,7 @@ index 69f4d38..662cb0b 100644
  @import "./components/parts/buttons";
 +// レイアウト
 +@import "components/parts/layouts";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -6993,11 +7042,11 @@ index 72be512..740be11 100644
 @@ -1,526 +1,294 @@
 -/*! sanitize.css v4.0.0 | CC0 License | github.com/10up/sanitize.css */
 +@charset 'utf-8';
- 
+
 -/* Display definitions
 -   ========================================================================== */
 +/*! sanitize.css v3.2.0 | CC0 1.0 Public Domain | github.com/10up/sanitize.css */
- 
+
 -/**
 - * Add the correct display in IE 9-.
 - * 1. Add the correct display in Edge, IE, and Firefox.
@@ -7035,13 +7084,13 @@ index 72be512..740be11 100644
 +/*
 + * Normalization
   */
- 
+
  audio:not([controls]) {
 -	display: none;
 -	height: 0;
 +  display: none; /* Chrome 44-, iOS 8+, Safari 9+ */
  }
- 
+
 -/**
 - * Add the correct display in IE 10-.
 - * 1. Add the correct display in IE.
@@ -7069,7 +7118,7 @@ index 72be512..740be11 100644
 +  -webkit-appearance: button; /* iOS 8+ */
 +  overflow: visible; /* Internet Explorer 11- */
  }
- 
+
 -/**
 - * 1. Add text decoration inheritance in all browsers (opinionated).
 - * 2. Add vertical alignment inheritence in all browsers (opinionated).
@@ -7082,7 +7131,7 @@ index 72be512..740be11 100644
 +details {
 +  display: block; /* Edge 12+, Firefox 40+, Internet Explorer 11-, Windows Phone 8.1+ */
  }
- 
+
 -/**
 - * 1. Add border box sizing in all browsers (opinionated).
 - * 2. Add the default cursor in all browsers (opinionated).
@@ -7101,7 +7150,7 @@ index 72be512..740be11 100644
 +  overflow-y: scroll; /* All browsers without overlaying scrollbars */
 +  -webkit-text-size-adjust: 100%; /* iOS 8+ */
  }
- 
+
 -/* Sections (https://www.w3.org/TR/html5/sections.html)
 -   ========================================================================== */
 -
@@ -7114,7 +7163,7 @@ index 72be512..740be11 100644
 +input {
 +  -webkit-border-radius: 0 /* iOS 8+ */
  }
- 
+
 -/**
 - * Correct the font sizes and margins on `h1` elements within
 - * `section` and `article` contexts in Chrome, Firefox, and Safari.
@@ -7128,7 +7177,7 @@ index 72be512..740be11 100644
 +input[type="submit"] {
 +  -webkit-appearance: button;/* iOS 8+ */
  }
- 
+
 -/* Grouping content (https://www.w3.org/TR/html5/grouping-content.html)
 -   ========================================================================== */
 -
@@ -7146,7 +7195,7 @@ index 72be512..740be11 100644
 +input[type="number"] {
 +  width: auto;/* Firefox 36+ */
  }
- 
+
 -/**
 - * 1. Correct the height in Firefox.
 - * 2. Add visible overflow in Edge and IE.
@@ -7158,7 +7207,7 @@ index 72be512..740be11 100644
 +input[type="search"] {
 +  -webkit-appearance: textfield;/* Chrome 45+, Safari 9+ */
  }
- 
+
 -/**
 - * Remove the list style on navigation lists in all browsers (opinionated).
 - */
@@ -7170,7 +7219,7 @@ index 72be512..740be11 100644
 +input[type="search"]::-webkit-search-decoration {
 +  -webkit-appearance: none;/* Chrome 45+, Safari 9+ */
  }
- 
+
 -/* Text-level semantics
 -   ========================================================================== */
 -
@@ -7185,7 +7234,7 @@ index 72be512..740be11 100644
 +main {
 +  display: block; /* Android 4.3-, Internet Explorer 11-, Windows Phone 8.1+ */
  }
- 
+
 -/**
 - * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
 - */
@@ -7196,7 +7245,7 @@ index 72be512..740be11 100644
 +pre {
 +  overflow: auto; /* Internet Explorer 11- */
  }
- 
+
 -/**
 - * Add the correct font weight in Chrome, Edge, and Safari.
 - */
@@ -7207,7 +7256,7 @@ index 72be512..740be11 100644
 +progress {
 +  display: inline-block; /* Internet Explorer 11-, Windows Phone 8.1+ */
  }
- 
+
 -/**
 - * Add the correct font style in Android 4.3-.
 - */
@@ -7217,7 +7266,7 @@ index 72be512..740be11 100644
 +small {
 +  font-size: 75%; /* All browsers */
  }
- 
+
 -/**
 - * Add the correct colors in IE 9-.
 - */
@@ -7228,7 +7277,7 @@ index 72be512..740be11 100644
 +summary {
 +  display: block; /* Firefox 40+, Internet Explorer 11-, Windows Phone 8.1+ */
  }
- 
+
 -/**
 - * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 - */
@@ -7238,7 +7287,7 @@ index 72be512..740be11 100644
 +svg:not(:root) {
 +  overflow: hidden; /* Internet Explorer 11- */
  }
- 
+
 -/**
 - * Correct the font size in all browsers.
 - */
@@ -7248,7 +7297,7 @@ index 72be512..740be11 100644
 +template {
 +  display: none; /* Android 4.3-, Internet Explorer 11-, iOS 7-, Safari 7-, Windows Phone 8.1+ */
  }
- 
+
 -/**
 - * Change the positioning on superscript and subscript elements
 - * in all browsers (opinionated).
@@ -7268,19 +7317,19 @@ index 72be512..740be11 100644
 +textarea {
 +  overflow: auto; /* Edge 12+, Internet Explorer 11- */
  }
- 
+
 -sup {
 -	top: -.5em;
 +[hidden] {
 +  display: none; /* Internet Explorer 10- */
  }
- 
+
  /*
 - * Remove the text shadow on text selections (opinionated).
 - * 1. Restore the coloring undone by defining the text shadow (opinionated).
 + * Universal inheritance
   */
- 
+
 -::-moz-selection {
 -	background-color: #b3d4fc; /* 1 */
 -	color: #000000; /* 1 */
@@ -7290,7 +7339,7 @@ index 72be512..740be11 100644
 +:after {
 +  box-sizing: inherit;
  }
- 
+
 -::selection {
 -	background-color: #b3d4fc; /* 1 */
 -	color: #000000; /* 1 */
@@ -7299,7 +7348,7 @@ index 72be512..740be11 100644
 +  font-size: inherit;
 +  line-height: inherit;
  }
- 
+
 -/* Embedded content (https://www.w3.org/TR/html5/embedded-content-0.html)
 -   ========================================================================== */
 -
@@ -7319,21 +7368,21 @@ index 72be512..740be11 100644
 +  text-decoration: inherit;
 +  vertical-align: inherit;
  }
- 
+
 -/**
 - * Remove the border on images inside links in IE 10-.
 - */
- 
+
 -img {
 -	border-style: none;
 -}
- 
+
 -/**
 - * Change the fill color to match the text color in all browsers (opinionated).
 +/*
 + * Opinionated defaults
   */
- 
+
 -svg {
 -	fill: currentColor;
 +/* specify the border style and width of all elements */
@@ -7344,12 +7393,12 @@ index 72be512..740be11 100644
 +  border-style: solid;
 +  border-width: 0;
  }
- 
+
 -/**
 - * Hide the overflow in IE.
 - */
 +/* specify the core styles of all elements */
- 
+
 -svg:not(:root) {
 -	overflow: hidden;
 +* {
@@ -7357,7 +7406,7 @@ index 72be512..740be11 100644
 +  margin: 0;
 +  padding: 0;
  }
- 
+
 -/* Links (https://www.w3.org/TR/html5/links.html#links)
 -   ========================================================================== */
 -
@@ -7366,7 +7415,7 @@ index 72be512..740be11 100644
 - * 2. Remove the gaps in underlines in iOS 8+ and Safari 8+.
 - */
 +/* specify the root styles of the document */
- 
+
 -a {
 -	background-color: transparent; /* 1 */
 -	-webkit-text-decoration-skip: objects; /* 2 */
@@ -7377,22 +7426,22 @@ index 72be512..740be11 100644
 +  cursor: default;
 +  font: 100%/1.5 sans-serif;
  }
- 
+
 -/**
 - * Remove the outline when hovering in all browsers (opinionated.
 - */
 +/* specify the text decoration of anchors */
- 
+
 -:hover {
 -	outline-width: 0;
 +a {
 +  text-decoration: none;
  }
- 
+
 -/* Tabular data (https://www.w3.org/TR/html5/tabular-data.html)
 -   ========================================================================== */
 +/* specify the alignment of media elements */
- 
+
 -/*
 - * Remove border spacing in all browsers (opinionated).
 - */
@@ -7408,7 +7457,7 @@ index 72be512..740be11 100644
 +video {
 +  vertical-align: middle;
  }
- 
+
 -/* transform-style:  (https://www.w3.org/TR/html5/forms.html)
 -   ========================================================================== */
 -
@@ -7417,7 +7466,7 @@ index 72be512..740be11 100644
 - * 3. Remove the margin in Firefox and Safari.
 - */
 +/* specify the background color of form elements */
- 
+
  button,
  input,
  select,
@@ -7429,7 +7478,7 @@ index 72be512..740be11 100644
 -	margin: 0; /* 3 */
 +  background-color: transparent;
  }
- 
+
 -/**
 - * Correct the overflow in IE.
 - * 1. Correct the overflow in Edge.
@@ -7445,7 +7494,7 @@ index 72be512..740be11 100644
 - * 1. Remove the inheritance in Firefox.
 - */
 +/* specify the inherited color and font of form elements */
- 
+
  button,
 -select { /* 1 */
 -	text-transform: none;
@@ -7457,14 +7506,14 @@ index 72be512..740be11 100644
 +  font-style: inherit;
 +  font-weight: inherit;
  }
- 
+
 -/**
 - * 1. Prevent the WebKit bug where (2) destroys native `audio` and `video`
 - *    controls in Android 4.
 - * 2. Correct the inability to style clickable types in iOS and Safari.
 - */
 +/* specify the minimum height of form elements */
- 
+
  button,
 -html [type="button"], /* 1 */
 +[type="button"],
@@ -7489,12 +7538,12 @@ index 72be512..740be11 100644
 +textarea {
 +  min-height: 1.5em;
  }
- 
+
 -/**
 - * Remove the inner border and padding in Firefox.
 - */
 +/* specify the font family of code elements */
- 
+
 -::-moz-focus-inner {
 -	border-style: none;
 -	padding: 0;
@@ -7504,24 +7553,24 @@ index 72be512..740be11 100644
 +samp {
 +  font-family: monospace, monospace;
  }
- 
+
 -/**
 - * Correct the focus styles unset by the previous rule.
 - */
 +/* specify the list style of nav lists */
- 
+
 -:-moz-focusring {
 -	outline: 1px dotted ButtonText;
 +nav ol,
 +nav ul {
 +  list-style: none;
  }
- 
+
 -/**
 - * Correct the border, margin, and padding in all browsers.
 - */
 +/* specify the standard appearance of selects */
- 
+
 -fieldset {
 -	border: 1px solid #c0c0c0;
 -	margin: 0 2px;
@@ -7530,7 +7579,7 @@ index 72be512..740be11 100644
 +  -moz-appearance: none;    /* Firefox 40+ */
 +  -webkit-appearance: none /* Chrome 45+ */
  }
- 
+
 -/**
 - * 1. Correct the text wrapping in Edge and IE.
 - * 2. Remove the padding so developers are not caught out when they zero out
@@ -7545,7 +7594,7 @@ index 72be512..740be11 100644
 +select::-ms-expand {
 +  display: none;/* Edge 12+, Internet Explorer 11- */
  }
- 
+
 -/**
 - * 1. Remove the vertical scrollbar in IE.
 - * 2. Change the resize direction on textareas in all browsers (opinionated).
@@ -7557,12 +7606,12 @@ index 72be512..740be11 100644
 +select::-ms-value {
 +  color: currentColor;/* Edge 12+, Internet Explorer 11- */
  }
- 
+
 -/**
 - * Remove the padding in IE 10-.
 - */
 +/* specify the border styling of tables */
- 
+
 -[type="checkbox"],
 -[type="radio"] {
 -	padding: 0;
@@ -7570,25 +7619,25 @@ index 72be512..740be11 100644
 +  border-collapse: collapse;
 +  border-spacing: 0;
  }
- 
+
 -/**
 - * Correct the cursor style on increment and decrement buttons in Chrome.
 - */
 +/* specify the resizability of textareas */
- 
+
 -::-webkit-inner-spin-button,
 -::-webkit-outer-spin-button {
 -	height: auto;
 +textarea {
 +  resize: vertical;
  }
- 
+
 -/**
 - * 1. Correct the odd appearance in Chrome and Safari.
 - * 2. Correct the outline style in Safari.
 - */
 +/* specify the background color, font color, and drop shadow of text selections */
- 
+
 -[type="search"] {
 -	-webkit-appearance: textfield; /* 1 */
 -	outline-offset: -2px; /* 2 */
@@ -7597,7 +7646,7 @@ index 72be512..740be11 100644
 +  color: #ffffff;
 +  text-shadow: none;
  }
- 
+
 -/**
 - * Remove the inner padding and cancel buttons in Chrome and Safari for OS X.
 - */
@@ -7610,36 +7659,36 @@ index 72be512..740be11 100644
 +  color: #ffffff;
 +  text-shadow: none;
  }
- 
+
 -/**
 - * Correct the text style on placeholders in Chrome, Edge, and Safari.
 - */
 +/* specify the progress cursor of updating elements */
- 
+
 -::-webkit-input-placeholder {
 -	color: inherit;
 -	opacity: .54;
 +[aria-busy="true"] {
 +  cursor: progress;
  }
- 
+
 -/**
 - * 1. Correct the inability to style clickable types in iOS and Safari.
 - * 2. Change font properties to `inherit` in Safari.
 - */
 +/* specify the pointer cursor of trigger elements */
- 
+
 -::-webkit-file-upload-button {
 -	-webkit-appearance: button; /* 1 */
 -	font: inherit; /* 2 */
 +[aria-controls] {
 +  cursor: pointer;
  }
- 
+
 -/* WAI-ARIA (https://www.w3.org/TR/html5/dom.html#wai-aria)
 -   ========================================================================== */
 +/* specify the unstyled cursor of disabled, not-editable, or otherwise inoperable elements */
- 
+
 -/**
 - * Change the cursor on busy elements (opinionated).
 - */
@@ -7649,12 +7698,12 @@ index 72be512..740be11 100644
 +[aria-disabled] {
 +  cursor: default;
  }
- 
+
 -/*
 - * Change the cursor on control elements (opinionated).
 - */
 +/* specify the style of visually hidden yet accessible elements */
- 
+
 -[aria-controls] {
 -	cursor: pointer;
 +[hidden][aria-hidden="false"] {
@@ -7662,7 +7711,7 @@ index 72be512..740be11 100644
 +  display: inherit;
 +  position: absolute
  }
- 
+
 -/*
 - * Change the cursor on disabled, not-editable, or otherwise
 - * inoperable elements (opinionated).
@@ -7673,7 +7722,7 @@ index 72be512..740be11 100644
 +[hidden][aria-hidden="false"]:focus {
 +  clip: auto;
  }
- 
+
 -/* User interaction (https://www.w3.org/TR/html5/editing.html)
 -   ========================================================================== */
 -
@@ -7682,7 +7731,7 @@ index 72be512..740be11 100644
 - * 1. Remove the tapping delay in IE 10.
 - */
 +/* remove delay from tapping on clickable elements */
- 
+
  a,
  area,
 @@ -530,20 +298,8 @@ label,
@@ -7704,7 +7753,7 @@ index 72be512..740be11 100644
 +  -ms-touch-action: manipulation;
 +  touch-action: manipulation;
  }
- 
+
 -[hidden][aria-hidden="false"]:focus {
 -	clip: auto;
 -}
@@ -7756,7 +7805,7 @@ index 0876055..69f4d38 100644
  @import "./components/entryPanel";
 +// ボタン
 +@import "./components/parts/buttons";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -7772,7 +7821,7 @@ index 2833ce7..b3bac9e 100644
 +      <div class="EntryPanel__foot"><a href="#" class="button">READ MORE</a></div>
      </div>
    </div>
- 
+
 @@ -23,7 +23,7 @@
        <div class="EntryPanel__body">
          今話題の人気店、Macaron'n Thingsのパンケーキを使ったコラボ商品のセットメニューを販売中。
@@ -7844,12 +7893,12 @@ index 8d700ee..0876055 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -4,6 +4,8 @@
- 
+
  // メニュー
  @import "./components/common/menu";
 +// ブログ抜粋
 +@import "./components/entryPanel";
- 
+
  //@import "pages/staff/container";
  //@import "pages/staff/layout";
 \ No newline at end of file
@@ -8061,7 +8110,7 @@ index 7bfc486..831bb5c 100644
 +++ b/app/views/layouts/staff.html.erb
 @@ -8,11 +8,9 @@
    </head>
- 
+
    <body>
 -    <div class="wrapper">
 +    <div id="wrapper">
@@ -8853,13 +8902,13 @@ index 3994f4a..7bfc486 100644
 +    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
    </head>
- 
+
 diff --git a/config/initializers/assets.rb b/config/initializers/assets.rb
 index 9bc9783..2256f19 100644
 --- a/config/initializers/assets.rb
 +++ b/config/initializers/assets.rb
 @@ -8,4 +8,4 @@ Rails.application.config.assets.version = '1.0'
- 
+
  # Precompile additional assets.
  # application.js, application.css, and all non-JS/CSS in app/assets folder are already added.
 -Rails.application.config.assets.precompile += %w( staff.css )
@@ -8955,7 +9004,7 @@ index 9ba7022..843e4b6 100644
 @@ -100,6 +100,214 @@ git push heroku master
  + 寸法を変数で表現する
  + アセットのプリコンパイル
- 
+
 +## よいCSSを書くためのHTMLマークアップ-CSS設計-
 +### デザインカンプを確認し、CSS設計を理解しよう
 +#### コンポーネント
@@ -9168,7 +9217,7 @@ index 9ba7022..843e4b6 100644
  ### ユーザー認証
  ### ユーザー認証
 @@ -119,3 +327,5 @@ git push heroku master
- 
+
  # 参照 #
  + [実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)
 ++ [現場のプロが本気で教える HTML/CSSデザイン講義](https://www.amazon.co.jp/dp/B01K3SZGR0/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1)
@@ -9213,7 +9262,7 @@ index a71748d..94f25f0 100644
 +  gem 'guard-livereload', '~> 2.5', require: false
 +  gem 'rack-livereload'
  end
- 
+
  group :test do
 diff --git a/Gemfile.lock b/Gemfile.lock
 index 3746378..0bcaa5d 100644
@@ -9662,9 +9711,8 @@ index 4cc0dcd..9ba7022 100644
  ===================
 -[![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt)
 +[![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![Code Climate](https://codeclimate.com/github/k2works/baukis-kai/badges/gpa.svg)](https://codeclimate.com/github/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt)
- 
+
  # 目的 #
  [実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)をRails5での実装及びフロント部分にモダンCSS設計(BEM)を組み込む
 
 ```
-
