--- a/docs/journal/20170117.md
+++ b/docs/journal/20170117.md
@@ -2,7 +2,56 @@
 
 ## 概要
 
-2017-01-17の作業内容をまとめています。
+2017-01-17の作業内容をまとめています。このジャーナルでは、エラーハンドリング機能の実装に関する作業を記録しています。主に例外処理の実装とエラーページの設定を行いました。
+
+## エラーハンドリング構成図
+
+```plantuml
+@startuml "Baukis-Kai エラーハンドリング構成"
+!include <C4/C4_Component>
+
+Person(user, "ユーザー", "システム利用者")
+
+System_Boundary(app, "Baukis-Kai アプリケーション") {
+    Component(app_controller, "ApplicationController", "基底コントローラ", "すべてのコントローラの親クラス")
+    Component(error_handler, "エラーハンドラ", "例外処理", "rescue_from メソッド")
+    Component(error_view, "エラービュー", "エラーページ", "errors/internal_server_error")
+
+    Component(staff_controller, "Staff::BaseController", "職員用コントローラ", "職員機能の基底クラス")
+    Component(admin_controller, "Admin::BaseController", "管理者用コントローラ", "管理者機能の基底クラス")
+    Component(customer_controller, "Customer::BaseController", "顧客用コントローラ", "顧客機能の基底クラス")
+}
+
+Rel(user, app, "リクエスト送信")
+Rel(app_controller, error_handler, "例外発生時に処理を委譲")
+Rel(error_handler, error_view, "エラーページをレンダリング")
+Rel(staff_controller, app_controller, "継承")
+Rel(admin_controller, app_controller, "継承")
+Rel(customer_controller, app_controller, "継承")
+
+@enduml
+```
+
+## 作業内容
+
+### 例外処理の実装
+
+アプリケーション全体でのエラーハンドリングを改善するため、ApplicationControllerに例外処理機能を追加しました。これにより、予期しない例外が発生した場合でも、ユーザーに適切なエラーページを表示できるようになります。
+
+#### 変更点の概要
+
+1. ApplicationControllerに例外処理を追加
+   - `rescue_from Exception` で全ての例外を捕捉
+   - `rescue500` メソッドで500エラーページをレンダリング
+
+2. エラーページの準備
+   - 500 Internal Server Error ページの設定
+
+#### 技術的詳細
+
+- `rescue_from` メソッドを使用して例外を捕捉
+- 例外オブジェクトをビューに渡して詳細情報を表示（開発環境のみ）
+- HTTPステータスコード500を適切に設定
 
 ## コミット: c0bcc9c
 
@@ -31,11 +80,11 @@ index efa11f8..6931138 100644
 --- a/README.md
 +++ b/README.md
 @@ -316,6 +316,7 @@ git push heroku master
- 
+
  #### 500 Internal Server Error
  + 準備作業
 ++ 例外の捕捉
- 
+
  #### 403 Forbidden
  #### 404 Not Found
 diff --git a/app/controllers/application_controller.rb b/app/controllers/application_controller.rb
@@ -43,9 +92,9 @@ index 1b2c7e6..3ab4c91 100644
 --- a/app/controllers/application_controller.rb
 +++ b/app/controllers/application_controller.rb
 @@ -3,6 +3,8 @@ class ApplicationController < ActionController::Base
- 
+
    layout :set_layout
- 
+
 +  rescue_from Exception, with: :rescue500
 +
    private
@@ -62,18 +111,6 @@ index 1b2c7e6..3ab4c91 100644
 +  end
  end
 
-```
-
-### 構造変更
-
-```plantuml
-@startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
-@enduml
 ```
 
 ## コミット: 5cf831a
@@ -110,7 +147,7 @@ index 5ddd4e2..05ce7cf 100644
 @@ -106,3 +106,4 @@ bower.json
  # Ignore Byebug command history file.
  .byebug_history
- 
+
 +public/assets/
 \ No newline at end of file
 diff --git a/Gemfile b/Gemfile
@@ -154,7 +191,7 @@ index 7dee61a..efa11f8 100644
 --- a/README.md
 +++ b/README.md
 @@ -310,7 +310,13 @@ git push heroku master
- 
+
  ### エラーページ
  #### 例外処理の基礎知識
 ++ 例外とは
@@ -197,11 +234,11 @@ index a736dfc..3af0b22 100644
 +++ b/config/environments/production.rb
 @@ -2,7 +2,7 @@ Rails.application.configure do
    # Settings specified here will take precedence over those in config/application.rb.
- 
+
    # Code is not reloaded between requests.
 -  config.cache_classes = true
 +  config.cache_classes = false
- 
+
    # Eager load code on boot. This eager loads most of Rails and
    # your application in memory, allowing both threaded web servers
 
@@ -246,7 +283,7 @@ index e23f947..7dee61a 100644
 +++ b/README.md
 @@ -309,6 +309,12 @@ git push heroku master
  + コンポーネントベースで作ると、ページ固有のCSSを少し追加するだけでほぼ１ページ作れる
- 
+
  ### エラーページ
 +#### 例外処理の基礎知識
 +#### 500 Internal Server Error
@@ -296,7 +333,7 @@ index 72eca03..13563ca 100644
 @@ -42,6 +42,18 @@ $very_light_gray: #fafafa;
  $dark_cyan: #448888;
  $very_dark_cyan: darken($dark_cyan, 25%);
- 
+
 +/* マゼンタ系 */
 +
 +$dark_magenta: #884488;
@@ -310,7 +347,7 @@ index 72eca03..13563ca 100644
 +$green: #00cc00;
 +
  /* マージン、パディング */
- 
+
  $narrow: 2px;
 diff --git a/app/assets/stylesheets/main.scss b/app/assets/stylesheets/main.scss
 index aa747a9..898bc2b 100644
@@ -319,7 +356,7 @@ index aa747a9..898bc2b 100644
 @@ -77,6 +77,9 @@
  // Staff
  @import "pages/staff";
- 
+
 +// Administrator
 +@import "pages/admin";
 +
@@ -397,7 +434,7 @@ index 6f42c51..d28a135 100644
 @@ -53,6 +53,6 @@ html, body {
    }
  }
- 
+
 -div.wrapper {
 -
 +.logo--staff {
@@ -433,7 +470,7 @@ index e37a09c..b1f43ad 100644
 +++ b/app/views/layouts/admin.html.erb
 @@ -9,7 +9,7 @@
  </head>
- 
+
  <body>
 -<div id="wrapper" class="SpMenu__wrapper">
 +<div id="wrapper" class="SpMenu__wrapper Admin__wrapper">
@@ -580,7 +617,7 @@ index 36b286c..aa747a9 100644
  @import "pages/customer/campaign";
 -
  @import "pages/customer/article";
- 
+
 +// Staff
 +@import "pages/staff";
 +
@@ -770,7 +807,7 @@ index fd979b6..0b928de 100644
 +++ b/app/views/layouts/staff.html.erb
 @@ -9,7 +9,7 @@
  </head>
- 
+
  <body>
 -<div id="wrapper" class="SpMenu__wrapper">
 +<div id="wrapper" class="SpMenu__wrapper Staff__wrapper">
@@ -878,13 +915,13 @@ index 8e0ff1d..36b286c 100644
  // ===========================
 -@import "./pages/index";
 +@import "pages/customer/index";
- 
+
 -@import "./pages/campaign";
 +@import "pages/customer/campaign";
- 
+
 -@import "./pages/article";
 +@import "pages/customer/article";
- 
+
  // ===========================
  // Utils
 diff --git a/app/assets/stylesheets/pages/_article.scss b/app/assets/stylesheets/pages/customer/_article.scss
@@ -1499,10 +1536,10 @@ index 29cbde1..504e1e9 100644
 -    get 'campaign/index'
 -    get 'campaign_submit', to: 'campaign#submit'
    end
- 
+
    namespace :admin do
 @@ -12,5 +9,8 @@ Rails.application.routes.draw do
- 
+
    namespace :customer do
      root 'top#index'
 +    get 'article/index'
@@ -1524,4 +1561,3 @@ index 29cbde1..504e1e9 100644
 ' NewClass --> ExistingClass
 @enduml
 ```
-
