--- a/docs/journal/20170118.md
+++ b/docs/journal/20170118.md
@@ -2,7 +2,58 @@
 
 ## 概要
 
-2017-01-18の作業内容をまとめています。
+2017-01-18の作業内容をまとめています。このジャーナルでは、ユーザー認証機能の実装に関する作業を記録しています。主にログイン・ログアウト機能のルーティングとリンクの設置を行いました。
+
+## ユーザー認証機能の構成図
+
+```plantuml
+@startuml "Baukis-Kai ユーザー認証機能"
+!include <C4/C4_Component>
+
+Person(staff, "職員", "システム利用者")
+
+System_Boundary(auth_system, "認証システム") {
+    Component(sessions_controller, "SessionsController", "コントローラ", "ログイン・ログアウト処理")
+    Component(staff_member, "StaffMember", "モデル", "職員情報")
+    Component(base_controller, "Staff::Base", "コントローラ", "職員用基底コントローラ")
+    Component(current_staff, "current_staff_member", "メソッド", "現在のログイン職員を取得")
+    Component(header, "ヘッダー", "ビュー", "ログイン・ログアウトリンク")
+}
+
+Rel(staff, header, "クリック")
+Rel(header, sessions_controller, "リクエスト")
+Rel(sessions_controller, staff_member, "認証")
+Rel(base_controller, current_staff, "利用")
+Rel(header, current_staff, "状態確認")
+
+@enduml
+```
+
+## 作業内容
+
+### ユーザー認証機能の実装
+
+ユーザー認証機能を実装するため、ログイン・ログアウト機能のルーティングとリンクの設置を行いました。これにより、職員がシステムにログインしてアクセス制限のある機能を利用できるようになります。
+
+#### 変更点の概要
+
+1. ルーティングの設定
+   - ログイン・ログアウト用のルートを追加
+   - RESTfulなリソース設計に基づいたルーティング
+
+2. ヘッダーへのリンク設置
+   - ログイン・ログアウトリンクをヘッダーに追加
+   - 現在のログイン状態に応じて表示を切り替え
+
+3. セッション管理
+   - `current_staff_member`メソッドの実装
+   - セッションを使用したユーザー状態の管理
+
+#### 技術的詳細
+
+- `current_staff_member`メソッドを使用してログイン状態を確認
+- ログイン・ログアウトリンクの条件分岐表示
+- CSSスタイルの調整によるヘッダーデザインの改善
 
 ## コミット: 04ebccc
 
@@ -36,7 +87,7 @@ index 4e8f3cb..50acaf7 100644
  + current_staff_memberメソッドの定義
  + ルーティングの決定
 ++ リンクの設置
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/assets/stylesheets/pages/_staff.scss b/app/assets/stylesheets/pages/_staff.scss
@@ -46,7 +97,7 @@ index d28a135..63ec54c 100644
 @@ -11,6 +11,19 @@ html, body {
    height: 100%;
  }
- 
+
 +.Header__head {
 +  text-align: left;
 +}
@@ -131,7 +182,7 @@ index 7f19c0c..4e8f3cb 100644
  + セッションとは
  + current_staff_memberメソッドの定義
 ++ ルーティングの決定
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/config/routes.rb b/config/routes.rb
@@ -158,7 +209,7 @@ index e26d28b..17026a1 100644
 +
  Rails.application.routes.draw do
    get 'errors/routing_error'
- 
+
    namespace :staff do
 -    root 'top#index'
 +    root   'top#index'
@@ -166,7 +217,7 @@ index e26d28b..17026a1 100644
 +    post   'session' => 'sessions#create', as: :session
 +    delete 'session' => 'sessions#destroy'
    end
- 
+
    namespace :admin do
 
 ```
@@ -199,11 +250,11 @@ index f703916..7f19c0c 100644
 --- a/README.md
 +++ b/README.md
 @@ -345,6 +345,7 @@ git push heroku master
- 
+
  #### セッション
  + セッションとは
 ++ current_staff_memberメソッドの定義
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/controllers/staff/base.rb b/app/controllers/staff/base.rb
@@ -276,10 +327,10 @@ index de625b1..f703916 100644
 +++ b/README.md
 @@ -344,6 +344,7 @@ git push heroku master
  + シードデータ投入
- 
+
  #### セッション
 ++ セッションとは
- 
+
  ### ユーザー認証
  ### ルーティング
 
@@ -317,9 +368,9 @@ index f6896d0..de625b1 100644
  + 索引用メールアドレス
  + ハッシュ関数
 ++ シードデータ投入
- 
+
  #### セッション
- 
+
 diff --git a/db/seed/development/staff_members.rb b/db/seed/development/staff_members.rb
 new file mode 100644
 index 0000000..7156a40
@@ -409,7 +460,7 @@ index b46c6fa..0ef0810 100644
  # Use ActiveModel has_secure_password
 -# gem 'bcrypt', '~> 3.1.7'
 +gem 'bcrypt', '~> 3.1.7'
- 
+
  # Use Capistrano for deployment
  # gem 'capistrano-rails', group: :development
 diff --git a/Gemfile.lock b/Gemfile.lock
@@ -425,7 +476,7 @@ index f553bc1..46d4a3a 100644
        coderay (>= 1.0.0)
        erubis (>= 2.6.6)
 @@ -294,6 +295,7 @@ PLATFORMS
- 
+
  DEPENDENCIES
    annotate
 +  bcrypt (~> 3.1.7)
@@ -441,9 +492,9 @@ index dadbfa0..f6896d0 100644
  + モデルの基礎知識
  + 索引用メールアドレス
 ++ ハッシュ関数
- 
+
  #### セッション
- 
+
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
 index 0910503..85c873d 100644
 --- a/app/models/staff_member.rb
@@ -479,7 +530,7 @@ index c26bb75..21f5c12 100644
 +++ b/spec/models/staff_member_spec.rb
 @@ -25,5 +25,20 @@
  require 'rails_helper'
- 
+
  RSpec.describe StaffMember, type: :model do
 -  pending "add some examples to (or delete) #{__FILE__}"
 +  describe '#password=' do
@@ -541,20 +592,20 @@ index 5e1ff05..dadbfa0 100644
 --- a/README.md
 +++ b/README.md
 @@ -339,6 +339,7 @@ git push heroku master
- 
+
  #### モデル
  + モデルの基礎知識
 ++ 索引用メールアドレス
- 
+
  #### セッション
- 
+
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
 index 409a66f..0910503 100644
 --- a/app/models/staff_member.rb
 +++ b/app/models/staff_member.rb
 @@ -23,4 +23,7 @@
  #
- 
+
  class StaffMember < ApplicationRecord
 +  before_validation do
 +    self.email_for_index = email.downcase if email
@@ -602,12 +653,12 @@ index 55fe13c..5e1ff05 100644
 +++ b/README.md
 @@ -338,6 +338,8 @@ git push heroku master
  + 主キー
- 
+
  #### モデル
 ++ モデルの基礎知識
 +
  #### セッション
- 
+
  ### ユーザー認証
 
 ```
@@ -642,7 +693,7 @@ index 0ee43f1..55fe13c 100644
  + マイグレーションスクリプト
  + マイグレーションの実行
 ++ 主キー
- 
+
  #### モデル
  #### セッション
 
@@ -684,7 +735,7 @@ index 3696688..0ee43f1 100644
  + 各種スケルトンの作成
  + マイグレーションスクリプト
 ++ マイグレーションの実行
- 
+
  #### モデル
  #### セッション
 @@ -358,4 +359,6 @@ git push heroku master
@@ -742,7 +793,7 @@ index b097f5f..0c508ef 100644
 -  host: 127.0.0.1
 +  url: postgres://postgres:password@127.0.0.1/baukis-kai_production
    port: 5432
- 
+
 diff --git a/db/schema.rb b/db/schema.rb
 index 52ab025..8209b42 100644
 --- a/db/schema.rb
@@ -750,7 +801,7 @@ index 52ab025..8209b42 100644
 @@ -10,6 +10,23 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 0) do
 +ActiveRecord::Schema.define(version: 20170118073759) do
 +
@@ -770,7 +821,7 @@ index 52ab025..8209b42 100644
 +    t.index ["email_for_index"], name: "index_staff_members_on_email_for_index", unique: true
 +    t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana"
 +  end
- 
+
  end
 diff --git a/lib/tasks/auto_annotate_models.rake b/lib/tasks/auto_annotate_models.rake
 new file mode 100644
@@ -843,7 +894,7 @@ index 4abdb4a..19592b2 100644
 +
  FactoryGirl.define do
    factory :staff_member do
-     
+
 diff --git a/spec/models/staff_member_spec.rb b/spec/models/staff_member_spec.rb
 index 290b09e..c26bb75 100644
 --- a/spec/models/staff_member_spec.rb
@@ -874,7 +925,7 @@ index 290b09e..c26bb75 100644
 +#
 +
  require 'rails_helper'
- 
+
  RSpec.describe StaffMember, type: :model do
 
 ```
@@ -922,7 +973,7 @@ index 0fe544d..3696688 100644
  #### マイグレーション
  + 各種スケルトンの作成
 ++ マイグレーションスクリプト
- 
+
  #### モデル
  #### セッション
 diff --git a/db/migrate/20170118073759_create_staff_members.rb b/db/migrate/20170118073759_create_staff_members.rb
@@ -945,7 +996,7 @@ index 26746d1..29f3bbc 100644
 +      t.date :end_date, comment: '終了日'
 +      t.boolean :suspended, null: false, default: false, comment: '停止フラグ'
 +
- 
+
        t.timestamps
      end
 +
@@ -986,14 +1037,14 @@ index f24bf6f..0fe544d 100644
 --- a/README.md
 +++ b/README.md
 @@ -332,6 +332,8 @@ git push heroku master
- 
+
  ### ユーザー認証(1)
  #### マイグレーション
 ++ 各種スケルトンの作成
 +
  #### モデル
  #### セッション
- 
+
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
 new file mode 100644
 index 0000000..415eafe
@@ -1079,9 +1130,9 @@ index a67d67c..f24bf6f 100644
 --- a/README.md
 +++ b/README.md
 @@ -330,7 +330,11 @@ git push heroku master
- 
+
  #### ActiveSupport::Concern
- 
+
 -### ユーザー認証
 +### ユーザー認証(1)
 +#### マイグレーション
@@ -1165,20 +1216,20 @@ index fb3280b..fb5507f 100644
 @@ -6,11 +6,7 @@ class ApplicationController < ActionController::Base
    class Forbidden < ActionController::ActionControllerError; end
    class IpAddressRejected < ActionController::ActionControllerError; end
- 
+
 -  rescue_from Exception, with: :rescue500
 -  rescue_from Forbidden, with: :rescue403
 -  rescue_from IpAddressRejected, with: :rescue403
 -  rescue_from ActionController::RoutingError, with: :rescue404
 -  rescue_from ActiveRecord::RecordNotFound, with: :rescue404
 +  include ErrorHandlers if Rails.env.production?
- 
+
    private
    def set_layout
 @@ -21,18 +17,4 @@ class ApplicationController < ActionController::Base
      end
    end
- 
+
 -  def rescue404(e)
 -    @exception = e
 -    render 'errors/not_found', status: 404
@@ -1235,11 +1286,11 @@ index 3af0b22..a736dfc 100644
 +++ b/config/environments/production.rb
 @@ -2,7 +2,7 @@ Rails.application.configure do
    # Settings specified here will take precedence over those in config/application.rb.
- 
+
    # Code is not reloaded between requests.
 -  config.cache_classes = false
 +  config.cache_classes = true
- 
+
    # Eager load code on boot. This eager loads most of Rails and
    # your application in memory, allowing both threaded web servers
 
@@ -1284,13 +1335,13 @@ index a7ad3fd..a67d67c 100644
 --- a/README.md
 +++ b/README.md
 @@ -326,6 +326,7 @@ git push heroku master
- 
+
  #### 404 Not Found
  + 例外ActionController::RoutingErrorの処理
 ++ 例外ActiveRecord::RecordNotFoundの処理
- 
+
  #### ActiveSupport::Concern
- 
+
 diff --git a/app/controllers/application_controller.rb b/app/controllers/application_controller.rb
 index 5ed5818..fb3280b 100644
 --- a/app/controllers/application_controller.rb
@@ -1300,7 +1351,7 @@ index 5ed5818..fb3280b 100644
    rescue_from IpAddressRejected, with: :rescue403
    rescue_from ActionController::RoutingError, with: :rescue404
 +  rescue_from ActiveRecord::RecordNotFound, with: :rescue404
- 
+
    private
    def set_layout
 
@@ -1353,12 +1404,12 @@ index 5d5c58a..a7ad3fd 100644
 +++ b/README.md
 @@ -325,6 +325,8 @@ git push heroku master
  + 動作の確認
- 
+
  #### 404 Not Found
 ++ 例外ActionController::RoutingErrorの処理
 +
  #### ActiveSupport::Concern
- 
+
  ### ユーザー認証
 diff --git a/app/assets/stylesheets/components/common/_errors.scss b/app/assets/stylesheets/components/common/_errors.scss
 index 1f3979c..47e7ec3 100644
@@ -1392,13 +1443,13 @@ index 17ad04c..5ed5818 100644
    rescue_from Forbidden, with: :rescue403
    rescue_from IpAddressRejected, with: :rescue403
 +  rescue_from ActionController::RoutingError, with: :rescue404
- 
+
    private
    def set_layout
 @@ -19,6 +20,11 @@ class ApplicationController < ActionController::Base
      end
    end
- 
+
 +  def rescue404(e)
 +    @exception = e
 +    render 'errors/not_found', status: 404
@@ -1515,7 +1566,7 @@ index 413988e..5d5c58a 100644
  + 例外の捕捉
  + ERBテンプレートの作成
 ++ 動作の確認
- 
+
  #### 404 Not Found
  #### ActiveSupport::Concern
 diff --git a/app/controllers/admin/top_controller.rb b/app/controllers/admin/top_controller.rb
@@ -1584,35 +1635,35 @@ index 4ca0c75..413988e 100644
 +++ b/README.md
 @@ -320,6 +320,9 @@ git push heroku master
  + ビジュアルデザイン
- 
+
  #### 403 Forbidden
 ++ 例外の捕捉
 ++ ERBテンプレートの作成
 +
  #### 404 Not Found
  #### ActiveSupport::Concern
- 
+
 diff --git a/app/controllers/application_controller.rb b/app/controllers/application_controller.rb
 index 3ab4c91..17ad04c 100644
 --- a/app/controllers/application_controller.rb
 +++ b/app/controllers/application_controller.rb
 @@ -3,7 +3,12 @@ class ApplicationController < ActionController::Base
- 
+
    layout :set_layout
- 
+
 +  class Forbidden < ActionController::ActionControllerError; end
 +  class IpAddressRejected < ActionController::ActionControllerError; end
 +
    rescue_from Exception, with: :rescue500
 +  rescue_from Forbidden, with: :rescue403
 +  rescue_from IpAddressRejected, with: :rescue403
- 
+
    private
    def set_layout
 @@ -14,6 +19,11 @@ class ApplicationController < ActionController::Base
      end
    end
- 
+
 +  def rescue403(e)
 +    @exception = e
 +    render 'errors/forbidden', status: 403
@@ -1690,7 +1741,7 @@ index 6931138..4ca0c75 100644
  + 準備作業
  + 例外の捕捉
 ++ ビジュアルデザイン
- 
+
  #### 403 Forbidden
  #### 404 Not Found
 diff --git a/app/assets/stylesheets/components/common/_errors.scss b/app/assets/stylesheets/components/common/_errors.scss
@@ -1727,7 +1778,7 @@ index 898bc2b..0d4f3b2 100644
 @@ -41,6 +41,9 @@
  // SNS
  @import "./components/common/sns";
- 
+
 +// エラー
 +@import "./components/common/errors";
 +
@@ -1770,4 +1821,3 @@ index 0000000..07fa14d
 ' NewClass --> ExistingClass
 @enduml
 ```
-
