--- a/docs/journal/20170120.md
+++ b/docs/journal/20170120.md
@@ -2,7 +2,60 @@
 
 ## 概要
 
-2017-01-20の作業内容をまとめています。
+2017-01-20の作業内容をまとめています。このジャーナルでは、ユーザー認証機能の拡張に関する作業を記録しています。主にログイン・ログアウト機能のフラッシュメッセージ表示とサービスオブジェクトの実装を行いました。
+
+## ユーザー認証機能の拡張構成図
+
+```plantuml
+@startuml "Baukis-Kai ユーザー認証拡張機能"
+!include <C4/C4_Component>
+
+Person(staff, "職員", "システム利用者")
+
+System_Boundary(auth_system, "認証システム") {
+    Component(sessions_controller, "SessionsController", "コントローラ", "ログイン・ログアウト処理")
+    Component(authenticator, "Staff::Authenticator", "サービスオブジェクト", "認証ロジック")
+    Component(login_form, "Staff::LoginForm", "フォームオブジェクト", "ログインフォーム")
+    Component(flash_message, "Flash", "メッセージ", "通知・警告表示")
+    Component(staff_member, "StaffMember", "モデル", "職員情報")
+    Component(header, "ヘッダー", "ビュー", "フラッシュメッセージ表示")
+}
+
+Rel(staff, sessions_controller, "ログイン/ログアウト")
+Rel(sessions_controller, authenticator, "認証依頼")
+Rel(authenticator, staff_member, "検証")
+Rel(sessions_controller, login_form, "利用")
+Rel(sessions_controller, flash_message, "メッセージ設定")
+Rel(flash_message, header, "表示")
+
+@enduml
+```
+
+## 作業内容
+
+### ユーザー認証機能の拡張
+
+ユーザー認証機能を拡張するため、ログイン・ログアウト後のフラッシュメッセージ表示機能と認証処理を行うサービスオブジェクトを実装しました。これにより、ユーザーに対して操作結果のフィードバックを提供し、認証ロジックをコントローラから分離することができました。
+
+#### 変更点の概要
+
+1. フラッシュメッセージの実装
+   - ログイン・ログアウト後のフラッシュメッセージ表示
+   - 成功・失敗時の異なるメッセージスタイル
+
+2. サービスオブジェクトの導入
+   - `Staff::Authenticator`クラスの実装
+   - 認証ロジックの分離と再利用性の向上
+
+3. フォームオブジェクトの実装
+   - `Staff::LoginForm`クラスの作成
+   - ログインフォームの入力値処理
+
+#### 技術的詳細
+
+- フラッシュメッセージ用のCSSスタイル定義
+- サービスオブジェクトによる認証処理のカプセル化
+- RSpecを使用したサービスオブジェクトのテスト実装
 
 ## コミット: ad31b26
 
@@ -33,13 +86,13 @@ index d66b2e0..6605555 100644
 --- a/README.md
 +++ b/README.md
 @@ -376,6 +376,7 @@ git push heroku master
- 
+
  #### ログイン・ログアウト後のメッセージ表示
  + フラッシュへの書き込み
 ++ メッセージの表示
- 
+
  #### 演習問題
- 
+
 diff --git a/app/assets/stylesheets/components/parts/_flash.scss b/app/assets/stylesheets/components/parts/_flash.scss
 new file mode 100644
 index 0000000..ab416bb
@@ -70,7 +123,7 @@ index bdbad80..c3e124a 100644
 @@ -27,6 +27,9 @@
  // フッター
  @import "./components/common/footer";
- 
+
 +// メッセージ
 +@import "./components/parts/flash";
 +
@@ -125,12 +178,12 @@ index 5c75cea..d66b2e0 100644
 +++ b/README.md
 @@ -375,6 +375,8 @@ git push heroku master
  + サービスオブジェクトのspecファイル
- 
+
  #### ログイン・ログアウト後のメッセージ表示
 ++ フラッシュへの書き込み
 +
  #### 演習問題
- 
+
  ### ルーティング
 diff --git a/app/controllers/staff/sessions_controller.rb b/app/controllers/staff/sessions_controller.rb
 index 0d35540..db17793 100644
@@ -147,13 +200,13 @@ index 0d35540..db17793 100644
        render action: 'new'
      end
    end
- 
+
    def destroy
      session.delete(:staff_member_id)
 +    flash.notice = 'ログアウトしました。'
      redirect_to :staff_root
    end
- 
+
 
 ```
 
@@ -197,11 +250,11 @@ index f56f71e..5c75cea 100644
 --- a/README.md
 +++ b/README.md
 @@ -372,6 +372,7 @@ git push heroku master
- 
+
  #### サービスオブジェクト
  + Staff::Authenticatorクラス
 ++ サービスオブジェクトのspecファイル
- 
+
  #### ログイン・ログアウト後のメッセージ表示
  #### 演習問題
 diff --git a/spec/factories/staff_members.rb b/spec/factories/staff_members.rb
@@ -209,7 +262,7 @@ index 19592b2..ce6d3bb 100644
 --- a/spec/factories/staff_members.rb
 +++ b/spec/factories/staff_members.rb
 @@ -24,6 +24,14 @@
- 
+
  FactoryGirl.define do
    factory :staff_member do
 -    
@@ -316,13 +369,13 @@ index 2550255..f56f71e 100644
 +++ b/README.md
 @@ -371,6 +371,8 @@ git push heroku master
  + スタイルシートの作成
- 
+
  #### サービスオブジェクト
 ++ Staff::Authenticatorクラス
 +
  #### ログイン・ログアウト後のメッセージ表示
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/sessions_controller.rb b/app/controllers/staff/sessions_controller.rb
 index 3280280..0d35540 100644
 --- a/app/controllers/staff/sessions_controller.rb
@@ -405,7 +458,7 @@ index 04a324c..2550255 100644
  + paramsオブジェクト
  + ログアウト機能の実装
 ++ スタイルシートの作成
- 
+
  #### サービスオブジェクト
  #### ログイン・ログアウト後のメッセージ表示
 diff --git a/app/assets/stylesheets/main.scss b/app/assets/stylesheets/main.scss
@@ -415,7 +468,7 @@ index 0d4f3b2..bdbad80 100644
 @@ -83,6 +83,9 @@
  // Administrator
  @import "pages/admin";
- 
+
 +// Login
 +@import "pages/login";
 +
@@ -533,7 +586,7 @@ index d7f863f..04a324c 100644
  + ログインフォームの作成
  + paramsオブジェクト
 ++ ログアウト機能の実装
- 
+
  #### サービスオブジェクト
  #### ログイン・ログアウト後のメッセージ表示
 diff --git a/app/controllers/staff/sessions_controller.rb b/app/controllers/staff/sessions_controller.rb
@@ -543,7 +596,7 @@ index 42c01e6..3280280 100644
 @@ -21,6 +21,11 @@ class Staff::SessionsController < Staff::Base
      end
    end
- 
+
 +  def destroy
 +    session.delete(:staff_member_id)
 +    redirect_to :staff_root
@@ -599,7 +652,7 @@ index c6ae8d6..d7f863f 100644
  + フォームオブジェクトとは
  + ログインフォームの作成
 ++ paramsオブジェクト
- 
+
  #### サービスオブジェクト
  #### ログイン・ログアウト後のメッセージ表示
 diff --git a/app/controllers/staff/sessions_controller.rb b/app/controllers/staff/sessions_controller.rb
@@ -694,7 +747,7 @@ index 60c2f16..c6ae8d6 100644
  + フォームオブジェクト
  + フォームオブジェクトとは
 ++ ログインフォームの作成
- 
+
  #### サービスオブジェクト
  #### ログイン・ログアウト後のメッセージ表示
 diff --git a/app/controllers/staff/sessions_controller.rb b/app/controllers/staff/sessions_controller.rb
@@ -793,7 +846,7 @@ index 2566d0c..60c2f16 100644
 --- a/README.md
 +++ b/README.md
 @@ -362,6 +362,10 @@ git push heroku master
- 
+
  ### ユーザー認証(2)
  #### フォームオブジェクト
 ++ フォームの基礎知識
@@ -846,7 +899,7 @@ index 8fcd2ec..2566d0c 100644
 @@ -360,7 +360,12 @@ git push heroku master
  + ルーティング追加
  + リンクの追加
- 
+
 -### ユーザー認証
 +### ユーザー認証(2)
 +#### フォームオブジェクト
@@ -892,7 +945,7 @@ index 9efbd39..8fcd2ec 100644
  + コントローラベースクラス作成
  + ルーティング追加
 ++ リンクの追加
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/assets/stylesheets/pages/_admin.scss b/app/assets/stylesheets/pages/_admin.scss
@@ -902,7 +955,7 @@ index 1cc4ad7..a44b621 100644
 @@ -11,6 +11,19 @@ html, body {
    height: 100%;
  }
- 
+
 +.Header__head {
 +  text-align: left;
 +}
@@ -969,7 +1022,7 @@ index f244fc3..9efbd39 100644
  + シードデータ作成
  + コントローラベースクラス作成
 ++ ルーティング追加
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/config/routes.rb b/config/routes.rb
@@ -987,14 +1040,14 @@ index 17026a1..59a0d54 100644
  #   customer_article_index GET    /customer/article/index(.:format)   customer/article#index
  #  customer_campaign_index GET    /customer/campaign/index(.:format)  customer/campaign#index
 @@ -27,6 +30,9 @@ Rails.application.routes.draw do
- 
+
    namespace :admin do
      root 'top#index'
 +    get    'login'   => 'sessions#new', as: :login
 +    post   'session' => 'sessions#create', as: :session
 +    delete 'session' => 'sessions#destroy'
    end
- 
+
    namespace :customer do
 
 ```
@@ -1031,7 +1084,7 @@ index f03ecee..f244fc3 100644
  + パスワードメソッド作成
  + シードデータ作成
 ++ コントローラベースクラス作成
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/controllers/admin/base.rb b/app/controllers/admin/base.rb
@@ -1109,7 +1162,7 @@ index ef7270f..f03ecee 100644
  + パスワードメソッドテスト作成
  + パスワードメソッド作成
 ++ シードデータ作成
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/db/seed/development/administrators.rb b/db/seed/development/administrators.rb
@@ -1128,7 +1181,7 @@ index 3549c1d..aa5909a 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,7 +6,7 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 -table_names = %w(staff_members)
@@ -1170,7 +1223,7 @@ index e5b3977..ef7270f 100644
  + コールバック追加
  + パスワードメソッドテスト作成
 ++ パスワードメソッド作成
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/models/administrator.rb b/app/models/administrator.rb
@@ -1180,7 +1233,7 @@ index 913908c..6ddd486 100644
 @@ -20,4 +20,11 @@ class Administrator < ApplicationRecord
      self.email_for_index = email.downcase if email
    end
- 
+
 +  def password=(raw_password)
 +    if raw_password.kind_of?(String)
 +      self.hashed_password = BCrypt::Password.create(raw_password)
@@ -1235,7 +1288,7 @@ index 1fdb467..e5b3977 100644
  + マイグレーション
  + コールバック追加
 ++ パスワードメソッドテスト作成
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/spec/models/administrator_spec.rb b/spec/models/administrator_spec.rb
@@ -1244,7 +1297,7 @@ index 8287e77..a03f296 100644
 +++ b/spec/models/administrator_spec.rb
 @@ -18,5 +18,20 @@
  require 'rails_helper'
- 
+
  RSpec.describe Administrator, type: :model do
 -  pending "add some examples to (or delete) #{__FILE__}"
 +  describe '#password=' do
@@ -1310,7 +1363,7 @@ index 386b877..1fdb467 100644
  + 管理者モデル作成
  + マイグレーション
 ++ コールバック追加
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/models/administrator.rb b/app/models/administrator.rb
@@ -1319,7 +1372,7 @@ index 7eea65d..913908c 100644
 +++ b/app/models/administrator.rb
 @@ -16,4 +16,8 @@
  #
- 
+
  class Administrator < ApplicationRecord
 +  before_validation do
 +    self.email_for_index = email.downcase if email
@@ -1372,11 +1425,11 @@ index 6d59274..386b877 100644
 --- a/README.md
 +++ b/README.md
 @@ -351,6 +351,7 @@ git push heroku master
- 
+
  #### 演習問題
  + 管理者モデル作成
 ++ マイグレーション
- 
+
  ### ユーザー認証
  ### ルーティング
 diff --git a/app/models/administrator.rb b/app/models/administrator.rb
@@ -1417,7 +1470,7 @@ index 29819ba..68a7747 100644
 +      t.string :hashed_password, comment: 'パスワード'
 +      t.boolean :suspended, null: false, default: false, comment: '停止フラグ'
 +
- 
+
        t.timestamps
      end
 +
@@ -1431,7 +1484,7 @@ index 8209b42..b5f43b8 100644
 @@ -10,7 +10,17 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170118073759) do
 +ActiveRecord::Schema.define(version: 20170120000741) do
 +
@@ -1444,7 +1497,7 @@ index 8209b42..b5f43b8 100644
 +    t.datetime "updated_at",                      null: false
 +    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true
 +  end
- 
+
    create_table "staff_members", force: :cascade do |t|
      t.string   "email",                            null: false
 diff --git a/spec/factories/administrators.rb b/spec/factories/administrators.rb
@@ -1471,7 +1524,7 @@ index c27d055..ee37bdc 100644
 +
  FactoryGirl.define do
    factory :administrator do
-     
+
 diff --git a/spec/models/administrator_spec.rb b/spec/models/administrator_spec.rb
 index da3b2ad..8287e77 100644
 --- a/spec/models/administrator_spec.rb
@@ -1495,7 +1548,7 @@ index da3b2ad..8287e77 100644
 +#
 +
  require 'rails_helper'
- 
+
  RSpec.describe Administrator, type: :model do
 
 ```
@@ -1544,7 +1597,7 @@ index 50acaf7..6d59274 100644
 @@ -349,6 +349,9 @@ git push heroku master
  + ルーティングの決定
  + リンクの設置
- 
+
 +#### 演習問題
 ++ 管理者モデル作成
 +
@@ -1609,4 +1662,3 @@ index 0000000..da3b2ad
 ' NewClass --> ExistingClass
 @enduml
 ```
-
