--- a/docs/journal/20170121.md
+++ b/docs/journal/20170121.md
@@ -2,7 +2,65 @@
 
 ## 概要
 
-2017-01-21の作業内容をまとめています。
+2017-01-21の作業内容をまとめています。このジャーナルでは、国際化（i18n）機能の実装に関する作業を記録しています。主にアプリケーションの多言語対応とユーザー認証機能の更新を行いました。
+
+## 国際化（i18n）機能の構成図
+
+```plantuml
+@startuml "Baukis-Kai 国際化（i18n）機能"
+!include <C4/C4_Component>
+
+Person(user, "ユーザー", "システム利用者")
+
+System_Boundary(i18n_system, "国際化システム") {
+    Component(i18n_config, "I18n設定", "設定", "config/application.rb")
+    Component(locale_files, "ロケールファイル", "YAML", "config/locales/*.yml")
+    Component(models_locale, "モデル翻訳", "YAML", "models.yml")
+    Component(views_locale, "ビュー翻訳", "YAML", "views.yml")
+    Component(controllers, "コントローラ", "Ruby", "各種コントローラ")
+    Component(views, "ビュー", "ERB", "各種ビューテンプレート")
+}
+
+Rel(user, views, "閲覧")
+Rel(views, i18n_config, "翻訳取得")
+Rel(i18n_config, locale_files, "読み込み")
+Rel(locale_files, models_locale, "含む")
+Rel(locale_files, views_locale, "含む")
+Rel(controllers, i18n_config, "翻訳取得")
+Rel(views, views_locale, "参照")
+Rel(controllers, models_locale, "参照")
+
+@enduml
+```
+
+## 作業内容
+
+### 国際化（i18n）機能の実装
+
+アプリケーションの国際化（i18n）機能を実装するため、ロケールファイルの設定と翻訳リソースの追加を行いました。これにより、アプリケーション全体で一貫した言語表示が可能になり、将来的な多言語対応の基盤が整いました。
+
+#### 変更点の概要
+
+1. i18n設定の追加
+   - i18n_generators Gemの追加
+   - ロケールファイルの構造化
+   - デフォルトロケールの設定
+
+2. 翻訳リソースの追加
+   - モデル関連の翻訳（属性名、エラーメッセージなど）
+   - ビュー関連の翻訳（ラベル、ボタン、メッセージなど）
+   - 共通部分の翻訳
+
+3. ビューテンプレートの更新
+   - 静的テキストを翻訳キーに置き換え
+   - ログインフォームの国際化対応
+   - ヘッダー部分の国際化対応
+
+#### 技術的詳細
+
+- YAMLファイルによる階層的な翻訳リソース管理
+- `t`ヘルパーメソッドを使用した翻訳の適用
+- モデル名や属性名の自動翻訳機能の活用
 
 ## コミット: 4275589
 
@@ -111,7 +169,7 @@ index 0ef0810..3ac01ff 100644
    gem 'rack-livereload'
 +  gem 'i18n_generators'
  end
- 
+
  group :test do
 diff --git a/README.md b/README.md
 index 6140be5..d8e0b6e 100644
@@ -120,7 +178,7 @@ index 6140be5..d8e0b6e 100644
 @@ -386,6 +386,9 @@ git push heroku master
  + 管理者認証サービス追加
  + メッセージの表示
- 
+
 +#### 改
 ++ i18nの設定と適用
 +
@@ -524,7 +582,7 @@ index a44b621..8937028 100644
 @@ -15,15 +15,6 @@ html, body {
    text-align: left;
  }
- 
+
 -.logo--admin {
 -  color: $color-white;
 -}
@@ -544,7 +602,7 @@ index 63ec54c..2252acd 100644
 @@ -15,15 +15,6 @@ html, body {
    text-align: left;
  }
- 
+
 -.logo--staff {
 -  color: $color-white;
 -}
@@ -723,7 +781,7 @@ index 4fdd7c8..6140be5 100644
  + 管理者認証サービステスト追加
  + 管理者認証サービス追加
 ++ メッセージの表示
- 
+
  ### ルーティング
  ### レコードの表示、新規作成、更新、削除
 diff --git a/app/views/shared/admin/_header.html.erb b/app/views/shared/admin/_header.html.erb
@@ -779,7 +837,7 @@ index 14ef5d0..4fdd7c8 100644
 -+ 認証サービステスト追加
 ++ 管理者認証サービステスト追加
 ++ 管理者認証サービス追加
- 
+
  ### ルーティング
  ### レコードの表示、新規作成、更新、削除
 diff --git a/app/services/admin/authenticator.rb b/app/services/admin/authenticator.rb
@@ -847,7 +905,7 @@ index 162925f..14ef5d0 100644
  + 管理者ログイン機能追加
  + 管理者ログアウト機能追加
 ++ 認証サービステスト追加
- 
+
  ### ルーティング
  ### レコードの表示、新規作成、更新、削除
 diff --git a/app/services/admin/authenticator.rb b/app/services/admin/authenticator.rb
@@ -864,7 +922,7 @@ index ee37bdc..336095c 100644
 --- a/spec/factories/administrators.rb
 +++ b/spec/factories/administrators.rb
 @@ -17,6 +17,8 @@
- 
+
  FactoryGirl.define do
    factory :administrator do
 -    
@@ -958,7 +1016,7 @@ index 35273aa..162925f 100644
  + 管理者用ログインフォーム作成
  + 管理者ログイン機能追加
 ++ 管理者ログアウト機能追加
- 
+
  ### ルーティング
  ### レコードの表示、新規作成、更新、削除
 diff --git a/app/controllers/admin/base.rb b/app/controllers/admin/base.rb
@@ -973,7 +1031,7 @@ index 8e245f0..93ca28f 100644
 +          Administrator.find_by(id: session[:administrator_id])
      end
    end
- 
+
 diff --git a/app/controllers/admin/sessions_controller.rb b/app/controllers/admin/sessions_controller.rb
 index 41f5740..dd15b5a 100644
 --- a/app/controllers/admin/sessions_controller.rb
@@ -989,7 +1047,7 @@ index 41f5740..dd15b5a 100644
 @@ -29,6 +28,12 @@ class Admin::SessionsController < Admin::Base
      end
    end
- 
+
 +  def destroy
 +    session.delete(:administrator_id)
 +    flash.notice = 'ログアウトしました。'
@@ -1059,12 +1117,12 @@ index 5af6f92..35273aa 100644
 +++ b/README.md
 @@ -379,7 +379,8 @@ git push heroku master
  + メッセージの表示
- 
+
  #### 演習問題
 -+　管理者用ログインフォーム作成
 ++ 管理者用ログインフォーム作成
 ++ 管理者ログイン機能追加
- 
+
  ### ルーティング
  ### レコードの表示、新規作成、更新、削除
 diff --git a/app/assets/stylesheets/pages/_login.scss b/app/assets/stylesheets/pages/_login.scss
@@ -1085,7 +1143,7 @@ index dea90df..c635be9 100644
 +  }
 +
    background-color: $very_light_gray;
- 
+
    &__head {
 diff --git a/app/controllers/admin/sessions_controller.rb b/app/controllers/admin/sessions_controller.rb
 new file mode 100644
@@ -1233,10 +1291,10 @@ index 6605555..5af6f92 100644
 +++ b/README.md
 @@ -379,6 +379,7 @@ git push heroku master
  + メッセージの表示
- 
+
  #### 演習問題
 ++　管理者用ログインフォーム作成
- 
+
  ### ルーティング
  ### レコードの表示、新規作成、更新、削除
 diff --git a/app/forms/admin/login_form.rb b/app/forms/admin/login_form.rb
@@ -1253,4 +1311,3 @@ index 0000000..ab1b60f
 \ No newline at end of file
 
 ```
-
