--- a/docs/journal/20170126.md
+++ b/docs/journal/20170126.md
@@ -2,7 +2,29 @@
 
 ## 概要
 
-2017-01-26の作業内容をまとめています。
+2017-01-26の作業内容をまとめています。この日は主に管理者による職員アカウント管理機能の準備作業を行いました。
+
+### 関連ユースケース
+
+- **A-003**: 職員アカウント作成 - 管理者が新規職員アカウントを作成する
+- **A-004**: 職員アカウント編集 - 管理者が既存の職員アカウント情報を編集する
+
+### システム構成上の位置づけ
+
+この実装は管理者インターフェースの一部であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "職員アカウント管理機能の位置づけ"
+actor "管理者" as Admin
+rectangle "管理者インターフェース" {
+  [Admin::StaffMembersController] as Controller
+  [StaffMember] as Model
+}
+
+Admin --> Controller : 操作
+Controller --> Model : CRUD操作
+@enduml
+```
 
 ## コミット: 2b5e45b
 
@@ -33,13 +55,13 @@ index 13c60e6..02f72a7 100644
 --- a/README.md
 +++ b/README.md
 @@ -417,6 +417,8 @@ git push heroku master
- 
+
  ### レコードの表示、新規作成、更新、削除
  #### 管理者による職員アカウント管理機能（前編）
 ++ 準備作業
 +
  #### 管理者による職員アカウント管理機能（後編）
- 
+
  ### String Parameters
 diff --git a/Vagrantfile b/Vagrantfile
 index 70088df..b27838b 100644
@@ -51,7 +73,7 @@ index 70088df..b27838b 100644
    config.vm.network :forwarded_port, guest:27017, host:27017, id:"mongodb"
 +  config.vm.network :forwarded_port, guest:8080, host:8080, id:"jenkins"
    config.vm.network :private_network, ip:"127.0.0.1"
- 
+
    config.vm.synced_folder ".", "/vagrant", mount_options: ['dmode=777','fmode=777']
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
 new file mode 100644
@@ -110,13 +132,26 @@ index 7156a40..1be8731 100644
 
 ### 構造変更
 
+このコミットでは、職員管理機能の基盤となる`Admin::StaffMembersController`が追加され、シードデータが拡充されました。
+
 ```plantuml
-@startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+@startuml "職員管理機能の構造"
+class Admin::StaffMembersController {
+}
+
+class StaffMember {
+  +email: string
+  +family_name: string
+  +given_name: string
+  +family_name_kana: string
+  +given_name_kana: string
+  +password: string
+  +start_date: date
+  +end_date: date
+  +suspended: boolean
+}
+
+Admin::StaffMembersController --> StaffMember : 管理
 @enduml
 ```
 
@@ -155,7 +190,7 @@ index 0c4a245..aaf01f7 100644
 +  password: password
 +  host: 127.0.0.1
 +  database: baukis-kai_production
- 
+
 
 ```
 
@@ -186,7 +221,7 @@ index d55146e..13c60e6 100644
 +++ b/README.md
 @@ -416,6 +416,9 @@ git push heroku master
  + 顧客ルーティング追加
- 
+
  ### レコードの表示、新規作成、更新、削除
 +#### 管理者による職員アカウント管理機能（前編）
 +#### 管理者による職員アカウント管理機能（後編）
@@ -196,4 +231,3 @@ index d55146e..13c60e6 100644
  ### モデル間の関連付け
 
 ```
-
