--- a/docs/journal/20170128.md
+++ b/docs/journal/20170128.md
@@ -2,7 +2,38 @@
 
 ## 概要
 
-2017-01-28の作業内容をまとめています。
+2017-01-28の作業内容をまとめています。この日は主に管理者による職員アカウント管理機能の実装を完了させ、createアクション、updateアクション、destroyアクションを実装しました。また、UI調整やバグ修正も行いました。
+
+### 関連ユースケース
+
+- **A-003**: 職員アカウント作成 - 管理者が新規職員アカウントを作成する
+- **A-004**: 職員アカウント編集 - 管理者が既存の職員アカウント情報を編集する
+- **A-005**: 職員アカウント停止/再開 - 管理者が職員アカウントの停止または再開を行う
+
+### システム構成上の位置づけ
+
+この実装は管理者インターフェースの一部であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "職員アカウント管理機能の完成"
+actor "管理者" as Admin
+rectangle "管理者インターフェース" {
+  [Admin::StaffMembersController] as Controller
+  [StaffMember] as Model
+  [Views] as Views
+}
+
+Admin --> Controller : CRUD操作
+Controller --> Model : データ操作
+Controller --> Views : レンダリング
+
+note right of Controller
+  この日の実装で
+  CRUDの全機能が
+  完成しました
+end note
+@enduml
+```
 
 ## コミット: a493db5
 
@@ -38,7 +69,7 @@ index ab416bb..92b4cd8 100644
 -  font-size: $tiny;
 +  font-size: $normal;
    color: $very_light_gray;
- 
+
    &__notice {
 diff --git a/app/views/admin/shared/_header.html.erb b/app/views/admin/shared/_header.html.erb
 index 299226e..afecf20 100644
@@ -49,7 +80,7 @@ index 299226e..afecf20 100644
    <div class="Header__head">
      <h1 class="logo"><%= link_to('BAUKIS KAI', admin_root_url, class:'logo logo--admin') %></h1>
 +  </div>
- 
+
 -    <div class="Flash">
 -      <%= content_tag(:span, flash.notice, class: 'Flash__notice') if flash.notice %>
 -      <%= content_tag(:span, flash.alert, class: 'Flash__alert') if flash.alert %>
@@ -72,7 +103,7 @@ index ea9128a..0e430e2 100644
    <div class="Header__head">
      <h1 class="logo"><%= link_to('BAUKIS KAI', staff_root_url, class:'logo logo--staff') %></h1>
 +  </div>
- 
+
 -    <div class="Flash">
 -      <%= content_tag(:span, flash.notice, class: 'Flash__notice') if flash.notice %>
 -      <%= content_tag(:span, flash.alert, class: 'Flash__alert') if flash.alert %>
@@ -115,7 +146,7 @@ index 8937028..5b939fe 100644
 --- a/app/assets/stylesheets/pages/_admin.scss
 +++ b/app/assets/stylesheets/pages/_admin.scss
 @@ -36,7 +36,7 @@ html, body {
- 
+
    &__header {
      padding: $moderate;
 -    background-color: $very_dark_magenta;
@@ -195,12 +226,12 @@ index 86bfb1c..0c75320 100644
 --- a/app/assets/stylesheets/components/common/_table.scss
 +++ b/app/assets/stylesheets/components/common/_table.scss
 @@ -48,6 +48,7 @@
- 
+
      &--actions {
        color: $dark_gray;
 +      text-align: center;
      }
- 
+
      &--center {
 diff --git a/app/views/admin/staff_members/new.html.erb b/app/views/admin/staff_members/new.html.erb
 index 06fed3c..fdc2ab3 100644
@@ -208,7 +239,7 @@ index 06fed3c..fdc2ab3 100644
 +++ b/app/views/admin/staff_members/new.html.erb
 @@ -4,13 +4,12 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -
 -  <div class="AppForm__generic-form">
@@ -265,7 +296,7 @@ index 4673828..8cf125f 100644
 +      resource :account, only: [:show, :edit, :update]
      end
    end
- 
+
 
 ```
 
@@ -301,7 +332,7 @@ index 81b29bd..e6134fc 100644
  + editアクション
  + updateアクション
 ++ updateアクションのテスト
- 
+
  ### アクセス制御
  ### モデル間の関連付け
 diff --git a/config/routes.rb b/config/routes.rb
@@ -316,7 +347,7 @@ index 7133f04..4673828 100644
 +      resource :account, only: [:update]
      end
    end
- 
+
 diff --git a/spec/controllers/staff/accounts_controller_spec.rb b/spec/controllers/staff/accounts_controller_spec.rb
 new file mode 100644
 index 0000000..e147715
@@ -404,7 +435,7 @@ index 848e791..81b29bd 100644
  + showアクション
  + editアクション
 ++ updateアクション
- 
+
  ### アクセス制御
  ### モデル間の関連付け
 diff --git a/app/controllers/staff/accounts_controller.rb b/app/controllers/staff/accounts_controller.rb
@@ -501,11 +532,11 @@ index 122a5b6..848e791 100644
 --- a/README.md
 +++ b/README.md
 @@ -436,6 +436,7 @@ git push heroku master
- 
+
  #### 職員自身によるアカウント管理機能
  + showアクション
 ++ editアクション
- 
+
  ### アクセス制御
  ### モデル間の関連付け
 diff --git a/app/assets/stylesheets/components/_adminAppForm.scss b/app/assets/stylesheets/components/_adminAppForm.scss
@@ -568,7 +599,7 @@ index e4b9282..c994463 100644
  @import "./components/appForm";
 +@import "./components/adminAppForm";
 +@import "./components/staffAppForm";
- 
+
  // テーブル
  @import "./components/adminTable";
 diff --git a/app/controllers/staff/accounts_controller.rb b/app/controllers/staff/accounts_controller.rb
@@ -590,7 +621,7 @@ index 11700f0..42104a8 100644
 +++ b/app/views/admin/staff_members/edit.html.erb
 @@ -4,8 +4,7 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -
 -  <div class="AppForm__generic-form">
@@ -712,7 +743,7 @@ index c453201..122a5b6 100644
 @@ -434,6 +434,9 @@ git push heroku master
  + コントローラのテスト
  + 400 Bad Request
- 
+
 +#### 職員自身によるアカウント管理機能
 ++ showアクション
 +
@@ -751,7 +782,7 @@ index 4d7ace1..86bfb1c 100644
 +++ b/app/assets/stylesheets/components/common/_table.scss
 @@ -16,14 +16,17 @@
    }
- 
+
    &__body {
 -    margin: $moderate auto 0;
 -    border: solid $moderate $very_dark_magenta;
@@ -768,17 +799,17 @@ index 4d7ace1..86bfb1c 100644
 +      td { background-color: $very_light_gray }
 +    }
    }
- 
+
    &__th {
 @@ -39,15 +42,17 @@
- 
+
      &--date {
        font-family: monospace;
 -      text-align: center;
      }
- 
+
      &--boolean { text-align: center }
- 
+
      &--actions {
 -      text-align: center;
        color: $dark_gray;
@@ -789,7 +820,7 @@ index 4d7ace1..86bfb1c 100644
 +    }
    }
  }
- 
+
 diff --git a/app/assets/stylesheets/main.scss b/app/assets/stylesheets/main.scss
 index 741293f..e4b9282 100644
 --- a/app/assets/stylesheets/main.scss
@@ -797,7 +828,7 @@ index 741293f..e4b9282 100644
 @@ -71,6 +71,10 @@
  @import "./components/form";
  @import "./components/appForm";
- 
+
 +// テーブル
 +@import "./components/adminTable";
 +@import "./components/staffTable";
@@ -818,7 +849,7 @@ index 2252acd..0efcba8 100644
 +      margin-left: $wide
 +    }
    }
- 
+
    &__footer {
 diff --git a/app/controllers/staff/accounts_controller.rb b/app/controllers/staff/accounts_controller.rb
 new file mode 100644
@@ -838,7 +869,7 @@ index 6551486..69e5487 100644
 @@ -8,7 +8,7 @@
      <%= link_to t('.new'), :new_admin_staff_member, class: 'btn btn-default' %>
    </div>
- 
+
 -  <table class="Table__body Table__body--listing">
 +  <table class="Table__body Table__body--listing AdminTable__body">
      <tr class="Table__tr">
@@ -980,13 +1011,13 @@ index c95084c..c453201 100644
 +++ b/README.md
 @@ -429,8 +429,10 @@ git push heroku master
  + destroyアクション
- 
+
  ### String Parameters
 +#### String Parameters
  + マスアサインメント脆弱性
  + コントローラのテスト
 ++ 400 Bad Request
- 
+
  ### アクセス制御
  ### モデル間の関連付け
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
@@ -995,7 +1026,7 @@ index eebd532..36c889b 100644
 +++ b/app/controllers/admin/staff_members_controller.rb
 @@ -45,7 +45,6 @@ class Admin::StaffMembersController < Admin::Base
    end
- 
+
    private
 -
    def staff_member_params
@@ -1006,7 +1037,7 @@ index b13f356..f0a871a 100644
 --- a/app/controllers/concerns/error_handlers.rb
 +++ b/app/controllers/concerns/error_handlers.rb
 @@ -3,6 +3,7 @@ module ErrorHandlers
- 
+
    included do
      rescue_from Exception, with: :rescue500
 +    rescue_from ActionController::ParameterMissing, with: :rescue400
@@ -1015,7 +1046,7 @@ index b13f356..f0a871a 100644
      rescue_from ActionController::RoutingError, with: :rescue404
 @@ -10,6 +11,11 @@ module ErrorHandlers
    end
- 
+
    private
 +  def rescue400(e)
 +    @exception = e
@@ -1078,11 +1109,11 @@ index 5ef10a0..c95084c 100644
 --- a/README.md
 +++ b/README.md
 @@ -430,6 +430,7 @@ git push heroku master
- 
+
  ### String Parameters
  + マスアサインメント脆弱性
 ++ コントローラのテスト
- 
+
  ### アクセス制御
  ### モデル間の関連付け
 diff --git a/spec/controllers/admin/staff_masters_controller_spec.rb b/spec/controllers/admin/staff_masters_controller_spec.rb
@@ -1175,7 +1206,7 @@ index 69a0739..5ef10a0 100644
 +++ b/README.md
 @@ -429,6 +429,8 @@ git push heroku master
  + destroyアクション
- 
+
  ### String Parameters
 ++ マスアサインメント脆弱性
 +
@@ -1188,7 +1219,7 @@ index 888d840..eebd532 100644
 +++ b/app/controllers/admin/staff_members_controller.rb
 @@ -17,7 +17,7 @@ class Admin::StaffMembersController < Admin::Base
    end
- 
+
    def create
 -    @staff_member = StaffMember.new(params[:staff_member])
 +    @staff_member = StaffMember.new(staff_member_params)
@@ -1196,7 +1227,7 @@ index 888d840..eebd532 100644
        flash.notice = t('.flash_success')
        redirect_to :admin_staff_members
 @@ -28,7 +28,7 @@ class Admin::StaffMembersController < Admin::Base
- 
+
    def update
      @staff_member = StaffMember.find(params[:id])
 -    @staff_member.assign_attributes(params[:staff_member])
@@ -1389,7 +1420,7 @@ index d8641a6..888d840 100644
 +      render action: 'edit'
      end
    end
- 
+
    def destroy
      staff_member = StaffMember.find(params[:id])
      staff_member.destroy!
@@ -1605,12 +1636,12 @@ index bf7656b..4d7ace1 100644
 +      tr:nth-child(odd) { background-color: $light_gray }
 +    }
    }
- 
+
    &__th {
 @@ -27,26 +33,21 @@
      text-align: center;
    }
- 
+
 -  &__td { padding: $narrow }
 -
 -  &--email { font-family: monospace }
@@ -1622,19 +1653,19 @@ index bf7656b..4d7ace1 100644
 +  &__td {
 +    padding: $narrow;
 +    &--email { font-family: monospace }
- 
+
 -  &--boolean { text-align: center }
 +    &--date {
 +      font-family: monospace;
 +      text-align: center;
 +    }
- 
+
 -  &--actions {
 -    text-align: center;
 -    color: $dark_gray;
 -  }
 +    &--boolean { text-align: center }
- 
+
 -  &--listing {
 -    width: 100%;
 -    tr:nth-child(even) { background-color: $very_light_gray }
@@ -1645,7 +1676,7 @@ index bf7656b..4d7ace1 100644
 +    }
    }
  }
- 
+
 diff --git a/app/views/admin/staff_members/index.html.erb b/app/views/admin/staff_members/index.html.erb
 index 4109326..6551486 100644
 --- a/app/views/admin/staff_members/index.html.erb
@@ -1656,13 +1687,13 @@ index 4109326..6551486 100644
  <section class="Section">
    <h1 class="Admin__title"><%= @title %></h1>
  </section>
- 
+
  <section class="Section l-column Table">
    <div class="Table__links">
 -    <%= link_to '新規登録', :new_admin_staff_member, class: 'btn btn-default' %>
 +    <%= link_to t('.new'), :new_admin_staff_member, class: 'btn btn-default' %>
    </div>
- 
+
 -  <table class="Table__body Table--listing">
 +  <table class="Table__body Table__body--listing">
      <tr class="Table__tr">
@@ -1707,7 +1738,7 @@ index 4109326..6551486 100644
          </tr>
      <% end %>
    </table>
- 
+
    <div class="Table__links">
 -    <%= link_to '新規登録', :new_admin_staff_member, class: 'btn btn-default' %>
 +    <%= link_to t('.new'), :new_admin_staff_member, class: 'btn btn-default' %>
@@ -1773,7 +1804,7 @@ index 7af501b..69a0739 100644
  + createアクション
  + updateアクション
 ++ destroyアクション
- 
+
  ### String Parameters
  ### アクセス制御
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
@@ -1834,11 +1865,11 @@ index 928f11e..7af501b 100644
 --- a/README.md
 +++ b/README.md
 @@ -425,6 +425,7 @@ git push heroku master
- 
+
  #### 管理者による職員アカウント管理機能（後編）
  + createアクション
 ++ updateアクション
- 
+
  ### String Parameters
  ### アクセス制御
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
@@ -1906,10 +1937,10 @@ index b870c87..928f11e 100644
 +++ b/README.md
 @@ -424,6 +424,7 @@ git push heroku master
  + editアクション
- 
+
  #### 管理者による職員アカウント管理機能（後編）
 ++ createアクション
- 
+
  ### String Parameters
  ### アクセス制御
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
@@ -1969,4 +2000,3 @@ index ed333f7..df9f07e 100644
 ' NewClass --> ExistingClass
 @enduml
 ```
-
