--- a/docs/journal/20170130.md
+++ b/docs/journal/20170130.md
@@ -2,7 +2,50 @@
 
 ## 概要
 
-2017-01-30の作業内容をまとめています。
+2017-01-30の作業内容をまとめています。この日はアクセス制御機能の実装を行いました。具体的には、ログイン状態のチェック、アカウントの有効性チェック、セッションタイムアウトなどの機能を実装しました。
+
+### 関連ユースケース
+
+- **S-001**: 職員ログイン - 職員がシステムにログインする
+- **S-002**: 職員ログアウト - 職員がシステムからログアウトする
+- **A-001**: 管理者ログイン - 管理者がシステムにログインする
+- **A-002**: 管理者ログアウト - 管理者がシステムからログアウトする
+- **A-005**: 職員アカウント停止/再開 - 管理者が職員アカウントの停止または再開を行う
+
+### システム構成上の位置づけ
+
+この実装はシステムのセキュリティ層に関わる部分であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "アクセス制御機能"
+actor "ユーザー" as User
+rectangle "認証・認可システム" {
+  [Staff::Base] as StaffBase
+  [Admin::Base] as AdminBase
+  [ErrorHandlers] as ErrorHandlers
+  [SessionTimeoutHandler] as SessionTimeout
+}
+database "Database" {
+  [StaffMember]
+  [Administrator]
+}
+
+User --> StaffBase : アクセス
+User --> AdminBase : アクセス
+StaffBase --> ErrorHandlers : エラー処理
+AdminBase --> ErrorHandlers : エラー処理
+StaffBase --> SessionTimeout : タイムアウト処理
+AdminBase --> SessionTimeout : タイムアウト処理
+StaffBase --> StaffMember : 認証
+AdminBase --> Administrator : 認証
+
+note right of SessionTimeout
+  セッションタイムアウトや
+  アカウント停止などの
+  アクセス制御を実装
+end note
+@enduml
+```
 
 ## コミット: 9537825
 
@@ -85,7 +128,7 @@ Author: k2works <kakimomokuri@gmail.com>
 Date:   Mon Jan 30 19:04:10 2017 +0900
 
     リファクタリング
-    
+
     ・メッセージ抽出
     ・管理者認証メソッド修正
 
@@ -138,14 +181,14 @@ index e5c8023..c7458bf 100644
        render action: 'new'
      end
    end
- 
+
    def destroy
      session.delete(:administrator_id)
 -    flash.notice = 'ログアウトしました。'
 +    flash.notice = t('common.session.destroy.notice')
      redirect_to :admin_root
    end
- 
+
 diff --git a/app/controllers/staff/base.rb b/app/controllers/staff/base.rb
 index cbf9a2e..83da20d 100644
 --- a/app/controllers/staff/base.rb
@@ -195,14 +238,14 @@ index ed10795..e08d450 100644
        render action: 'new'
      end
    end
- 
+
    def destroy
      session.delete(:staff_member_id)
 -    flash.notice = 'ログアウトしました。'
 +    flash.notice = t('common.session.destroy.notice')
      redirect_to :staff_root
    end
- 
+
 diff --git a/config/locales/controllers/ja.yml b/config/locales/controllers/ja.yml
 index 52eca0b..dd1b88a 100644
 --- a/config/locales/controllers/ja.yml
@@ -289,11 +332,11 @@ index bb38db0..ccfb611 100644
 --- a/README.md
 +++ b/README.md
 @@ -458,6 +458,7 @@ git push heroku master
- 
+
  #### 演習問題
  + テスト作成
 ++ 機能追加
- 
+
  ### モデル間の関連付け
  ### 値の正規化とバリデーション
 diff --git a/app/controllers/admin/base.rb b/app/controllers/admin/base.rb
@@ -305,7 +348,7 @@ index 2e2ff20..f7beeb7 100644
    before_action :authorize
 +  before_action :check_account
 +  before_action :check_timeout
- 
+
    private
    def current_administrator
 @@ -18,4 +20,26 @@ class Admin::Base < ApplicationController
@@ -381,12 +424,12 @@ index c2dcde1..5f14598 100644
 --- a/spec/controllers/admin/staff_masters_controller_spec.rb
 +++ b/spec/controllers/admin/staff_masters_controller_spec.rb
 @@ -10,6 +10,7 @@ describe Admin::StaffMembersController do
- 
+
    before do
      session[:administrator_id] = administrator.id
 +    session[:last_access_time] = 1.second.ago
    end
- 
+
    describe '#create' do
 
 ```
@@ -431,10 +474,10 @@ index 9801d2d..bb38db0 100644
 +++ b/README.md
 @@ -457,6 +457,7 @@ git push heroku master
  + セッションタイムアウトのテスト
- 
+
  #### 演習問題
 ++ テスト作成
- 
+
  ### モデル間の関連付け
  ### 値の正規化とバリデーション
 diff --git a/spec/controllers/admin/top_controller_spec.rb b/spec/controllers/admin/top_controller_spec.rb
@@ -518,9 +561,9 @@ index 4ebdfdb..9801d2d 100644
  + 共有エグザンプル
  + 強制ログアウトのテスト
 ++ セッションタイムアウトのテスト
- 
+
  #### 演習問題
- 
+
 diff --git a/spec/controllers/staff/top_controller_spec.rb b/spec/controllers/staff/top_controller_spec.rb
 index 3c12fe2..8f12e7c 100644
 --- a/spec/controllers/staff/top_controller_spec.rb
@@ -601,7 +644,7 @@ index 3ac01ff..e9ca58f 100644
    gem 'capybara-screenshot'
 +  gem 'rails-controller-testing'
  end
- 
+
  # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 diff --git a/Gemfile.lock b/Gemfile.lock
 index 46d4a3a..9fe802b 100644
@@ -635,9 +678,9 @@ index b5ec3a3..4ebdfdb 100644
  + 失敗するエグザンプルの修正
  + 共有エグザンプル
 ++ 強制ログアウトのテスト
- 
+
  #### 演習問題
- 
+
 diff --git a/baukis-kai.iml b/baukis-kai.iml
 index 7d95f8d..a4ebc0d 100644
 --- a/baukis-kai.iml
@@ -729,20 +772,20 @@ index 2337222..b5ec3a3 100644
 --- a/README.md
 +++ b/README.md
 @@ -452,6 +452,7 @@ git push heroku master
- 
+
  #### アクセス制御のテスト
  + 失敗するエグザンプルの修正
 ++ 共有エグザンプル
- 
+
  #### 演習問題
- 
+
 diff --git a/spec/controllers/admin/staff_masters_controller_spec.rb b/spec/controllers/admin/staff_masters_controller_spec.rb
 index 8e2ea4e..c2dcde1 100644
 --- a/spec/controllers/admin/staff_masters_controller_spec.rb
 +++ b/spec/controllers/admin/staff_masters_controller_spec.rb
 @@ -1,5 +1,9 @@
  require 'rails_helper'
- 
+
 +describe Admin::StaffMembersController, 'Before login' do
 +  it_behaves_like 'a protected admin controller'
 +end
@@ -756,7 +799,7 @@ index 7b62865..cf7ce64 100644
 +++ b/spec/controllers/staff/accounts_controller_spec.rb
 @@ -1,5 +1,9 @@
  require 'rails_helper'
- 
+
 +describe Staff::AccountsController, 'Before login' do
 +  it_behaves_like 'a protected singular staff controller'
 +end
@@ -774,7 +817,7 @@ index ad9274e..975dc23 100644
  #
 -# Dir[Rails.root.join('spec/support/**/*.rb')].each { |f| require f }
 +Dir[Rails.root.join('spec/support/**/*.rb')].each { |f| require f }
- 
+
  # Checks for pending migration and applies them before tests are run.
  # If you are not using ActiveRecord, you can remove this line.
 diff --git a/spec/support/shared_examples_for_admin_controllers.rb b/spec/support/shared_examples_for_admin_controllers.rb
@@ -889,19 +932,19 @@ index a167d60..2337222 100644
 +++ b/README.md
 @@ -451,6 +451,8 @@ git push heroku master
  + セッションタイムアウト
- 
+
  #### アクセス制御のテスト
 ++ 失敗するエグザンプルの修正
 +
  #### 演習問題
- 
+
  ### モデル間の関連付け
 diff --git a/spec/controllers/admin/staff_masters_controller_spec.rb b/spec/controllers/admin/staff_masters_controller_spec.rb
 index 93f0b30..8e2ea4e 100644
 --- a/spec/controllers/admin/staff_masters_controller_spec.rb
 +++ b/spec/controllers/admin/staff_masters_controller_spec.rb
 @@ -2,6 +2,11 @@ require 'rails_helper'
- 
+
  describe Admin::StaffMembersController do
    let(:params_hash) { attributes_for(:staff_member) }
 +  let(:administrator) { create(:administrator) }
@@ -909,7 +952,7 @@ index 93f0b30..8e2ea4e 100644
 +  before do
 +    session[:administrator_id] = administrator.id
 +  end
- 
+
    describe '#create' do
      # 職員一覧ページにリダイレクト
 diff --git a/spec/controllers/staff/accounts_controller_spec.rb b/spec/controllers/staff/accounts_controller_spec.rb
@@ -917,12 +960,12 @@ index e147715..7b62865 100644
 --- a/spec/controllers/staff/accounts_controller_spec.rb
 +++ b/spec/controllers/staff/accounts_controller_spec.rb
 @@ -7,6 +7,7 @@ describe Staff::AccountsController do
- 
+
      before do
        session[:staff_member_id] = staff_member.id
 +      session[:last_access_time] = 1.second.ago
      end
- 
+
      # email属性を変更する
 
 ```
@@ -1030,11 +1073,11 @@ index 4718fe2..a167d60 100644
 --- a/README.md
 +++ b/README.md
 @@ -448,6 +448,7 @@ git push heroku master
- 
+
  #### アクセス制御の強化
  + 強制的ログアウト
 ++ セッションタイムアウト
- 
+
  #### アクセス制御のテスト
  #### 演習問題
 diff --git a/app/controllers/staff/base.rb b/app/controllers/staff/base.rb
@@ -1046,7 +1089,7 @@ index e6f0ac3..a2d9642 100644
    before_action :authorize
    before_action :check_account
 +  before_action :check_timeout
- 
+
    private
    def current_staff_member
 @@ -27,4 +28,18 @@ class Staff::Base < ApplicationController
@@ -1126,13 +1169,13 @@ index e2e8cfa..4718fe2 100644
 +++ b/README.md
 @@ -447,6 +447,8 @@ git push heroku master
  + 職員ページのアクセス制御
- 
+
  #### アクセス制御の強化
 ++ 強制的ログアウト
 +
  #### アクセス制御のテスト
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/base.rb b/app/controllers/staff/base.rb
 index 6dd7d73..e6f0ac3 100644
 --- a/app/controllers/staff/base.rb
@@ -1141,7 +1184,7 @@ index 6dd7d73..e6f0ac3 100644
  class Staff::Base < ApplicationController
    before_action :authorize
 +  before_action :check_account
- 
+
    private
    def current_staff_member
 @@ -18,4 +19,12 @@ class Staff::Base < ApplicationController
@@ -1234,7 +1277,7 @@ index 380ba3d..e2e8cfa 100644
  + 管理者ページのアクセス制御
  + before_actionの継承
 ++ 職員ページのアクセス制御
- 
+
  #### アクセス制御の強化
  #### アクセス制御のテスト
 diff --git a/app/controllers/staff/base.rb b/app/controllers/staff/base.rb
@@ -1250,7 +1293,7 @@ index ecfda96..6dd7d73 100644
      if session[:staff_member_id]
 @@ -8,4 +10,12 @@ class Staff::Base < ApplicationController
    end
- 
+
    helper_method :current_staff_member
 +
 +  private
@@ -1347,7 +1390,7 @@ index 77a506c..380ba3d 100644
  #### before_action
  + 管理者ページのアクセス制御
 ++ before_actionの継承
- 
+
  #### アクセス制御の強化
  #### アクセス制御のテスト
 diff --git a/app/controllers/admin/base.rb b/app/controllers/admin/base.rb
@@ -1363,7 +1406,7 @@ index 93ca28f..2e2ff20 100644
      if session[:administrator_id]
 @@ -8,4 +10,12 @@ class Admin::Base < ApplicationController
    end
- 
+
    helper_method :current_administrator
 +
 +  private
@@ -1393,12 +1436,12 @@ index 0641c91..6cc46bc 100644
 @@ -1,5 +1,4 @@
  class Admin::StaffMembersController < Admin::Base
 -  before_action :authorize
- 
+
    def index
      @staff_members = StaffMember.order(:family_name_kana, :given_name_kana)
 @@ -47,13 +46,6 @@ class Admin::StaffMembersController < Admin::Base
    end
- 
+
    private
 -  def authorize
 -    unless current_administrator
@@ -1481,7 +1524,7 @@ index ed63b58..77a506c 100644
 --- a/README.md
 +++ b/README.md
 @@ -442,6 +442,8 @@ git push heroku master
- 
+
  ### アクセス制御
  #### before_action
 ++ 管理者ページのアクセス制御
@@ -1502,7 +1545,7 @@ index 36c889b..0641c91 100644
    end
 @@ -45,6 +47,13 @@ class Admin::StaffMembersController < Admin::Base
    end
- 
+
    private
 +  def authorize
 +    unless current_administrator
@@ -1569,7 +1612,7 @@ index e6134fc..ed63b58 100644
 +++ b/README.md
 @@ -441,6 +441,11 @@ git push heroku master
  + updateアクションのテスト
- 
+
  ### アクセス制御
 +#### before_action
 +#### アクセス制御の強化
@@ -1581,4 +1624,3 @@ index e6134fc..ed63b58 100644
  ### プレゼンター
 
 ```
-
