--- a/docs/journal/20170131.md
+++ b/docs/journal/20170131.md
@@ -2,7 +2,70 @@
 
 ## 概要
 
-2017-01-31の作業内容をまとめています。
+2017-01-31の作業内容をまとめています。この日は主にモデルオブジェクトの正規化とバリデーション機能の実装を行いました。また、職員が自分のパスワードを変更する機能も実装しました。
+
+### 関連ユースケース
+
+- **S-003**: 職員アカウント情報更新 - 職員が自身のアカウント情報を更新する
+- **A-004**: 職員アカウント編集 - 管理者が既存の職員アカウント情報を編集する
+
+### システム構成上の位置づけ
+
+この実装はモデル層のデータ整合性を確保するための重要な部分であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "モデルの正規化とバリデーション"
+package "Domain Layer" {
+  class StaffMember {
+    +email: string
+    +family_name: string
+    +given_name: string
+    +family_name_kana: string
+    +given_name_kana: string
+    +password: string
+    +start_date: date
+    +end_date: date
+    +suspended: boolean
+    --
+    +normalize_as_email()
+    +normalize_as_name()
+    +normalize_as_furigana()
+    +validate_email()
+    +validate_date_relations()
+  }
+
+  class Administrator {
+    +email: string
+    +password: string
+  }
+
+  class PasswordChanger {
+    +object: StaffMember
+    +current_password: string
+    +new_password: string
+    +new_password_confirmation: string
+    --
+    +change()
+    +valid?()
+  }
+}
+
+StaffMember <|-- Administrator
+PasswordChanger --> StaffMember : 変更
+
+note right of StaffMember
+  データの正規化と
+  バリデーションにより
+  データの整合性を確保
+end note
+
+note right of PasswordChanger
+  パスワード変更の
+  ビジネスロジックを
+  カプセル化
+end note
+@enduml
+```
 
 ## コミット: e6fcb21
 
@@ -36,7 +99,7 @@ index 6ccda17..59a3bb8 100644
  + 開始日と終了日のバリデーション
  + メールアドレスの正規化とバリデーション
 ++ 正規化とバリデーションのテスト
- 
+
  #### 職員が自分のパスワードを変更する機能
  #### 演習問題
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
@@ -45,7 +108,7 @@ index 93d6bea..c307f2b 100644
 +++ b/app/models/staff_member.rb
 @@ -28,7 +28,8 @@ class StaffMember < ApplicationRecord
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
- 
+
    before_validation do
 -    self.email_for_index = normalize_as_email(email)
 +    self.email = normalize_as_email(email)
@@ -170,7 +233,7 @@ index 48da51e..6ccda17 100644
  + 氏名とフリガナの正規化とバリデーション
  + 開始日と終了日のバリデーション
 ++ メールアドレスの正規化とバリデーション
- 
+
  #### 職員が自分のパスワードを変更する機能
  #### 演習問題
 diff --git a/app/models/concerns/string_normalizer.rb b/app/models/concerns/string_normalizer.rb
@@ -180,7 +243,7 @@ index d329c2a..13a558b 100644
 @@ -3,6 +3,10 @@ require 'nkf'
  module StringNormalizer
    extend ActiveSupport::Concern
- 
+
 +  def normalize_as_email(text)
 +    NKF.nkf('-w -Z1', text).strip if text
 +  end
@@ -194,7 +257,7 @@ index 6488eba..93d6bea 100644
 +++ b/app/models/staff_member.rb
 @@ -28,7 +28,7 @@ class StaffMember < ApplicationRecord
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
- 
+
    before_validation do
 -    self.email_for_index = email.downcase if email
 +    self.email_for_index = normalize_as_email(email)
@@ -202,9 +265,9 @@ index 6488eba..93d6bea 100644
      self.given_name = normalize_as_name(given_name)
      self.family_name_kana = normalize_as_furigana(family_name_kana)
 @@ -37,6 +37,7 @@ class StaffMember < ApplicationRecord
- 
+
    KATAKANA_REGEXP = /\A[\p{katakana}\u{30fc}]+\z/
- 
+
 +  validates :email, presence: true, email: { alllow_blank: true }
    validates :family_name, :given_name, presence: true
    validates :family_name_kana, :given_name_kana, presence: true, format: { with: KATAKANA_REGEXP, allow_blank: true }
@@ -212,7 +275,7 @@ index 6488eba..93d6bea 100644
 @@ -50,6 +51,14 @@ class StaffMember < ApplicationRecord
        allow_blank: true
    }
- 
+
 +  validates :email_for_index, uniqueness: { allow_blank: true }
 +  after_validation do
 +    if errors.include?(:email_for_index)
@@ -270,7 +333,7 @@ index 1bbf57b..48da51e 100644
  + 準備作業 
  + 氏名とフリガナの正規化とバリデーション
 ++ 開始日と終了日のバリデーション
- 
+
  #### 職員が自分のパスワードを変更する機能
  #### 演習問題
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
@@ -278,7 +341,7 @@ index b0a18cb..6488eba 100644
 --- a/app/models/staff_member.rb
 +++ b/app/models/staff_member.rb
 @@ -39,6 +39,16 @@ class StaffMember < ApplicationRecord
- 
+
    validates :family_name, :given_name, presence: true
    validates :family_name_kana, :given_name_kana, presence: true, format: { with: KATAKANA_REGEXP, allow_blank: true }
 +  validates :start_date, presence: true, date: {
@@ -291,7 +354,7 @@ index b0a18cb..6488eba 100644
 +      before: -> (obj) { 1.year.from_now.to_date },
 +      allow_blank: true
 +  }
- 
+
    def password=(raw_password)
      if raw_password.kind_of?(String)
 
@@ -341,7 +404,7 @@ index 7c275d1..1bbf57b 100644
  + 値の正規化とバリデーション
  + 準備作業 
 ++ 氏名とフリガナの正規化とバリデーション
- 
+
  #### 職員が自分のパスワードを変更する機能
  #### 演習問題
 diff --git a/app/models/concerns/string_normalizer.rb b/app/models/concerns/string_normalizer.rb
@@ -370,12 +433,12 @@ index ded6c47..b0a18cb 100644
 +++ b/app/models/staff_member.rb
 @@ -23,12 +23,23 @@
  #
- 
+
  class StaffMember < ApplicationRecord
 +  include StringNormalizer
 +
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
- 
+
    before_validation do
      self.email_for_index = email.downcase if email
 +    self.family_name = normalize_as_name(family_name)
@@ -383,7 +446,7 @@ index ded6c47..b0a18cb 100644
 +    self.family_name_kana = normalize_as_furigana(family_name_kana)
 +    self.given_name_kana = normalize_as_furigana(given_name_kana)
    end
- 
+
 +  KATAKANA_REGEXP = /\A[\p{katakana}\u{30fc}]+\z/
 +
 +  validates :family_name, :given_name, presence: true
@@ -484,7 +547,7 @@ index 8f91fc6..7c275d1 100644
 --- a/README.md
 +++ b/README.md
 @@ -488,6 +488,9 @@ git push heroku master
- 
+
  ### 値の正規化とバリデーション
  #### モデルオブジェクトの正規化とバリデーション
 ++ 値の正規化とバリデーション
@@ -492,7 +555,7 @@ index 8f91fc6..7c275d1 100644
 +
  #### 職員が自分のパスワードを変更する機能
  #### 演習問題
- 
+
 diff --git a/app/assets/stylesheets/components/_appForm.scss b/app/assets/stylesheets/components/_appForm.scss
 index a6b23f4..98aa757 100644
 --- a/app/assets/stylesheets/components/_appForm.scss
@@ -559,7 +622,7 @@ index 814b44f..8f91fc6 100644
 +++ b/README.md
 @@ -487,6 +487,10 @@ git push heroku master
  #### 演習問題
- 
+
  ### 値の正規化とバリデーション
 +#### モデルオブジェクトの正規化とバリデーション
 +#### 職員が自分のパスワードを変更する機能
@@ -638,12 +701,12 @@ index 6cc46bc..1855b32 100644
 +++ b/app/controllers/admin/staff_members_controller.rb
 @@ -1,7 +1,7 @@
  class Admin::StaffMembersController < Admin::Base
- 
+
    def index
 -    @staff_members = StaffMember.order(:family_name_kana, :given_name_kana)
 +    @staff_members = StaffMember.order(:family_name_kana, :given_name_kana).page(params[:page])
    end
- 
+
    def show
 diff --git a/app/views/admin/staff_members/index.html.erb b/app/views/admin/staff_members/index.html.erb
 index d8bf10e..e5fd15b 100644
@@ -652,7 +715,7 @@ index d8bf10e..e5fd15b 100644
 @@ -8,6 +8,8 @@
      <%= link_to t('.new'), :new_admin_staff_member, class: 'btn btn-default' %>
    </div>
- 
+
 +  <%= paginate @staff_members %>
 +
    <table class="Table__body Table__body--listing AdminTable__body">
@@ -661,7 +724,7 @@ index d8bf10e..e5fd15b 100644
 @@ -38,6 +40,8 @@
      <% end %>
    </table>
- 
+
 +  <%= paginate @staff_members %>
 +
    <div class="Table__links">
@@ -713,9 +776,9 @@ index 8897fa3..814b44f 100644
  + N+1問題とは
  + includeメソッド
 ++ リファクタリング
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/admin/staff_events_controller.rb b/app/controllers/admin/staff_events_controller.rb
 index 663ef31..39ae2f6 100644
 --- a/app/controllers/admin/staff_events_controller.rb
@@ -778,14 +841,14 @@ index b4834c4..8897fa3 100644
 +++ b/README.md
 @@ -479,6 +479,10 @@ git push heroku master
  + ページネーションのカスタマイズ
- 
+
  #### N + 1問題
 ++ Gemパッケージquiet_assets
 ++ N+1問題とは
 ++ includeメソッド
 +
  #### 演習問題
- 
+
  ### 値の正規化とバリデーション
 diff --git a/app/controllers/admin/staff_events_controller.rb b/app/controllers/admin/staff_events_controller.rb
 index ea08a31..663ef31 100644
@@ -850,7 +913,7 @@ index f8856c7..b4834c4 100644
  + indexアクションの修正
  + ERBテンプレートの修正
 ++ ページネーションのカスタマイズ
- 
+
  #### N + 1問題
  #### 演習問題
 diff --git a/app/assets/stylesheets/components/parts/_pagination.scss b/app/assets/stylesheets/components/parts/_pagination.scss
@@ -891,7 +954,7 @@ index c994463..76d692c 100644
 @@ -30,6 +30,9 @@
  // メッセージ
  @import "./components/parts/flash";
- 
+
 +// ページネーション
 +@import "./components/parts/pagination";
 +
@@ -1055,7 +1118,7 @@ index 6870eca..f8856c7 100644
  + Gemパッケージkaminari
  + indexアクションの修正
 ++ ERBテンプレートの修正
- 
+
  #### N + 1問題
  #### 演習問題
 diff --git a/app/views/admin/staff_events/index.html.erb b/app/views/admin/staff_events/index.html.erb
@@ -1065,7 +1128,7 @@ index 43fe679..d2736b4 100644
 @@ -15,6 +15,8 @@
      <%= link_to t('.admin_staff_members'), :admin_staff_members, class: 'btn btn-default' %>
    </div>
- 
+
 +  <%= paginate @events %>
 +
    <table class="Table__body Table__body--listing AdminTable__body">
@@ -1074,7 +1137,7 @@ index 43fe679..d2736b4 100644
 @@ -30,6 +32,8 @@
      <% end %>
    </table>
- 
+
 +  <%= paginate @events %>
 +
    <div class="Table__links">
@@ -1280,7 +1343,7 @@ index 3880100..6870eca 100644
  + シードデータの投入
  + Gemパッケージkaminari
 ++ indexアクションの修正
- 
+
  #### N + 1問題
  #### 演習問題
 diff --git a/app/controllers/admin/staff_events_controller.rb b/app/controllers/admin/staff_events_controller.rb
@@ -1393,11 +1456,11 @@ index b7355b2..3880100 100644
 --- a/README.md
 +++ b/README.md
 @@ -473,6 +473,7 @@ git push heroku master
- 
+
  #### ページネーション
  + シードデータの投入
 ++ Gemパッケージkaminari
- 
+
  #### N + 1問題
  #### 演習問題
 diff --git a/app/views/kaminari/_first_page.html.erb b/app/views/kaminari/_first_page.html.erb
@@ -1557,21 +1620,21 @@ index e01bc9a..b7355b2 100644
 +++ b/README.md
 @@ -472,6 +472,8 @@ git push heroku master
  + admin/staff_eventsコントローラ
- 
+
  #### ページネーション
 ++ シードデータの投入
 +
  #### N + 1問題
  #### 演習問題
- 
+
 diff --git a/db/schema.rb b/db/schema.rb
 index 9780a2e..5bd9dd3 100644
 --- a/db/schema.rb
 +++ b/db/schema.rb
 @@ -12,7 +12,7 @@
- 
+
  ActiveRecord::Schema.define(version: 20170131041629) do
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -1580,7 +1643,7 @@ index 9780a2e..5bd9dd3 100644
 @@ -22,7 +22,7 @@ ActiveRecord::Schema.define(version: 20170131041629) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -1589,7 +1652,7 @@ index 9780a2e..5bd9dd3 100644
 @@ -31,7 +31,7 @@ ActiveRecord::Schema.define(version: 20170131041629) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -1623,7 +1686,7 @@ index aa5909a..f58b110 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,7 +6,7 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 -table_names = %w(staff_members administrators)
@@ -1667,11 +1730,11 @@ index d01db1d..e01bc9a 100644
 --- a/README.md
 +++ b/README.md
 @@ -469,6 +469,7 @@ git push heroku master
- 
+
  #### ネストされたリソース
  + ネストされたリソースとは
 ++ admin/staff_eventsコントローラ
- 
+
  #### ページネーション
  #### N + 1問題
 diff --git a/app/controllers/admin/staff_events_controller.rb b/app/controllers/admin/staff_events_controller.rb
@@ -1696,7 +1759,7 @@ index 286c6f1..d0198dc 100644
 +++ b/app/models/staff_event.rb
 @@ -18,5 +18,15 @@ class StaffEvent < ApplicationRecord
    self.inheritance_column = nil
- 
+
    belongs_to :member, class_name: 'StaffMember', foreign_key: 'staff_member_id'
 -  alias_attribute :occurred_at, :create_at
 +  alias_attribute :occurred_at, :created_at
@@ -1780,13 +1843,13 @@ index 15cb668..3650d58 100644
        administrator: 管理者
        staff_member: 職員
 +      staff_event: 職員イベント
- 
+
      attributes:
        administrator:
 @@ -23,6 +24,14 @@ ja:
          start_date: 開始日
          suspended: 停止フラグ
- 
+
 +      staff_event:
 +        member: 職員レコードへの外部キー
 +        type: イベントタイプ
@@ -1824,14 +1887,14 @@ index 5124565..26ef1fa 100644
 +++ b/config/routes.rb
 @@ -32,6 +32,10 @@
  #
- 
+
  Rails.application.routes.draw do
 +  namespace :admin do
 +    get 'staff_events/index'
 +  end
 +
    config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
 
 ```
@@ -1879,7 +1942,7 @@ index 6de3bcd..d01db1d 100644
 +++ b/README.md
 @@ -468,6 +468,8 @@ git push heroku master
  + イベントの記録
- 
+
  #### ネストされたリソース
 ++ ネストされたリソースとは
 +
@@ -1992,7 +2055,7 @@ index 8cf125f..5124565 100644
 +#                            root GET    /                                                    errors#routing_error
 +#                                 GET    /*anything(.:format)                                 errors#routing_error
  #
- 
+
  Rails.application.routes.draw do
 @@ -47,7 +51,10 @@ Rails.application.routes.draw do
      namespace :admin, path: config[:admin][:path]  do
@@ -2005,7 +2068,7 @@ index 8cf125f..5124565 100644
 +      resources :staff_events, only: [:index]
      end
    end
- 
+
 
 ```
 
@@ -2040,7 +2103,7 @@ index 6ba704d..6de3bcd 100644
  + 外部キー制約
  + StaffEventモデルの追加
 ++ イベントの記録
- 
+
  #### ネストされたリソース
  #### ページネーション
 diff --git a/app/controllers/staff/sessions_controller.rb b/app/controllers/staff/sessions_controller.rb
@@ -2063,7 +2126,7 @@ index e08d450..b6dc29b 100644
        end
 @@ -32,6 +34,9 @@ class Staff::SessionsController < Staff::Base
    end
- 
+
    def destroy
 +    if current_staff_member
 +      current_staff_member.events.create!(type: 'logged_out')
@@ -2118,7 +2181,7 @@ index f4f5e43..6ba704d 100644
 --- a/README.md
 +++ b/README.md
 @@ -462,6 +462,10 @@ git push heroku master
- 
+
  ### モデル間の関連付け
  #### モデル間の関連付け
 ++ 一対他の関連付け
@@ -2162,7 +2225,7 @@ index 4f85737..ded6c47 100644
 +++ b/app/models/staff_member.rb
 @@ -23,6 +23,8 @@
  #
- 
+
  class StaffMember < ApplicationRecord
 +  has_many :events, class_name: 'StaffEvent', dependent: :destroy
 +
@@ -2195,10 +2258,10 @@ index b5f43b8..9780a2e 100644
 @@ -10,33 +10,43 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170120000741) do
 +ActiveRecord::Schema.define(version: 20170131041629) do
- 
+
 -  create_table "administrators", force: :cascade do |t|
 -    t.string   "email",                           null: false
 -    t.string   "email_for_index",                 null: false
@@ -2214,7 +2277,7 @@ index b5f43b8..9780a2e 100644
 -    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true
 +    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade do |t|
 -    t.string   "email",                            null: false
 -    t.string   "email_for_index",                  null: false
@@ -2253,7 +2316,7 @@ index b5f43b8..9780a2e 100644
 +    t.index ["email_for_index"], name: "index_staff_members_on_email_for_index", unique: true, using: :btree
 +    t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 +  add_foreign_key "staff_events", "staff_members"
  end
 diff --git a/spec/factories/staff_events.rb b/spec/factories/staff_events.rb
@@ -2352,7 +2415,7 @@ index ccfb611..f4f5e43 100644
 +++ b/README.md
 @@ -461,6 +461,12 @@ git push heroku master
  + 機能追加
- 
+
  ### モデル間の関連付け
 +#### モデル間の関連付け
 +#### ネストされたリソース
@@ -2365,4 +2428,3 @@ index ccfb611..f4f5e43 100644
  ### jQueryとCoffeeScript
 
 ```
-
