--- a/docs/journal/20170202.md
+++ b/docs/journal/20170202.md
@@ -2,7 +2,53 @@
 
 ## 概要
 
-2017-02-02の作業内容をまとめています。
+2017-02-02の作業内容をまとめています。この日は主にフロントエンド機能の強化を行いました。具体的には、jQueryとCoffeeScriptを使用したインタラクティブな機能の実装と、日付選択のためのDatepickerの導入を行いました。
+
+### 関連ユースケース
+
+- **S-003**: 職員アカウント情報更新 - 職員が自身のアカウント情報を更新する
+- **A-003**: 職員アカウント作成 - 管理者が新規職員アカウントを作成する
+- **A-004**: 職員アカウント編集 - 管理者が既存の職員アカウント情報を編集する
+
+### システム構成上の位置づけ
+
+この実装はプレゼンテーション層のユーザーインターフェース改善に関わる部分であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "フロントエンド機能強化"
+package "Presentation Layer" {
+  [Views] as Views
+  [JavaScript] as JS
+  [CoffeeScript] as Coffee
+  [jQuery] as jQuery
+  [DatePicker] as DatePicker
+  [FormPresenter] as FormPresenter
+}
+
+package "Domain Layer" {
+  [Models] as Models
+}
+
+Views --> JS : 使用
+JS --> Coffee : コンパイル
+Coffee --> jQuery : 使用
+Coffee --> DatePicker : 使用
+Views --> FormPresenter : 使用
+FormPresenter --> DatePicker : 設定
+FormPresenter --> Models : データバインド
+
+note right of DatePicker
+  日付入力を
+  ユーザーフレンドリーに
+end note
+
+note right of Coffee
+  jQueryとDatePickerを
+  使った動的な
+  UI機能の実装
+end note
+@enduml
+```
 
 ## コミット: 1b81ab5
 
@@ -128,11 +174,11 @@ index 1dbb26d..ff0cb7d 100644
 --- a/README.md
 +++ b/README.md
 @@ -540,6 +540,7 @@ git push heroku master
- 
+
  #### Datapicker
  + 準備作業
 ++ Datepickerの利用
- 
+
  ### 単一テーブ継承
  ### Capybara
 diff --git a/app/assets/javascripts/admin.js b/app/assets/javascripts/admin.js
@@ -214,7 +260,7 @@ index 154b8f1..c21d5c5 100644
  @import "bootstrap-sprockets";
  @import "components/bootstrap-custom";
 +@import 'bootstrap-datetimepicker';
- 
+
  //jQuery
  @import "jquery-ui/datepicker";
 diff --git a/app/presenters/form_presenter.rb b/app/presenters/form_presenter.rb
@@ -235,7 +281,7 @@ index 5be118f..b0527db 100644
 +      m << text_field(name, options.merge(hide_label: true))
      end
    end
- 
+
 diff --git a/baukis-kai.iml b/baukis-kai.iml
 index eb66749..7df2722 100644
 --- a/baukis-kai.iml
@@ -323,10 +369,10 @@ index b6b811d..1dbb26d 100644
 +++ b/README.md
 @@ -539,6 +539,7 @@ git push heroku master
  + 入力フォームの有効・無効を切り替える
- 
+
  #### Datapicker
 ++ 準備作業
- 
+
  ### 単一テーブ継承
  ### Capybara
 diff --git a/app/assets/javascripts/admin.js b/app/assets/javascripts/admin.js
@@ -367,7 +413,7 @@ index 76d692c..154b8f1 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -82,9 +82,13 @@
- 
+
  //font-awesome
  @import "font-awesome";
 +
@@ -429,9 +475,9 @@ index d470c6e..b6b811d 100644
  #### jQueryとCoffeeScript
  + 準備作業
 ++ 入力フォームの有効・無効を切り替える
- 
+
  #### Datapicker
- 
+
 diff --git a/app/assets/javascripts/admin/staff_member_form.coffee b/app/assets/javascripts/admin/staff_member_form.coffee
 new file mode 100644
 index 0000000..52b4456
@@ -477,7 +523,7 @@ index b5b7ac6..62b43d3 100644
 +      end
      end
    end
- 
+
 diff --git a/app/views/admin/staff_members/_form.html.erb b/app/views/admin/staff_members/_form.html.erb
 index 2570e2b..9601706 100644
 --- a/app/views/admin/staff_members/_form.html.erb
@@ -545,13 +591,13 @@ index b136562..d470c6e 100644
 --- a/README.md
 +++ b/README.md
 @@ -535,6 +535,8 @@ git push heroku master
- 
+
  ### jQueryとCoffeeScript
  #### jQueryとCoffeeScript
 ++ 準備作業
 +
  #### Datapicker
- 
+
  ### 単一テーブ継承
 diff --git a/app/assets/javascripts/application.js b/app/assets/javascripts/admin.js
 similarity index 93%
@@ -639,7 +685,7 @@ index 9ca8f85..88d2bab 100644
 +  <%= javascript_include_tag 'admin', 'data-turbolinks-track': 'reload' %>
    <%= csrf_meta_tags %>
  </head>
- 
+
 @@ -15,8 +17,6 @@
    <%= yield %>
    <%= render 'admin/shared/footer' %>
@@ -661,7 +707,7 @@ index a1a4f25..404c4c2 100644
 +  <%= javascript_include_tag 'customer', 'data-turbolinks-track': 'reload' %>
    <%= csrf_meta_tags %>
  </head>
- 
+
 @@ -15,8 +17,6 @@
    <%= yield %>
    <%= render 'customer/shared/footer' %>
@@ -683,7 +729,7 @@ index 39f318f..a354967 100644
 +  <%= javascript_include_tag 'staff', 'data-turbolinks-track': 'reload' %>
    <%= csrf_meta_tags %>
  </head>
- 
+
 @@ -15,8 +17,6 @@
    <%= yield %>
    <%= render 'staff/shared/footer' %>
@@ -698,7 +744,7 @@ index ac8c972..87e894e 100644
 --- a/config/initializers/assets.rb
 +++ b/config/initializers/assets.rb
 @@ -8,5 +8,5 @@ Rails.application.config.assets.version = '1.0'
- 
+
  # Precompile additional assets.
  # application.js, application.css, and all non-JS/CSS in app/assets folder are already added.
 -# Rails.application.config.assets.precompile += %w( staff.css )
@@ -734,7 +780,7 @@ index 76d9886..b136562 100644
 +++ b/README.md
 @@ -534,6 +534,9 @@ git push heroku master
  #### 演習問題
- 
+
  ### jQueryとCoffeeScript
 +#### jQueryとCoffeeScript
 +#### Datapicker
@@ -774,7 +820,7 @@ index 0cf37c8..1e69aa9 100644
 @@ -1,6 +1,14 @@
  class Admin::StaffMemberPresenter < ModelPresenter
    delegate :suspended?, to: :object
- 
+
 +  def full_name
 +    object.family_name + ' ' + object.given_name
 +  end
@@ -835,9 +881,9 @@ index 6602d07..76d9886 100644
  + エラーメッセージの設定
  + エラーメッセージの生成
 ++ パスワード変更フォームの改良
- 
+
  #### 演習問題
- 
+
 diff --git a/app/views/staff/passwords/edit.html.erb b/app/views/staff/passwords/edit.html.erb
 index 2679676..456ad56 100644
 --- a/app/views/staff/passwords/edit.html.erb
@@ -900,9 +946,9 @@ index de1f145..6602d07 100644
  + Errorsオブジェクト
  + エラーメッセージの設定
 ++ エラーメッセージの生成
- 
+
  #### 演習問題
- 
+
 diff --git a/app/presenters/form_presenter.rb b/app/presenters/form_presenter.rb
 index 016f17d..5be118f 100644
 --- a/app/presenters/form_presenter.rb
@@ -910,7 +956,7 @@ index 016f17d..5be118f 100644
 @@ -45,6 +45,16 @@ class FormPresenter
      end
    end
- 
+
 +  def error_message_for(name)
 +    markup do |m|
 +      object.errors.full_messages_for(name).each do |message|
@@ -955,13 +1001,13 @@ index c6c0977..de1f145 100644
 +++ b/README.md
 @@ -526,6 +526,9 @@ git push heroku master
  + さらなる改善
- 
+
  #### 入力エラーメッセージの生成
 ++ Errorsオブジェクト
 ++ エラーメッセージの設定
 +
  #### 演習問題
- 
+
  ### jQueryとCoffeeScript
 diff --git a/config/locales/models/ja.yml b/config/locales/models/ja.yml
 index 59e82a2..9f4947d 100644
@@ -970,7 +1016,7 @@ index 59e82a2..9f4947d 100644
 @@ -35,6 +35,20 @@ ja:
            logged_out: ログアウト
            rejected: ログイン拒否
- 
+
 +    errors:
 +      models:
 +        staff_member:
@@ -1025,7 +1071,7 @@ index edc601b..c6c0977 100644
  + FormPresenterクラスの定義
  + フォームプレゼンターの利用
 ++ さらなる改善
- 
+
  #### 入力エラーメッセージの生成
  #### 演習問題
 diff --git a/app/helpers/application_helper.rb b/app/helpers/application_helper.rb
@@ -1044,7 +1090,7 @@ index 58cff48..b5b7ac6 100644
 --- a/app/presenters/admin/staff_member_form_presenter.rb
 +++ b/app/presenters/admin/staff_member_form_presenter.rb
 @@ -7,7 +7,7 @@ class Admin::StaffMemberFormPresenter < FormPresenter
- 
+
    def full_name_block(name1, name2, label_text, options = {})
      markup(:dvi,class: 'AppForm__input-block') do |m|
 -      m << label(name1, label_text ,class: options[:required] ? 'AppForm__label required' : 'AppForm__label')
@@ -1057,7 +1103,7 @@ index a3295ca..016f17d 100644
 --- a/app/presenters/form_presenter.rb
 +++ b/app/presenters/form_presenter.rb
 @@ -26,22 +26,28 @@ class FormPresenter
- 
+
    def text_field_block(name, label_text, options = {})
      markup(:div, class: 'AppForm__input-block') do |m|
 -      m << label(name, label_text,class: options[:required] ? 'AppForm__label required' : 'AppForm__label')
@@ -1065,7 +1111,7 @@ index a3295ca..016f17d 100644
        m << text_field(name, hide_label: true, class: options[:required] ? 'required' : nil)
      end
    end
- 
+
    def password_field_block(name, label_text, options = {})
      markup(:div, class: 'AppForm__input-block') do |m|
 -      m << label(name, label_text, class: options[:required] ? 'AppForm__label required' : 'AppForm__label')
@@ -1073,7 +1119,7 @@ index a3295ca..016f17d 100644
        m << password_field(name, hide_label: true, class: options[:required] ? 'required' : nil)
      end
    end
- 
+
    def date_field_block(name, label_text, options = {})
      markup(:div, class: 'AppForm__input-block') do |m|
 -      m << label(name, label_text,class: options[:required] ? 'AppForm__label required' : 'AppForm__label')
@@ -1156,7 +1202,7 @@ index 5118a64..edc601b 100644
  + 問題の所在
  + FormPresenterクラスの定義
 ++ フォームプレゼンターの利用
- 
+
  #### 入力エラーメッセージの生成
  #### 演習問題
 diff --git a/app/assets/stylesheets/components/_appForm.scss b/app/assets/stylesheets/components/_appForm.scss
@@ -1301,7 +1347,7 @@ index 77f47da..59e82a2 100644
 +        full_name: 氏名
 +        full_name_kana: フリガナ
 +        suspended_on: アカウント停止
- 
+
        staff_event:
          member: 職員レコードへの外部キー
 
@@ -1336,14 +1382,14 @@ index dab8f6f..5118a64 100644
 +++ b/README.md
 @@ -520,6 +520,9 @@ git push heroku master
  + StaffEventPresenter
- 
+
  #### フォームプレゼンター
 ++ 問題の所在
 ++ FormPresenterクラスの定義
 +
  #### 入力エラーメッセージの生成
  #### 演習問題
- 
+
 diff --git a/app/presenters/form_presenter.rb b/app/presenters/form_presenter.rb
 new file mode 100644
 index 0000000..d9b7985
@@ -1377,7 +1423,7 @@ index cd210db..d347ed8 100644
 @@ -1,8 +1,11 @@
  class ModelPresenter
    include HtmlBuilder
- 
+
 -  attr_reader :object, :view_context
 -  delegate :raw, :link_to, to: :view_context
 +  attr_reader :object,
@@ -1385,7 +1431,7 @@ index cd210db..d347ed8 100644
 +
 +  delegate :raw,
 +           :link_to, to: :view_context
- 
+
    def initialize(object, view_context)
      @object = object
 
@@ -1439,7 +1485,7 @@ index 3fdcfcd..dab8f6f 100644
  + HtmlBuilderモジュールの作成
 ++ markupメソッドの使用法
 ++ StaffEventPresenter
- 
+
  #### フォームプレゼンター
  #### 入力エラーメッセージの生成
 diff --git a/app/lib/html_builder.rb b/app/lib/html_builder.rb
@@ -1490,7 +1536,7 @@ index 59e4a0d..cd210db 100644
    attr_reader :object, :view_context
 -  delegate :raw, to: :view_context
 +  delegate :raw, :link_to, to: :view_context
- 
+
    def initialize(object, view_context)
      @object = object
 diff --git a/app/views/admin/staff_events/_event.html.erb b/app/views/admin/staff_events/_event.html.erb
@@ -1569,7 +1615,7 @@ index 8b79979..3fdcfcd 100644
 +++ b/README.md
 @@ -514,6 +514,9 @@ git push heroku master
  + 委譲
- 
+
  #### HtmlBuilder
 ++ 問題の所在
 ++ HtmlBuilderモジュールの作成
@@ -1634,7 +1680,7 @@ index 11e8581..8b79979 100644
  + 問題の所在
  + プレゼンターとは
 ++ 委譲
- 
+
  #### HtmlBuilder
  #### フォームプレゼンター
 diff --git a/app/presenters/admin/staff_member_presenter.rb b/app/presenters/admin/staff_member_presenter.rb
@@ -1662,7 +1708,7 @@ index 480617a..59e4a0d 100644
  class ModelPresenter
    attr_reader :object, :view_context
 +  delegate :raw, to: :view_context
- 
+
    def initialize(object, view_context)
      @object = object
 
@@ -1709,7 +1755,7 @@ index 0f329a8..11e8581 100644
 --- a/README.md
 +++ b/README.md
 @@ -509,6 +509,9 @@ git push heroku master
- 
+
  ### プレゼンター
  #### モデルプレゼンター
 ++ 問題の所在
@@ -1811,7 +1857,7 @@ index 39b8df0..0f329a8 100644
 +++ b/README.md
 @@ -508,6 +508,12 @@ git push heroku master
  + バリデーション追加
- 
+
  ### プレゼンター
 +#### モデルプレゼンター
 +#### HtmlBuilder
@@ -1891,11 +1937,11 @@ index 56c6186..39b8df0 100644
 --- a/README.md
 +++ b/README.md
 @@ -505,6 +505,7 @@ git push heroku master
- 
+
  #### 演習問題
  + テスト追加
 ++ バリデーション追加
- 
+
  ### プレゼンター
  ### jQueryとCoffeeScript
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
@@ -1905,10 +1951,10 @@ index c307f2b..e9c0e92 100644
 @@ -36,10 +36,11 @@ class StaffMember < ApplicationRecord
      self.given_name_kana = normalize_as_furigana(given_name_kana)
    end
- 
+
 +  HUMAN_NAME_REGEXP = /\A[p{han}\p{hiragana}\p{katakana}\u{30fc}\p{alpha}]+\z/
    KATAKANA_REGEXP = /\A[\p{katakana}\u{30fc}]+\z/
- 
+
    validates :email, presence: true, email: { alllow_blank: true }
 -  validates :family_name, :given_name, presence: true
 +  validates :family_name, :given_name, presence: true, format: { with: HUMAN_NAME_REGEXP, allow_blank: true }
@@ -1958,10 +2004,10 @@ index c74703e..56c6186 100644
 +++ b/README.md
 @@ -504,6 +504,7 @@ git push heroku master
  + バリデーション
- 
+
  #### 演習問題
 ++ テスト追加
- 
+
  ### プレゼンター
  ### jQueryとCoffeeScript
 diff --git a/spec/models/staff_member_spec.rb b/spec/models/staff_member_spec.rb
@@ -1971,7 +2017,7 @@ index 142b2d4..4d72fe7 100644
 @@ -100,6 +100,16 @@ RSpec.describe StaffMember, type: :model do
        expect(member2).not_to be_valid
      end
- 
+
 +    # 漢字、ひらがな、カタカナ、アルファベット以外の文字を含まない
 +    it 'does not include characters other than kanji, hiragana, katakana, and alphabet in family_name' do
 +      member = build(:staff_member, family_name: '@@@')
@@ -1982,7 +2028,7 @@ index 142b2d4..4d72fe7 100644
 +      member = build(:staff_member, given_name: '@@@')
 +      expect(member).not_to be_valid
 +    end
- 
+
    end
  end
 
@@ -2032,9 +2078,9 @@ index 384af1c..c74703e 100644
  + editアクション
  + updateアクション
 ++ バリデーション
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/passwords_controller.rb b/app/controllers/staff/passwords_controller.rb
 index 05390eb..cf04051 100644
 --- a/app/controllers/staff/passwords_controller.rb
@@ -2060,7 +2106,7 @@ index c5c9728..1894953 100644
 @@ -6,8 +6,18 @@ class Staff::ChangePasswordForm
                  :new_password,
                  :new_password_confirmation
- 
+
 +  validates :new_password, presence: true, confirmation: true
 +
 +  validate do
@@ -2126,9 +2172,9 @@ index 413d724..384af1c 100644
  + showアクション
  + editアクション
 ++ updateアクション
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/passwords_controller.rb b/app/controllers/staff/passwords_controller.rb
 index d529ad8..05390eb 100644
 --- a/app/controllers/staff/passwords_controller.rb
@@ -2224,9 +2270,9 @@ index d670099..413d724 100644
  + リンクの設置
  + showアクション
 ++ editアクション
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/passwords_controller.rb b/app/controllers/staff/passwords_controller.rb
 index c39c27c..d529ad8 100644
 --- a/app/controllers/staff/passwords_controller.rb
@@ -2300,7 +2346,7 @@ index 3650d58..77f47da 100644
        staff/login_form: 職員ログインフォーム
 +      staff/change_password_form: 職員パスワード変更フォーム
        admin/login_form: 管理者ログインフォーム
- 
+
      attributes:
        staff/login_form:
          email: メールアドレス
@@ -2374,9 +2420,9 @@ index 82adc1e..d670099 100644
  + ルーティングの設定
  + リンクの設置
 ++ showアクション
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/passwords_controller.rb b/app/controllers/staff/passwords_controller.rb
 new file mode 100644
 index 0000000..c39c27c
@@ -2432,13 +2478,13 @@ index f3aed1e..82adc1e 100644
 --- a/README.md
 +++ b/README.md
 @@ -497,6 +497,7 @@ git push heroku master
- 
+
  #### 職員が自分のパスワードを変更する機能
  + ルーティングの設定
 ++ リンクの設置
- 
+
  #### 演習問題
- 
+
 diff --git a/app/assets/stylesheets/components/common/_table.scss b/app/assets/stylesheets/components/common/_table.scss
 index 0c75320..18a6b86 100644
 --- a/app/assets/stylesheets/components/common/_table.scss
@@ -2446,7 +2492,7 @@ index 0c75320..18a6b86 100644
 @@ -40,6 +40,8 @@
      padding: $narrow;
      &--email { font-family: monospace }
- 
+
 +    &--password { font-family: monospace }
 +
      &--date {
@@ -2462,7 +2508,7 @@ index d286219..d87fd2b 100644
      <%= link_to t('.edit'), :edit_staff_account, class: 'btn btn-default' %>
 +    <%= link_to t('.password_edit'), :edit_staff_password, class: 'btn btn-default' %>
    </div>
- 
+
    <table class="Table__body Table__body--attributes StaffTable__body">
 @@ -29,6 +30,10 @@
          <%= @staff_member.email %>
@@ -2522,12 +2568,12 @@ index 59a3bb8..f3aed1e 100644
 +++ b/README.md
 @@ -496,6 +496,8 @@ git push heroku master
  + 正規化とバリデーションのテスト
- 
+
  #### 職員が自分のパスワードを変更する機能
 ++ ルーティングの設定
 +
  #### 演習問題
- 
+
  ### プレゼンター
 diff --git a/config/routes.rb b/config/routes.rb
 index 26ef1fa..3be854a 100644
@@ -2546,14 +2592,14 @@ index 26ef1fa..3be854a 100644
  #                   admin_session DELETE /admin/session(.:format)                             admin/sessions#destroy {:host=>"0.0.0.0"}
 @@ -32,10 +36,6 @@
  #
- 
+
  Rails.application.routes.draw do
 -  namespace :admin do
 -    get 'staff_events/index'
 -  end
 -
    config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
 @@ -48,6 +48,7 @@ Rails.application.routes.draw do
        root   'top#index'
@@ -2562,7 +2608,6 @@ index 26ef1fa..3be854a 100644
 +      resource :password, only: [:show, :edit, :update]
      end
    end
- 
+
 
 ```
-
