--- a/docs/journal/20170203.md
+++ b/docs/journal/20170203.md
@@ -2,7 +2,52 @@
 
 ## 概要
 
-2017-02-03の作業内容をまとめています。
+2017-02-03の作業内容をまとめています。この日は主に顧客管理機能の実装を行いました。具体的には、顧客情報の新規登録・編集フォームの作成と、それに関連する部分テンプレートやフォームプレゼンターの実装を行いました。
+
+### 関連ユースケース
+
+- **S-004**: 顧客情報登録 - 職員が新規顧客情報を登録する
+- **S-005**: 顧客情報検索 - 職員が顧客情報を検索する
+- **S-006**: 顧客情報更新 - 職員が既存の顧客情報を更新する
+
+### システム構成上の位置づけ
+
+この実装はシステムの顧客管理機能に関わる部分であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "顧客管理機能"
+actor "職員" as Staff
+rectangle "Staff Interface" {
+  [Staff::CustomersController] as Controller
+  [CustomerFormPresenter] as Presenter
+  [Customer] as CustomerModel
+  [HomeAddress] as HomeAddressModel
+  [WorkAddress] as WorkAddressModel
+  [CustomerForm] as FormObject
+}
+
+Staff --> Controller : 操作
+Controller --> FormObject : データバインド
+Controller --> Presenter : 表示整形
+Presenter --> CustomerModel : データ参照
+Presenter --> HomeAddressModel : データ参照
+Presenter --> WorkAddressModel : データ参照
+FormObject --> CustomerModel : データ保存
+FormObject --> HomeAddressModel : データ保存
+FormObject --> WorkAddressModel : データ保存
+
+note right of FormObject
+  顧客、自宅住所、勤務先住所の
+  複合オブジェクトを扱う
+end note
+
+note right of Presenter
+  フォーム表示を整形し
+  入力フィールドを
+  適切に配置
+end note
+@enduml
+```
 
 ## コミット: 998fa88
 
@@ -57,9 +102,9 @@ index a706763..23ad161 100644
  + フォームプレゼンターの作成
  + ERBテンプレート本体の作成
 ++ 部分テンプレート郡の作成
- 
+
  #### 顧客アカウントの新規登録・更新・削除
- 
+
 diff --git a/app/assets/javascripts/customer.js b/app/assets/javascripts/customer.js
 index 2e0435d..c8586cb 100644
 --- a/app/assets/javascripts/customer.js
@@ -135,7 +180,7 @@ index 1a3c9bd..b825b9a 100644
 --- a/app/presenters/form_presenter.rb
 +++ b/app/presenters/form_presenter.rb
 @@ -53,7 +53,6 @@ class FormPresenter
- 
+
    def drop_down_list_block(name, label_text, choices, options ={})
      markup(:div, class: 'AppForm__input-block') do |m|
 -      m << decorated_label(name, label_text, options)
@@ -154,7 +199,7 @@ index dc0a1bb..8fc0c0f 100644
 +      m << text_field(name, options.merge(hide_label: true))
      end
    end
- 
+
 diff --git a/app/views/staff/customers/_customer_fields.html.erb b/app/views/staff/customers/_customer_fields.html.erb
 new file mode 100644
 index 0000000..a2871e1
@@ -235,7 +280,7 @@ index 33594d6..b534606 100644
 --- a/app/views/staff/customers/edit.html.erb
 +++ b/app/views/staff/customers/edit.html.erb
 @@ -5,11 +5,11 @@
- 
+
  <section class="Section l-column AppForm">
    <div class="AppForm__generic-form StaffAppForm__generic-form">
 -    <%= bootstrap_form_for @customer_form, as: 'form' do |f| %>
@@ -297,9 +342,9 @@ index 3386f1e..a706763 100644
  + new/editアクションの実装
  + フォームプレゼンターの作成
 ++ ERBテンプレート本体の作成
- 
+
  #### 顧客アカウントの新規登録・更新・削除
- 
+
 diff --git a/app/views/staff/customers/edit.html.erb b/app/views/staff/customers/edit.html.erb
 new file mode 100644
 index 0000000..33594d6
@@ -401,9 +446,9 @@ index 3545fd2..3386f1e 100644
  + フォームオブジェクトの作成
  + new/editアクションの実装
 ++ フォームプレゼンターの作成
- 
+
  #### 顧客アカウントの新規登録・更新・削除
- 
+
 diff --git a/app/presenters/admin/staff_member_form_presenter.rb b/app/presenters/admin/staff_member_form_presenter.rb
 index 62b43d3..8434d7b 100644
 --- a/app/presenters/admin/staff_member_form_presenter.rb
@@ -442,7 +487,7 @@ index b0527db..1a3c9bd 100644
 @@ -51,6 +51,13 @@ class FormPresenter
      end
    end
- 
+
 +  def drop_down_list_block(name, label_text, choices, options ={})
 +    markup(:div, class: 'AppForm__input-block') do |m|
 +      m << decorated_label(name, label_text, options)
@@ -455,13 +500,13 @@ index b0527db..1a3c9bd 100644
        object.errors.full_messages_for(name).each do |message|
 @@ -62,7 +69,7 @@ class FormPresenter
    end
- 
+
    private
 -  def decorated_label(name, label_text, options)
 +  def decorated_label(name, label_text, options = {})
      label(name, label_text, class: options[:required] ? 'AppForm__label required' : 'AppForm__label')
    end
- 
+
 diff --git a/app/presenters/staff/address_form_presenter.rb b/app/presenters/staff/address_form_presenter.rb
 new file mode 100644
 index 0000000..2500e50
@@ -568,13 +613,13 @@ index 18d4c33..3545fd2 100644
 --- a/README.md
 +++ b/README.md
 @@ -556,6 +556,7 @@ git push heroku master
- 
+
  #### 顧客アカウントの新規登録・編集フォーム
  + フォームオブジェクトの作成
 ++ new/editアクションの実装
- 
+
  #### 顧客アカウントの新規登録・更新・削除
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index 3e2aa83..ffa88e4 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -635,12 +680,12 @@ index 5bb06ba..18d4c33 100644
 +++ b/README.md
 @@ -555,6 +555,8 @@ git push heroku master
  + 顧客アカウントの詳細表示
- 
+
  #### 顧客アカウントの新規登録・編集フォーム
 ++ フォームオブジェクトの作成
 +
  #### 顧客アカウントの新規登録・更新・削除
- 
+
  ### Capybara
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
 new file mode 100644
@@ -700,7 +745,7 @@ index 8aef379..5bb06ba 100644
  + シードデータの投入
  + 顧客アカウントの一覧表示
 ++ 顧客アカウントの詳細表示
- 
+
  #### 顧客アカウントの新規登録・編集フォーム
  #### 顧客アカウントの新規登録・更新・削除
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
@@ -870,11 +915,11 @@ index 8b2d632..8aef379 100644
 --- a/README.md
 +++ b/README.md
 @@ -551,6 +551,7 @@ git push heroku master
- 
+
  #### 顧客アカウントの一覧表示・詳細表示
  + シードデータの投入
 ++ 顧客アカウントの一覧表示
- 
+
  #### 顧客アカウントの新規登録・編集フォーム
  #### 顧客アカウントの新規登録・更新・削除
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
@@ -894,7 +939,7 @@ index 67c8a43..091794c 100644
 +++ b/app/controllers/staff/top_controller.rb
 @@ -2,6 +2,10 @@ class Staff::TopController < Staff::Base
    skip_before_action :authorize
- 
+
    def index
 -    render action: 'index'
 +    if current_staff_member
@@ -1156,7 +1201,7 @@ index 3be854a..f0f1ae9 100644
 +      resources :customers
      end
    end
- 
+
 diff --git a/db/migrate/20170203051643_create_customers.rb b/db/migrate/20170203051643_create_customers.rb
 index 49f2df7..df6f8d1 100644
 --- a/db/migrate/20170203051643_create_customers.rb
@@ -1168,7 +1213,7 @@ index 49f2df7..df6f8d1 100644
 -      t.string :birthday, comment:'誕生日'
 +      t.date :birthday, comment:'誕生日'
        t.string :hashed_password, comment:'パスワード'
- 
+
        t.timestamps
 diff --git a/db/schema.rb b/db/schema.rb
 index edc3e7e..36cea7d 100644
@@ -1189,7 +1234,7 @@ index 8f12e7c..c6663ca 100644
 +++ b/spec/controllers/staff/top_controller_spec.rb
 @@ -9,10 +9,10 @@ describe Staff::TopController, 'Before login' do
    end
- 
+
    describe '#index' do
 -    # 通常はstaff/top/indexを表示
 -    it 'should display staff/top/index' do
@@ -1199,7 +1244,7 @@ index 8f12e7c..c6663ca 100644
 -      expect(response).to render_template('staff/top/index')
 +      expect(response).to render_template('staff/top/dashboard')
      end
- 
+
      # 停止フラグがセットされたら強制的にログアウト
 diff --git a/spec/factories/customers.rb b/spec/factories/customers.rb
 index 2895e7f..98d55fd 100644
@@ -1259,21 +1304,21 @@ index 9bbec3c..8b2d632 100644
 +++ b/README.md
 @@ -550,6 +550,8 @@ git push heroku master
  + 顧客関連モデル群の初期実装
- 
+
  #### 顧客アカウントの一覧表示・詳細表示
 ++ シードデータの投入
 +
  #### 顧客アカウントの新規登録・編集フォーム
  #### 顧客アカウントの新規登録・更新・削除
- 
+
 diff --git a/db/schema.rb b/db/schema.rb
 index 6d16dd3..edc3e7e 100644
 --- a/db/schema.rb
 +++ b/db/schema.rb
 @@ -12,7 +12,7 @@
- 
+
  ActiveRecord::Schema.define(version: 20170203051654) do
- 
+
 -  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
 +  create_table "addresses", force: :cascade,  comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -1282,7 +1327,7 @@ index 6d16dd3..edc3e7e 100644
 @@ -28,7 +28,7 @@ ActiveRecord::Schema.define(version: 20170203051654) do
      t.index ["type", "customer_id"], name: "index_addresses_on_type_and_customer_id", unique: true, using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade,  comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -1291,7 +1336,7 @@ index 6d16dd3..edc3e7e 100644
 @@ -38,7 +38,7 @@ ActiveRecord::Schema.define(version: 20170203051654) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
 +  create_table "customers", force: :cascade,  comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -1300,7 +1345,7 @@ index 6d16dd3..edc3e7e 100644
 @@ -54,7 +54,7 @@ ActiveRecord::Schema.define(version: 20170203051654) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_customers_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade,  comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -1309,7 +1354,7 @@ index 6d16dd3..edc3e7e 100644
 @@ -63,7 +63,7 @@ ActiveRecord::Schema.define(version: 20170203051654) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade,  comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -1391,7 +1436,7 @@ index f58b110..1de7b86 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,7 +6,7 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 -table_names = %w(staff_members administrators staff_events)
@@ -1436,7 +1481,7 @@ index f2ae519..9bbec3c 100644
  + 単一テーブル継承とは
  + 顧客関連テーブル群の作成
 ++ 顧客関連モデル群の初期実装
- 
+
  #### 顧客アカウントの一覧表示・詳細表示
  #### 顧客アカウントの新規登録・編集フォーム
 diff --git a/app/models/address.rb b/app/models/address.rb
@@ -1445,7 +1490,7 @@ index 71dcc7a..fd01b80 100644
 +++ b/app/models/address.rb
 @@ -22,4 +22,18 @@
  #
- 
+
  class Address < ApplicationRecord
 +  belongs_to :customer
 +
@@ -1468,7 +1513,7 @@ index 6a2be80..b688c24 100644
 +++ b/app/models/customer.rb
 @@ -22,4 +22,17 @@
  #
- 
+
  class Customer < ApplicationRecord
 +  has_one :home_address, dependent: :destroy
 +  has_one :work_address, dependent: :destroy
@@ -1550,7 +1595,7 @@ index afdc1b9..f2ae519 100644
 --- a/README.md
 +++ b/README.md
 @@ -544,6 +544,10 @@ git push heroku master
- 
+
  ### 単一テーブ継承
  #### 単一テーブル継承
 ++ 顧客管理のためのデータベース設計
@@ -1681,10 +1726,10 @@ index 5bd9dd3..6d16dd3 100644
 @@ -10,9 +10,25 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170131041629) do
 +ActiveRecord::Schema.define(version: 20170203051654) do
- 
+
 -  create_table "administrators", force: :cascade, comment: "管理者" do |t|
 +  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
 +    t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -1709,7 +1754,7 @@ index 5bd9dd3..6d16dd3 100644
 @@ -22,7 +38,23 @@ ActiveRecord::Schema.define(version: 20170131041629) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
 +  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
 +    t.string   "email",            null: false, comment: "メールアドレス"
@@ -1734,7 +1779,7 @@ index 5bd9dd3..6d16dd3 100644
 @@ -31,7 +63,7 @@ ActiveRecord::Schema.define(version: 20170131041629) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -1743,7 +1788,7 @@ index 5bd9dd3..6d16dd3 100644
 @@ -48,5 +80,6 @@ ActiveRecord::Schema.define(version: 20170131041629) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 +  add_foreign_key "addresses", "customers"
    add_foreign_key "staff_events", "staff_members"
  end
@@ -1868,7 +1913,7 @@ index ff0cb7d..afdc1b9 100644
 +++ b/README.md
 @@ -543,6 +543,11 @@ git push heroku master
  + Datepickerの利用
- 
+
  ### 単一テーブ継承
 +#### 単一テーブル継承
 +#### 顧客アカウントの一覧表示・詳細表示
@@ -1880,4 +1925,3 @@ index ff0cb7d..afdc1b9 100644
  ### 検索フォーム
 
 ```
-
