--- a/docs/journal/20170204.md
+++ b/docs/journal/20170204.md
@@ -2,7 +2,79 @@
 
 ## 概要
 
-2017-02-04の作業内容をまとめています。
+2017-02-04の作業内容をまとめています。この日は主に「単一テーブル継承」機能の実装と、JavaScriptの読み込み不具合修正を行いました。
+
+### 実装内容の説明
+
+#### 単一テーブル継承（Single Table Inheritance）
+
+単一テーブル継承は、オブジェクト指向プログラミングの継承概念をデータベースに適用する手法です。この実装により、顧客関連の情報（住所や電話番号など）を効率的に管理できるようになりました。
+
+```plantuml
+@startuml
+title 単一テーブル継承の実装
+
+class Customer {
+  +id: integer
+  +email: string
+  +family_name: string
+  +given_name: string
+  +family_name_kana: string
+  +given_name_kana: string
+  +gender: string
+  +birthday: date
+  +hashed_password: string
+}
+
+class Address {
+  +id: integer
+  +customer_id: integer
+  +type: string
+  +postal_code: string
+  +prefecture: string
+  +city: string
+  +address1: string
+  +address2: string
+}
+
+class HomeAddress {
+}
+
+class WorkAddress {
+  +company_name: string
+  +division_name: string
+}
+
+Customer "1" -- "0..*" Address
+Address <|-- HomeAddress
+Address <|-- WorkAddress
+
+note right of Address: typeカラムで継承関係を表現
+
+@enduml
+```
+
+#### JavaScriptの読み込み不具合修正
+
+各インターフェース（管理者、職員、顧客）のJavaScriptファイルで共通ライブラリの読み込みが正しく行われるよう修正しました。
+
+### アーキテクチャとの関連
+
+この実装は、[アーキテクチャ概要](../アーキテクチャ概要.md)の「5. 主要なデータモデル」セクションに記載されている顧客、住所、電話番号のモデル関連を実現するものです。特に以下の部分に関連しています：
+
+```
+Customer ||--o{ HomeAddress
+Customer ||--o{ WorkAddress
+Customer ||--o{ Phone
+```
+
+### ユースケースとの関連
+
+この実装は、[ユースケース](../ユースケース.md)の「3.2. 顧客管理」セクションに記載されている以下のユースケースをサポートします：
+
+- S-004: 顧客情報登録
+- S-005: 顧客情報検索
+- S-006: 顧客情報更新
 
 ## コミット: 6d1204e
 
@@ -123,7 +195,7 @@ index ffd10d2..9343c80 100644
 +++ b/app/assets/javascripts/shared/main.js
 @@ -1,26 +1,30 @@
  /* main.js */
- 
+
  /* メニュー */
 -(function(){
 -    function toggle(targetDOM, _className, callback) {
@@ -156,17 +228,17 @@ index ffd10d2..9343c80 100644
 +                wrapper = document.getElementById('wrapper'),
 +                overlay = document.getElementById('overlay'),
 +                toggleMenu = toggle(wrapper, 'isOpened');
- 
+
 -    menuButton.addEventListener('click', toggleMenu, false);
 -    overlay.addEventListener('click', toggleMenu, false);
 +            menuButton.addEventListener('click', toggleMenu, false);
 +            overlay.addEventListener('click', toggleMenu, false);
- 
+
 -}());
 +        }());
 +    });
 +}).call(this);
- 
+
  /* 画像スライダー */
  // @param {string} id - ラッパー要素のid
 diff --git a/app/assets/javascripts/staff.js b/app/assets/javascripts/staff.js
@@ -305,7 +377,7 @@ index 53cec0c..0b78d96 100644
 --- a/app/views/staff/customers/show.html.erb
 +++ b/app/views/staff/customers/show.html.erb
 @@ -5,33 +5,33 @@
- 
+
  <section class="Section l-column Table StaffTable">
    <table class="Table__body Table__body--attributes StaffTable__body">
 -    <tr class="Table__tr"><th class="Table__th" colspan="2">基本情報</th></tr>
@@ -370,13 +442,13 @@ index 9f4947d..b4eafec 100644
        staff_event: 職員イベント
 +      customer: 顧客
 +      address: 住所
- 
+
      attributes:
        administrator:
 @@ -35,6 +37,46 @@ ja:
            logged_out: ログアウト
            rejected: ログイン拒否
- 
+
 +      customer:
 +        email: メールアドレス
 +        email_for_index: 顧客用メールアドレス
@@ -492,7 +564,7 @@ index 6d5229b..ef5ff0b 100644
  + フォームオブジェクトの拡張
  + create/updateアクションの実装
 ++ destroyアクションの実装
- 
+
  ### Capybara
  ### フォームオブジェクト
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
@@ -568,11 +640,11 @@ index efc01d4..6d5229b 100644
 --- a/README.md
 +++ b/README.md
 @@ -563,6 +563,7 @@ git push heroku master
- 
+
  #### 顧客アカウントの新規登録・更新・削除
  + フォームオブジェクトの拡張
 ++ create/updateアクションの実装
- 
+
  ### Capybara
  ### フォームオブジェクト
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
@@ -615,7 +687,7 @@ index 2c43187..69dc6e2 100644
 @@ -14,7 +14,7 @@ class Staff::CustomerForm
    def assign_attributes(params = {})
      @params = params
- 
+
 -    customer.assign_attributes(customer_parmas)
 +    customer.assign_attributes(customer_params)
      customer.home_address.assign_attributes(home_address_params)
@@ -682,10 +754,10 @@ index 23ad161..efc01d4 100644
 +++ b/README.md
 @@ -562,6 +562,7 @@ git push heroku master
  + 部分テンプレート郡の作成
- 
+
  #### 顧客アカウントの新規登録・更新・削除
 ++ フォームオブジェクトの拡張
- 
+
  ### Capybara
  ### フォームオブジェクト
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
@@ -752,4 +824,3 @@ index 3a7edae..2c43187 100644
 \ No newline at end of file
 
 ```
-
