--- a/docs/journal/20170206.md
+++ b/docs/journal/20170206.md
@@ -2,7 +2,98 @@
 
 ## 概要
 
-2017-02-06の作業内容をまとめています。
+2017-02-06の作業内容をまとめています。この日は主に「顧客電話番号の管理」機能の実装を行いました。
+
+### 実装内容の説明
+
+#### 顧客電話番号の管理
+
+顧客の連絡先情報として電話番号を管理する機能を実装しました。顧客は複数の電話番号（個人電話、自宅電話、勤務先電話など）を持つことができ、それぞれに優先フラグを設定できます。また、電話番号は顧客に直接紐づくだけでなく、住所（自宅・勤務先）にも紐づけることができます。
+
+```plantuml
+@startuml
+title 顧客電話番号管理の実装
+
+class Customer {
+  +id: integer
+  +email: string
+  +family_name: string
+  +given_name: string
+  +family_name_kana: string
+  +given_name_kana: string
+  +gender: string
+  +birthday: date
+  +hashed_password: string
+}
+
+class Address {
+  +id: integer
+  +customer_id: integer
+  +type: string
+  +postal_code: string
+  +prefecture: string
+  +city: string
+  +address1: string
+  +address2: string
+}
+
+class HomeAddress {
+}
+
+class WorkAddress {
+  +company_name: string
+  +division_name: string
+}
+
+class Phone {
+  +id: integer
+  +customer_id: integer
+  +address_id: integer
+  +number: string
+  +number_for_index: string
+  +primary: boolean
+}
+
+Customer "1" -- "0..*" Phone
+Customer "1" -- "0..*" Address
+Address <|-- HomeAddress
+Address <|-- WorkAddress
+Address "0..1" -- "0..*" Phone
+
+note right of Phone::number_for_index
+  検索用に正規化された電話番号
+  （ハイフンなどの記号を除去）
+end note
+
+note right of Phone::primary
+  優先フラグ（主な連絡先として使用）
+end note
+
+@enduml
+```
+
+#### 電話番号の正規化と検証
+
+電話番号は入力形式が多様なため、保存前に正規化処理を行います。また、電話番号形式の検証も実装し、不正な形式の電話番号が登録されないようにしています。
+
+### アーキテクチャとの関連
+
+この実装は、[アーキテクチャ概要](../アーキテクチャ概要.md)の「5. 主要なデータモデル」セクションに記載されている顧客と電話番号のモデル関連を実現するものです。特に以下の部分に関連しています：
+
+```
+Customer ||--o{ Phone
+```
+
+また、「7.1 値の正規化とバリデーション」の実装例としても位置づけられます。
+
+### ユースケースとの関連
+
+この実装は、[ユースケース](../ユースケース.md)の「3.2. 顧客管理」セクションに記載されている以下のユースケースをサポートします：
+
+- S-004: 顧客情報登録
+- S-006: 顧客情報更新
+
+これにより、職員は顧客の連絡先情報として複数の電話番号を管理できるようになります。
 
 ## コミット: a2f9e37
 
@@ -173,7 +264,7 @@ index 55df9b9..43aae6a 100644
  + phonesテーブルとPhoneモデル
  + 顧客、自宅住所、勤務先との関連付け
 ++ 顧客詳細ページへの電話番号の表示
- 
+
  #### 顧客電話番号の管理（２）
  #### 演習問題 
 diff --git a/app/presenters/staff/address_presenter.rb b/app/presenters/staff/address_presenter.rb
@@ -310,7 +401,7 @@ index 8daea5e..55df9b9 100644
  + 電話番号管理機能の仕様
  + phonesテーブルとPhoneモデル
 ++ 顧客、自宅住所、勤務先との関連付け
- 
+
  #### 顧客電話番号の管理（２）
  #### 演習問題 
 diff --git a/app/models/address.rb b/app/models/address.rb
@@ -319,10 +410,10 @@ index e4133f5..b8ab123 100644
 +++ b/app/models/address.rb
 @@ -25,6 +25,7 @@ class Address < ApplicationRecord
    include StringNormalizer
- 
+
    belongs_to :customer
 +  has_many :phones, -> { order(:id) }, dependent: :destroy, autosave: true
- 
+
    before_validation do
      self.postal_code = normalize_as_postal_code(postal_code)
 diff --git a/app/models/customer.rb b/app/models/customer.rb
@@ -330,12 +421,12 @@ index 3a480d3..423e927 100644
 --- a/app/models/customer.rb
 +++ b/app/models/customer.rb
 @@ -28,6 +28,8 @@ class Customer < ApplicationRecord
- 
+
    has_one :home_address, dependent: :destroy, autosave: true
    has_one :work_address, dependent: :destroy, autosave: true
 +  has_many :phones, dependent: :destroy
 +  has_many :personal_phones, -> { where(address_id: nil).order(:id) },class_name: 'Phone', autosave: true
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 diff --git a/db/schema.rb b/db/schema.rb
@@ -345,7 +436,7 @@ index f0ee063..7285822 100644
 @@ -54,14 +54,14 @@ ActiveRecord::Schema.define(version: 20170206085929) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_customers_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade,  comment: "電話" do |t|
 -    t.integer  "customer_id",      null: false
 -    t.integer  "address_id"
@@ -433,14 +524,14 @@ index 2bb5293..8daea5e 100644
 +++ b/README.md
 @@ -591,6 +591,9 @@ git push heroku master
  + Capybaraによるテスト
- 
+
  #### 顧客電話番号の管理（１） 
 ++ 電話番号管理機能の仕様
 ++ phonesテーブルとPhoneモデル
 +
  #### 顧客電話番号の管理（２）
  #### 演習問題 
- 
+
 diff --git a/app/models/concerns/string_normalizer.rb b/app/models/concerns/string_normalizer.rb
 index f036970..c19131e 100644
 --- a/app/models/concerns/string_normalizer.rb
@@ -462,16 +553,16 @@ index 36cea7d..f0ee063 100644
 @@ -10,7 +10,7 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170203051654) do
 +ActiveRecord::Schema.define(version: 20170206085929) do
- 
+
    create_table "addresses", force: :cascade,  comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
 @@ -54,6 +54,19 @@ ActiveRecord::Schema.define(version: 20170203051654) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_customers_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 +  create_table "phones", force: :cascade,  comment: "電話" do |t|
 +    t.integer  "customer_id",      null: false
 +    t.integer  "address_id"
@@ -490,7 +581,7 @@ index 36cea7d..f0ee063 100644
      t.string   "type",            null: false, comment: "イベントタイプ"
 @@ -81,5 +94,7 @@ ActiveRecord::Schema.define(version: 20170203051654) do
    end
- 
+
    add_foreign_key "addresses", "customers"
 +  add_foreign_key "phones", "addresses"
 +  add_foreign_key "phones", "customers"
@@ -542,7 +633,7 @@ index 28c33ce..2bb5293 100644
  + フィールドの有効化・無効化
  + フォームオブジェクトの修正
 ++ Capybaraによるテスト
- 
+
  #### 顧客電話番号の管理（１） 
  #### 顧客電話番号の管理（２）
 diff --git a/spec/features/staff/customer_management_spec.rb b/spec/features/staff/customer_management_spec.rb
@@ -552,7 +643,7 @@ index a03060c..0f4ca36 100644
 @@ -11,6 +11,28 @@ feature 'Customer management by staff' do
      login_as_staff_member(staff_member)
    end
- 
+
 +  # 職員が顧客（基本情報のみ）を登録する
 +  scenario 'Employees register customers (only basic information)' do
 +    click_link I18n.t('staff.top.dashboard.staff_customers')
@@ -584,7 +675,7 @@ index a03060c..0f4ca36 100644
      click_link I18n.t('staff.top.dashboard.staff_customers')
 -
      first('.Table__links').click_link I18n.t('staff.customers.index.new')
- 
+
      fill_in I18n.t('activerecord.attributes.customer.email'), with: 'test@example.jp'
 @@ -45,6 +66,7 @@ feature 'Customer management by staff' do
      fill_in 'form_customer_given_name_kana', with: 'ハナコ'
@@ -637,7 +728,7 @@ index 72e323f..28c33ce 100644
  #### 自宅住所と勤務先の任意入力
  + フィールドの有効化・無効化
 ++ フォームオブジェクトの修正
- 
+
  #### 顧客電話番号の管理（１） 
  #### 顧客電話番号の管理（２）
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
@@ -645,12 +736,12 @@ index d4f493e..acc92b9 100644
 --- a/app/forms/staff/customer_form.rb
 +++ b/app/forms/staff/customer_form.rb
 @@ -15,10 +15,20 @@ class Staff::CustomerForm
- 
+
    def assign_attributes(params = {})
      @params = params
 +    self.inputs_home_address = params[:inputs_home_address] == '1'
 +    self.inputs_work_address = params[:inputs_work_address] == '1'
- 
+
      customer.assign_attributes(customer_params)
 -    customer.home_address.assign_attributes(home_address_params)
 -    customer.work_address.assign_attributes(work_address_params)
@@ -665,7 +756,7 @@ index d4f493e..acc92b9 100644
 +      customer.work_address.mark_for_destruction
 +    end
    end
- 
+
    private
 diff --git a/app/views/staff/customers/_customer_fields.html.erb b/app/views/staff/customers/_customer_fields.html.erb
 index cb1bc77..ea4eb7f 100644
@@ -719,7 +810,7 @@ index 5ad36cd..72e323f 100644
 --- a/README.md
 +++ b/README.md
 @@ -586,6 +586,8 @@ git push heroku master
- 
+
  ### フォームオブジェクト
  #### 自宅住所と勤務先の任意入力
 ++ フィールドの有効化・無効化
@@ -732,7 +823,7 @@ index 52b4456..ef60797 100644
 --- a/app/assets/javascripts/admin/staff_member_form.coffee
 +++ b/app/assets/javascripts/admin/staff_member_form.coffee
 @@ -4,19 +4,19 @@ $(document).on "turbolinks:load", ->
- 
+
  class StaffMemberForm
    constructor: ->
 -    $('#enable-password-field').on
@@ -741,7 +832,7 @@ index 52b4456..ef60797 100644
 -    $('#disable-password-field').on
 +    $('.AppForm__customer_form #is-disable-password-field').on
        'click': handlePasswordInputFieldOff
- 
+
    handlePasswordInputFieldOn = ->
 -    $('#enable-password-field').hide()
 -    $('#disable-password-field').show()
@@ -749,7 +840,7 @@ index 52b4456..ef60797 100644
 +    $('#is-disable-password-field').show()
      $('#staff_member_password').removeAttr('disabled')
      $('label[for=staff_member_password]').addClass('required')
- 
+
    handlePasswordInputFieldOff = ->
 -    $('#disable-password-field').hide()
 -    $('#enable-password-field').show()
@@ -762,7 +853,7 @@ index 894aed5..1d09d38 100644
 --- a/app/assets/javascripts/staff/customer_form.coffee
 +++ b/app/assets/javascripts/staff/customer_form.coffee
 @@ -4,19 +4,37 @@ $(document).on "turbolinks:load", ->
- 
+
  class CustomerForm
    constructor: ->
 -    $('button#enable-password-field').on
@@ -777,7 +868,7 @@ index 894aed5..1d09d38 100644
 +      'click' : handleHomeAddressFields
 +    $('.AppForm__customer-form input#form_inputs_work_address').on
 +      'click' : handleWorkAddrssFields
- 
+
    handlePasswordInputFieldOn = ->
 -    $('#enable-password-field').hide()
 -    $('#disable-password-field').show()
@@ -814,11 +905,11 @@ index 271fd36..d4f493e 100644
 @@ -1,12 +1,14 @@
  class Staff::CustomerForm
    include ActiveModel::Model
- 
+
 -  attr_accessor :customer
 +  attr_accessor :customer, :inputs_home_address, :inputs_work_address
    delegate :persisted?, :save, to: :customer
- 
+
    def initialize(customer = nil)
      @customer = customer
      @customer ||= Customer.new(gender: 'male')
@@ -848,7 +939,7 @@ index 3dedba9..039c1f1 100644
 +++ b/app/views/admin/staff_members/edit.html.erb
 @@ -4,7 +4,7 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -  <div class="AppForm__generic-form AdminAppForm__generic-form">
 +  <div class="AppForm__generic-form AdminAppForm__generic-form AppForm__customer_form">
@@ -861,7 +952,7 @@ index fdc2ab3..6f206a5 100644
 +++ b/app/views/admin/staff_members/new.html.erb
 @@ -4,7 +4,7 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -  <div class="AppForm__generic-form AdminAppForm__generic-form">
 +  <div class="AppForm__generic-form AdminAppForm__generic-form AppForm__customer_form">
@@ -895,7 +986,7 @@ index b534606..9f24172 100644
 +++ b/app/views/staff/customers/edit.html.erb
 @@ -4,7 +4,7 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -  <div class="AppForm__generic-form StaffAppForm__generic-form">
 +  <div class="AppForm__generic-form StaffAppForm__generic-form AppForm__customer-form">
@@ -908,7 +999,7 @@ index eec2844..4514a82 100644
 +++ b/app/views/staff/customers/new.html.erb
 @@ -4,7 +4,7 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -  <div class="AppForm__generic-form StaffAppForm__generic-form">
 +  <div class="AppForm__generic-form StaffAppForm__generic-form AppForm__customer-form">
@@ -960,7 +1051,7 @@ index 5a8fc26..5ad36cd 100644
 +++ b/README.md
 @@ -585,6 +585,11 @@ git push heroku master
  + PasswordHolderモジュールの抽出
- 
+
  ### フォームオブジェクト
 +#### 自宅住所と勤務先の任意入力
 +#### 顧客電話番号の管理（１） 
@@ -969,7 +1060,7 @@ index 5a8fc26..5ad36cd 100644
 +
  ### 検索フォーム
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/baukis-kai.iml b/baukis-kai.iml
 index 008ed4e..7961602 100644
 --- a/baukis-kai.iml
@@ -1047,7 +1138,7 @@ index c7e684d..5a8fc26 100644
  + PersonalNameHolderモジュールの抽出
  + EmailHolderモジュールの抽出
 ++ PasswordHolderモジュールの抽出
- 
+
  ### フォームオブジェクト
  ### 検索フォーム
 diff --git a/app/controllers/concerns/password_holder.rb b/app/controllers/concerns/password_holder.rb
@@ -1073,7 +1164,7 @@ index f88be8b..a6d32d4 100644
 --- a/app/models/administrator.rb
 +++ b/app/models/administrator.rb
 @@ -17,14 +17,7 @@
- 
+
  class Administrator < ApplicationRecord
    include EmailHolder
 -
@@ -1085,7 +1176,7 @@ index f88be8b..a6d32d4 100644
 -    end
 -  end
 +  include PasswordHolder
- 
+
    def active?
      !suspended?
 diff --git a/app/models/customer.rb b/app/models/customer.rb
@@ -1097,7 +1188,7 @@ index 12dc7d5..3a480d3 100644
    include EmailHolder
    include PersonalNameHolder
 +  include PasswordHolder
- 
+
    has_one :home_address, dependent: :destroy, autosave: true
    has_one :work_address, dependent: :destroy, autosave: true
 @@ -34,12 +35,4 @@ class Customer < ApplicationRecord
@@ -1122,13 +1213,13 @@ index 956375b..a6f0230 100644
    include EmailHolder
    include PersonalNameHolder
 +  include PasswordHolder
- 
+
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
- 
+
 @@ -39,14 +40,6 @@ class StaffMember < ApplicationRecord
        allow_blank: true
    }
- 
+
 -  def password=(raw_password)
 -    if raw_password.kind_of?(String)
 -      self.hashed_password = BCrypt::Password.create(raw_password)
@@ -1185,11 +1276,11 @@ index e4dd7bc..c7e684d 100644
 --- a/README.md
 +++ b/README.md
 @@ -581,6 +581,7 @@ git push heroku master
- 
+
  #### ActiveSupport::Concernによるコード共有
  + PersonalNameHolderモジュールの抽出
 ++ EmailHolderモジュールの抽出
- 
+
  ### フォームオブジェクト
  ### 検索フォーム
 diff --git a/app/controllers/concerns/email_holder.rb b/app/controllers/concerns/email_holder.rb
@@ -1227,13 +1318,13 @@ index 52332d4..f88be8b 100644
 +++ b/app/models/administrator.rb
 @@ -16,9 +16,7 @@
  #
- 
+
  class Administrator < ApplicationRecord
 -  before_validation do
 -    self.email_for_index = email.downcase if email
 -  end
 +  include EmailHolder
- 
+
    def password=(raw_password)
      if raw_password.kind_of?(String)
 diff --git a/app/models/customer.rb b/app/models/customer.rb
@@ -1242,17 +1333,17 @@ index 67ff67a..12dc7d5 100644
 +++ b/app/models/customer.rb
 @@ -22,13 +22,11 @@
  #
- 
+
  class Customer < ApplicationRecord
 +  include EmailHolder
    include PersonalNameHolder
- 
+
    has_one :home_address, dependent: :destroy, autosave: true
    has_one :work_address, dependent: :destroy, autosave: true
 -  before_validation do
 -    self.email_for_index = email.downcase if email
 -  end
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 diff --git a/app/models/staff_member.rb b/app/models/staff_member.rb
@@ -1261,14 +1352,14 @@ index 35c13e5..956375b 100644
 +++ b/app/models/staff_member.rb
 @@ -23,17 +23,11 @@
  #
- 
+
  class StaffMember < ApplicationRecord
 -  include StringNormalizer
 +  include EmailHolder
    include PersonalNameHolder
- 
+
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
- 
+
 -  before_validation do
 -    self.email = normalize_as_email(email)
 -    self.email_for_index = email.downcase if email
@@ -1281,7 +1372,7 @@ index 35c13e5..956375b 100644
 @@ -45,14 +39,6 @@ class StaffMember < ApplicationRecord
        allow_blank: true
    }
- 
+
 -  validates :email_for_index, uniqueness: { allow_blank: true }
 -  after_validation do
 -    if errors.include?(:email_for_index)
@@ -1338,10 +1429,10 @@ index 2acd2cf..e4dd7bc 100644
 +++ b/README.md
 @@ -580,6 +580,7 @@ git push heroku master
  + autosaveオプションによる処理の簡素化
- 
+
  #### ActiveSupport::Concernによるコード共有
 ++ PersonalNameHolderモジュールの抽出
- 
+
  ### フォームオブジェクト
  ### 検索フォーム
 diff --git a/app/controllers/concerns/personal_name_holder.rb b/app/controllers/concerns/personal_name_holder.rb
@@ -1377,7 +1468,7 @@ index f91be55..67ff67a 100644
 +++ b/app/models/customer.rb
 @@ -22,6 +22,8 @@
  #
- 
+
  class Customer < ApplicationRecord
 +  include PersonalNameHolder
 +
@@ -1389,13 +1480,13 @@ index e9c0e92..35c13e5 100644
 --- a/app/models/staff_member.rb
 +++ b/app/models/staff_member.rb
 @@ -24,24 +24,16 @@
- 
+
  class StaffMember < ApplicationRecord
    include StringNormalizer
 +  include PersonalNameHolder
- 
+
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
- 
+
    before_validation do
      self.email = normalize_as_email(email)
      self.email_for_index = email.downcase if email
@@ -1404,7 +1495,7 @@ index e9c0e92..35c13e5 100644
 -    self.family_name_kana = normalize_as_furigana(family_name_kana)
 -    self.given_name_kana = normalize_as_furigana(given_name_kana)
    end
- 
+
 -  HUMAN_NAME_REGEXP = /\A[p{han}\p{hiragana}\p{katakana}\u{30fc}\p{alpha}]+\z/
 -  KATAKANA_REGEXP = /\A[\p{katakana}\u{30fc}]+\z/
 -
@@ -1461,26 +1552,26 @@ index a8ac2bc..2acd2cf 100644
  + フォームオブジェクトにおけるバリエーションの実施
  + バリデーションのテスト
 ++ autosaveオプションによる処理の簡素化
- 
+
  #### ActiveSupport::Concernによるコード共有
- 
+
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
 index 351a5ce..271fd36 100644
 --- a/app/forms/staff/customer_form.rb
 +++ b/app/forms/staff/customer_form.rb
 @@ -2,7 +2,7 @@ class Staff::CustomerForm
    include ActiveModel::Model
- 
+
    attr_accessor :customer
 -  delegate :persisted?, to: :customer
 +  delegate :persisted?, :save, to: :customer
- 
+
    def initialize(customer = nil)
      @customer = customer
 @@ -19,20 +19,6 @@ class Staff::CustomerForm
      customer.work_address.assign_attributes(work_address_params)
    end
- 
+
 -  def valid?
 -    [ customer, customer.home_address, customer.work_address ].map(&:valid?).all?
 -  end
@@ -1504,7 +1595,7 @@ index e8c43a8..f91be55 100644
 +++ b/app/models/customer.rb
 @@ -22,8 +22,8 @@
  #
- 
+
  class Customer < ApplicationRecord
 -  has_one :home_address, dependent: :destroy
 -  has_one :work_address, dependent: :destroy
@@ -1558,9 +1649,9 @@ index bb05cb2..a8ac2bc 100644
  + モデルオブジェクトにおける値の正規化とバリデーション
  + フォームオブジェクトにおけるバリエーションの実施
 ++ バリデーションのテスト
- 
+
  #### ActiveSupport::Concernによるコード共有
- 
+
 diff --git a/spec/features/staff/customer_nanagement_spec.rb b/spec/features/staff/customer_management_spec.rb
 similarity index 83%
 rename from spec/features/staff/customer_nanagement_spec.rb
@@ -1574,7 +1665,7 @@ index 1d853aa..a03060c 100644
      click_link I18n.t('staff.top.dashboard.staff_customers')
 -
      first('table.Table__body--listing').click_link I18n.t('staff.customers.index.edit')
- 
+
      fill_in I18n.t('activerecord.attributes.customer.email'), with: 'test@example.jp'
 @@ -71,4 +70,19 @@ feature 'Customer management by staff' do
      expect(new_customer.home_address.postal_code).to eq('1000001')
@@ -1627,13 +1718,13 @@ index 1a6a544..bb05cb2 100644
 --- a/README.md
 +++ b/README.md
 @@ -575,6 +575,7 @@ git push heroku master
- 
+
  #### 顧客アカウント新規登録・更新機能の改良
  + モデルオブジェクトにおける値の正規化とバリデーション
 ++ フォームオブジェクトにおけるバリエーションの実施
- 
+
  #### ActiveSupport::Concernによるコード共有
- 
+
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
 index 69dc6e2..351a5ce 100644
 --- a/app/forms/staff/customer_form.rb
@@ -1641,7 +1732,7 @@ index 69dc6e2..351a5ce 100644
 @@ -19,11 +19,17 @@ class Staff::CustomerForm
      customer.work_address.assign_attributes(work_address_params)
    end
- 
+
 +  def valid?
 +    [ customer, customer.home_address, customer.work_address ].map(&:valid?).all?
 +  end
@@ -1658,7 +1749,7 @@ index 69dc6e2..351a5ce 100644
 +      end
      end
    end
- 
+
 
 ```
 
@@ -1697,12 +1788,12 @@ index 6a4246f..1a6a544 100644
 +++ b/README.md
 @@ -574,6 +574,8 @@ git push heroku master
  + 顧客アカウント新規登録機能のテスト
- 
+
  #### 顧客アカウント新規登録・更新機能の改良
 ++ モデルオブジェクトにおける値の正規化とバリデーション
 +
  #### ActiveSupport::Concernによるコード共有
- 
+
  ### フォームオブジェクト
 diff --git a/app/models/address.rb b/app/models/address.rb
 index fd01b80..e4133f5 100644
@@ -1710,12 +1801,12 @@ index fd01b80..e4133f5 100644
 +++ b/app/models/address.rb
 @@ -22,8 +22,17 @@
  #
- 
+
  class Address < ApplicationRecord
 +  include StringNormalizer
 +
    belongs_to :customer
- 
+
 +  before_validation do
 +    self.postal_code = normalize_as_postal_code(postal_code)
 +    self.city = normalize_as_name(city)
@@ -1755,7 +1846,7 @@ index 04386e3..e8c43a8 100644
 @@ -28,6 +28,13 @@ class Customer < ApplicationRecord
      self.email_for_index = email.downcase if email
    end
- 
+
 +  validates :gender, inclusion: { in: %w(male female), allow_blank: true }
 +  validates :birthday, date: {
 +      after: Date.new(1900,1,1),
@@ -1772,7 +1863,7 @@ index 0dc6aa5..fd3aa3e 100644
 +++ b/app/models/home_address.rb
 @@ -22,4 +22,6 @@
  #
- 
+
  class HomeAddress < Address
 +  validates :postal_code, :prefecture, :city, :address1, presence: true
 +  validates :company_name, :division_name, absence: true
@@ -1783,7 +1874,7 @@ index 93e332b..de8d396 100644
 +++ b/app/models/work_address.rb
 @@ -22,4 +22,10 @@
  #
- 
+
  class WorkAddress < Address
 +  before_validation do
 +    self.company_name = normalize_as_name(company_name)
@@ -1809,7 +1900,7 @@ index b4eafec..cf31ec0 100644
 +              birthday:
 +                after_or_equal_to: には1900年1月1日以降の日時を指定してください。
 +                before: が未来の日付です。
- 
+
    activemodel:
      models:
 diff --git a/spec/factories/addresses.rb b/spec/factories/addresses.rb
@@ -1817,7 +1908,7 @@ index 2a866b7..076c809 100644
 --- a/spec/factories/addresses.rb
 +++ b/spec/factories/addresses.rb
 @@ -23,7 +23,7 @@
- 
+
  FactoryGirl.define do
    factory :home_address do
 -    postal_code '10000000'
@@ -1839,7 +1930,7 @@ index ae8a741..1d853aa 100644
 --- a/spec/features/staff/customer_nanagement_spec.rb
 +++ b/spec/features/staff/customer_nanagement_spec.rb
 @@ -19,7 +19,7 @@ feature 'Customer management by staff' do
- 
+
      fill_in I18n.t('activerecord.attributes.customer.email'), with: 'test@example.jp'
      within('fieldset#home-address-fields') do
 -      fill_in I18n.t('activerecord.attributes.home_address.postal_code'), with: '99999999'
@@ -1848,14 +1939,14 @@ index ae8a741..1d853aa 100644
      within('fieldset#work-address-fields') do
        fill_in I18n.t('activerecord.attributes.work_address.company_name'), with: 'テスト'
 @@ -28,7 +28,7 @@ feature 'Customer management by staff' do
- 
+
      customer.reload
      expect(customer.email).to eq('test@example.jp')
 -    expect(customer.home_address.postal_code).to eq('99999999')
 +    expect(customer.home_address.postal_code).to eq('9999999')
      expect(customer.work_address.company_name).to eq('テスト')
    end
- 
+
 
 ```
 
@@ -1902,7 +1993,7 @@ index effb203..6a4246f 100644
  + 準備作業
  + 顧客アカウント更新機能のテスト
 ++ 顧客アカウント新規登録機能のテスト
- 
+
  #### 顧客アカウント新規登録・更新機能の改良
  #### ActiveSupport::Concernによるコード共有
 diff --git a/spec/features/staff/customer_nanagement_spec.rb b/spec/features/staff/customer_nanagement_spec.rb
@@ -2013,7 +2104,7 @@ index f932a45..4da1b83 100644
 --- a/Gemfile
 +++ b/Gemfile
 @@ -68,7 +68,7 @@ end
- 
+
  group :test do
    gem 'faker', '~> 1.4.3'
 -  gem 'capybara', '~> 2.5.0'
@@ -2073,7 +2164,7 @@ index 98acbab..effb203 100644
  + Capybaraとは
  + 準備作業
 ++ 顧客アカウント更新機能のテスト
- 
+
  #### 顧客アカウント新規登録・更新機能の改良
  #### ActiveSupport::Concernによるコード共有
 diff --git a/baukis-kai.iml b/baukis-kai.iml
@@ -2149,7 +2240,7 @@ index 975dc23..8e3f5b2 100644
 @@ -22,6 +22,8 @@ require 'rspec/rails'
  #
  Dir[Rails.root.join('spec/support/**/*.rb')].each { |f| require f }
- 
+
 +Capybara.javascript_driver = :webkit
 +
  # Checks for pending migration and applies them before tests are run.
@@ -2167,7 +2258,7 @@ index d993975..54314d5 100644
 -    Capybara.app_host = 'http://' + config[:namespace][:host]
 +    Capybara.app_host = 'http://' + config[namespace][:host]
    end
- 
+
    def login_as_staff_member(staff_member, password = 'pw')
      visit staff_login_path
 -    within('#Login--staff') do
@@ -2207,7 +2298,7 @@ index fb9bb3f..98acbab 100644
 --- a/README.md
 +++ b/README.md
 @@ -568,6 +568,9 @@ git push heroku master
- 
+
  ### Capybara
  #### Capybara
 ++ Capybaraとは
@@ -2215,14 +2306,14 @@ index fb9bb3f..98acbab 100644
 +
  #### 顧客アカウント新規登録・更新機能の改良
  #### ActiveSupport::Concernによるコード共有
- 
+
 diff --git a/spec/factories/addresses.rb b/spec/factories/addresses.rb
 index 8b961d6..2a866b7 100644
 --- a/spec/factories/addresses.rb
 +++ b/spec/factories/addresses.rb
 @@ -22,7 +22,21 @@
  #
- 
+
  FactoryGirl.define do
 -  factory :address do
 -    
@@ -2249,7 +2340,7 @@ index 98d55fd..9cec838 100644
 --- a/spec/factories/customers.rb
 +++ b/spec/factories/customers.rb
 @@ -23,6 +23,15 @@
- 
+
  FactoryGirl.define do
    factory :customer do
 -    
@@ -2317,7 +2408,7 @@ index ef5ff0b..fb9bb3f 100644
 +++ b/README.md
 @@ -567,6 +567,10 @@ git push heroku master
  + destroyアクションの実装
- 
+
  ### Capybara
 +#### Capybara
 +#### 顧客アカウント新規登録・更新機能の改良
@@ -2328,4 +2419,3 @@ index ef5ff0b..fb9bb3f 100644
  **[⬆ back to top](#構成)**
 
 ```
-
