--- a/docs/journal/20170207.md
+++ b/docs/journal/20170207.md
@@ -2,7 +2,107 @@
 
 ## 概要
 
-2017-02-07の作業内容をまとめています。
+2017-02-07の作業内容をまとめています。この日は主に「顧客検索機能」の実装を行いました。
+
+### 実装内容の説明
+
+#### 顧客検索機能
+
+職員が顧客情報を効率的に検索できるよう、複数の条件を組み合わせた検索機能を実装しました。検索条件には氏名、メールアドレス、電話番号、性別、郵便番号、住所などが含まれます。特に電話番号の下4桁による検索機能は、顧客からの問い合わせ時に素早く顧客を特定するのに役立ちます。
+
+```plantuml
+@startuml
+title 顧客検索機能の実装
+
+class Staff::CustomersController {
+  +index
+  -search_params
+}
+
+class Staff::CustomerSearchForm {
+  +family_name
+  +given_name
+  +family_name_kana
+  +given_name_kana
+  +email
+  +phone_number
+  +gender
+  +postal_code
+  +last_four_digits
+  +search
+}
+
+class Customer {
+  +id
+  +email
+  +family_name
+  +given_name
+  +family_name_kana
+  +given_name_kana
+  +gender
+  +birthday
+}
+
+class Address {
+  +postal_code
+  +prefecture
+  +city
+}
+
+class Phone {
+  +number
+  +number_for_index
+  +last_four_digits
+}
+
+Staff::CustomersController --> Staff::CustomerSearchForm: 使用
+Staff::CustomerSearchForm --> Customer: 検索
+Staff::CustomerSearchForm --> Address: 検索
+Staff::CustomerSearchForm --> Phone: 検索
+
+note right of Phone::last_four_digits
+  電話番号の下4桁を
+  検索用に保存
+end note
+
+@enduml
+```
+
+#### 検索条件の拡張
+
+基本的な検索機能に加えて、以下の検索条件を追加実装しました：
+1. 性別による検索
+2. 郵便番号による検索
+3. 電話番号の下4桁による検索
+
+特に電話番号の下4桁検索は、顧客が自分の電話番号の下4桁だけを覚えている場合に便利な機能です。
+
+### アーキテクチャとの関連
+
+この実装は、[アーキテクチャ概要](../アーキテクチャ概要.md)の「5. 主要なデータモデル」および「7.2 フォームオブジェクト」セクションに関連しています。特に以下の部分を実現するものです：
+
+```
+Customer ||--o{ Phone
+Customer ||--o{ HomeAddress
+Customer ||--o{ WorkAddress
+```
+
+フォームオブジェクトパターンを使用して、検索フォームの入力値の処理と検索ロジックをカプセル化しています。
+
+### ユースケースとの関連
+
+この実装は、[ユースケース](../ユースケース.md)の「3.2. 顧客管理」セクションに記載されている以下のユースケースを実現するものです：
+
+- S-005: 顧客情報検索
+
+ユースケース説明：
+> 職員が顧客情報を検索する
+> 
+> 基本フロー：
+> 1. 顧客検索フォームにアクセス
+> 2. 検索条件（名前、メールアドレス、電話番号など）を入力
+> 3. 検索を実行
+> 4. 検索結果を表示
 
 ## コミット: 4164c10
 
@@ -82,9 +182,9 @@ index b76583b..18c6f37 100644
  + 検索条件に性別を追加 
  + 検索条件に郵便番号を追加
 ++ 検索条件に電話番号下４桁を追加
- 
+
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index c9b3ccf..6342b22 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -98,7 +198,7 @@ index c9b3ccf..6342b22 100644
 +        :last_four_digits
      )
    end
- 
+
 diff --git a/app/forms/staff/customer_search_form.rb b/app/forms/staff/customer_search_form.rb
 index 0d2991a..6a46821 100644
 --- a/app/forms/staff/customer_search_form.rb
@@ -110,13 +210,13 @@ index 0d2991a..6a46821 100644
 -                :postal_code
 +                :postal_code,
 +                :last_four_digits
- 
+
    def search
      normalize_values
 @@ -49,8 +50,14 @@ class Staff::CustomerSearchForm
        end
      end
- 
+
 -    if phone_number.present?
 -      rel = rel.joins(:phones).where('phones.number_for_index' => phone_number)
 +    if phone_number.present? || last_four_digits.present?
@@ -128,7 +228,7 @@ index 0d2991a..6a46821 100644
 +        rel = rel.where('phones.last_four_digits' => last_four_digits)
 +      end
      end
- 
+
      rel.order(:family_name_kana, :given_name_kana)
 diff --git a/app/models/phone.rb b/app/models/phone.rb
 index 386e689..94e92f9 100644
@@ -147,7 +247,7 @@ index 386e689..94e92f9 100644
 +#  index_phones_on_last_four_digits  (last_four_digits)
  #  index_phones_on_number_for_index  (number_for_index)
  #
- 
+
 @@ -27,6 +29,9 @@ class Phone < ApplicationRecord
    before_validation do
      self.number = normalize_as_phone_number(number)
@@ -156,7 +256,7 @@ index 386e689..94e92f9 100644
 +      self.last_four_digits = number_for_index[-4, 4]
 +    end
    end
- 
+
    before_create do
 diff --git a/app/views/staff/customers/_search_form.html.erb b/app/views/staff/customers/_search_form.html.erb
 index 08e0875..43ff1f4 100644
@@ -180,7 +280,7 @@ index 013f874..612676c 100644
          number_for_index: 索引用電話番号
          primary: 優先
 +        last_four_digits: 電話番号下４桁
- 
+
      errors:
        models:
 diff --git a/db/migrate/20170207070920_alter_phones2.rb b/db/migrate/20170207070920_alter_phones2.rb
@@ -228,10 +328,10 @@ index c644c07..218066a 100644
 @@ -10,109 +10,107 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170207064811) do
 +ActiveRecord::Schema.define(version: 20170207071612) do
- 
+
 -  create_table "addresses", force: :cascade, comment: "住所" do |t|
 -    t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
 -    t.string   "type",                       null: false, comment: "継承カラム"
@@ -269,7 +369,7 @@ index c644c07..218066a 100644
 +    t.index ["type", "customer_id"], name: "index_addresses_on_type_and_customer_id", unique: true
 +    t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city"
    end
- 
+
 -  create_table "administrators", force: :cascade, comment: "管理者" do |t|
 -    t.string   "email",                           null: false, comment: "メールアドレス"
 -    t.string   "email_for_index",                 null: false, comment: "索引用メールアドレス"
@@ -285,7 +385,7 @@ index c644c07..218066a 100644
 -    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
 +    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true
    end
- 
+
 -  create_table "customers", force: :cascade, comment: "顧客" do |t|
 -    t.string   "email",            null: false, comment: "メールアドレス"
 -    t.string   "email_for_index",  null: false, comment: "顧客用メールアドレス"
@@ -339,7 +439,7 @@ index c644c07..218066a 100644
 +    t.index ["gender", "family_name_kana", "given_name_kana"], name: "index_customers_on_gender_and_furigana"
 +    t.index ["given_name_kana"], name: "index_customers_on_given_name_kana"
    end
- 
+
 -  create_table "phones", force: :cascade, comment: "電話" do |t|
 -    t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
 -    t.integer  "address_id",                                    comment: "住所への外部キー"
@@ -363,7 +463,7 @@ index c644c07..218066a 100644
 +    t.index ["last_four_digits"], name: "index_phones_on_last_four_digits"
 +    t.index ["number_for_index"], name: "index_phones_on_number_for_index"
    end
- 
+
 -  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
 -    t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
 -    t.string   "type",            null: false, comment: "イベントタイプ"
@@ -379,7 +479,7 @@ index c644c07..218066a 100644
 +    t.index ["staff_member_id", "created_at"], name: "index_staff_events_on_staff_member_id_and_created_at"
 +    t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id"
    end
- 
+
 -  create_table "staff_members", force: :cascade, comment: "職員" do |t|
 -    t.string   "email",                            null: false, comment: "メールアドレス"
 -    t.string   "email_for_index",                  null: false, comment: "索引用メールアドレス"
@@ -409,7 +509,7 @@ index c644c07..218066a 100644
 +    t.index ["email_for_index"], name: "index_staff_members_on_email_for_index", unique: true
 +    t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana"
    end
- 
+
 -  add_foreign_key "addresses", "customers"
 -  add_foreign_key "phones", "addresses"
 -  add_foreign_key "phones", "customers"
@@ -432,7 +532,7 @@ index 4ef34b3..694da4d 100644
 +#  index_phones_on_last_four_digits  (last_four_digits)
  #  index_phones_on_number_for_index  (number_for_index)
  #
- 
+
 
 ```
 
@@ -483,13 +583,13 @@ index 7a9f2f1..b76583b 100644
 --- a/README.md
 +++ b/README.md
 @@ -620,6 +620,7 @@ git push heroku master
- 
+
  #### 演習問題
  + 検索条件に性別を追加 
 ++ 検索条件に郵便番号を追加
- 
+
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index ea2433a..c9b3ccf 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -503,7 +603,7 @@ index ea2433a..c9b3ccf 100644
 +        :postal_code
      )
    end
- 
+
 diff --git a/app/forms/staff/customer_search_form.rb b/app/forms/staff/customer_search_form.rb
 index 10480fc..0d2991a 100644
 --- a/app/forms/staff/customer_search_form.rb
@@ -515,13 +615,13 @@ index 10480fc..0d2991a 100644
 -                :gender
 +                :gender,
 +                :postal_code
- 
+
    def search
      normalize_values
 @@ -28,7 +29,7 @@ class Staff::CustomerSearchForm
      rel = rel.where(birth_mday: birth_mday) if birth_mday.present?
      rel = rel.where(gender: gender) if gender.present?
- 
+
 -    if prefecture.present? || city.present?
 +    if prefecture.present? || city.present? || postal_code.present?
        case address_type
@@ -535,7 +635,7 @@ index 10480fc..0d2991a 100644
 +        rel = rel.where('addresses.postal_code' => postal_code)
 +      end
      end
- 
+
      if phone_number.present?
 @@ -58,5 +62,6 @@ class Staff::CustomerSearchForm
      self.given_name_kana = normalize_as_furigana(given_name_kana)
@@ -611,10 +711,10 @@ index 80706d9..c644c07 100644
 @@ -10,9 +10,9 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170207063552) do
 +ActiveRecord::Schema.define(version: 20170207064811) do
- 
+
 -  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -630,7 +730,7 @@ index 80706d9..c644c07 100644
      t.index ["type", "customer_id"], name: "index_addresses_on_type_and_customer_id", unique: true, using: :btree
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -639,7 +739,7 @@ index 80706d9..c644c07 100644
 @@ -42,7 +43,7 @@ ActiveRecord::Schema.define(version: 20170207063552) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -648,7 +748,7 @@ index 80706d9..c644c07 100644
 @@ -71,7 +72,7 @@ ActiveRecord::Schema.define(version: 20170207063552) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
 +  create_table "phones", force: :cascade, comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -657,7 +757,7 @@ index 80706d9..c644c07 100644
 @@ -84,7 +85,7 @@ ActiveRecord::Schema.define(version: 20170207063552) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -666,7 +766,7 @@ index 80706d9..c644c07 100644
 @@ -93,7 +94,7 @@ ActiveRecord::Schema.define(version: 20170207063552) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -734,12 +834,12 @@ index 77a1a03..7a9f2f1 100644
 +++ b/README.md
 @@ -619,6 +619,7 @@ git push heroku master
  + 検索文字列の正規化
- 
+
  #### 演習問題
 ++ 検索条件に性別を追加 
- 
+
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index b004ad4..ea2433a 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -753,7 +853,7 @@ index b004ad4..ea2433a 100644
 +        :gender
      )
    end
- 
+
 diff --git a/app/forms/staff/customer_search_form.rb b/app/forms/staff/customer_search_form.rb
 index c63fcf1..10480fc 100644
 --- a/app/forms/staff/customer_search_form.rb
@@ -765,7 +865,7 @@ index c63fcf1..10480fc 100644
 -                :phone_number
 +                :phone_number,
 +                :gender
- 
+
    def search
      normalize_values
 @@ -25,6 +26,7 @@ class Staff::CustomerSearchForm
@@ -773,7 +873,7 @@ index c63fcf1..10480fc 100644
      rel = rel.where(birth_month: birth_month) if birth_month.present?
      rel = rel.where(birth_mday: birth_mday) if birth_mday.present?
 +    rel = rel.where(gender: gender) if gender.present?
- 
+
      if prefecture.present? || city.present?
        case address_type
 diff --git a/app/models/customer.rb b/app/models/customer.rb
@@ -787,7 +887,7 @@ index 30f20ba..68bac7c 100644
 +#  index_customers_on_gender_and_furigana                        (gender,family_name_kana,given_name_kana)
  #  index_customers_on_given_name_kana                            (given_name_kana)
  #
- 
+
 diff --git a/app/views/staff/customers/_search_form.html.erb b/app/views/staff/customers/_search_form.html.erb
 index 3c51099..da3070a 100644
 --- a/app/views/staff/customers/_search_form.html.erb
@@ -832,10 +932,10 @@ index 7678b16..80706d9 100644
 @@ -10,9 +10,9 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170207044130) do
 +ActiveRecord::Schema.define(version: 20170207063552) do
- 
+
 -  create_table "addresses", force: :cascade, comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -844,7 +944,7 @@ index 7678b16..80706d9 100644
 @@ -32,7 +32,7 @@ ActiveRecord::Schema.define(version: 20170207044130) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade,  comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -853,7 +953,7 @@ index 7678b16..80706d9 100644
 @@ -42,7 +42,7 @@ ActiveRecord::Schema.define(version: 20170207044130) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade,  comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -866,7 +966,7 @@ index 7678b16..80706d9 100644
 +    t.index ["gender", "family_name_kana", "given_name_kana"], name: "index_customers_on_gender_and_furigana", using: :btree
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade,  comment: "電話" do |t|
 +  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -875,7 +975,7 @@ index 7678b16..80706d9 100644
 @@ -83,7 +84,7 @@ ActiveRecord::Schema.define(version: 20170207044130) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade,  comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -884,7 +984,7 @@ index 7678b16..80706d9 100644
 @@ -92,7 +93,7 @@ ActiveRecord::Schema.define(version: 20170207044130) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade,  comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -901,7 +1001,7 @@ index 3e9abab..9b0a9cd 100644
 +#  index_customers_on_gender_and_furigana                        (gender,family_name_kana,given_name_kana)
  #  index_customers_on_given_name_kana                            (given_name_kana)
  #
- 
+
 
 ```
 
@@ -948,9 +1048,9 @@ index d602654..77a1a03 100644
  + フォームオブジェクトの修正（１）
  + フォームオブジェクトの修正（２）
 ++ 検索文字列の正規化
- 
+
  #### 演習問題
- 
+
 diff --git a/app/forms/staff/customer_search_form.rb b/app/forms/staff/customer_search_form.rb
 index 1500017..c63fcf1 100644
 --- a/app/forms/staff/customer_search_form.rb
@@ -959,12 +1059,12 @@ index 1500017..c63fcf1 100644
  class Staff::CustomerSearchForm
    include ActiveModel::Model
 +  include StringNormalizer
- 
+
    attr_accessor :family_name_kana,
                  :given_name_kana,
 @@ -12,6 +13,8 @@ class Staff::CustomerSearchForm
                  :phone_number
- 
+
    def search
 +    normalize_values
 +
@@ -972,7 +1072,7 @@ index 1500017..c63fcf1 100644
      if family_name_kana.present?
        rel = rel.where(family_name_kana: family_name_kana)
 @@ -46,4 +49,12 @@ class Staff::CustomerSearchForm
- 
+
      rel.order(:family_name_kana, :given_name_kana)
    end
 +
@@ -1021,9 +1121,9 @@ index fff94bb..d602654 100644
  + indexアクションの修正
  + フォームオブジェクトの修正（１）
 ++ フォームオブジェクトの修正（２）
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index c840c22..b004ad4 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -1039,7 +1139,7 @@ index c840c22..b004ad4 100644
 +    end
      @customers = @search_form.search.page(params[:page])
    end
- 
+
 diff --git a/app/forms/staff/customer_search_form.rb b/app/forms/staff/customer_search_form.rb
 index f48f500..1500017 100644
 --- a/app/forms/staff/customer_search_form.rb
@@ -1047,7 +1147,7 @@ index f48f500..1500017 100644
 @@ -23,6 +23,27 @@ class Staff::CustomerSearchForm
      rel = rel.where(birth_month: birth_month) if birth_month.present?
      rel = rel.where(birth_mday: birth_mday) if birth_mday.present?
- 
+
 +    if prefecture.present? || city.present?
 +      case address_type
 +        when 'home'
@@ -1080,7 +1180,7 @@ index eec9620..30f20ba 100644
 @@ -38,8 +38,9 @@ class Customer < ApplicationRecord
    include PersonalNameHolder
    include PasswordHolder
- 
+
 -  has_one :home_address, dependent: :destroy, autosave: true
 -  has_one :work_address, dependent: :destroy, autosave: true
 +  has_many :addresses, dependent: :destroy
@@ -1088,7 +1188,7 @@ index eec9620..30f20ba 100644
 +  has_one :work_address, autosave: true
    has_many :phones, dependent: :destroy
    has_many :personal_phones, -> { where(address_id: nil).order(:id) },class_name: 'Phone', autosave: true
- 
+
 
 ```
 
@@ -1132,13 +1232,13 @@ index 11acab2..fff94bb 100644
 --- a/README.md
 +++ b/README.md
 @@ -614,6 +614,7 @@ git push heroku master
- 
+
  #### 検索機能の実装
  + indexアクションの修正
 ++ フォームオブジェクトの修正（１）
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index 842cd2d..c840c22 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -1150,7 +1250,7 @@ index 842cd2d..c840c22 100644
 +    @search_form = Staff::CustomerSearchForm.new(search_params)
      @customers = @search_form.search.page(params[:page])
    end
- 
+
 @@ -46,4 +46,20 @@ class Staff::CustomersController < Staff::Base
      flash.notice = t('.flash_notice')
      redirect_to :staff_customers
@@ -1240,12 +1340,12 @@ index 6e17a88..11acab2 100644
 +++ b/README.md
 @@ -613,6 +613,8 @@ git push heroku master
  + 検索フォームの表示
- 
+
  #### 検索機能の実装
 ++ indexアクションの修正
 +
  #### 演習問題
- 
+
  **[⬆ back to top](#構成)**
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index 6568707..842cd2d 100644
@@ -1259,7 +1359,7 @@ index 6568707..842cd2d 100644
 +    @search_form = Staff::CustomerSearchForm.new(params[:search])
 +    @customers = @search_form.search.page(params[:page])
    end
- 
+
    def show
 
 ```
@@ -1314,7 +1414,7 @@ index ae630b8..6e17a88 100644
  + データベーススキーマの見直し
  + 誕生日、誕生月、誕生日の設定
 ++ 検索フォームの表示
- 
+
  #### 検索機能の実装
  #### 演習問題
 diff --git a/app/assets/stylesheets/components/_appForm.scss b/app/assets/stylesheets/components/_appForm.scss
@@ -1347,7 +1447,7 @@ index 3969abe..6568707 100644
 +    @search_form = Staff::CustomerSearchForm.new
      @customers = Customer.order(:family_name_kana, :given_name_kana).page(params[:page])
    end
- 
+
 diff --git a/app/forms/staff/customer_search_form.rb b/app/forms/staff/customer_search_form.rb
 new file mode 100644
 index 0000000..696c289
@@ -1373,14 +1473,14 @@ index 2695a43..545467e 100644
 --- a/app/presenters/form_presenter.rb
 +++ b/app/presenters/form_presenter.rb
 @@ -53,7 +53,7 @@ class FormPresenter
- 
+
    def drop_down_list_block(name, label_text, choices, options ={})
      markup(:div, class: 'AppForm__input-block') do |m|
 -      m << form_builder.select(name, choices, { include_blank: true }, options)
 +      m << form_builder.select(name, choices, options.merge(include_blank: true).merge(label: label_text))
      end
    end
- 
+
 diff --git a/app/views/staff/customers/_search_form.html.erb b/app/views/staff/customers/_search_form.html.erb
 new file mode 100644
 index 0000000..3c51099
@@ -1415,11 +1515,11 @@ index 4978613..2fd20aa 100644
 @@ -8,6 +8,8 @@
      <%= link_to t('.new'), :new_staff_customer, class: 'btn btn-default' %>
    </div>
- 
+
 +  <%= render 'search_form' %>
 +
    <%= paginate @customers %>
- 
+
    <table class="Table__body Table__body--listing StaffTable__body">
 diff --git a/config/locales/models/ja.yml b/config/locales/models/ja.yml
 index b5c2b2f..013f874 100644
@@ -1432,7 +1532,7 @@ index b5c2b2f..013f874 100644
 +        birth_year: 誕生年
 +        birth_month: 誕生月
 +        birth_mday: 誕生日
- 
+
        address:
          postal_code: 郵便番号
 diff --git a/config/locales/views/ja.yml b/config/locales/views/ja.yml
@@ -1501,7 +1601,7 @@ index eb6c484..ae630b8 100644
  + 顧客検索機能の仕様
  + データベーススキーマの見直し
 ++ 誕生日、誕生月、誕生日の設定
- 
+
  #### 検索機能の実装
  #### 演習問題
 diff --git a/app/models/customer.rb b/app/models/customer.rb
@@ -1569,10 +1669,10 @@ index 8c5917b..7678b16 100644
 @@ -10,9 +10,9 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170207042122) do
 +ActiveRecord::Schema.define(version: 20170207044130) do
- 
+
 -  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -1581,7 +1681,7 @@ index 8c5917b..7678b16 100644
 @@ -32,7 +32,7 @@ ActiveRecord::Schema.define(version: 20170207042122) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade,  comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -1590,7 +1690,7 @@ index 8c5917b..7678b16 100644
 @@ -42,7 +42,7 @@ ActiveRecord::Schema.define(version: 20170207042122) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
 +  create_table "customers", force: :cascade,  comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -1599,7 +1699,7 @@ index 8c5917b..7678b16 100644
 @@ -70,7 +70,7 @@ ActiveRecord::Schema.define(version: 20170207042122) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
 +  create_table "phones", force: :cascade,  comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -1608,7 +1708,7 @@ index 8c5917b..7678b16 100644
 @@ -83,7 +83,7 @@ ActiveRecord::Schema.define(version: 20170207042122) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade,  comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -1617,7 +1717,7 @@ index 8c5917b..7678b16 100644
 @@ -92,7 +92,7 @@ ActiveRecord::Schema.define(version: 20170207042122) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade,  comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -1690,7 +1790,7 @@ index c678175..eb6c484 100644
 --- a/README.md
 +++ b/README.md
 @@ -607,6 +607,9 @@ git push heroku master
- 
+
  ### 検索フォーム
  #### 顧客検索フォーム
 ++ 顧客検索機能の仕様
@@ -1698,7 +1798,7 @@ index c678175..eb6c484 100644
 +
  #### 検索機能の実装
  #### 演習問題
- 
+
 diff --git a/app/models/address.rb b/app/models/address.rb
 index b8ab123..f7db6f8 100644
 --- a/app/models/address.rb
@@ -1716,7 +1816,7 @@ index b8ab123..f7db6f8 100644
 +#  index_addresses_on_type_and_customer_id          (type,customer_id) UNIQUE
 +#  index_addresses_on_type_and_prefecture_and_city  (type,prefecture,city)
  #
- 
+
  class Address < ApplicationRecord
 diff --git a/app/models/customer.rb b/app/models/customer.rb
 index 423e927..55327ae 100644
@@ -1746,7 +1846,7 @@ index 423e927..55327ae 100644
 +#  index_customers_on_family_name_kana_and_given_name_kana       (family_name_kana,given_name_kana)
 +#  index_customers_on_given_name_kana                            (given_name_kana)
  #
- 
+
  class Customer < ApplicationRecord
 diff --git a/app/models/home_address.rb b/app/models/home_address.rb
 index fd3aa3e..da88407 100644
@@ -1765,7 +1865,7 @@ index fd3aa3e..da88407 100644
 +#  index_addresses_on_type_and_customer_id          (type,customer_id) UNIQUE
 +#  index_addresses_on_type_and_prefecture_and_city  (type,prefecture,city)
  #
- 
+
  class HomeAddress < Address
 diff --git a/app/models/work_address.rb b/app/models/work_address.rb
 index de8d396..0ba0773 100644
@@ -1784,7 +1884,7 @@ index de8d396..0ba0773 100644
 +#  index_addresses_on_type_and_customer_id          (type,customer_id) UNIQUE
 +#  index_addresses_on_type_and_prefecture_and_city  (type,prefecture,city)
  #
- 
+
  class WorkAddress < Address
 diff --git a/db/migrate/20170207042109_alter_customers1.rb b/db/migrate/20170207042109_alter_customers1.rb
 new file mode 100644
@@ -1830,10 +1930,10 @@ index 7285822..8c5917b 100644
 @@ -10,9 +10,9 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170206085929) do
 +ActiveRecord::Schema.define(version: 20170207042122) do
- 
+
 -  create_table "addresses", force: :cascade,  comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -1850,7 +1950,7 @@ index 7285822..8c5917b 100644
      t.index ["type", "customer_id"], name: "index_addresses_on_type_and_customer_id", unique: true, using: :btree
 +    t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade,  comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -1859,7 +1959,7 @@ index 7285822..8c5917b 100644
 @@ -38,7 +42,7 @@ ActiveRecord::Schema.define(version: 20170206085929) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade,  comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -1884,7 +1984,7 @@ index 7285822..8c5917b 100644
      t.index ["family_name_kana", "given_name_kana"], name: "index_customers_on_family_name_kana_and_given_name_kana", using: :btree
 +    t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, comment: "電話" do |t|
 +  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -1893,7 +1993,7 @@ index 7285822..8c5917b 100644
 @@ -67,7 +83,7 @@ ActiveRecord::Schema.define(version: 20170206085929) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade,  comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -1902,7 +2002,7 @@ index 7285822..8c5917b 100644
 @@ -76,7 +92,7 @@ ActiveRecord::Schema.define(version: 20170206085929) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade,  comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -1925,7 +2025,7 @@ index 076c809..39737ae 100644
 +#  index_addresses_on_type_and_customer_id          (type,customer_id) UNIQUE
 +#  index_addresses_on_type_and_prefecture_and_city  (type,prefecture,city)
  #
- 
+
  FactoryGirl.define do
 diff --git a/spec/factories/customers.rb b/spec/factories/customers.rb
 index 9cec838..185b72d 100644
@@ -1955,7 +2055,7 @@ index 9cec838..185b72d 100644
 +#  index_customers_on_family_name_kana_and_given_name_kana       (family_name_kana,given_name_kana)
 +#  index_customers_on_given_name_kana                            (given_name_kana)
  #
- 
+
  FactoryGirl.define do
 
 ```
@@ -1999,14 +2099,14 @@ index 05708e9..c678175 100644
 +++ b/README.md
 @@ -606,6 +606,10 @@ git push heroku master
  + 勤務先電話番号の新規登録、更新、削除
- 
+
  ### 検索フォーム
 +#### 顧客検索フォーム
 +#### 検索機能の実装
 +#### 演習問題
 +
  **[⬆ back to top](#構成)**
- 
+
  # 参照 #
 
 ```
@@ -2078,11 +2178,11 @@ index 79db94d..05708e9 100644
 --- a/README.md
 +++ b/README.md
 @@ -603,6 +603,7 @@ git push heroku master
- 
+
  #### 演習問題 
  + 受け入れテスト作成
 ++ 勤務先電話番号の新規登録、更新、削除
- 
+
  ### 検索フォーム
  **[⬆ back to top](#構成)**
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
@@ -2097,7 +2197,7 @@ index b66b14d..89ca635 100644
 +      @customer.work_address.phones.build
 +    end
    end
- 
+
    def assign_attributes(params = {})
 @@ -53,6 +56,16 @@ class Staff::CustomerForm
      end
@@ -2166,10 +2266,10 @@ index ab05df6..79db94d 100644
 +++ b/README.md
 @@ -602,6 +602,7 @@ git push heroku master
  + 自宅電話番号の新規登録、更新、削除
- 
+
  #### 演習問題 
 ++ 受け入れテスト作成
- 
+
  ### 検索フォーム
  **[⬆ back to top](#構成)**
 diff --git a/app/assets/javascripts/staff/customer_form.coffee b/app/assets/javascripts/staff/customer_form.coffee
@@ -2275,9 +2375,9 @@ index d0120c4..ab05df6 100644
  + 個人電話番号の入力欄表示
  + 個人電話番号の新規登録、更新、削除
 ++ 自宅電話番号の新規登録、更新、削除
- 
+
  #### 演習問題 
- 
+
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
 index 8b0845f..b66b14d 100644
 --- a/app/forms/staff/customer_form.rb
@@ -2290,10 +2390,10 @@ index 8b0845f..b66b14d 100644
 +      @customer.home_address.phones.build
 +    end
    end
- 
+
    def assign_attributes(params = {})
 @@ -35,6 +38,16 @@ class Staff::CustomerForm
- 
+
      if inputs_home_address
        customer.home_address.assign_attributes(home_address_params)
 +
@@ -2381,20 +2481,20 @@ index 6747cf6..d0120c4 100644
 --- a/README.md
 +++ b/README.md
 @@ -598,6 +598,7 @@ git push heroku master
- 
+
  #### 顧客電話番号の管理（２）
  + 個人電話番号の入力欄表示
 ++ 個人電話番号の新規登録、更新、削除
- 
+
  #### 演習問題 
- 
+
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
 index ca5ed03..8b0845f 100644
 --- a/app/forms/staff/customer_form.rb
 +++ b/app/forms/staff/customer_form.rb
 @@ -22,6 +22,17 @@ class Staff::CustomerForm
      self.inputs_work_address = params[:inputs_work_address] == '1'
- 
+
      customer.assign_attributes(customer_params)
 +
 +    phones = phone_params(:customer).fetch(:phones)
@@ -2489,12 +2589,12 @@ index 43aae6a..6747cf6 100644
 +++ b/README.md
 @@ -597,6 +597,8 @@ git push heroku master
  + 顧客詳細ページへの電話番号の表示
- 
+
  #### 顧客電話番号の管理（２）
 ++ 個人電話番号の入力欄表示
 +
  #### 演習問題 
- 
+
  ### 検索フォーム
 diff --git a/app/forms/staff/customer_form.rb b/app/forms/staff/customer_form.rb
 index acc92b9..ca5ed03 100644
@@ -2517,7 +2617,7 @@ index b825b9a..2695a43 100644
 @@ -67,7 +67,6 @@ class FormPresenter
      end
    end
- 
+
 -  private
    def decorated_label(name, label_text, options = {})
      label(name, label_text, class: options[:required] ? 'AppForm__label required' : 'AppForm__label')
@@ -2568,7 +2668,7 @@ index cf31ec0..b5c2b2f 100644
 @@ -77,6 +78,11 @@ ja:
          company_name: 会社名
          division_name: 部署名
- 
+
 +      phone:
 +        number: 電話番号
 +        number_for_index: 索引用電話番号
@@ -2579,4 +2679,3 @@ index cf31ec0..b5c2b2f 100644
          staff_member:
 
 ```
-
