--- a/docs/journal/20170209.md
+++ b/docs/journal/20170209.md
@@ -2,7 +2,72 @@
 
 ## 概要
 
-2017-02-09の作業内容をまとめています。
+2017-02-09の作業内容をまとめています。この日は主に「顧客の自動ログイン機能」の実装を行いました。
+
+### 実装内容の説明
+
+#### 顧客の自動ログイン機能
+
+顧客がシステムを再訪問した際に、毎回ログイン情報を入力する手間を省くため、「次回から自動でログイン」機能を実装しました。この機能は、顧客が明示的に選択した場合にのみ有効になります。実装にはクッキーを使用し、セキュリティを考慮して暗号化されたIDをクッキーに保存します。
+
+```plantuml
+@startuml
+title 顧客の自動ログイン機能
+
+actor 顧客
+participant "SessionsController" as SC
+participant "Customer" as C
+database "Cookie" as Cookie
+
+顧客 -> SC: ログイン要求
+note right: メールアドレス、パスワード、\n自動ログインフラグを送信
+SC -> C: 認証
+C --> SC: 認証結果
+
+alt 認証成功 & 自動ログイン選択
+  SC -> SC: 暗号化されたIDを生成
+  SC -> Cookie: クッキーに保存\n(有効期限: 20年)
+  note right: customer_id=暗号化されたID
+end
+
+顧客 -> SC: 再訪問
+SC -> Cookie: クッキーを確認
+Cookie --> SC: customer_id
+SC -> C: 顧客を検索
+C --> SC: 顧客情報
+SC -> 顧客: 自動ログイン完了
+
+@enduml
+```
+
+#### クッキーの値とセキュリティ
+
+セキュリティを確保するため、クッキーには顧客IDをそのまま保存するのではなく、SHA1ハッシュ関数を使用して暗号化した値を保存します。また、クッキーの有効期限は20年と長期に設定し、顧客が明示的にログアウトするまで自動ログインが機能するようにしています。
+
+#### テストの実装
+
+自動ログイン機能の信頼性を確保するため、以下のテストを実装しました：
+1. クッキーに正しい形式の値が保存されることを確認するテスト
+2. クッキーの有効期限が適切に設定されていることを確認するテスト
+
+### アーキテクチャとの関連
+
+この実装は、[アーキテクチャ概要](../アーキテクチャ概要.md)の「8. 認証・認可システム」セクションに関連しています。特に以下の部分を拡張するものです：
+
+```
+[Customer::SessionsController] --> [Customer]: authenticate
+[Customer] --> [Customer::BaseController]: current_customer
+```
+
+顧客認証の仕組みに、クッキーを使用した自動ログイン機能を追加することで、ユーザー体験を向上させています。
+
+### ユースケースとの関連
+
+この実装は、[ユースケース](../ユースケース.md)の「4.1. アカウント管理」セクションに記載されている以下のユースケースを拡張するものです：
+
+- C-002: 顧客ログイン
+
+ユースケースの基本フローに「次回から自動でログイン」のオプションを追加し、顧客が選択した場合はクッキーを使用して認証情報を保持するようになりました。これにより、顧客は再訪問時に自動的にログイン状態となり、利便性が向上します。
 
 ## コミット: cabf2d2
 
@@ -31,11 +96,11 @@ index 8ac8ad5..caffe50 100644
 --- a/README.md
 +++ b/README.md
 @@ -637,6 +637,7 @@ git push heroku master
- 
+
  #### RSpecによるテスト
  + クッキーの値のテスト
 ++ クッキーの有効期限テスト
- 
+
  ### IPアドレスによるアクセス制限
  #### IPアドレスによるアクセス制限
 diff --git a/spec/controllers/customer/session_controller_spec.rb b/spec/controllers/customer/session_controller_spec.rb
@@ -43,7 +108,7 @@ index 6025c2f..5a0f323 100644
 --- a/spec/controllers/customer/session_controller_spec.rb
 +++ b/spec/controllers/customer/session_controller_spec.rb
 @@ -24,6 +24,9 @@ describe Customer::SessionsController do
- 
+
        expect(session).not_to have_key(:customer_id)
        expect(response.cookies['customer_id']).to match(/[0-9a-f]{40}\z/)
 +
@@ -97,10 +162,10 @@ index 9325084..8ac8ad5 100644
 +++ b/README.md
 @@ -636,6 +636,7 @@ git push heroku master
  + 動作確認
- 
+
  #### RSpecによるテスト
 ++ クッキーの値のテスト
- 
+
  ### IPアドレスによるアクセス制限
  #### IPアドレスによるアクセス制限
 diff --git a/app/controllers/customer/sessions_controller.rb b/app/controllers/customer/sessions_controller.rb
@@ -196,20 +261,20 @@ index bdb8194..9325084 100644
 --- a/README.md
 +++ b/README.md
 @@ -632,6 +632,8 @@ git push heroku master
- 
+
  #### 自動ログイン機能の追加
  + ビューの修正
 ++ コントローラの修正
 ++ 動作確認
- 
+
  #### RSpecによるテスト
- 
+
 diff --git a/app/controllers/customer/base.rb b/app/controllers/customer/base.rb
 index c95c283..2fd598b 100644
 --- a/app/controllers/customer/base.rb
 +++ b/app/controllers/customer/base.rb
 @@ -3,8 +3,8 @@ class Customer::Base < ApplicationController
- 
+
    private
    def current_customer
 -    if session[:customer_id]
@@ -218,7 +283,7 @@ index c95c283..2fd598b 100644
 +      @current_customer ||= Customer.find_by(id: customer_id)
      end
    end
- 
+
 diff --git a/app/controllers/customer/sessions_controller.rb b/app/controllers/customer/sessions_controller.rb
 index 3394e51..62555e9 100644
 --- a/app/controllers/customer/sessions_controller.rb
@@ -239,7 +304,7 @@ index 3394e51..62555e9 100644
      else
 @@ -26,6 +31,7 @@ class Customer::SessionsController < Customer::Base
    end
- 
+
    def destroy
 +    cookies.delete(:customer_id)
      session.delete(:customer_id)
@@ -290,12 +355,12 @@ index f47bb33..bdb8194 100644
 +++ b/README.md
 @@ -631,6 +631,8 @@ git push heroku master
  + サービスオブジェクト
- 
+
  #### 自動ログイン機能の追加
 ++ ビューの修正
 +
  #### RSpecによるテスト
- 
+
  ### IPアドレスによるアクセス制限
 diff --git a/app/forms/customer/login_form.rb b/app/forms/customer/login_form.rb
 index 1feb6e1..a0e2ef5 100644
@@ -304,7 +369,7 @@ index 1feb6e1..a0e2ef5 100644
 @@ -1,5 +1,9 @@
  class Customer::LoginForm
    include ActiveModel::Model
- 
+
 -  attr_accessor :email, :password
 +  attr_accessor :email, :password, :remember_me
 +
@@ -385,7 +450,7 @@ index 4aa2842..f47bb33 100644
  + コントローラ
  + ビュー
 ++ サービスオブジェクト
- 
+
  #### 自動ログイン機能の追加
  #### RSpecによるテスト
 diff --git a/app/assets/stylesheets/main.scss b/app/assets/stylesheets/main.scss
@@ -397,7 +462,7 @@ index c21d5c5..82d9d5f 100644
  @import "pages/customer/campaign";
  @import "pages/customer/article";
 +@import "pages/customer";
- 
+
  // Staff
  @import "pages/staff";
 diff --git a/app/assets/stylesheets/pages/_customer.scss b/app/assets/stylesheets/pages/_customer.scss
@@ -412,7 +477,7 @@ index 468e113..c101d73 100644
 +    background-color: $very_dark_yellow;
      color: $light_gray;
    }
- 
+
    &__header {
      padding: $moderate;
 -    background-color: $dark_magenta;
@@ -443,7 +508,7 @@ index d714b08..c95c283 100644
 +      @current_customer ||= Customer.find_by(id: session[:customer_id])
      end
    end
- 
+
 diff --git a/app/controllers/customer/campaign_controller.rb b/app/controllers/customer/campaign_controller.rb
 index 897f1f3..e852bae 100644
 --- a/app/controllers/customer/campaign_controller.rb
@@ -453,7 +518,7 @@ index 897f1f3..e852bae 100644
 +class Customer::CampaignController < Customer::Base
    def index
    end
- 
+
 diff --git a/app/controllers/customer/sessions_controller.rb b/app/controllers/customer/sessions_controller.rb
 index 993e180..3394e51 100644
 --- a/app/controllers/customer/sessions_controller.rb
@@ -461,7 +526,7 @@ index 993e180..3394e51 100644
 @@ -10,10 +10,10 @@ class Customer::SessionsController < Customer::Base
      end
    end
- 
+
 -  def crete
 -    @form = Customer::LoginForm.new(params[:customer_login_form])
 +  def create
@@ -494,7 +559,7 @@ index 013788c..7083b1d 100644
 +++ b/app/controllers/customer/top_controller.rb
 @@ -2,6 +2,10 @@ class Customer::TopController < Customer::Base
    skip_before_action :authorize
- 
+
    def index
 -    render action: 'index'
 +    if current_customer
@@ -661,7 +726,7 @@ index 3f4db64..4aa2842 100644
  + ルーティング
  + コントローラ
 ++ ビュー
- 
+
  #### 自動ログイン機能の追加
  #### RSpecによるテスト
 diff --git a/app/assets/stylesheets/base/_variables.scss b/app/assets/stylesheets/base/_variables.scss
@@ -671,7 +736,7 @@ index 13563ca..d79c276 100644
 @@ -47,6 +47,11 @@ $very_dark_cyan: darken($dark_cyan, 25%);
  $dark_magenta: #884488;
  $very_dark_magenta: darken($dark_magenta, 25%);
- 
+
 +/* イエロー系 */
 +
 +$dark_yellow: #888844;
@@ -759,9 +824,9 @@ index 72fc3e8..f86b2a9 100644
 +  &--customer {
 +    border: solid 4px $dark_yellow;
 +  }
- 
+
    background-color: $very_light_gray;
- 
+
 diff --git a/app/forms/customer/login_form.rb b/app/forms/customer/login_form.rb
 new file mode 100644
 index 0000000..1feb6e1
@@ -945,7 +1010,7 @@ index 612676c..b52d1db 100644
        staff/change_password_form: 職員パスワード変更フォーム
        admin/login_form: 管理者ログインフォーム
 +      customer/login_form: 顧客ログインフォーム
- 
+
      attributes:
        staff/login_form:
 @@ -127,3 +128,6 @@ ja:
@@ -1030,7 +1095,7 @@ index b52a5e7..3f4db64 100644
  #### 顧客のログイン・ログアウト機能
  + ルーティング
 ++ コントローラ
- 
+
  #### 自動ログイン機能の追加
  #### RSpecによるテスト
 diff --git a/app/controllers/customer/base.rb b/app/controllers/customer/base.rb
@@ -1167,14 +1232,14 @@ index 5e01860..b52a5e7 100644
 --- a/README.md
 +++ b/README.md
 @@ -625,6 +625,8 @@ git push heroku master
- 
+
  ### 次回から自動でログイン
  #### 顧客のログイン・ログアウト機能
 ++ ルーティング
 +
  #### 自動ログイン機能の追加
  #### RSpecによるテスト
- 
+
 diff --git a/config/routes.rb b/config/routes.rb
 index f0f1ae9..ce8228f 100644
 --- a/config/routes.rb
@@ -1197,7 +1262,7 @@ index f0f1ae9..ce8228f 100644
 +      resource :session, only: [ :create, :destroy ]
      end
    end
- 
+
 
 ```
 
@@ -1229,7 +1294,7 @@ index 18c6f37..5e01860 100644
 @@ -623,6 +623,48 @@ git push heroku master
  + 検索条件に郵便番号を追加
  + 検索条件に電話番号下４桁を追加
- 
+
 +### 次回から自動でログイン
 +#### 顧客のログイン・ログアウト機能
 +#### 自動ログイン機能の追加
@@ -1273,8 +1338,7 @@ index 18c6f37..5e01860 100644
 +#### 演習問題  
 +
  **[⬆ back to top](#構成)**
- 
+
  # 参照 #
 
 ```
-
