--- a/docs/journal/20170210.md
+++ b/docs/journal/20170210.md
@@ -2,7 +2,86 @@
 
 ## 概要
 
-2017-02-10の作業内容をまとめています。
+2017-02-10の作業内容をまとめています。この日は主に「IPアドレスによるアクセス制限」機能の管理機能を実装しました。
+
+### 実装内容の説明
+
+#### IPアドレスによるアクセス制限の管理機能
+
+セキュリティを強化するため、特定のIPアドレスからのみ管理者・職員インターフェースにアクセスできるよう制限する機能を実装しました。この日は特に、許可IPアドレスを管理するための管理者向け機能を実装しました。管理者は許可IPアドレスの追加や一括削除を行うことができます。
+
+```plantuml
+@startuml
+title IPアドレスによるアクセス制限の管理機能
+
+actor 管理者
+participant "AllowedSourcesController" as ASC
+participant "AllowedSourcesDeleter" as ASD
+entity "AllowedSource" as AS
+database "Database" as DB
+
+== 許可IPアドレスの一覧表示 ==
+管理者 -> ASC: 一覧表示要求
+ASC -> AS: 許可IPアドレス取得
+AS -> DB: SELECT
+DB --> AS: 結果
+AS --> ASC: 許可IPアドレスリスト
+ASC --> 管理者: 一覧表示
+
+== 許可IPアドレスの追加 ==
+管理者 -> ASC: 新規IPアドレス登録
+ASC -> AS: 新規レコード作成
+AS -> DB: INSERT
+DB --> AS: 結果
+AS --> ASC: 成功/失敗
+ASC --> 管理者: 結果表示
+
+== 許可IPアドレスの一括削除 ==
+管理者 -> ASC: 削除対象を選択して削除
+ASC -> ASD: 削除処理依頼
+ASD -> AS: 対象レコード削除
+AS -> DB: DELETE
+DB --> AS: 結果
+AS --> ASD: 成功/失敗
+ASD --> ASC: 結果
+ASC --> 管理者: 結果表示
+
+@enduml
+```
+
+#### 許可IPアドレスの管理
+
+許可IPアドレスは、以下の形式で管理されます：
+1. 完全一致（例：192.168.1.1）
+2. 前方一致（例：192.168.1.*）
+
+管理者は、これらのパターンを使って柔軟にアクセス制限を設定できます。また、一括削除機能により、複数の許可IPアドレスを効率的に管理できます。
+
+### アーキテクチャとの関連
+
+この実装は、[アーキテクチャ概要](../アーキテクチャ概要.md)の「8. 認証・認可システム」および「10. 開発ガイドライン」セクションに関連しています。特に以下の部分を強化するものです：
+
+```
+1. **名前空間の分離**: 各インターフェース（スタッフ、顧客、管理者）のコードは名前空間で明確に分離する
+...
+4. **アクセス制御**: 適切なアクセス制御によりセキュリティを確保する
+```
+
+また、サービスオブジェクトパターン（`AllowedSourcesDeleter`）を使用して、複雑な削除ロジックをコントローラから分離しています。
+
+### ユースケースとの関連
+
+この実装は、[ユースケース](../ユースケース.md)の「5.3. システム管理」セクションに記載されている以下のユースケースを実現するものです：
+
+- A-007: アクセス制限IPアドレス管理
+
+ユースケース説明：
+> 管理者がアクセス許可するIPアドレスを管理する
+> 
+> 基本フロー：
+> 1. IPアドレス制限設定ページにアクセス
+> 2. 許可するIPアドレスを追加/編集/削除
+> 3. 変更を保存
 
 ## コミット: 698d99c
 
@@ -38,9 +117,9 @@ index 60478cd..a0749af 100644
  + 許可IPアドレスの追加
  + 許可IPアドレスの一括削除フォーム
 ++ 許可IPアドレスの一括削除
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/admin/allowed_sources_controller.rb b/app/controllers/admin/allowed_sources_controller.rb
 index 6745e01..bb03a41 100644
 --- a/app/controllers/admin/allowed_sources_controller.rb
@@ -48,7 +127,7 @@ index 6745e01..bb03a41 100644
 @@ -17,6 +17,13 @@ class Admin::AllowedSourcesController < Admin::Base
      end
    end
- 
+
 +  def delete
 +    if Admin::AllowedSourcesDeleter.new.delete(allowed_sources_params(params[:form]))
 +      flash.notice = t('.flash_notice')
@@ -126,7 +205,7 @@ index 484e11b..2faa88c 100644
          flash_alert: '許可IPアドレスの値が正しくありません。'
 +      delete:
 +        flash_notice: '許可IPアドレスを削除しました。'
- 
+
    customer:
      base:
 
@@ -178,20 +257,20 @@ index b35bf73..60478cd 100644
  + 許可IPアドレスの新規登録フォーム
  + 許可IPアドレスの追加
 ++ 許可IPアドレスの一括削除フォーム
- 
+
  #### 演習問題
- 
+
 diff --git a/app/models/allowed_source.rb b/app/models/allowed_source.rb
 index 10c6f60..7a1154d 100644
 --- a/app/models/allowed_source.rb
 +++ b/app/models/allowed_source.rb
 @@ -18,7 +18,7 @@
  #
- 
+
  class AllowedSource < ApplicationRecord
 -  attr_accessor :last_octet
 +  attr_accessor :last_octet, :_destroy
- 
+
    before_validation do
      if last_octet
 diff --git a/app/views/admin/allowed_sources/_new_allowed_source.html.erb b/app/views/admin/allowed_sources/_new_allowed_source.html.erb
@@ -218,7 +297,7 @@ index 4b2721d..c4ebc36 100644
 -  </div>
 -</section>
 -
- 
+
 -<section class="Section l-column Table">
 -  <table class="Table__body Table__body--listing AdminTable__body">
 -    <tr class="Table__tr">
@@ -276,7 +355,7 @@ index 17a4243..07e17d1 100644
 +          confirm: '本当に削除しますか。'
 +        new_allowed_source:
            submit: '追加'
- 
+
    customer:
 
 ```
@@ -326,9 +405,9 @@ index 80e4e13..b35bf73 100644
  + 許可IPアドレスの一覧表示
  + 許可IPアドレスの新規登録フォーム
 ++ 許可IPアドレスの追加
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/admin/allowed_sources_controller.rb b/app/controllers/admin/allowed_sources_controller.rb
 index bfef319..6745e01 100644
 --- a/app/controllers/admin/allowed_sources_controller.rb
@@ -366,7 +445,7 @@ index 2d2bf38..10c6f60 100644
 @@ -20,12 +20,34 @@
  class AllowedSource < ApplicationRecord
    attr_accessor :last_octet
- 
+
 +  before_validation do
 +    if last_octet
 +      self.last_octet.strip!
@@ -395,7 +474,7 @@ index 2d2bf38..10c6f60 100644
 +      end
 +    end
 +  end
- 
+
    def ip_address=(ip_address)
      octets = ip_address.split('.')
 diff --git a/config/locales/controllers/ja.yml b/config/locales/controllers/ja.yml
@@ -462,11 +541,11 @@ index 43e54c2..2c3a094 100644
 -      Rails.application.config.baukis_kai[:restrict_ip_address] = true
 +      Rails.application.config.baukis_kai[:restrict_ip_addresses] = true
      end
- 
+
      # 許可
 @@ -28,7 +28,7 @@ describe Staff::TopController, 'Before login' do
      end
- 
+
      after do
 -      Rails.application.config.baukis_kai[:restrict_ip_address] = false
 +      Rails.application.config.baukis_kai[:restrict_ip_addresses] = false
@@ -478,7 +557,7 @@ index 5ee54e3..a134be0 100644
 --- a/spec/models/allowed_source_spec.rb
 +++ b/spec/models/allowed_source_spec.rb
 @@ -58,7 +58,7 @@ RSpec.describe AllowedSource, type: :model do
- 
+
    describe '.include?' do
      before do
 -      Rails.application.config.baukis_kai[:restrict_ip_address] = true
@@ -536,9 +615,9 @@ index e650284..80e4e13 100644
  + ルーティング
  + 許可IPアドレスの一覧表示
 ++ 許可IPアドレスの新規登録フォーム
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/admin/allowed_sources_controller.rb b/app/controllers/admin/allowed_sources_controller.rb
 index b03ef30..bfef319 100644
 --- a/app/controllers/admin/allowed_sources_controller.rb
@@ -556,7 +635,7 @@ index 6f6e932..2d2bf38 100644
 +++ b/app/models/allowed_source.rb
 @@ -18,6 +18,8 @@
  #
- 
+
  class AllowedSource < ApplicationRecord
 +  attr_accessor :last_octet
 +
@@ -587,7 +666,7 @@ index 06bd291..4b2721d 100644
 @@ -3,6 +3,13 @@
    <h1 class="Admin__title"><%= @title %></h1>
  </section>
- 
+
 +<section class="Section l-column AppForm">
 +  <div class="AppForm__generic-form AdminAppForm__generic-form AppForm__customer_form">
 +    <%= render 'new_allowed_source' %>
@@ -608,7 +687,7 @@ index f7660fe..17a4243 100644
            created_at: '作成日時'
 +          form_label: '新規許可IPアドレス'
 +          submit: '追加'
- 
+
    customer:
      shared:
 
@@ -662,9 +741,9 @@ index 5176018..e650284 100644
  + 仕様
  + ルーティング
 ++ 許可IPアドレスの一覧表示
- 
+
  #### 演習問題
- 
+
 diff --git a/app/assets/stylesheets/components/common/_table.scss b/app/assets/stylesheets/components/common/_table.scss
 index 18a6b86..56ebb47 100644
 --- a/app/assets/stylesheets/components/common/_table.scss
@@ -679,7 +758,7 @@ index 18a6b86..56ebb47 100644
 +    }
    }
  }
- 
+
 diff --git a/app/controllers/admin/allowed_sources_controller.rb b/app/controllers/admin/allowed_sources_controller.rb
 new file mode 100644
 index 0000000..b03ef30
@@ -766,7 +845,7 @@ index 7b1fcee..f7660fe 100644
 +          title: '許可IPアドレス一覧'
 +          ip_address: 'IPアドレス'
 +          created_at: '作成日時'
- 
+
    customer:
      shared:
 
@@ -814,13 +893,13 @@ index 5191403..5176018 100644
 +++ b/README.md
 @@ -649,6 +649,9 @@ git push heroku master
  + 動作確認
- 
+
  #### 許可IPアドレスの管理
 ++ 仕様
 ++ ルーティング
 +
  #### 演習問題
- 
+
  ### 多対多の関連付け
 diff --git a/app/presenters/admin/allowed_source_presenter.rb b/app/presenters/admin/allowed_source_presenter.rb
 new file mode 100644
@@ -851,7 +930,7 @@ index ce8228f..dd9124e 100644
 +      end
      end
    end
- 
+
 
 ```
 
@@ -887,7 +966,7 @@ index c3d5987..5191403 100644
  + クラスメソッドinclude?
  + コントローラ修正
 ++ 動作確認
- 
+
  #### 許可IPアドレスの管理
  #### 演習問題
 diff --git a/app/models/allowed_source.rb b/app/models/allowed_source.rb
@@ -895,14 +974,14 @@ index edbf78f..6f6e932 100644
 --- a/app/models/allowed_source.rb
 +++ b/app/models/allowed_source.rb
 @@ -40,7 +40,7 @@ class AllowedSource < ApplicationRecord
- 
+
    class << self
      def include?(namespace, ip_address)
 -      !Rails.application.config.baukis_kai[:restrict_ip_address] ||
 +      !Rails.application.config.baukis_kai[:restrict_ip_addresses] ||
            where(namespace: namespace).where(options_for(ip_address)).exists?
      end
- 
+
 diff --git a/config/environments/development.rb b/config/environments/development.rb
 index bac6336..63bc608 100644
 --- a/config/environments/development.rb
@@ -914,7 +993,7 @@ index bac6336..63bc608 100644
 -      restrict_ip_addresses: true
 +      restrict_ip_addresses: false
    }
- 
+
    config.middleware.insert_after ActionDispatch::Static, Rack::LiveReload
 
 ```
@@ -963,7 +1042,7 @@ index 13e9c19..c3d5987 100644
  + AllowedSourceモデル
  + クラスメソッドinclude?
 ++ コントローラ修正
- 
+
  #### 許可IPアドレスの管理
  #### 演習問題
 diff --git a/app/controllers/staff/base.rb b/app/controllers/staff/base.rb
@@ -977,9 +1056,9 @@ index 83da20d..ad5e718 100644
    before_action :check_account
    before_action :check_timeout
 @@ -13,6 +14,10 @@ class Staff::Base < ApplicationController
- 
+
    helper_method :current_staff_member
- 
+
 +  def check_source_ip_address
 +    raise IpAddressRejected unless AllowedSource.include?('staff', request.ip)
 +  end
@@ -994,7 +1073,7 @@ index c6663ca..43e54c2 100644
 @@ -3,6 +3,39 @@ require 'rails_helper'
  describe Staff::TopController, 'Before login' do
    let(:staff_member) { create(:staff_member) }
- 
+
 +  # IPアドレスによるアクセス制限
 +  describe 'access restriction by IP address' do
 +    before do
@@ -1078,7 +1157,7 @@ index d550d51..13e9c19 100644
  + 準備作業
  + AllowedSourceモデル
 ++ クラスメソッドinclude?
- 
+
  #### 許可IPアドレスの管理
  #### 演習問題
 diff --git a/app/models/allowed_source.rb b/app/models/allowed_source.rb
@@ -1134,7 +1213,7 @@ index 81ee342..5ee54e3 100644
 +        expect(src).to be_valid
 +      end
      end
- 
+
      # 引数に"192.168.0.*"を与えた場合
 -    example 'When "192.168.0.*" is given as an argument' do
 -      src = AllowedSource.new(namespace: 'staff', ip_address: '192.168.0.*')
@@ -1155,7 +1234,7 @@ index 81ee342..5ee54e3 100644
 +        expect(src).to be_valid
 +      end
      end
- 
+
      # 引数に不正な文字列を与えた場合
 -    example 'When an invalid character string is given as an argument' do
 -      src = AllowedSource.new(namespace: 'staff', ip_address: 'A.B.C.D')
@@ -1247,7 +1326,7 @@ index 2339dcd..d550d51 100644
  + 仕様
  + 準備作業
 ++ AllowedSourceモデル
- 
+
  #### 許可IPアドレスの管理
  #### 演習問題
 diff --git a/app/models/allowed_source.rb b/app/models/allowed_source.rb
@@ -1325,10 +1404,10 @@ index 218066a..e6570d9 100644
 @@ -10,107 +10,123 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170207071612) do
 +ActiveRecord::Schema.define(version: 20170210034614) do
- 
+
 -  create_table "addresses", force: :cascade do |t|
 -    t.integer  "customer_id",                null: false
 -    t.string   "type",                       null: false
@@ -1366,7 +1445,7 @@ index 218066a..e6570d9 100644
 +    t.index ["type", "customer_id"], name: "index_addresses_on_type_and_customer_id", unique: true, using: :btree
 +    t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade do |t|
 -    t.string   "email",                           null: false
 -    t.string   "email_for_index",                 null: false
@@ -1382,7 +1461,7 @@ index 218066a..e6570d9 100644
 -    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true
 +    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade do |t|
 -    t.string   "email",            null: false
 -    t.string   "email_for_index",  null: false
@@ -1448,7 +1527,7 @@ index 218066a..e6570d9 100644
 +    t.index ["gender", "family_name_kana", "given_name_kana"], name: "index_customers_on_gender_and_furigana", using: :btree
 +    t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade do |t|
 -    t.integer  "customer_id",                      null: false
 -    t.integer  "address_id"
@@ -1474,7 +1553,7 @@ index 218066a..e6570d9 100644
 +    t.index ["last_four_digits"], name: "index_phones_on_last_four_digits", using: :btree
 +    t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade do |t|
 -    t.integer  "staff_member_id", null: false
 -    t.string   "type",            null: false
@@ -1490,7 +1569,7 @@ index 218066a..e6570d9 100644
 +    t.index ["staff_member_id", "created_at"], name: "index_staff_events_on_staff_member_id_and_created_at", using: :btree
 +    t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade do |t|
 -    t.string   "email",                            null: false
 -    t.string   "email_for_index",                  null: false
@@ -1520,7 +1599,7 @@ index 218066a..e6570d9 100644
 +    t.index ["email_for_index"], name: "index_staff_members_on_email_for_index", unique: true, using: :btree
 +    t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 +  add_foreign_key "addresses", "customers"
 +  add_foreign_key "phones", "addresses"
 +  add_foreign_key "phones", "customers"
@@ -1658,7 +1737,7 @@ index caffe50..2339dcd 100644
 --- a/README.md
 +++ b/README.md
 @@ -641,6 +641,9 @@ git push heroku master
- 
+
  ### IPアドレスによるアクセス制限
  #### IPアドレスによるアクセス制限
 ++ 仕様
@@ -1666,24 +1745,24 @@ index caffe50..2339dcd 100644
 +
  #### 許可IPアドレスの管理
  #### 演習問題
- 
+
 diff --git a/app/controllers/application_controller.rb b/app/controllers/application_controller.rb
 index fb5507f..d1ed053 100644
 --- a/app/controllers/application_controller.rb
 +++ b/app/controllers/application_controller.rb
 @@ -7,6 +7,8 @@ class ApplicationController < ActionController::Base
    class IpAddressRejected < ActionController::ActionControllerError; end
- 
+
    include ErrorHandlers if Rails.env.production?
 +  rescue_from ApplicationController::Forbidden, with: :rescue403
 +  rescue_from ApplicationController::IpAddressRejected, with: :rescue403
- 
+
    private
    def set_layout
 @@ -17,4 +19,9 @@ class ApplicationController < ActionController::Base
      end
    end
- 
+
 +  def rescue403(e)
 +    @exception = e
 +    render 'errors/forbidden', status: 403
@@ -1706,7 +1785,7 @@ index f0a871a..09ca974 100644
 @@ -21,11 +19,6 @@ module ErrorHandlers
      render 'errors/not_found', status: 404
    end
- 
+
 -  def rescue403(e)
 -    @exception = e
 -    render 'errors/forbidden', status: 403
@@ -1727,7 +1806,7 @@ index c6f4df0..bac6336 100644
 +      customer: { host: '0.0.0.0', path: '' },
 +      restrict_ip_addresses: true
    }
- 
+
    config.middleware.insert_after ActionDispatch::Static, Rack::LiveReload
 
 ```
@@ -1743,4 +1822,3 @@ index c6f4df0..bac6336 100644
 ' NewClass --> ExistingClass
 @enduml
 ```
-
