--- a/docs/journal/20170213.md
+++ b/docs/journal/20170213.md
@@ -2,7 +2,74 @@
 
 ## 概要
 
-2017-02-13の作業内容をまとめています。
+2017-02-13の作業内容をまとめています。この日は主に「IPアドレスによるアクセス制限」機能の実装を行いました。
+
+### 実装内容の説明
+
+#### IPアドレスによるアクセス制限
+
+セキュリティ強化のため、特定のIPアドレスからのみ管理者インターフェースにアクセスできるよう制限する機能を実装しました。これにより、不正アクセスのリスクを低減し、システムのセキュリティを向上させています。
+
+```plantuml
+@startuml
+title IPアドレスによるアクセス制限の実装
+
+class AllowedSource {
+  +id: integer
+  +namespace: string
+  +octet1: integer
+  +octet2: integer
+  +octet3: integer
+  +octet4: integer
+  +ip_address: string (仮想属性)
+  +include?(namespace, ip_address): boolean (クラスメソッド)
+}
+
+class Admin::BaseController {
+  +check_source_ip_address
+}
+
+class Staff::BaseController {
+  +check_source_ip_address
+}
+
+AllowedSource <-- Admin::BaseController: 利用
+AllowedSource <-- Staff::BaseController: 利用
+
+note right of AllowedSource::ip_address
+  IPアドレスを "192.168.1.*" のような
+  形式で扱うための仮想属性
+end note
+
+note right of AllowedSource::include?
+  指定されたIPアドレスが
+  許可リストに含まれるか確認
+end note
+
+@enduml
+```
+
+#### 許可IPアドレスの管理機能
+
+管理者が許可するIPアドレスを追加・削除できる管理機能も実装しました。これにより、システム管理者は柔軟にアクセス制限を設定できます。
+
+### アーキテクチャとの関連
+
+この実装は、[アーキテクチャ概要](../アーキテクチャ概要.md)の「8. 認証・認可システム」および「10. 開発ガイドライン」セクションに関連しています。特に以下の部分を強化するものです：
+
+```
+1. **名前空間の分離**: 各インターフェース（スタッフ、顧客、管理者）のコードは名前空間で明確に分離する
+...
+4. **アクセス制御**: 適切なアクセス制御によりセキュリティを確保する
+```
+
+### ユースケースとの関連
+
+この実装は、[ユースケース](../ユースケース.md)の「5.3. システム管理」セクションに記載されている以下のユースケースを実現するものです：
+
+- A-007: アクセス制限IPアドレス管理
+
+このユースケースでは、管理者がアクセス許可するIPアドレスを管理できることが要件として定義されています。
 
 ## コミット: fb7a1a1
 
@@ -93,7 +160,7 @@ index 1de7b86..4b2cd20 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,7 +6,7 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 -table_names = %w(staff_members administrators staff_events customers)
@@ -130,11 +197,11 @@ index fbf896e..dd7a38b 100644
 --- a/README.md
 +++ b/README.md
 @@ -659,6 +659,7 @@ git push heroku master
- 
+
  #### 演習問題
  + 管理者ページに対するIPアクセス制限（テスト）
 ++ 管理者ページに対するIPアクセス制限機能追加
- 
+
  ### 多対多の関連付け
  #### 多対多の関連付け
 
@@ -172,9 +239,9 @@ index 65e022f..a69969f 100644
    before_action :check_account
    before_action :check_timeout
 @@ -13,6 +14,10 @@ class Admin::Base < ApplicationController
- 
+
    helper_method :current_administrator
- 
+
 +  def check_source_ip_address
 +    raise IpAddressRejected unless AllowedSource.include?('admin',request.ip)
 +  end
@@ -225,10 +292,10 @@ index a0749af..fbf896e 100644
 +++ b/README.md
 @@ -658,6 +658,7 @@ git push heroku master
  + 許可IPアドレスの一括削除
- 
+
  #### 演習問題
 ++ 管理者ページに対するIPアクセス制限（テスト）
- 
+
  ### 多対多の関連付け
  #### 多対多の関連付け
 diff --git a/spec/controllers/admin/top_controller_spec.rb b/spec/controllers/admin/top_controller_spec.rb
@@ -238,7 +305,7 @@ index ab43961..55e040d 100644
 @@ -3,6 +3,39 @@ require 'rails_helper'
  describe Admin::TopController, 'Before login' do
    let(:administrator) { create(:administrator) }
- 
+
 +  # IPアドレスによるアクセス制限
 +  describe 'access restriction by IP address' do
 +    before do
@@ -289,4 +356,3 @@ index ab43961..55e040d 100644
 ' NewClass --> ExistingClass
 @enduml
 ```
-
