--- a/docs/journal/20170214.md
+++ b/docs/journal/20170214.md
@@ -2,7 +2,61 @@
 
 ## 概要
 
-2017-02-14の作業内容をまとめています。
+2017-02-14の作業内容をまとめています。このジャーナルでは、プログラム管理機能の実装に関する作業を記録しています。主にプログラムの新規登録・編集フォームの実装を行いました。
+
+## プログラム管理機能の構成図
+
+```plantuml
+@startuml "Baukis-Kai プログラム管理機能"
+!include <C4/C4_Component>
+
+Person(staff, "職員", "プログラム管理者")
+
+System_Boundary(program_management, "プログラム管理機能") {
+    Component(programs_controller, "ProgramsController", "コントローラ", "プログラム管理の制御")
+    Component(program_form, "ProgramForm", "フォームオブジェクト", "プログラム情報の入力処理")
+    Component(program_model, "Program", "モデル", "プログラムのデータ構造")
+    Component(form_presenter, "FormPresenter", "プレゼンター", "フォーム表示の抽象クラス")
+    Component(program_form_presenter, "ProgramFormPresenter", "プレゼンター", "プログラムフォーム表示")
+    Component(program_views, "プログラムビュー", "ビュー", "new.html.erb, edit.html.erb, _form.html.erb")
+}
+
+Rel(staff, programs_controller, "リクエスト")
+Rel(programs_controller, program_form, "生成・利用")
+Rel(program_form, program_model, "データ操作")
+Rel(programs_controller, program_views, "レンダリング")
+Rel(program_views, program_form_presenter, "表示整形")
+Rel(program_form_presenter, form_presenter, "継承")
+
+@enduml
+```
+
+## 作業内容
+
+### プログラム管理機能の実装
+
+職員がプログラム（イベントやセミナーなど）を管理するための機能を実装しました。今回は特に、プログラムの新規登録と編集のためのフォーム機能に焦点を当てています。
+
+#### 変更点の概要
+
+1. フォームオブジェクトの導入
+   - `Staff::ProgramForm` クラスを作成し、複雑なフォーム処理をカプセル化
+   - 日付と時刻の分離・結合処理を実装
+
+2. プレゼンターの拡張
+   - `ProgramFormPresenter` クラスを作成し、フォーム表示を整形
+   - 既存の `FormPresenter` クラスを拡張
+
+3. ビューの実装
+   - 新規登録・編集用のビューテンプレートを作成
+   - 部分テンプレートを活用して共通部分を共有
+
+#### 技術的詳細
+
+- フォームオブジェクトパターンを使用して複雑なフォーム処理を分離
+- プレゼンターパターンを使用してビューロジックを分離
+- 日付と時刻の入力を分けて、使いやすいUIを実現
+- ActiveModel::Modelを使用して、モデルのようにフォームオブジェクトを扱えるように実装
 
 ## コミット: d980c7f
 
@@ -39,14 +93,14 @@ index c74a2a4..5100173 100644
 --- a/README.md
 +++ b/README.md
 @@ -681,6 +681,9 @@ git push heroku master
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 ++ プログラムの新規登録・更新フォームの仕様
 ++ プログラムの新規登録・編集フォーム
 +
  #### プログラム申し込み機能
- 
+
  ### トランザクションと排他的ロック
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
 index 88fe271..980bf48 100644
@@ -107,7 +161,7 @@ index 2edf22a..46c9dd1 100644
 @@ -24,6 +24,13 @@ class Program < ApplicationRecord
    has_many :applicants, through: :entries, source: :customer
    belongs_to :registrant, class_name: 'StaffMember'
- 
+
 +  attr_accessor :application_start_date,
 +                :application_start_hour,
 +                :application_start_minute,
@@ -131,7 +185,7 @@ index 545467e..88c57e2 100644
 +      end
      end
    end
- 
+
 +  def number_field_block(name, label_text, options = {})
 +    markup(:div) do |m|
 +      m << decorated_label(name, label_text, options)
@@ -325,7 +379,7 @@ index 7ac388b..c74a2a4 100644
  + 編集対象の変更による改善
  + テーブルの内部結合(INNER JOIN)
 ++ テーブルの左結合(LEFT JOIN)
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/app/models/program.rb b/app/models/program.rb
@@ -334,7 +388,7 @@ index ac5e61f..2edf22a 100644
 +++ b/app/models/program.rb
 @@ -25,7 +25,7 @@ class Program < ApplicationRecord
    belongs_to :registrant, class_name: 'StaffMember'
- 
+
    scope :listing, -> {
 -    joins(:entries)
 +    joins('LEFT JOIN entries ON programs.id = entries.program_id')
@@ -389,7 +443,7 @@ index 563f1da..7ac388b 100644
  + スコープの定義
  + 編集対象の変更による改善
 ++ テーブルの内部結合(INNER JOIN)
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
@@ -398,7 +452,7 @@ index 2053134..88fe271 100644
 +++ b/app/controllers/staff/programs_controller.rb
 @@ -4,6 +4,6 @@ class Staff::ProgramsController < Staff::Base
    end
- 
+
    def show
 -    @program = Program.find(params[:id])
 +    @program = Program.listing.find(params[:id])
@@ -410,7 +464,7 @@ index 802d487..ac5e61f 100644
 +++ b/app/models/program.rb
 @@ -25,6 +25,10 @@ class Program < ApplicationRecord
    belongs_to :registrant, class_name: 'StaffMember'
- 
+
    scope :listing, -> {
 -    order(application_start_time: :desc).includes(:registrant)
 +    joins(:entries)
@@ -426,12 +480,12 @@ index 9af7a53..a3847ab 100644
 +++ b/app/presenters/staff/program_presenter.rb
 @@ -23,7 +23,7 @@ class Staff::ProgramPresenter < ModelPresenter
    end
- 
+
    def number_of_applicants
 -    number_with_delimiter(object.entries.count)
 +    number_with_delimiter(object.number_of_applicants)
    end
- 
+
    def registrant
 
 ```
@@ -479,7 +533,7 @@ index 6c59a80..563f1da 100644
  + includesメソッドによる改善
  + スコープの定義
 ++ 編集対象の変更による改善
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/app/presenters/staff/program_presenter.rb b/app/presenters/staff/program_presenter.rb
@@ -488,12 +542,12 @@ index a46d511..9af7a53 100644
 +++ b/app/presenters/staff/program_presenter.rb
 @@ -23,7 +23,7 @@ class Staff::ProgramPresenter < ModelPresenter
    end
- 
+
    def number_of_applicants
 -    number_with_delimiter(object.applicants.count)
 +    number_with_delimiter(object.entries.count)
    end
- 
+
    def registrant
 
 ```
@@ -530,7 +584,7 @@ index e36f33f..6c59a80 100644
  + プログラム一覧表所機能のベンチマーク測定
  + includesメソッドによる改善
 ++ スコープの定義
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
@@ -543,7 +597,7 @@ index bfda027..2053134 100644
 -    @programs = Program.order(application_start_time: :desc).includes(:registrant).page(params[:page])
 +    @programs = Program.listing.page(params[:page])
    end
- 
+
    def show
 diff --git a/app/models/program.rb b/app/models/program.rb
 index 96125eb..802d487 100644
@@ -604,7 +658,7 @@ index 1ca0316..e36f33f 100644
  + ベンチマーク測定の準備
  + プログラム一覧表所機能のベンチマーク測定
 ++ includesメソッドによる改善
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
@@ -617,7 +671,7 @@ index 77ee323..bfda027 100644
 -    @programs = Program.order(application_start_time: :desc).page(params[:page])
 +    @programs = Program.order(application_start_time: :desc).includes(:registrant).page(params[:page])
    end
- 
+
    def show
 
 ```
@@ -662,11 +716,11 @@ index fe7a4f2..1ca0316 100644
 --- a/README.md
 +++ b/README.md
 @@ -672,6 +672,7 @@ git push heroku master
- 
+
  #### パフォーマンス改善
  + ベンチマーク測定の準備
 ++ プログラム一覧表所機能のベンチマーク測定
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/spec/factories/programs.rb b/spec/factories/programs.rb
@@ -674,7 +728,7 @@ index 5819c1c..a14ab17 100644
 --- a/spec/factories/programs.rb
 +++ b/spec/factories/programs.rb
 @@ -21,6 +21,12 @@
- 
+
  FactoryGirl.define do
    factory :program do
 -    
@@ -763,10 +817,10 @@ index 08b8c41..fe7a4f2 100644
 +++ b/README.md
 @@ -671,6 +671,7 @@ git push heroku master
  + プログラムの詳細表示
- 
+
  #### パフォーマンス改善
 ++ ベンチマーク測定の準備
- 
+
  ### 複雑なフォーム
  #### プログラム管理機能（後編）
 diff --git a/spec/rails_helper.rb b/spec/rails_helper.rb
@@ -776,7 +830,7 @@ index 8e3f5b2..52a3101 100644
 @@ -52,6 +52,8 @@ RSpec.configure do |config|
    # https://relishapp.com/rspec/rspec-rails/docs
    config.infer_spec_type_from_file_location!
- 
+
 +  config.filter_run_excluding :performance => true
 +
    # Filter lines from Rails gems in backtraces.
@@ -846,13 +900,13 @@ index 6d26deb..08b8c41 100644
 --- a/README.md
 +++ b/README.md
 @@ -668,6 +668,7 @@ git push heroku master
- 
+
  #### プログラム管理機能（前編）
  + プログラムの一覧表示 
 ++ プログラムの詳細表示
- 
+
  #### パフォーマンス改善
- 
+
 diff --git a/app/assets/stylesheets/components/common/_table.scss b/app/assets/stylesheets/components/common/_table.scss
 index 8523b0f..66813e4 100644
 --- a/app/assets/stylesheets/components/common/_table.scss
@@ -868,7 +922,7 @@ index 8523b0f..66813e4 100644
 +      background-color: $very_light_gray;
 +    }
    }
- 
+
    &__th {
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index 9757ef6..6342b22 100644
@@ -881,7 +935,7 @@ index 9757ef6..6342b22 100644
 -    @programs = @search_form.search.page(params[:page])
 +    @customers = @search_form.search.page(params[:page])
    end
- 
+
    def show
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
 index b9c11ac..77ee323 100644
@@ -993,12 +1047,12 @@ index 00383a1..6d26deb 100644
 +++ b/README.md
 @@ -667,6 +667,8 @@ git push heroku master
  + データベース設計
- 
+
  #### プログラム管理機能（前編）
 ++ プログラムの一覧表示 
 +
  #### パフォーマンス改善
- 
+
  ### 複雑なフォーム
 diff --git a/app/assets/stylesheets/components/common/_table.scss b/app/assets/stylesheets/components/common/_table.scss
 index 56ebb47..8523b0f 100644
@@ -1014,7 +1068,7 @@ index 56ebb47..8523b0f 100644
 +    }
    }
  }
- 
+
 diff --git a/app/controllers/staff/customers_controller.rb b/app/controllers/staff/customers_controller.rb
 index 6342b22..9757ef6 100644
 --- a/app/controllers/staff/customers_controller.rb
@@ -1026,7 +1080,7 @@ index 6342b22..9757ef6 100644
 -    @customers = @search_form.search.page(params[:page])
 +    @programs = @search_form.search.page(params[:page])
    end
- 
+
    def show
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
 new file mode 100644
@@ -1212,7 +1266,7 @@ index dd9124e..1fe6a8a 100644
 +      resources :programs
      end
    end
- 
+
 
 ```
 
@@ -1271,7 +1325,7 @@ index e2da587..5d824f1 100644
 +++ b/db/migrate/20170203051654_create_addresses.rb
 @@ -15,6 +15,6 @@ class CreateAddresses < ActiveRecord::Migration[5.0]
      end
- 
+
      add_index :addresses, [:type, :customer_id], unique: true
 -    add_foreign_key :addresses, :customers
 +    add_foreign_key :addresses, :programs
@@ -1283,7 +1337,7 @@ index f9f0714..bb8c001 100644
 +++ b/db/migrate/20170206085929_create_phones.rb
 @@ -11,7 +11,7 @@ class CreatePhones < ActiveRecord::Migration[5.0]
      end
- 
+
      add_index :phones, :number_for_index
 -    add_foreign_key :phones, :customers
 +    add_foreign_key :phones, :programs
@@ -1303,7 +1357,7 @@ index 1e0ffe5..49f274b 100644
 +    add_column :programs, :birth_year, :integer, comment:'誕生年'
 +    add_column :programs, :birth_month, :integer, comment:'誕生月'
 +    add_column :programs, :birth_mday, :integer, comment:'誕生日'
- 
+
      add_index :customers, [ :birth_year, :birth_month, :birth_mday ]
      add_index :customers, [ :birth_month, :birth_mday ]
 diff --git a/db/migrate/20170214071032_create_entries.rb b/db/migrate/20170214071032_create_entries.rb
@@ -1311,7 +1365,7 @@ index 312fce7..d8c4042 100644
 --- a/db/migrate/20170214071032_create_entries.rb
 +++ b/db/migrate/20170214071032_create_entries.rb
 @@ -11,6 +11,6 @@ class CreateEntries < ActiveRecord::Migration[5.0]
- 
+
      add_index :entries, [ :program_id, :customer_id ], unique: true
      add_foreign_key :entries, :programs
 -    add_foreign_key :entries, :customers
@@ -1361,7 +1415,7 @@ index dd7a38b..00383a1 100644
 --- a/README.md
 +++ b/README.md
 @@ -663,6 +663,9 @@ git push heroku master
- 
+
  ### 多対多の関連付け
  #### 多対多の関連付け
 ++ プログラム管理機能の概要
@@ -1369,13 +1423,13 @@ index dd7a38b..00383a1 100644
 +
  #### プログラム管理機能（前編）
  #### パフォーマンス改善
- 
+
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
 index 1855b32..e38e3f3 100644
 --- a/app/controllers/admin/staff_members_controller.rb
 +++ b/app/controllers/admin/staff_members_controller.rb
 @@ -40,8 +40,12 @@ class Admin::StaffMembersController < Admin::Base
- 
+
    def destroy
      staff_member = StaffMember.find(params[:id])
 -    staff_member.destroy!
@@ -1388,7 +1442,7 @@ index 1855b32..e38e3f3 100644
 +    end
      redirect_to :admin_staff_members
    end
- 
+
 diff --git a/app/models/customer.rb b/app/models/customer.rb
 index 68bac7c..6e802b2 100644
 --- a/app/models/customer.rb
@@ -1399,7 +1453,7 @@ index 68bac7c..6e802b2 100644
    has_many :personal_phones, -> { where(address_id: nil).order(:id) },class_name: 'Phone', autosave: true
 +  has_many :entries, dependent: :destroy
 +  has_many :programs, through: :entries
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 diff --git a/app/models/entry.rb b/app/models/entry.rb
@@ -1469,10 +1523,10 @@ index a6f0230..51e7549 100644
 +++ b/app/models/staff_member.rb
 @@ -28,6 +28,7 @@ class StaffMember < ApplicationRecord
    include PasswordHolder
- 
+
    has_many :events, class_name: 'StaffEvent', dependent: :destroy
 +  has_many :programs, foreign_key: 'registrant_id', dependent: :restrict_with_exception
- 
+
    validates :start_date, presence: true, date: {
        after_or_equal_to: Date.new(2000, 1, 1),
 @@ -44,4 +45,8 @@ class StaffMember < ApplicationRecord
@@ -1550,16 +1604,16 @@ index e6570d9..ea83be8 100644
 @@ -10,7 +10,7 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170210034614) do
 +ActiveRecord::Schema.define(version: 20170214071032) do
- 
+
    create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
 @@ -84,6 +84,18 @@ ActiveRecord::Schema.define(version: 20170210034614) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 +  create_table "entries", force: :cascade, comment: "申し込み" do |t|
 +    t.integer  "program_id",                  null: false
 +    t.integer  "customer_id",                 null: false
@@ -1578,7 +1632,7 @@ index e6570d9..ea83be8 100644
 @@ -99,6 +111,20 @@ ActiveRecord::Schema.define(version: 20170210034614) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 +  create_table "programs", force: :cascade, comment: "プログラム" do |t|
 +    t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
 +    t.string   "title",                                    null: false, comment: "タイトル"
@@ -1598,7 +1652,7 @@ index e6570d9..ea83be8 100644
      t.string   "type",            null: false, comment: "イベントタイプ"
 @@ -126,7 +152,10 @@ ActiveRecord::Schema.define(version: 20170210034614) do
    end
- 
+
    add_foreign_key "addresses", "customers"
 +  add_foreign_key "entries", "customers"
 +  add_foreign_key "entries", "programs"
@@ -1644,7 +1698,7 @@ index 4b2cd20..3f0d536 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,7 +6,7 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 -table_names = %w(staff_members administrators staff_events customers allowed_sources)
@@ -1728,4 +1782,3 @@ index 0000000..5819c1c
 ' NewClass --> ExistingClass
 @enduml
 ```
-
