--- a/docs/journal/20170216.md
+++ b/docs/journal/20170216.md
@@ -2,18 +2,18 @@
 
 ## 概要
 
-2017-02-16の作業内容をまとめています。
+2017-02-16の作業内容をまとめています。このジャーナルでは、IPアドレス制限の設定変更、マイグレーションファイルの修正、プログラム管理機能の実装などを行いました。
 
-## コミット: c951126
+## コミット: c951126 - 本番環境でのIPアドレス制限を回避できるようにする
 
-### メッセージ
+### 概要
+本番環境において、特定のIPアドレスからのアクセスを許可するように設定を変更しました。これにより、本番環境でも指定されたIPアドレスからシステムにアクセスできるようになります。
 
-```
-本番環境でのIPアドレス制限を回避できるようにする
-```
+### 技術的詳細
+- `allowed_sources`テーブルに新しいIPアドレスのエントリを追加
+- 管理者と職員の両方のインターフェースに対して、特定のIPアドレス（118.4.67.44および118.4.67.*）からのアクセスを許可
 
 ### 変更されたファイル
-
 - M	db/seed/production/allowed_sources.rb
 
 ### 変更内容
@@ -37,19 +37,38 @@ index 541d445..a97f5de 100644
 +AllowedSource.create(namespace: 'admin', ip_address: '118.4.67.44')
 +AllowedSource.create(namespace: 'staff', ip_address: '118.4.67.*')
 \ No newline at end of file
-
 ```
 
-## コミット: c5c1282
+### 構造変更
 
-### メッセージ
+```plantuml
+@startuml
+title IPアドレス制限の構造
 
+class AllowedSource {
+  +namespace: string
+  +ip_address: string
+}
+
+note right of AllowedSource
+  新しいIPアドレスを追加:
+  - admin: 118.4.67.44
+  - staff: 118.4.67.*
+end note
+
+@enduml
 ```
-マイグレーションファイルの編集ミス修正
-```
+
+## コミット: c5c1282 - マイグレーションファイルの編集ミス修正
+
+### 概要
+マイグレーションファイル内の外部キー設定に関する誤りを修正しました。エントリーテーブルが顧客テーブルを参照するための外部キー制約が正しく設定されていなかった問題を解決しています。
+
+### 技術的詳細
+- `entries`テーブルの外部キー設定を修正
+- 誤って同じテーブル（programs）を2回参照していた設定を、正しく`programs`と`customers`を参照するように変更
 
 ### 変更されたファイル
-
 - M	db/migrate/20170214071032_create_entries.rb
 
 ### 変更内容
@@ -66,26 +85,66 @@ index d8c4042..312fce7 100644
 --- a/db/migrate/20170214071032_create_entries.rb
 +++ b/db/migrate/20170214071032_create_entries.rb
 @@ -11,6 +11,6 @@ class CreateEntries < ActiveRecord::Migration[5.0]
- 
-     add_index :entries, [ :program_id, :customer_id ], unique: true
-     add_foreign_key :entries, :programs
+
+    add_index :entries, [ :program_id, :customer_id ], unique: true
+    add_foreign_key :entries, :programs
 -    add_foreign_key :entries, :programs
 +    add_foreign_key :entries, :customers
    end
  end
-
 ```
 
-## コミット: 6cf0216
+### 構造変更
 
-### メッセージ
+```plantuml
+@startuml
+title エントリーテーブルの外部キー修正
 
+entity "entries" {
+  * id: integer
+  * program_id: integer <<FK>>
+  * customer_id: integer <<FK>>
+  * approved: boolean
+  * canceled: boolean
+}
+
+entity "programs" {
+  * id: integer
+  * title: string
+  * description: text
+  ...
+}
+
+entity "customers" {
+  * id: integer
+  * email: string
+  * family_name: string
+  * given_name: string
+  ...
+}
+
+entries }|--|| programs
+entries }|--|| customers : 修正後の参照関係
+
+note bottom of entries
+  修正前: entries -> programs (2回)
+  修正後: entries -> programs, customers
+end note
+
+@enduml
 ```
-Revert: データベース設計 #27
-```
+
+## コミット: 6cf0216 - データベース設計の修正
+
+### 概要
+データベース設計に関する誤りを修正しました。マイグレーションファイル内で顧客テーブルが誤って`programs`として作成されていた問題を解決し、関連する外部キー参照も修正しています。
+
+### 技術的詳細
+- 顧客テーブルの作成時のテーブル名を`programs`から`customers`に修正
+- 住所テーブルと電話番号テーブルの外部キー参照先を`programs`から`customers`に修正
+- 顧客テーブルの誕生日関連カラム追加先を`programs`から`customers`に修正
 
 ### 変更されたファイル
-
 - M	db/migrate/20170203051643_create_customers.rb
 - M	db/migrate/20170203051654_create_addresses.rb
 - M	db/migrate/20170206085929_create_phones.rb
@@ -118,7 +177,7 @@ index 5d824f1..e2da587 100644
 +++ b/db/migrate/20170203051654_create_addresses.rb
 @@ -15,6 +15,6 @@ class CreateAddresses < ActiveRecord::Migration[5.0]
      end
- 
+
      add_index :addresses, [:type, :customer_id], unique: true
 -    add_foreign_key :addresses, :programs
 +    add_foreign_key :addresses, :customers
@@ -130,7 +189,7 @@ index bb8c001..f9f0714 100644
 +++ b/db/migrate/20170206085929_create_phones.rb
 @@ -11,7 +11,7 @@ class CreatePhones < ActiveRecord::Migration[5.0]
      end
- 
+
      add_index :phones, :number_for_index
 -    add_foreign_key :phones, :programs
 +    add_foreign_key :phones, :customers
@@ -150,22 +209,100 @@ index 49f274b..1e0ffe5 100644
 +    add_column :customers, :birth_year, :integer, comment:'誕生年'
 +    add_column :customers, :birth_month, :integer, comment:'誕生月'
 +    add_column :customers, :birth_mday, :integer, comment:'誕生日'
- 
+
      add_index :customers, [ :birth_year, :birth_month, :birth_mday ]
      add_index :customers, [ :birth_month, :birth_mday ]
-
 ```
 
-## コミット: aaaa913
+### 構造変更
 
-### メッセージ
+```plantuml
+@startuml
+title データベース設計の修正
 
+' 修正前の誤った構造
+package "修正前（誤り）" {
+  entity "programs" as programs_wrong {
+    * id: integer
+    * email: string
+    * family_name: string
+    * given_name: string
+    * birth_year: integer
+    * birth_month: integer
+    * birth_mday: integer
+    ...
+  }
+
+  entity "addresses" as addresses_wrong {
+    * id: integer
+    * customer_id: integer <<FK>>
+    * postal_code: string
+    ...
+  }
+
+  entity "phones" as phones_wrong {
+    * id: integer
+    * customer_id: integer <<FK>>
+    * number: string
+    ...
+  }
+
+  addresses_wrong }|--|| programs_wrong
+  phones_wrong }|--|| programs_wrong
+}
+
+' 修正後の正しい構造
+package "修正後（正しい）" {
+  entity "customers" {
+    * id: integer
+    * email: string
+    * family_name: string
+    * given_name: string
+    * birth_year: integer
+    * birth_month: integer
+    * birth_mday: integer
+    ...
+  }
+
+  entity "addresses" {
+    * id: integer
+    * customer_id: integer <<FK>>
+    * postal_code: string
+    ...
+  }
+
+  entity "phones" {
+    * id: integer
+    * customer_id: integer <<FK>>
+    * number: string
+    ...
+  }
+
+  addresses }|--|| customers
+  phones }|--|| customers
+}
+
+note bottom of programs_wrong
+  誤り: 顧客データが"programs"テーブルに格納されていた
+end note
+
+note bottom of customers
+  修正: 顧客データを正しく"customers"テーブルに格納
+end note
+
+@enduml
 ```
-プログラム管理機能
-```
+
+## コミット: aaaa913 - プログラム管理機能の追加
+
+### 概要
+職員向けトップページのお知らせセクションに、プログラム管理機能が追加されたことを通知するエントリを追加しました。これにより、システムユーザーに新機能の追加を知らせることができます。
+
+### 技術的詳細
+- 職員向けトップページのお知らせリストに新しいエントリを追加
+- 新しいエントリには日付（2017-2-16）とメッセージ（プログラム管理機能を追加）を含む
 
 ### 変更されたファイル
-
 - M	app/views/staff/top/index.html.erb
 
 ### 変更内容
@@ -192,19 +329,48 @@ index 4adfc9f..877666a 100644
      <li class="NewsList__item">
        <time class="NewsList__head" datatime="2017-2-7">2017.2.7</time>
        <span class="NewsList__body">顧客検索機能を追加</span>
-
 ```
 
-## コミット: 0a6fbdf
+### 構造変更
 
-### メッセージ
+```plantuml
+@startuml
+title 職員トップページのお知らせ更新
 
+actor "職員" as Staff
+boundary "トップページ" as TopPage
+
+Staff -> TopPage: アクセス
+
+note right of TopPage
+  お知らせセクションに新しいエントリを追加:
+  - 日付: 2017.2.16
+  - 内容: プログラム管理機能を追加
+end note
+
+package "お知らせリスト" {
+  card "2017.2.16: プログラム管理機能を追加" #LightGreen
+  card "2017.2.7: 顧客検索機能を追加"
+  card "その他の過去のお知らせ..."
+}
+
+TopPage --> "お知らせリスト"
+
+@enduml
 ```
-演習問題 #26
-```
+
+## コミット: 0a6fbdf - プログラム削除機能の安全性向上
+
+### 概要
+プログラム削除機能に安全性チェックを追加しました。エントリー（申し込み）が存在するプログラムは削除できないようにし、関連データの整合性を保護する機能を実装しています。
+
+### 技術的詳細
+- プログラムモデルに`deletable?`メソッドを追加して、エントリーが空の場合のみ削除可能とする
+- プログラムとエントリーの関連付けを`dependent: :destroy`から`dependent: :restrict_with_exception`に変更し、関連エントリーがある場合は例外を発生させる
+- コントローラの`destroy`アクションを修正し、削除可能な場合のみ削除を実行
+- 削除できない場合のエラーメッセージを追加
 
 ### 変更されたファイル
-
 - M	app/controllers/staff/programs_controller.rb
 - M	app/models/program.rb
 - M	config/locales/controllers/ja.yml
@@ -223,7 +389,7 @@ index 715a9c2..072161a 100644
 --- a/app/controllers/staff/programs_controller.rb
 +++ b/app/controllers/staff/programs_controller.rb
 @@ -42,8 +42,11 @@ class Staff::ProgramsController < Staff::Base
- 
+
    def destroy
      program = Program.find(params[:id])
 -    program.destroy!
@@ -235,24 +401,24 @@ index 715a9c2..072161a 100644
 +    flash.alert = t('.flash_alert')
      redirect_to :staff_programs
    end
- 
+
 diff --git a/app/models/program.rb b/app/models/program.rb
 index 5c11919..905887b 100644
 --- a/app/models/program.rb
 +++ b/app/models/program.rb
 @@ -20,7 +20,7 @@
  #
- 
+
  class Program < ApplicationRecord
 -  has_many :entries, dependent: :destroy
 +  has_many :entries, dependent: :restrict_with_exception
    has_many :applicants, through: :entries, source: :customer
    belongs_to :registrant, class_name: 'StaffMember'
- 
+
 @@ -70,6 +70,10 @@ class Program < ApplicationRecord
          .includes(:registrant)
    }
- 
+
 +  def deletable?
 +    entries.empty?
 +  end
@@ -272,31 +438,78 @@ index e78bbd8..f6b50e3 100644
        entries:
          flash_notice: 'プログラム申し込みのフラグを更新しました。'
    admin:
-
 ```
 
 ### 構造変更
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title プログラム削除機能の安全性向上
+
+class Program {
+  +id: integer
+  +title: string
+  +description: text
+  ...
+  +deletable(): boolean
+}
+
+class Entry {
+  +id: integer
+  +program_id: integer <<FK>>
+  +customer_id: integer <<FK>>
+  +approved: boolean
+  +canceled: boolean
+}
+
+class Customer {
+  +id: integer
+  +name: string
+  ...
+}
+
+Program "1" o-- "0..*" Entry : has_many >
+Entry "*" --o "1" Customer : belongs_to >
+
+note right of Program::deletable
+  新規追加メソッド
+  エントリーが空の場合のみtrueを返す
+end note
+
+note bottom of Program
+  変更前: has_many :entries, dependent: :destroy
+  変更後: has_many :entries, dependent: :restrict_with_exception
+end note
+
+actor "職員" as Staff
+boundary "ProgramsController" as Controller
+
+Staff -> Controller : DELETE /staff/programs/:id
+Controller -> Program : find(id)
+Controller -> Program : deletable?
+alt エントリーが存在しない場合
+  Program --> Controller : true
+  Controller -> Program : destroy!
+  Controller -> Staff : リダイレクト（成功メッセージ）
+else エントリーが存在する場合
+  Program --> Controller : false
+  Controller -> Staff : リダイレクト（エラーメッセージ）
+end
+
 @enduml
 ```
 
-## コミット: ca63ff0
+## コミット: ca63ff0 - プログラム参加者数の検証強化
 
-### メッセージ
+### 概要
+プログラムモデルに最大参加者数の検証ルールを追加しました。これにより、プログラム作成・更新時に最大参加者数が適切な範囲内にあることを確認できるようになります。
 
-```
-演習問題 #26
-```
+### 技術的詳細
+- `max_number_of_participants`（最大参加者数）フィールドに数値検証を追加
+- 整数のみを許可し、1から1000の範囲内であることを検証
+- 空白値は許容する設定
 
 ### 変更されたファイル
-
 - M	app/models/program.rb
 
 ### 変更内容
@@ -323,31 +536,70 @@ index dc9c294..5c11919 100644
    validate do
      if min_number_of_participants && max_number_of_participants && min_number_of_participants > max_number_of_participants
        errors.add(:max_number_of_participants, :less_than_min_number)
-
 ```
 
 ### 構造変更
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title プログラム参加者数の検証強化
+
+class Program {
+  +id: integer
+  +title: string
+  +description: text
+  +min_number_of_participants: integer
+  +max_number_of_participants: integer
+  ...
+}
+
+note right of Program
+  追加された検証ルール:
+  validates :max_number_of_participants, numericality: {
+    only_integer: true,
+    greater_than_or_equal_to: 1,
+    less_than_or_equal_to: 1000,
+    allow_blank: true
+  }
+end note
+
+class "ActiveModel::Validations" as Validations
+
+Program --|> Validations : 検証ルールを使用
+
+actor "職員" as Staff
+boundary "ProgramForm" as Form
+control "ProgramsController" as Controller
+entity "Program" as ProgramEntity
+
+Staff -> Form : プログラム情報入力
+Form -> Controller : 送信
+Controller -> ProgramEntity : 保存
+ProgramEntity -> ProgramEntity : 検証実行
+alt 検証成功
+  ProgramEntity --> Controller : 保存成功
+  Controller --> Staff : 成功メッセージ
+else 検証失敗
+  ProgramEntity --> Controller : 検証エラー
+  Controller --> Staff : エラーメッセージ表示
+end
+
 @enduml
 ```
 
-## コミット: f0442a3
+## コミット: f0442a3 - 多数のオブジェクトの一括更新処理
 
-### メッセージ
+### 概要
+プログラム申し込み（エントリー）の一括更新機能を実装しました。これにより、職員は複数のエントリーの承認状態やキャンセル状態を一度に更新できるようになります。
 
-```
-多数のオブジェクトの一括更新処理 #26
-```
+### 技術的詳細
+- `EntriesForm`クラスに`assign_attributes`と`save`メソッドを追加
+- 承認・非承認・キャンセル・非キャンセルの各状態を一括で更新する機能を実装
+- トランザクションを使用して、すべての更新を原子的に処理
+- `ProgramsController`に`entries`アクションを追加して、一括更新処理を実行
+- 更新成功時のフラッシュメッセージを追加
 
 ### 変更されたファイル
-
 - M	README.md
 - M	app/controllers/staff/programs_controller.rb
 - M	app/forms/staff/entries_form.rb
@@ -371,7 +623,7 @@ index 3820bf1..d178a44 100644
  + 多数のオブジェクトを一括編集するフォーム
  + 隠しフィールドとCoffeeScript  
 ++ 多数のオブジェクトの一括更新処理
- 
+
  ### トランザクションと排他的ロック
  #### プログラム一覧表示・詳細表示機能（顧客向け)
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
@@ -436,31 +688,84 @@ index 8b067bf..e78bbd8 100644
    admin:
      base:
        authrize:
-
 ```
 
 ### 構造変更
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title 多数のオブジェクトの一括更新処理
+
+class "Staff::EntriesForm" as EntriesForm {
+  -program: Program
+  -approved: String
+  -not_approved: String
+  -canceled: String
+  -not_canceled: String
+  +initialize(program)
+  +assign_attributes(params)
+  +save()
+}
+
+class "Staff::ProgramsController" as ProgramsController {
+  +entries()
+}
+
+class Program {
+  +id: integer
+  +title: string
+  ...
+}
+
+class Entry {
+  +id: integer
+  +program_id: integer <<FK>>
+  +customer_id: integer <<FK>>
+  +approved: boolean
+  +canceled: boolean
+}
+
+Program "1" o-- "0..*" Entry : has_many >
+ProgramsController ..> EntriesForm : 使用
+EntriesForm --> Program : 参照
+EntriesForm --> Entry : 更新
+
+note right of EntriesForm::save
+  トランザクションを使用して
+  複数のエントリーを一括更新
+end note
+
+actor "職員" as Staff
+boundary "エントリーフォーム" as Form
+control "ProgramsController" as Controller
+entity "EntriesForm" as FormEntity
+entity "Entry" as EntryEntity
+
+Staff -> Form : エントリー状態を変更
+Form -> Controller : PATCH /staff/programs/:id/entries
+Controller -> FormEntity : new(program)
+Controller -> FormEntity : assign_attributes(params)
+Controller -> FormEntity : save()
+FormEntity -> EntryEntity : update_all(approved: true/false)
+FormEntity -> EntryEntity : update_all(canceled: true/false)
+Controller -> Staff : リダイレクト（成功メッセージ）
+
 @enduml
 ```
 
-## コミット: 5ebcb9e
+## コミット: 5ebcb9e - 隠しフィールドとCoffeeScriptによるフォーム処理
 
-### メッセージ
+### 概要
+プログラム申し込み（エントリー）フォームにJavaScriptを使った機能を追加しました。CoffeeScriptを使用して、チェックボックスの状態を隠しフィールドに集約し、一括更新処理を実行する機能を実装しています。
 
-```
-隠しフィールドとCoffeeScript #26
-```
+### 技術的詳細
+- CoffeeScriptで`EntriesForm`クラスを作成し、チェックボックスの状態を監視
+- チェックボックスに`data-entry-id`属性とCSSクラスを追加して識別可能に
+- 隠しフィールドを使用して、チェックボックスの状態をサーバーに送信
+- 更新ボタンを追加し、クリック時にフォームを送信する処理を実装
+- ルーティングを更新して、エントリー更新用のパスを追加
 
 ### 変更されたファイル
-
 - M	README.md
 - A	app/assets/javascripts/staff/entries_form.coffee
 - A	app/forms/staff/entries_form.rb
@@ -482,11 +787,11 @@ index 6b5b55c..3820bf1 100644
 --- a/README.md
 +++ b/README.md
 @@ -689,6 +689,7 @@ git push heroku master
- 
+
  #### プログラム申し込み機能
  + 多数のオブジェクトを一括編集するフォーム
 ++ 隠しフィールドとCoffeeScript  
- 
+
  ### トランザクションと排他的ロック
  #### プログラム一覧表示・詳細表示機能（顧客向け)
 diff --git a/app/assets/javascripts/staff/entries_form.coffee b/app/assets/javascripts/staff/entries_form.coffee
@@ -601,7 +906,7 @@ index 00314d3..175ce07 100644
          a: 'A'
          c: 'C'
 +        update: '申し込みフラグを更新する'
- 
+
    admin:
      shared:
 diff --git a/config/routes.rb b/config/routes.rb
@@ -626,20 +931,70 @@ index 1fe6a8a..8a753ed 100644
 +      end
      end
    end
- 
-
 ```
 
-## コミット: 1d20b95
+### 構造変更
 
-### メッセージ
+```plantuml
+@startuml
+title 隠しフィールドとCoffeeScriptによるフォーム処理
 
+class "EntriesForm" as CoffeeForm {
+  +constructor()
+  -handleEntriesButton()
+}
+
+class "Staff::EntriesForm" as RubyForm {
+  +program
+  +approved
+  +not_approved
+  +canceled
+  +not_canceled
+  +initialize(program)
+}
+
+note right of CoffeeForm
+  CoffeeScriptで実装されたクラス
+  チェックボックスの状態を監視し
+  隠しフィールドに値を設定
+end note
+
+note right of RubyForm
+  Rubyで実装されたフォームオブジェクト
+  フォームの状態を保持
+end note
+
+actor "職員" as Staff
+boundary "エントリーフォーム" as Form
+control "CoffeeScript" as Coffee
+entity "隠しフィールド" as HiddenFields
+control "ProgramsController" as Controller
+
+Staff -> Form : チェックボックスを操作
+Staff -> Form : 更新ボタンをクリック
+Form -> Coffee : イベント発火
+Coffee -> Form : チェックボックスの状態を取得
+Coffee -> HiddenFields : IDをコロン区切りで設定
+  note right: approved=1:3:5\nnot_approved=2:4:6\ncanceled=2:5\nnot_canceled=1:3:4:6
+Coffee -> Form : フォーム送信
+Form -> Controller : PATCH /staff/programs/:id/entries
+
+@enduml
 ```
-多数のオブジェクトを一括編集するフォーム #26
-```
+
+## コミット: 1d20b95 - 多数のオブジェクトを一括編集するフォーム
+
+### 概要
+プログラム申し込み（エントリー）の一括編集用フォームを実装しました。これにより、職員はプログラムの詳細ページで複数のエントリーの承認状態やキャンセル状態を一度に確認・編集できるようになります。
+
+### 技術的詳細
+- エントリーフォーム用のスタイルシート（`_appEntryForm.scss`）を作成
+- プログラム詳細ページにエントリーフォームを表示する部分テンプレートを追加
+- エントリーが存在する場合のみフォームを表示するよう条件分岐を追加
+- 表形式でエントリー情報を表示し、チェックボックスで承認・キャンセル状態を編集可能に
+- 多言語対応のための翻訳キーを追加
 
 ### 変更されたファイル
-
 - M	README.md
 - A	app/assets/stylesheets/components/_appEntryForm.scss
 - M	app/assets/stylesheets/main.scss
@@ -662,10 +1017,10 @@ index 9226786..6b5b55c 100644
 +++ b/README.md
 @@ -688,6 +688,7 @@ git push heroku master
  + プログラムの削除
- 
+
  #### プログラム申し込み機能
 ++ 多数のオブジェクトを一括編集するフォーム
- 
+
  ### トランザクションと排他的ロック
  #### プログラム一覧表示・詳細表示機能（顧客向け)
 diff --git a/app/assets/stylesheets/components/_appEntryForm.scss b/app/assets/stylesheets/components/_appEntryForm.scss
@@ -715,7 +1070,7 @@ index 82d9d5f..2b95725 100644
  @import "./components/adminAppForm";
  @import "./components/staffAppForm";
 +@import "./components/appEntryForm";
- 
+
  // テーブル
  @import "./components/adminTable";
 diff --git a/app/views/staff/programs/_entries_form.html.erb b/app/views/staff/programs/_entries_form.html.erb
@@ -769,7 +1124,7 @@ index 8d7ee85..ef453c3 100644
 +++ b/app/views/staff/programs/show.html.erb
 @@ -16,4 +16,6 @@
    </table>
- 
+
    <div class="Table__body--description"><%= @program.description %></div>
 +
 +  <%= render 'entries_form' if @program.number_of_applicants > 0 %>
@@ -787,22 +1142,87 @@ index 280d466..00314d3 100644
 +        name: '氏名'
 +        a: 'A'
 +        c: 'C'
- 
+
    admin:
      shared:
-
 ```
 
-## コミット: 6daf247
+### 構造変更
 
-### メッセージ
+```plantuml
+@startuml
+title 多数のオブジェクトを一括編集するフォーム
 
+class Program {
+  +id: integer
+  +title: string
+  ...
+  +number_of_applicants: integer
+}
+
+class Entry {
+  +id: integer
+  +program_id: integer <<FK>>
+  +customer_id: integer <<FK>>
+  +approved: boolean
+  +canceled: boolean
+}
+
+class Customer {
+  +id: integer
+  +family_name: string
+  +given_name: string
+  ...
+}
+
+Program "1" o-- "0..*" Entry : has_many >
+Entry "*" --o "1" Customer : belongs_to >
+
+note right of Program::number_of_applicants
+  エントリー数を取得するための
+  カウンターキャッシュ属性
+end note
+
+actor "職員" as Staff
+boundary "プログラム詳細ページ" as ProgramShow
+boundary "エントリーフォーム" as EntryForm
+entity "Entry" as EntryEntity
+
+Staff -> ProgramShow : アクセス
+ProgramShow -> Program : number_of_applicants > 0?
+
+alt エントリーが存在する場合
+  Program --> ProgramShow : true
+  ProgramShow -> EntryForm : レンダリング
+  EntryForm -> EntryEntity : entries.includes(:customer)
+  EntryEntity --> EntryForm : エントリー情報
+  EntryForm --> Staff : 表形式でエントリー一覧を表示
+else エントリーが存在しない場合
+  Program --> ProgramShow : false
+  ProgramShow --> Staff : エントリーフォームを表示しない
+end
+
+note right of EntryForm
+  - 4列のグリッドレイアウト
+  - 顧客名の表示
+  - 承認状態のチェックボックス
+  - キャンセル状態のチェックボックス
+end note
+
+@enduml
 ```
-プログラムの削除 #26
-```
+
+## コミット: 6daf247 - プログラム削除機能の実装
+
+### 概要
+プログラムを削除する機能を実装しました。これにより、職員はプログラムを削除できるようになります。
+
+### 技術的詳細
+- `ProgramsController`に`destroy`アクションを追加
+- 削除処理後に成功メッセージを表示し、プログラム一覧ページにリダイレクト
+- 削除成功時のフラッシュメッセージを多言語対応ファイルに追加
 
 ### 変更されたファイル
-
 - M	README.md
 - M	app/controllers/staff/programs_controller.rb
 - M	config/locales/controllers/ja.yml
@@ -825,9 +1245,9 @@ index fe2195a..9226786 100644
  + プログラムの新規登録と更新
  + バリデーション
 ++ プログラムの削除
- 
+
  #### プログラム申し込み機能
- 
+
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
 index fb819a3..7f487e3 100644
 --- a/app/controllers/staff/programs_controller.rb
@@ -857,31 +1277,69 @@ index 2c5878e..8b067bf 100644
    admin:
      base:
        authrize:
-
 ```
 
 ### 構造変更
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title プログラム削除機能の実装
+
+class "Staff::ProgramsController" as ProgramsController {
+  +index()
+  +show()
+  +new()
+  +edit()
+  +create()
+  +update()
+  +destroy() <<新規追加>>
+}
+
+class Program {
+  +id: integer
+  +title: string
+  ...
+}
+
+ProgramsController ..> Program : 操作
+
+actor "職員" as Staff
+boundary "プログラム一覧/詳細画面" as ProgramView
+control "ProgramsController" as Controller
+entity "Program" as ProgramEntity
+
+Staff -> ProgramView : 削除ボタンをクリック
+ProgramView -> Controller : DELETE /staff/programs/:id
+Controller -> ProgramEntity : find(id)
+Controller -> ProgramEntity : destroy!
+Controller -> Staff : リダイレクト（成功メッセージ）
+
+note right of Controller::destroy
+  新規追加されたアクション
+  プログラムを削除し、
+  成功メッセージを表示
+end note
+
 @enduml
 ```
 
-## コミット: 59015b1
+## コミット: 59015b1 - プログラムモデルのバリデーション強化
 
-### メッセージ
+### 概要
+プログラムモデルに詳細なバリデーションルールを追加し、フォーム表示時のエラー表示機能を強化しました。これにより、プログラム作成・更新時のデータ検証が厳密になり、ユーザーにわかりやすくエラーを表示できるようになります。
 
-```
-バリデーション #26
-```
+### 技術的詳細
+- プログラムモデルに各種バリデーションルールを追加
+  - タイトルと説明文の必須チェックと長さ制限
+  - 日付文字列の妥当性検証用のカスタムバリデータを作成
+  - 申し込み開始・終了日時の範囲チェック
+  - 参加者数の数値範囲チェック
+- フォーム表示時のエラー表示機能を強化
+  - エラー時のスタイル（赤色のラベルとピンク色の背景）を追加
+  - エラーメッセージの表示機能を追加
+- 多言語対応のためのメッセージを追加
 
 ### 変更されたファイル
-
 - M	.idea/.generators
 - M	README.md
 - M	app/assets/stylesheets/components/_appForm.scss
@@ -918,9 +1376,9 @@ index 7e53182..fe2195a 100644
  + プログラムの新規登録・編集フォーム
  + プログラムの新規登録と更新
 ++ バリデーション
- 
+
  #### プログラム申し込み機能
- 
+
 diff --git a/app/assets/stylesheets/components/_appForm.scss b/app/assets/stylesheets/components/_appForm.scss
 index 591163e..420d4b5 100644
 --- a/app/assets/stylesheets/components/_appForm.scss
@@ -956,7 +1414,7 @@ index bd1ed70..dc9c294 100644
 @@ -34,6 +34,30 @@ class Program < ApplicationRecord
    before_validation :set_application_start_time
    before_validation :set_application_end_time
- 
+
 +  validates :title, presence: true, length: { maximum: 32 }
 +  validates :description, presence: true, length: { maximum: 800 }
 +  validates :application_start_date, :application_end_date, date_string: true
@@ -995,7 +1453,7 @@ index 491dd3e..1dd3ea4 100644
 +      m << error_message_for(:description)
      end
    end
- 
+
    def datetime_field_block(name, label_text, options = {})
      instruction = options.delete(:instruction)
 -    markup(:div, class: 'AppForm__input-block') do |m|
@@ -1027,13 +1485,13 @@ index b52d1db..95f4c93 100644
        customer: 顧客
        address: 住所
 +      program: プログラム
- 
+
      attributes:
        administrator:
 @@ -87,6 +88,19 @@ ja:
          primary: 優先
          last_four_digits: 電話番号下４桁
- 
+
 +      program:
 +        title: タイトル
 +        description: 詳細
@@ -1073,34 +1531,99 @@ index b52d1db..95f4c93 100644
 +              after: には申し込み開始日時よりも後の日時を指定してください。
 +            max_number_of_participants:
 +              less_than_min_number: には最小参加者以上の数を指定してください。
- 
+
    activemodel:
      models:
-
 ```
 
 ### 構造変更
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title プログラムモデルのバリデーション強化
+
+class Program {
+  +id: integer
+  +title: string
+  +description: text
+  +application_start_time: datetime
+  +application_end_time: datetime
+  +min_number_of_participants: integer
+  +max_number_of_participants: integer
+  ...
+}
+
+class DateStringValidator {
+  +validate_each(record, attribute, value)
+}
+
+class "Staff::ProgramFormPresenter" as ProgramFormPresenter {
+  +text_field_block()
+  +datetime_field_block()
+  +error_message_for()
+}
+
+Program ..> DateStringValidator : 使用
+ProgramFormPresenter ..> Program : 表示
+
+note right of Program
+  追加されたバリデーション:
+  - タイトル: 必須、32文字以内
+  - 説明: 必須、800文字以内
+  - 日付: 有効な日付形式
+  - 開始日時: 2000年以降、1年以内
+  - 終了日時: 開始日時より後、90日以内
+  - 参加者数: 1〜1000の整数
+end note
+
+note right of DateStringValidator
+  カスタムバリデータ:
+  文字列が有効な日付形式かを検証
+end note
+
+note right of ProgramFormPresenter
+  エラー表示機能の強化:
+  - エラー時のスタイル適用
+  - エラーメッセージの表示
+end note
+
+actor "職員" as Staff
+boundary "プログラムフォーム" as Form
+control "ProgramsController" as Controller
+entity "Program" as ProgramEntity
+entity "DateStringValidator" as Validator
+
+Staff -> Form : プログラム情報入力
+Form -> Controller : 送信
+Controller -> ProgramEntity : 保存
+ProgramEntity -> ProgramEntity : バリデーション実行
+ProgramEntity -> Validator : 日付文字列の検証
+alt バリデーション成功
+  ProgramEntity --> Controller : 保存成功
+  Controller --> Staff : 成功メッセージ
+else バリデーション失敗
+  ProgramEntity --> Controller : 検証エラー
+  Controller -> Form : エラー情報を渡す
+  Form --> Staff : エラー表示（赤色ラベル、ピンク背景）
+end
+
 @enduml
 ```
 
-## コミット: 2831d4b
+## コミット: 2831d4b - プログラムの新規登録と更新機能
 
-### メッセージ
+### 概要
+プログラムの新規登録と更新機能を実装しました。これにより、職員はプログラムを作成・編集できるようになります。
 
-```
-プログラムの新規登録と更新 #26
-```
+### 技術的詳細
+- `ProgramsController`に`create`と`update`アクションを追加
+- `ProgramForm`クラスに`assign_attributes`メソッドを追加してフォームデータの割り当て処理を実装
+- プログラムモデルに日時変換用のコールバックメソッドを追加
+  - `set_application_start_time`: 申し込み開始日時を設定
+  - `set_application_end_time`: 申し込み終了日時を設定
+- 成功・失敗時のフラッシュメッセージを多言語対応ファイルに追加
 
 ### 変更されたファイル
-
 - M	README.md
 - M	app/controllers/staff/programs_controller.rb
 - M	app/forms/staff/program_form.rb
@@ -1125,9 +1648,9 @@ index 5100173..7e53182 100644
  + プログラムの新規登録・更新フォームの仕様
  + プログラムの新規登録・編集フォーム
 ++ プログラムの新規登録と更新
- 
+
  #### プログラム申し込み機能
- 
+
 diff --git a/app/controllers/staff/programs_controller.rb b/app/controllers/staff/programs_controller.rb
 index 980bf48..fb819a3 100644
 --- a/app/controllers/staff/programs_controller.rb
@@ -1200,7 +1723,7 @@ index 46c9dd1..bd1ed70 100644
 @@ -31,6 +31,9 @@ class Program < ApplicationRecord
                  :application_end_hour,
                  :application_end_minute
- 
+
 +  before_validation :set_application_start_time
 +  before_validation :set_application_end_time
 +
@@ -1257,18 +1780,81 @@ index 54638d6..2c5878e 100644
    admin:
      base:
        authrize:
-
 ```
 
 ### 構造変更
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title プログラムの新規登録と更新機能
+
+class "Staff::ProgramsController" as ProgramsController {
+  +index()
+  +show()
+  +new()
+  +edit()
+  +create() <<新規追加>>
+  +update() <<新規追加>>
+}
+
+class "Staff::ProgramForm" as ProgramForm {
+  +program
+  +initialize(program = nil)
+  +assign_attributes(params) <<新規追加>>
+  -program_params() <<新規追加>>
+}
+
+class Program {
+  +id: integer
+  +title: string
+  +description: text
+  +application_start_time: datetime
+  +application_end_time: datetime
+  ...
+  -set_application_start_time() <<新規追加>>
+  -set_application_end_time() <<新規追加>>
+}
+
+ProgramsController ..> ProgramForm : 使用
+ProgramForm ..> Program : 操作
+
+note right of ProgramsController
+  新規追加されたアクション:
+  - create: 新規プログラム作成
+  - update: 既存プログラム更新
+end note
+
+note right of ProgramForm::assign_attributes
+  フォームデータをプログラムに割り当て
+  Strong Parametersによる安全な代入
+end note
+
+note right of Program::set_application_start_time
+  日付と時刻の文字列から
+  DateTimeオブジェクトを生成
+end note
+
+actor "職員" as Staff
+boundary "プログラムフォーム" as Form
+control "ProgramsController" as Controller
+entity "ProgramForm" as FormEntity
+entity "Program" as ProgramEntity
+
+Staff -> Form : プログラム情報入力
+Form -> Controller : POST/PATCH
+Controller -> FormEntity : new
+Controller -> FormEntity : assign_attributes(params)
+FormEntity -> ProgramEntity : assign_attributes(program_params)
+ProgramEntity -> ProgramEntity : set_application_start_time
+ProgramEntity -> ProgramEntity : set_application_end_time
+Controller -> FormEntity : save
+alt 保存成功
+  FormEntity --> Controller : true
+  Controller -> Staff : リダイレクト（成功メッセージ）
+else 保存失敗
+  FormEntity --> Controller : false
+  Controller -> Staff : フォーム再表示（エラーメッセージ）
+end
+
 @enduml
 ```
-
