--- a/docs/journal/20170220.md
+++ b/docs/journal/20170220.md
@@ -2,19 +2,24 @@
 
 ## 概要
 
-2017-02-20の作業内容をまとめています。
+2017-02-20の作業内容をまとめています。このジャーナルでは、JenkinsのBuildPipelineに対応するための設定ファイルの追加を行いました。
 
-## コミット: 5bf3ad4
+## コミット: 5bf3ad4 - Jenkins BuildPipeline対応
 
-### メッセージ
+### 概要
+継続的インテグレーション（CI）環境を整備するため、Jenkinsのビルドパイプラインを設定しました。これにより、コードの変更が自動的にテストされ、品質を維持することができます。
 
-```
-Jenkins BuildPipeline対応
-```
+### 技術的詳細
+- Jenkinsfileを新規作成し、ビルドパイプラインの設定を定義
+- パイプラインは以下のステージで構成:
+  1. Checkout: GitHubからコードを取得
+  2. Prepare: Ruby環境のセットアップ（rbenv使用、Ruby 2.4.0）
+  3. Prepare test: 依存関係のインストールとテストDBの準備
+  4. Unit test: コントローラー、モデル、ルーティング、サービスのユニットテスト実行
+  5. Integration test: 統合テスト（機能テスト）の実行
 
 ### 変更されたファイル
-
-- A	Jenkinsfile
+- A	Jenkinsfile (新規追加)
 
 ### 変更内容
 
@@ -55,6 +60,54 @@ index 0000000..098e206
 +  stage "Integration test"
 +  sh "bundle exec rspec spec/features/*_spec.rb"
 +}
-
 ```
 
+### CI/CDパイプラインの構造
+
+```plantuml
+@startuml
+title Jenkins BuildPipeline構造
+
+skinparam backgroundColor white
+skinparam handwritten false
+
+rectangle "GitHub" as github {
+  [baukis-kai repository] as repo
+}
+
+rectangle "Jenkins" as jenkins {
+  rectangle "Pipeline" as pipeline {
+    rectangle "Checkout" as checkout
+    rectangle "Prepare" as prepare
+    rectangle "Prepare test" as prepare_test
+    rectangle "Unit test" as unit_test
+    rectangle "Integration test" as integration_test
+  }
+}
+
+repo --> checkout : git clone
+checkout --> prepare : Ruby環境設定
+prepare --> prepare_test : bundle install & DB準備
+prepare_test --> unit_test : コントローラー・モデル・\nルーティング・サービステスト
+unit_test --> integration_test : 機能テスト
+
+note right of prepare
+  Ruby 2.4.0を使用
+  rbenvで環境管理
+end note
+
+note right of unit_test
+  RSpecでテスト実行:
+  - コントローラーテスト
+  - モデルテスト
+  - ルーティングテスト
+  - サービステスト
+end note
+
+note right of integration_test
+  RSpec + Capybaraで
+  エンドツーエンドテスト実行
+end note
+
+@enduml
+```
