--- a/docs/journal/20170317.md
+++ b/docs/journal/20170317.md
@@ -2,18 +2,19 @@
 
 ## 概要
 
-2017-03-17の作業内容をまとめています。
+2017-03-17の作業内容をまとめています。このジャーナルでは、フォームの確認画面機能の実装と、職員アカウント編集機能のテスト追加を行いました。これらの変更はユーザー体験の向上とコード品質の確保を目的としています。
 
-## コミット: 22c4d8e
+## コミット: 22c4d8e - フォームの確認画面 #24
 
-### メッセージ
+### 概要
+ユーザーインターフェースを改善するため、フォームの確認画面機能を実装しました。これにより、ユーザーは入力内容を確認してから送信できるようになり、入力ミスを減らすことができます。
 
-```
-フォームの確認画面  #24
-```
+### 技術的詳細
+- 顧客向けダッシュボードに「顧客自身によるアカウント管理機能追加」のお知らせを追加
+- 職員向けトップページに「アカウント情報編集機能を改善」のお知らせを追加
+- BEM記法に従ったHTMLマークアップを使用（NewsList__item, NewsList__head, NewsList__bodyなど）
 
 ### 変更されたファイル
-
 - M	app/views/customer/top/dashboard.html.erb
 - M	app/views/staff/top/index.html.erb
 
@@ -56,21 +57,55 @@ index 877666a..c0973b1 100644
      <li class="NewsList__item">
        <time class="NewsList__head" datatime="2017-2-16">2017.2.16</time>
        <span class="NewsList__body">プログラム管理機能を追加</span>
-
 ```
 
-## コミット: f61e351
+### お知らせ表示の構造
 
-### メッセージ
+```plantuml
+@startuml
+title お知らせ表示コンポーネント構造
 
+skinparam backgroundColor white
+skinparam handwritten false
+
+rectangle "NewsList (お知らせリスト)" as newsList {
+  rectangle "NewsList__item (お知らせ項目)" as item1 {
+    rectangle "NewsList__head (日付)" as head1
+    rectangle "NewsList__body (内容)" as body1
+  }
+
+  rectangle "NewsList__item (お知らせ項目)" as item2 {
+    rectangle "NewsList__head (日付)" as head2
+    rectangle "NewsList__body (内容)" as body2
+  }
+}
+
+note bottom of newsList
+  BEM記法に基づいたコンポーネント設計
+  - Block: NewsList
+  - Element: __item, __head, __body
+end note
+
+@enduml
 ```
-職員が自分のアカウントを編集する機能に関するCapybaraによるテストを作成 #24
-```
+
+## コミット: f61e351 - 職員アカウント編集機能のCapybaraテスト追加 #24
+
+### 概要
+職員が自分のアカウントを編集する機能について、Capybaraを使用した統合テストを追加しました。これにより、ユーザーの視点からの機能の動作を確認し、リグレッションを防止することができます。
+
+### 技術的詳細
+- READMEに新しいテスト項目を追加
+- Capybaraを使用した統合テストファイルを新規作成
+- テストでは以下のシナリオをカバー:
+  - アカウント情報の表示
+  - アカウント情報の編集
+  - 確認画面の表示と確認
+  - 情報の更新処理
 
 ### 変更されたファイル
-
 - M	README.md
-- A	spec/features/staff/account_management_spec.rb
+- A	spec/features/staff/account_management_spec.rb (新規作成)
 
 ### 変更内容
 
@@ -90,7 +125,7 @@ index 33304ad..3e956b6 100644
  + 職員が自分のアカウントを編集する機能に確認画面用を追加
  + 機能追加により失敗するテストの修正
 ++ 職員が自分のアカウントを編集する機能に関するCapybaraによるテストを作成
- 
+
  ### Ajax
  #### 顧客向け問い合わせフォーム
 diff --git a/spec/features/staff/account_management_spec.rb b/spec/features/staff/account_management_spec.rb
@@ -98,6 +133,55 @@ new file mode 100644
 index 0000000..fef8918
 --- /dev/null
 +++ b/spec/features/staff/account_management_spec.rb
+```
+
+### Capybaraテストのフロー
+
+```plantuml
+@startuml
+title 職員アカウント編集機能のテストフロー
+
+skinparam backgroundColor white
+skinparam handwritten false
+
+start
+:テスト用スタッフアカウント作成;
+:ログイン処理;
+:アカウント詳細ページにアクセス;
+
+if (アカウント情報が正しく表示されるか?) then (yes)
+  :アカウント編集ページにアクセス;
+  :フォームに新しい情報を入力;
+  :確認ボタンをクリック;
+
+  if (確認画面が表示されるか?) then (yes)
+    :更新ボタンをクリック;
+
+    if (情報が更新されるか?) then (yes)
+      :テスト成功;
+    else (no)
+      :テスト失敗;
+    endif
+
+  else (no)
+    :テスト失敗;
+  endif
+
+else (no)
+  :テスト失敗;
+endif
+
+stop
+
+note right
+  Capybaraを使用した統合テスト:
+  - ユーザーの操作を模倣
+  - 実際のブラウザ動作を確認
+  - 画面遷移や表示内容を検証
+end note
+
+@enduml
+```
 @@ -0,0 +1,34 @@
 +require 'rails_helper'
 +
@@ -164,11 +248,11 @@ index b7ade4f..33304ad 100644
 --- a/README.md
 +++ b/README.md
 @@ -725,6 +725,7 @@ git push heroku master
- 
+
  #### 演習問題
  + 職員が自分のアカウントを編集する機能に確認画面用を追加
 ++ 機能追加により失敗するテストの修正
- 
+
  ### Ajax
  #### 顧客向け問い合わせフォーム
 diff --git a/spec/controllers/staff/accounts_controller_spec.rb b/spec/controllers/staff/accounts_controller_spec.rb
@@ -191,7 +275,7 @@ index cf7ce64..bdce4d8 100644
 -      expect { patch :update, id: staff_member.id}.to raise_error(ActionController::ParameterMissing)
 +      expect { patch :update, id: staff_member.id, commit: '更新'}.to raise_error(ActionController::ParameterMissing)
      end
- 
+
      # end_dateの値は書き換え不可
      it 'should writable end_data value' do
        params_hash.merge!(end_date: Date.tomorrow)
@@ -249,7 +333,7 @@ index 449f282..1b5b3ba 100644
 @@ -7,12 +7,26 @@ class Staff::AccountsController < Staff::Base
      @staff_member = current_staff_member
    end
- 
+
 +  def confirm
 +    @staff_member = current_staff_member
 +    @staff_member.assign_attributes(staff_member_params)
@@ -319,7 +403,7 @@ index c60ac2e..ed7746f 100644
 --- a/app/views/staff/accounts/edit.html.erb
 +++ b/app/views/staff/accounts/edit.html.erb
 @@ -5,10 +5,10 @@
- 
+
  <section class="Section l-column AppForm">
    <div class="AppForm__generic-form StaffAppForm__generic-form">
 -    <%= bootstrap_form_for @staff_member, url: :staff_account do |f| %>
@@ -408,10 +492,10 @@ index a80e7e8..b7ade4f 100644
 +++ b/README.md
 @@ -724,6 +724,7 @@ git push heroku master
  + Capybaraによるテスト
- 
+
  #### 演習問題
 ++ 職員が自分のアカウントを編集する機能に確認画面用を追加
- 
+
  ### Ajax
  #### 顧客向け問い合わせフォーム
 diff --git a/config/routes.rb b/config/routes.rb
@@ -430,7 +514,7 @@ index 170bc41..e003496 100644
  #                   staff_session DELETE /staff/session(.:format)                             staff/sessions#destroy {:host=>"0.0.0.0"}
 @@ -71,18 +68,6 @@
  #
- 
+
  Rails.application.routes.draw do
 -  namespace :customer do
 -    get 'entries/create'
@@ -445,7 +529,7 @@ index 170bc41..e003496 100644
 -  end
 -
    config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
 
 ```
@@ -482,9 +566,9 @@ index ff398fd..a80e7e8 100644
  + CoffeeScriptの修正
  + 訂正ボタン
 ++ Capybaraによるテスト
- 
+
  #### 演習問題
- 
+
 diff --git a/spec/features/customer/account_management_spec.rb b/spec/features/customer/account_management_spec.rb
 new file mode 100644
 index 0000000..f497df1
@@ -589,9 +673,9 @@ index bb54ab8..ff398fd 100644
  + 確認画面の本実装
  + CoffeeScriptの修正
 ++ 訂正ボタン
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/customer/accounts_controller.rb b/app/controllers/customer/accounts_controller.rb
 index e9dc219..9e383c7 100644
 --- a/app/controllers/customer/accounts_controller.rb
@@ -621,16 +705,16 @@ index 6aed1f5..23a98e1 100644
 --- a/app/forms/customer/account_form.rb
 +++ b/app/forms/customer/account_form.rb
 @@ -23,8 +23,8 @@ class Customer::AccountForm
- 
+
    def assign_attributes(params = {})
      @params = params
 -    self.inputs_home_address = params[:inputs_home_address] == '1'
 -    self.inputs_work_address = params[:inputs_work_address] == '1'
 +    self.inputs_home_address = params[:inputs_home_address].in? [ '1', 'true']
 +    self.inputs_work_address = params[:inputs_work_address].in? [ '1', 'true']
- 
+
      customer.assign_attributes(customer_params)
- 
+
 
 ```
 
@@ -679,16 +763,16 @@ index d8a8cde..bb54ab8 100644
  + 確認画面用プレゼンターの作成
  + 確認画面の本実装
 ++ CoffeeScriptの修正
- 
+
  #### 演習問題
- 
+
 diff --git a/app/assets/javascripts/customer/account_form.coffee b/app/assets/javascripts/customer/account_form.coffee
 index 0db2be2..2e5cac4 100644
 --- a/app/assets/javascripts/customer/account_form.coffee
 +++ b/app/assets/javascripts/customer/account_form.coffee
 @@ -17,11 +17,13 @@ class AccountForm
      toggleWorkAddressFields()
- 
+
    toggleHomeAddressFields = ->
 +    return if $('.AppForm--isConfirmed').length
      checked = $('input#form_inputs_home_address').prop('checked')
@@ -717,7 +801,7 @@ index 64ce9a4..743918e 100644
 +++ b/app/views/customer/accounts/confirm.html.erb
 @@ -4,7 +4,7 @@
  </section>
- 
+
  <section class="Section l-column AppForm">
 -  <div class="AppForm__generic-form CustomerAppForm__generic-form AppForm__customer-form">
 +  <div class="AppForm__generic-form CustomerAppForm__generic-form AppForm__customer-form AppForm--isConfirmed">
@@ -770,15 +854,15 @@ index 269c058..d8a8cde 100644
  + 確認画面の仮実装
  + 確認画面用プレゼンターの作成
 ++ 確認画面の本実装
- 
+
  #### 演習問題
- 
+
 diff --git a/app/assets/javascripts/customer/account_form.coffee b/app/assets/javascripts/customer/account_form.coffee
 index 3db60a7..0db2be2 100644
 --- a/app/assets/javascripts/customer/account_form.coffee
 +++ b/app/assets/javascripts/customer/account_form.coffee
 @@ -4,6 +4,8 @@ $(document).on "turbolinks:load", ->
- 
+
  class AccountForm
    constructor: ->
 +    toggleHomeAddressFields()
@@ -805,11 +889,11 @@ index 8fc536d..8811aaf 100644
 +++ b/app/presenters/confirming_form_presenter.rb
 @@ -2,7 +2,7 @@ class ConfirmingFormPresenter
    include HtmlBuilder
- 
+
    attr_reader :form_builder, :view_context
 -  delegate :lable, :hidden_field, :object, to: :form_builder
 +  delegate :label, :hidden_field, :object, to: :form_builder
- 
+
    def initialize(form_builder, view_context)
      @form_builder = form_builder
 @@ -13,9 +13,9 @@ class ConfirmingFormPresenter
@@ -1088,9 +1172,9 @@ index 6bde6a1..269c058 100644
  + 編集フォームの修正
  + 確認画面の仮実装
 ++ 確認画面用プレゼンターの作成
- 
+
  #### 演習問題
- 
+
 diff --git a/app/presenters/confirming_form_presenter.rb b/app/presenters/confirming_form_presenter.rb
 new file mode 100644
 index 0000000..8fc536d
@@ -1228,9 +1312,9 @@ index 651f73b..6bde6a1 100644
  + ルーティング
  + 編集フォームの修正
 ++ 確認画面の仮実装
- 
+
  #### 演習問題
- 
+
 diff --git a/app/controllers/customer/accounts_controller.rb b/app/controllers/customer/accounts_controller.rb
 index e964c59..e9dc219 100644
 --- a/app/controllers/customer/accounts_controller.rb
@@ -1258,11 +1342,11 @@ index 42dd17d..6aed1f5 100644
 +++ b/app/forms/customer/account_form.rb
 @@ -2,7 +2,7 @@ class Customer::AccountForm
    include ActiveModel::Model
- 
+
    attr_accessor :customer, :inputs_home_address, :inputs_work_address
 -  delegate :persisted?, :save, to: :customer
 +  delegate :persisted?, :valid?, :save, to: :customer
- 
+
    def initialize(customer)
      @customer = customer
 diff --git a/app/views/customer/accounts/confirm.html.erb b/app/views/customer/accounts/confirm.html.erb
@@ -1357,19 +1441,19 @@ index 2202f59..651f73b 100644
 --- a/README.md
 +++ b/README.md
 @@ -715,6 +715,7 @@ git push heroku master
- 
+
  #### 確認画面
  + ルーティング
 ++ 編集フォームの修正
- 
+
  #### 演習問題
- 
+
 diff --git a/app/views/customer/accounts/edit.html.erb b/app/views/customer/accounts/edit.html.erb
 index a169648..8ad70cc 100644
 --- a/app/views/customer/accounts/edit.html.erb
 +++ b/app/views/customer/accounts/edit.html.erb
 @@ -5,10 +5,10 @@
- 
+
  <section class="Section l-column AppForm">
    <div class="AppForm__generic-form CustomerAppForm__generic-form AppForm__customer-form">
 -    <%= bootstrap_form_for @customer_form, as: 'form', url: :customer_account do |f| %>
@@ -1424,12 +1508,12 @@ index a4c205b..2202f59 100644
 +++ b/README.md
 @@ -714,6 +714,8 @@ git push heroku master
  + アカウント編集機能
- 
+
  #### 確認画面
 ++ ルーティング
 +
  #### 演習問題
- 
+
  ### Ajax
 diff --git a/config/routes.rb b/config/routes.rb
 index ee7c8e3..170bc41 100644
@@ -1501,7 +1585,7 @@ index b6e2467..a4c205b 100644
  + 顧客トップページの修正
  + アカウント詳細表示
 ++ アカウント編集機能
- 
+
  #### 確認画面
  #### 演習問題
 diff --git a/app/assets/javascripts/customer/account_form.coffee b/app/assets/javascripts/customer/account_form.coffee
@@ -1566,7 +1650,7 @@ index 6293d9d..b0f45e1 100644
  @import "./components/staffAppForm";
 +@import "./components/customerAppForm";
  @import "./components/appEntryForm";
- 
+
  // テーブル
 diff --git a/app/controllers/customer/accounts_controller.rb b/app/controllers/customer/accounts_controller.rb
 index e6d6b32..e964c59 100644
@@ -1856,7 +1940,7 @@ index 469002d..5bbb464 100644
 -  <h1 class="Staff__title"><%= @title %></h1>
 +  <h1 class="Customer__title"><%= @title %></h1>
  </section>
- 
+
  <section class="Section l-column Table StaffTable">
 +  <div class="Table__links">
 +    <%= link_to t('.edit'), :edit_customer_account , class: 'btn btn-default' %>
@@ -1953,7 +2037,7 @@ index 548c321..b6e2467 100644
  + ルーティング
  + 顧客トップページの修正
 ++ アカウント詳細表示
- 
+
  #### 確認画面
  #### 演習問題
 diff --git a/app/controllers/customer/accounts_controller.rb b/app/controllers/customer/accounts_controller.rb
@@ -2108,7 +2192,7 @@ index 27d50a1..548c321 100644
 +
  #### 確認画面
  #### 演習問題
- 
+
 diff --git a/app/assets/stylesheets/components/common/_header.scss b/app/assets/stylesheets/components/common/_header.scss
 index 2a68577..a91cc29 100644
 --- a/app/assets/stylesheets/components/common/_header.scss
@@ -2175,13 +2259,13 @@ index cad918c..27d50a1 100644
 --- a/README.md
 +++ b/README.md
 @@ -708,6 +708,7 @@ git push heroku master
- 
+
  ### フォームの確認画面 
  #### 顧客自身によるアカウント管理機能
 ++ ルーティング
  #### 確認画面
  #### 演習問題
- 
+
 diff --git a/config/routes.rb b/config/routes.rb
 index 829ed42..ee7c8e3 100644
 --- a/config/routes.rb
@@ -2293,7 +2377,7 @@ index c648b7d..cad918c 100644
  + 排他制御
  + プログラム申し込み機能の仕上げ
 ++ 申し込みのキャンセル
- 
+
  ### フォームの確認画面 
  #### 顧客自身によるアカウント管理機能
 diff --git a/app/controllers/customer/entries_controller.rb b/app/controllers/customer/entries_controller.rb
@@ -2324,11 +2408,11 @@ index da482cb..ec7ec6c 100644
    delegate :number_with_delimiter,
 +           :current_customer,
             :button_to, to: :view_context
- 
+
    def initialize(object, view_context)
 @@ -26,8 +27,13 @@ class Customer::ProgramPresenter < ModelPresenter
    end
- 
+
    def apply_or_cancel_button
 -    closed = object.application_end_time < Time.current
 -    label_text = closed ? I18n.t('customer.programs.show.closed') : I18n.t('customer.programs.show.apply')
@@ -2421,7 +2505,7 @@ index bad088c..c648b7d 100644
  + 申込みを受け付ける
  + 排他制御
 ++ プログラム申し込み機能の仕上げ
- 
+
  ### フォームの確認画面 
  #### 顧客自身によるアカウント管理機能
 diff --git a/app/controllers/customer/entries_controller.rb b/app/controllers/customer/entries_controller.rb
@@ -2443,7 +2527,7 @@ index 95870d4..14acf50 100644
 +++ b/app/services/customer/entry_acceptor.rb
 @@ -4,9 +4,13 @@ class Customer::EntryAcceptor
    end
- 
+
    def accept(program)
 +    raise if Time.current < program.application_start_time
 +    return :closed if Time.current >= program.application_end_time
@@ -2515,7 +2599,7 @@ index c516ed6..bad088c 100644
  + 「申し込む」ボタンの設置
  + 申込みを受け付ける
 ++ 排他制御
- 
+
  ### フォームの確認画面 
  #### 顧客自身によるアカウント管理機能
 diff --git a/app/services/customer/entry_acceptor.rb b/app/services/customer/entry_acceptor.rb
@@ -2524,7 +2608,7 @@ index f5ad52c..95870d4 100644
 +++ b/app/services/customer/entry_acceptor.rb
 @@ -4,16 +4,19 @@ class Customer::EntryAcceptor
    end
- 
+
    def accept(program)
 -    if max = program.max_number_of_participants
 -      if program.entries.where(canceled: false).count < max
@@ -2599,7 +2683,7 @@ index 3c44fce..c516ed6 100644
  + 仕様の確認
  + 「申し込む」ボタンの設置
 ++ 申込みを受け付ける
- 
+
  ### フォームの確認画面 
  #### 顧客自身によるアカウント管理機能
 diff --git a/app/controllers/customer/entries_controller.rb b/app/controllers/customer/entries_controller.rb
@@ -2668,7 +2752,7 @@ index f9f2b3d..829ed42 100644
 +++ b/config/routes.rb
 @@ -61,6 +61,10 @@
  #
- 
+
  Rails.application.routes.draw do
 +  namespace :customer do
 +    get 'entries/create'
@@ -2723,11 +2807,11 @@ index f1e6f2b..3c44fce 100644
 +++ b/README.md
 @@ -699,6 +699,8 @@ git push heroku master
  + プログラムの一覧と詳細
- 
+
  #### プログラム申し込み機能
 ++ 仕様の確認
 ++ 「申し込む」ボタンの設置
- 
+
  ### フォームの確認画面 
  #### 顧客自身によるアカウント管理機能
 diff --git a/app/presenters/customer/program_presenter.rb b/app/presenters/customer/program_presenter.rb
@@ -2742,7 +2826,7 @@ index 1e63019..da482cb 100644
 +           :description, to: :object
 +  delegate :number_with_delimiter,
 +           :button_to, to: :view_context
- 
+
    def initialize(object, view_context)
      super
 @@ -22,4 +24,10 @@ class Customer::ProgramPresenter < ModelPresenter
@@ -2763,7 +2847,7 @@ index 4e603f1..243debe 100644
 +++ b/app/views/customer/programs/show.html.erb
 @@ -14,4 +14,6 @@
    </table>
- 
+
    <div class="Table__body--description"><%= @program.description %></div>
 +
 +  <div><%= p.apply_or_cancel_button %></div>
@@ -2799,7 +2883,7 @@ index 45c887c..f9f2b3d 100644
 +      end
      end
    end
- 
+
 
 ```
 
@@ -2843,9 +2927,9 @@ index 31b1423..f1e6f2b 100644
  + ルーティング
  + 顧客トップページの修正
 ++ プログラムの一覧と詳細
- 
+
  #### プログラム申し込み機能
- 
+
 diff --git a/app/assets/stylesheets/components/_customerTable.scss b/app/assets/stylesheets/components/_customerTable.scss
 new file mode 100644
 index 0000000..3d2d4b8
@@ -2868,7 +2952,7 @@ index 2b95725..6293d9d 100644
  @import "./components/adminTable";
  @import "./components/staffTable";
 +@import "./components/customerTable";
- 
+
  //font-awesome
  @import "font-awesome";
 diff --git a/app/controllers/customer/programs_controller.rb b/app/controllers/customer/programs_controller.rb
@@ -2898,7 +2982,7 @@ index 905887b..bc3c1d7 100644
 +    where('application_start_time <= ?', Time.current)
 +    .order(application_start_time: :desc)
 +  }
- 
+
    def deletable?
      entries.empty?
 diff --git a/app/presenters/customer/program_presenter.rb b/app/presenters/customer/program_presenter.rb
@@ -3038,7 +3122,7 @@ index dd3aa14..45c887c 100644
 +++ b/config/routes.rb
 @@ -61,6 +61,14 @@
  #
- 
+
  Rails.application.routes.draw do
 +  namespace :customer do
 +    get 'programs/index'
@@ -3049,7 +3133,7 @@ index dd3aa14..45c887c 100644
 +  end
 +
    config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
 
 ```
@@ -3098,9 +3182,9 @@ index eea5c34..31b1423 100644
  #### プログラム一覧表示・詳細表示機能（顧客向け)
  + ルーティング
 ++ 顧客トップページの修正
- 
+
  #### プログラム申し込み機能
- 
+
 diff --git a/app/views/customer/top/dashboard.html.erb b/app/views/customer/top/dashboard.html.erb
 index 6aa1334..83a0f41 100644
 --- a/app/views/customer/top/dashboard.html.erb
@@ -3160,13 +3244,13 @@ index d178a44..eea5c34 100644
 --- a/README.md
 +++ b/README.md
 @@ -694,6 +694,8 @@ git push heroku master
- 
+
  ### トランザクションと排他的ロック
  #### プログラム一覧表示・詳細表示機能（顧客向け)
 ++ ルーティング
 +
  #### プログラム申し込み機能
- 
+
  ### フォームの確認画面 
 diff --git a/config/routes.rb b/config/routes.rb
 index 8a753ed..dd3aa14 100644
@@ -3188,7 +3272,6 @@ index 8a753ed..dd3aa14 100644
 +      resources :programs, only: [ :index, :show ]
      end
    end
- 
+
 
 ```
-
