--- a/docs/journal/20170318.md
+++ b/docs/journal/20170318.md
@@ -2,18 +2,26 @@
 
 ## 概要
 
-2017-03-18の作業内容をまとめています。
+2017-03-18の作業内容をまとめています。このジャーナルでは、メッセージのタグ付け機能の実装に関連する作業を行いました。具体的には、モデル間の関連付けやデータベース設計などを実施し、メッセージとタグを関連付ける機能の基盤を構築しました。
 
-## コミット: ca2c3eb
+## コミット: ca2c3eb - モデル間の関連付け #21
 
-### メッセージ
+### 概要
+メッセージにタグを付ける機能を実装するため、Message、Tag、MessageTagLinkモデル間の関連付けを設定しました。これにより、メッセージに複数のタグを付けたり、タグでメッセージをフィルタリングしたりすることが可能になります。
 
-```
-モデル間の関連付け #21
-```
+### 技術的詳細
+- 多対多の関連付けを実現するために中間テーブル（MessageTagLink）を使用
+- Messageモデルに以下の関連を追加:
+  - `has_many :message_tag_links` - メッセージとタグの関連付けを管理
+  - `has_many :tags, through: :message_tag_links` - タグへの直接アクセスを可能に
+- Tagモデルに以下の関連を追加:
+  - `has_many :message_tag_links` - メッセージとタグの関連付けを管理
+  - `has_many :messages, through: :message_tag_links` - メッセージへの直接アクセスを可能に
+- MessageTagLinkモデルに以下の関連を追加:
+  - `belongs_to :message` - メッセージへの参照
+  - `belongs_to :tag` - タグへの参照
 
 ### 変更されたファイル
-
 - M	README.md
 - M	app/models/message.rb
 - M	app/models/message_tag_link.rb
@@ -33,11 +41,11 @@ index 5d17afe..480e469 100644
 --- a/README.md
 +++ b/README.md
 @@ -771,6 +771,7 @@ git push heroku master
- 
+
  #### メッセージのタグ付け
  + データベース設計
 ++ モデル間の関連付け
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/models/message.rb b/app/models/message.rb
@@ -50,7 +58,7 @@ index cade141..ecc8a44 100644
    belongs_to :parent, class_name: 'Message', foreign_key: 'parent_id'
 +  has_many :message_tag_links, dependent: :destroy
 +  has_many :tags, -> { order(:value)}, through: :message_tag_links
- 
+
    validates :subject, :body, presence: true
    validates :subject, length: { maximum: 80, allow_blank: true }
 diff --git a/app/models/message_tag_link.rb b/app/models/message_tag_link.rb
@@ -59,7 +67,7 @@ index 2a52ae5..5b88619 100644
 +++ b/app/models/message_tag_link.rb
 @@ -14,4 +14,6 @@
  #
- 
+
  class MessageTagLink < ApplicationRecord
 +  belongs_to :message
 +  belongs_to :tag
@@ -70,23 +78,65 @@ index c8071ee..2c83b3d 100644
 +++ b/app/models/tag.rb
 @@ -13,4 +13,6 @@
  #
- 
+
  class Tag < ApplicationRecord
 +  has_many :message_tag_links, dependent: :destroy
 +  has_many :messages, through: :message_tag_links
  end
-
 ```
 
-### 構造変更
+### モデル間の関連付け構造
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title メッセージとタグの多対多関連
+
+skinparam backgroundColor white
+skinparam handwritten false
+skinparam classAttributeIconSize 0
+
+class Message {
+  +id: integer
+  +customer_id: integer
+  +staff_member_id: integer
+  +subject: string
+  +body: text
+  +root_id: integer
+  +parent_id: integer
+  +discarded: boolean
+  +deleted: boolean
+}
+
+class Tag {
+  +id: integer
+  +value: string
+}
+
+class MessageTagLink {
+  +id: integer
+  +message_id: integer
+  +tag_id: integer
+}
+
+Message "1" -- "0..*" MessageTagLink : has many >
+Tag "1" -- "0..*" MessageTagLink : has many >
+MessageTagLink "0..*" -- "1" Message : belongs to >
+MessageTagLink "0..*" -- "1" Tag : belongs to >
+
+note right of Message::tags
+  has_many :tags, through: :message_tag_links
+  タグを値でソート: -> { order(:value) }
+end note
+
+note right of Tag::messages
+  has_many :messages, through: :message_tag_links
+end note
+
+note bottom of MessageTagLink
+  中間テーブルとして機能し、
+  メッセージとタグの多対多関連を実現
+end note
+
 @enduml
 ```
 
@@ -128,13 +178,13 @@ index 7097aa0..5d17afe 100644
 +++ b/README.md
 @@ -770,6 +770,8 @@ git push heroku master
  + 返信の送信
- 
+
  #### メッセージのタグ付け
 ++ データベース設計
 +
  #### 一意制約と排他的ロック
  #### 演習問題  
- 
+
 diff --git a/app/models/customer_message.rb b/app/models/customer_message.rb
 index faeaa3f..ff7247a 100644
 --- a/app/models/customer_message.rb
@@ -302,16 +352,16 @@ index 35e4f1c..1086b9a 100644
 @@ -10,7 +10,7 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170318002915) do
 +ActiveRecord::Schema.define(version: 20170318093830) do
- 
+
    create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
 @@ -96,6 +96,14 @@ ActiveRecord::Schema.define(version: 20170318002915) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 +  create_table "message_tag_links", force: :cascade, comment: "タグリンクテーブル" do |t|
 +    t.integer "message_id", null: false
 +    t.integer "tag_id",     null: false
@@ -326,7 +376,7 @@ index 35e4f1c..1086b9a 100644
 @@ -176,6 +184,13 @@ ActiveRecord::Schema.define(version: 20170318002915) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 +  create_table "tags", force: :cascade, comment: "タグ" do |t|
 +    t.string   "value",      null: false
 +    t.datetime "created_at", null: false
@@ -487,7 +537,7 @@ index 00aa21c..7097aa0 100644
  + 返信内容編集フォーム
  + 確認画面
 ++ 返信の送信
- 
+
  #### メッセージのタグ付け
  #### 一意制約と排他的ロック
 diff --git a/app/controllers/staff/replies_controller.rb b/app/controllers/staff/replies_controller.rb
@@ -497,7 +547,7 @@ index ca1f722..c7c7798 100644
 @@ -16,6 +16,23 @@ class Staff::RepliesController < Staff::Base
      end
    end
- 
+
 +  def create
 +    @reply = StaffMessage.new(staff_message_params)
 +    if params[:commit]
@@ -523,9 +573,9 @@ index 4525b64..cade141 100644
 --- a/app/models/message.rb
 +++ b/app/models/message.rb
 @@ -49,6 +49,13 @@ class Message < ApplicationRecord
- 
+
    default_scope { order(created_at: :desc) }
- 
+
 +  before_validation do
 +    if parent
 +      self.root = parent.root || parent
@@ -534,7 +584,7 @@ index 4525b64..cade141 100644
 +  end
 +
    attr_accessor :child_nodes
- 
+
    def tree
 diff --git a/config/locales/controllers/ja.yml b/config/locales/controllers/ja.yml
 index 02399aa..a67b2aa 100644
@@ -551,7 +601,7 @@ index 02399aa..a67b2aa 100644
 +      create:
 +        flash_notice: '問い合わせに返信しました。'
 +        flash_alert: '入力に誤りがあります。'
- 
+
    admin:
      base:
 
@@ -604,7 +654,7 @@ index d45a644..00aa21c 100644
  + リンクの設置
  + 返信内容編集フォーム
 ++ 確認画面
- 
+
  #### メッセージのタグ付け
  #### 一意制約と排他的ロック
 diff --git a/app/controllers/staff/replies_controller.rb b/app/controllers/staff/replies_controller.rb
@@ -614,7 +664,7 @@ index 108446e..ca1f722 100644
 @@ -5,8 +5,26 @@ class Staff::RepliesController < Staff::Base
      @reply = StaffMessage.new
    end
- 
+
 +  # POST
 +  def confirm
 +    @reply = StaffMessage.new(staff_message_params)
@@ -687,7 +737,7 @@ index 47e8297..02399aa 100644
 +    replieds:
 +      confirm:
 +        flash_notice: '入力に誤りがあります。'
- 
+
    admin:
      base:
 diff --git a/config/locales/views/ja.yml b/config/locales/views/ja.yml
@@ -705,7 +755,7 @@ index e69869c..f2a92dd 100644
 +        correct: '訂正'
 +        cancel: 'キャンセル'
 +        confirm_message: '以下の内容で返信します。よろしいですか？'
- 
+
    admin:
      shared:
 
@@ -758,7 +808,7 @@ index 5a9fb6a..d45a644 100644
  + ルーティング
  + リンクの設置
 ++ 返信内容編集フォーム
- 
+
  #### メッセージのタグ付け
  #### 一意制約と排他的ロック
 diff --git a/app/controllers/staff/replies_controller.rb b/app/controllers/staff/replies_controller.rb
@@ -855,7 +905,7 @@ index ba71b60..e69869c 100644
 +        subject: '件名'
 +        created_at: '作成日時'
 +
- 
+
    admin:
      shared:
 
@@ -905,7 +955,7 @@ index 22de8f3..5a9fb6a 100644
  #### 問い合わせの返信機能
  + ルーティング
 ++ リンクの設置
- 
+
  #### メッセージのタグ付け
  #### 一意制約と排他的ロック
 diff --git a/app/views/staff/messages/show.html.erb b/app/views/staff/messages/show.html.erb
@@ -913,7 +963,7 @@ index 3365cf5..bfc7d1a 100644
 --- a/app/views/staff/messages/show.html.erb
 +++ b/app/views/staff/messages/show.html.erb
 @@ -5,6 +5,11 @@
- 
+
  <section class="Section l-column Table StaffTable">
    <table class="Table__body Table__body--attributes StaffTable__body">
 +    <% if @message.kind_of?(CustomerMessage) %>
@@ -933,7 +983,7 @@ index 3151807..ba71b60 100644
          subject: '件名'
          created_at: '作成日時'
 +        reply: '返信する'
- 
+
    admin:
      shared:
 
@@ -966,7 +1016,7 @@ index e813d90..22de8f3 100644
 --- a/README.md
 +++ b/README.md
 @@ -763,6 +763,8 @@ git push heroku master
- 
+
  ### タグ付け
  #### 問い合わせの返信機能
 ++ ルーティング
@@ -1033,7 +1083,7 @@ index 613fd7f..e813d90 100644
  + シードデータの投入
  + 動作確認
 ++ 問い合わせの削除
- 
+
  #### メッセージツリーの表示
  + showアクション
 diff --git a/app/controllers/staff/messages_controller.rb b/app/controllers/staff/messages_controller.rb
@@ -1150,11 +1200,11 @@ index d66ebbd..613fd7f 100644
 --- a/README.md
 +++ b/README.md
 @@ -758,6 +758,7 @@ git push heroku master
- 
+
  #### パフォーマンスチューニング
  + パフォーマンスの計測
 ++ パフォーマンスの向上策
- 
+
  ### タグ付け
  #### 問い合わせの返信機能
 diff --git a/app/lib/simple_tree.rb b/app/lib/simple_tree.rb
@@ -1191,12 +1241,12 @@ index 32ce378..4525b64 100644
    belongs_to :root, class_name: 'Message', foreign_key: 'root_id'
    belongs_to :parent, class_name: 'Message', foreign_key: 'parent_id'
 -  has_many :children, class_name: 'Message', foreign_key: 'parent_id'
- 
+
    validates :subject, :body, presence: true
    validates :subject, length: { maximum: 80, allow_blank: true }
 @@ -49,4 +48,13 @@ class Message < ApplicationRecord
    end
- 
+
    default_scope { order(created_at: :desc) }
 +
 +  attr_accessor :child_nodes
@@ -1214,12 +1264,12 @@ index 98c5a29..0a77e7d 100644
 +++ b/app/presenters/staff/message_presenter.rb
 @@ -53,7 +53,7 @@ class Staff::MessagePresenter < ModelPresenter
    end
- 
+
    def tree
 -    expand(object.root || object)
 +    expand(object.tree.root)
    end
- 
+
    private
 @@ -65,7 +65,7 @@ class Staff::MessagePresenter < ModelPresenter
          else
@@ -1275,7 +1325,7 @@ index be02577..d66ebbd 100644
 @@ -756,6 +756,9 @@ git push heroku master
  + showアクション
  + メッセージツリーの表示
- 
+
 +#### パフォーマンスチューニング
 ++ パフォーマンスの計測
 +
@@ -1288,7 +1338,7 @@ index d0bec84..374c483 100644
 +++ b/spec/factories/messages.rb
 @@ -31,7 +31,16 @@
  #
- 
+
  FactoryGirl.define do
 -  factory :message do
 -    
@@ -1379,11 +1429,11 @@ index 30f1daa..be02577 100644
 --- a/README.md
 +++ b/README.md
 @@ -754,6 +754,7 @@ git push heroku master
- 
+
  #### メッセージツリーの表示
  + showアクション
 ++ メッセージツリーの表示
- 
+
  ### タグ付け
  #### 問い合わせの返信機能
 diff --git a/app/models/message.rb b/app/models/message.rb
@@ -1395,7 +1445,7 @@ index aa3668f..32ce378 100644
    belongs_to :root, class_name: 'Message', foreign_key: 'root_id'
    belongs_to :parent, class_name: 'Message', foreign_key: 'parent_id'
 +  has_many :children, class_name: 'Message', foreign_key: 'parent_id'
- 
+
    validates :subject, :body, presence: true
    validates :subject, length: { maximum: 80, allow_blank: true }
 diff --git a/app/presenters/staff/message_presenter.rb b/app/presenters/staff/message_presenter.rb
@@ -1435,7 +1485,7 @@ index b87136d..3365cf5 100644
 @@ -13,5 +13,6 @@
      <tr class="Table__tr"><th class="Table__th"><%= t('.created_at') %></th><td class="Table__td--date"><%= p.created_at %></td></tr>
    </table>
- 
+
 +  <div class="tree"><%= p.tree %></div>
    <div class="Table__body--description"><%= p.formatted_body %></div>
  </section>
@@ -1500,10 +1550,10 @@ index 5697be0..30f1daa 100644
 +++ b/README.md
 @@ -753,6 +753,7 @@ git push heroku master
  + 動作確認
- 
+
  #### メッセージツリーの表示
 ++ showアクション
- 
+
  ### タグ付け
  #### 問い合わせの返信機能
 diff --git a/app/controllers/staff/messages_controller.rb b/app/controllers/staff/messages_controller.rb
@@ -1551,7 +1601,7 @@ index 2c8e4cd..ceb696e 100644
              end
  %>
 @@ -15,12 +15,12 @@
- 
+
    <table class="Table__body Table__body--listing StaffTable__body">
      <tr class="Table__tr">
 -      <th class="Table__th"><%= t('customer.messages.index.type') %></th>
@@ -1633,7 +1683,7 @@ index 91cf7c5..3151807 100644
 +        receiver: '受信者'
 +        subject: '件名'
 +        created_at: '作成日時'
- 
+
    admin:
      shared:
 @@ -307,17 +328,4 @@ ja:
@@ -1703,9 +1753,9 @@ index 2bb1332..5697be0 100644
  + メッセージ一覧
  + シードデータの投入
 ++ 動作確認
- 
+
  #### メッセージツリーの表示
- 
+
 diff --git a/app/presenters/staff/message_presenter.rb b/app/presenters/staff/message_presenter.rb
 index 6e59d3d..b342ebd 100644
 --- a/app/presenters/staff/message_presenter.rb
@@ -1772,9 +1822,9 @@ index 1580160..2bb1332 100644
  + リンクの設置
  + メッセージ一覧
 ++ シードデータの投入
- 
+
  #### メッセージツリーの表示
- 
+
 diff --git a/db/seed/development/messages.rb b/db/seed/development/messages.rb
 new file mode 100644
 index 0000000..c3e3d2c
@@ -1837,7 +1887,7 @@ index 3f0d536..beeaf0f 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,7 +6,7 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 -table_names = %w(staff_members administrators staff_events customers allowed_sources programs entries)
@@ -1883,9 +1933,9 @@ index d2e2090..1580160 100644
  + ルーティング
  + リンクの設置
 ++ メッセージ一覧
- 
+
  #### メッセージツリーの表示
- 
+
 diff --git a/app/controllers/staff/messages_controller.rb b/app/controllers/staff/messages_controller.rb
 index 24f7336..22550ac 100644
 --- a/app/controllers/staff/messages_controller.rb
@@ -1893,7 +1943,7 @@ index 24f7336..22550ac 100644
 @@ -1,6 +1,28 @@
  class Staff::MessagesController < Staff::Base
    before_action :reject_non_xhr, only: [ :count ]
- 
+
 +  def index
 +    @messages = Message.where(deleted: false).page(params[:page])
 +  end
@@ -2109,15 +2159,15 @@ index 66c7098..d2e2090 100644
  #### 問い合わせの一覧表示と削除
  + ルーティング
 ++ リンクの設置
- 
+
  #### メッセージツリーの表示
- 
+
 diff --git a/app/helpers/staff_helper.rb b/app/helpers/staff_helper.rb
 index 8b02516..114b44e 100644
 --- a/app/helpers/staff_helper.rb
 +++ b/app/helpers/staff_helper.rb
 @@ -3,8 +3,8 @@ module StaffHelper
- 
+
    def number_of_unprocessed_messages
      markup do |m|
 -      m.a({href: '#', class:'unprocessedMessages'}) do
@@ -2193,13 +2243,13 @@ index d38de71..66c7098 100644
 --- a/README.md
 +++ b/README.md
 @@ -746,6 +746,8 @@ git push heroku master
-  
+
  ### ツリー構造
  #### 問い合わせの一覧表示と削除
 ++ ルーティング
 +
  #### メッセージツリーの表示
- 
+
  ### タグ付け
 diff --git a/config/routes.rb b/config/routes.rb
 index 791c1bb..c0f31c5 100644
@@ -2321,7 +2371,7 @@ index cf9bc49..d38de71 100644
  + countアクション
  + Ajax
 ++ アクセス制限
-  
+
  ### ツリー構造
  #### 問い合わせの一覧表示と削除
 diff --git a/app/controllers/application_controller.rb b/app/controllers/application_controller.rb
@@ -2331,7 +2381,7 @@ index d1ed053..b5a081c 100644
 @@ -24,4 +24,8 @@ class ApplicationController < ActionController::Base
      render 'errors/forbidden', status: 403
    end
- 
+
 +  def reject_non_xhr
 +    raise ActionController::BadRequest unless request.xhr?
 +  end
@@ -2342,7 +2392,7 @@ index 09ca974..e215b42 100644
 --- a/app/controllers/concerns/error_handlers.rb
 +++ b/app/controllers/concerns/error_handlers.rb
 @@ -3,6 +3,7 @@ module ErrorHandlers
- 
+
    included do
      rescue_from Exception, with: :rescue500
 +    rescue_from ActionController::BadRequest, with: :rescue400
@@ -2409,7 +2459,7 @@ index 013c39c..cf9bc49 100644
  + ルーティング
  + countアクション
 ++ Ajax
-  
+
  ### ツリー構造
  #### 問い合わせの一覧表示と削除
 diff --git a/app/assets/javascripts/staff/messages.coffee b/app/assets/javascripts/staff/messages.coffee
@@ -2508,11 +2558,11 @@ index e3c8c2a..013c39c 100644
 --- a/README.md
 +++ b/README.md
 @@ -740,6 +740,7 @@ git push heroku master
- 
+
  #### 問い合わせ到着の通知
  + ルーティング
 ++ countアクション
-  
+
  ### ツリー構造
  #### 問い合わせの一覧表示と削除
 diff --git a/app/assets/stylesheets/components/parts/_labels.scss b/app/assets/stylesheets/components/parts/_labels.scss
@@ -2627,10 +2677,10 @@ index f03ff72..e3c8c2a 100644
 +++ b/README.md
 @@ -739,6 +739,7 @@ git push heroku master
  + createアクション
- 
+
  #### 問い合わせ到着の通知
 ++ ルーティング
-  
+
  ### ツリー構造
  #### 問い合わせの一覧表示と削除
 diff --git a/config/routes.rb b/config/routes.rb
@@ -2647,14 +2697,14 @@ index 775fea1..791c1bb 100644
  #                   admin_session DELETE /admin/session(.:format)                             admin/sessions#destroy {:host=>"0.0.0.0"}
 @@ -72,10 +73,6 @@
  #
- 
+
  Rails.application.routes.draw do
 -  namespace :customer do
 -    get 'messagges/new'
 -  end
 -
    config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
 @@ -95,6 +92,9 @@ Rails.application.routes.draw do
        resources :programs do
@@ -2665,7 +2715,7 @@ index 775fea1..791c1bb 100644
 +      end
      end
    end
- 
+
 
 ```
 
@@ -2702,9 +2752,9 @@ index 087cd37..f03ff72 100644
  + newアクション
  + confirmアクション
 ++ createアクション
- 
+
  #### 問い合わせ到着の通知
-  
+
 diff --git a/app/controllers/customer/messages_controller.rb b/app/controllers/customer/messages_controller.rb
 index 94afa9c..3b0c70e 100644
 --- a/app/controllers/customer/messages_controller.rb
@@ -2712,7 +2762,7 @@ index 94afa9c..3b0c70e 100644
 @@ -14,6 +14,22 @@ class Customer::MessagesController < Customer::Base
      end
    end
- 
+
 +  def create
 +    @message = CustomerMessage.new(customer_message_params)
 +    if params[:commit]
@@ -2743,7 +2793,7 @@ index 055aaaf..239cdf9 100644
 +      create:
 +        flash_notice: '問い合わせを送信しました。'
 +        flash_alert: '入力に誤りがあります。'
- 
+
 diff --git a/config/locales/views/ja.yml b/config/locales/views/ja.yml
 index fe10849..4ab558b 100644
 --- a/config/locales/views/ja.yml
@@ -2808,9 +2858,9 @@ index 85b69bc..087cd37 100644
  + ルーティング
  + newアクション
 ++ confirmアクション
- 
+
  #### 問い合わせ到着の通知
-  
+
 diff --git a/app/controllers/customer/messages_controller.rb b/app/controllers/customer/messages_controller.rb
 index 0a614d9..94afa9c 100644
 --- a/app/controllers/customer/messages_controller.rb
@@ -2846,7 +2896,7 @@ index 8811aaf..7c26499 100644
 @@ -29,6 +29,17 @@ class ConfirmingFormPresenter
      end
    end
- 
+
 +  def text_area_block(name, label_text, options = {})
 +    markup(:div) do |m|
 +      m << decorated_label(name, label_text, options)
@@ -2992,9 +3042,9 @@ index 8aba67e..85b69bc 100644
  + バリデーション等
  + ルーティング
 ++ newアクション
- 
+
  #### 問い合わせ到着の通知
-  
+
 diff --git a/app/controllers/customer/messages_controller.rb b/app/controllers/customer/messages_controller.rb
 new file mode 100644
 index 0000000..0a614d9
@@ -3012,13 +3062,13 @@ index f024258..ac307fa 100644
 +++ b/app/models/message.rb
 @@ -37,8 +37,8 @@ class Message < ApplicationRecord
    belongs_to :parent, class_name: 'Message', foreign_key: 'parent_id'
- 
+
    validates :subject, :body, presence: true
 -  validates :subject, length: [ maximum: 80, allow_blank: true ]
 -  validates :body, length: [ maximum: 800, allow_blank: true ]
 +  validates :subject, length: { maximum: 80, allow_blank: true }
 +  validates :body, length: { maximum: 800, allow_blank: true }
- 
+
    before_create do
      if parent
 diff --git a/app/views/customer/messages/_form.html.erb b/app/views/customer/messages/_form.html.erb
@@ -3080,13 +3130,13 @@ index 95f4c93..d6f3d9e 100644
        address: 住所
        program: プログラム
 +      message: 問い合わせ
- 
+
      attributes:
        administrator:
 @@ -101,6 +102,14 @@ ja:
          entries: エントリー
          registrant: 登録者
- 
+
 +      message:
 +        status: 状態（職員向け）
 +        subject: 件名
@@ -3129,14 +3179,14 @@ index b36dc1e..775fea1 100644
 +++ b/config/routes.rb
 @@ -72,6 +72,10 @@
  #
- 
+
  Rails.application.routes.draw do
 +  namespace :customer do
 +    get 'messagges/new'
 +  end
 +
    config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
 
 ```
@@ -3184,9 +3234,9 @@ index 2bd9094..8aba67e 100644
  + モデル間の関連付け
  + バリデーション等
 ++ ルーティング
- 
+
  #### 問い合わせ到着の通知
-  
+
 diff --git a/config/routes.rb b/config/routes.rb
 index ab71ca9..b36dc1e 100644
 --- a/config/routes.rb
@@ -3218,7 +3268,7 @@ index ab71ca9..b36dc1e 100644
 +      end
      end
    end
- 
+
 
 ```
 
@@ -3253,9 +3303,9 @@ index c9d5647..2bd9094 100644
  + データベース設計
  + モデル間の関連付け
 ++ バリデーション等
- 
+
  #### 問い合わせ到着の通知
-  
+
 diff --git a/app/models/message.rb b/app/models/message.rb
 index 6fee098..f024258 100644
 --- a/app/models/message.rb
@@ -3326,7 +3376,7 @@ index 6e802b2..1b01fa2 100644
 +  has_many :messages
 +  has_many :outbound_messages, class_name: 'CustomerMessage', foreign_key: 'customer_id'
 +  has_many :inbound_messages, class_name: 'StaffMember', foreign_key: 'customer_id'
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 diff --git a/app/models/customer_message.rb b/app/models/customer_message.rb
@@ -3344,7 +3394,7 @@ index ae8222b..6fee098 100644
 +++ b/app/models/message.rb
 @@ -31,4 +31,8 @@
  #
- 
+
  class Message < ApplicationRecord
 +  belongs_to :customer
 +  belongs_to :staff_member
@@ -3406,14 +3456,14 @@ index 3e956b6..c9d5647 100644
 --- a/README.md
 +++ b/README.md
 @@ -730,6 +730,9 @@ git push heroku master
- 
+
  ### Ajax
  #### 顧客向け問い合わせフォーム
 ++ データベース設計
 ++ モデル間の関連付け
 +
  #### 問い合わせ到着の通知
-  
+
  ### ツリー構造
 diff --git a/app/models/message.rb b/app/models/message.rb
 new file mode 100644
@@ -3498,16 +3548,16 @@ index ea83be8..35e4f1c 100644
 @@ -10,7 +10,7 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170214071032) do
 +ActiveRecord::Schema.define(version: 20170318002915) do
- 
+
    create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
 @@ -96,6 +96,31 @@ ActiveRecord::Schema.define(version: 20170214071032) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 +  create_table "messages", force: :cascade, comment: "問い合わせ" do |t|
 +    t.integer  "customer_id",                                   null: false
 +    t.integer  "staff_member_id"
@@ -3647,4 +3697,3 @@ index 0000000..271a842
 ' NewClass --> ExistingClass
 @enduml
 ```
-
