--- a/docs/journal/20170325.md
+++ b/docs/journal/20170325.md
@@ -2,18 +2,20 @@
 
 ## 概要
 
-2017-03-25の作業内容をまとめています。
+2017-03-25の作業内容をまとめています。このジャーナルでは、メッセージのタグ付け機能に関連する改善と拡張を行いました。具体的には、タグによるメッセージの絞り込み機能の実装、JavaScriptの改善、データベースの照合順序の変更などを実施し、メッセージ管理機能の使いやすさと保守性を向上させました。
 
-## コミット: 3a25da2
+## コミット: 3a25da2 - staff/messagesコントローラ #21
 
-### メッセージ
+### 概要
+メッセージコントローラのコードをリファクタリングし、タグによるメッセージの絞り込み機能を全てのメッセージ一覧（通常、受信、送信、削除済み）に適用できるようにしました。これにより、ユーザーはどのメッセージ一覧画面でもタグを使って効率的に情報を絞り込むことができます。
 
-```
-staff/messagesコントローラ #21
-```
+### 技術的詳細
+- 重複していたタグによる絞り込みロジックを`narrow_down`という共通のプライベートメソッドに抽出
+- 各アクション（index, inbound, outbound, deleted）で`narrow_down`メソッドを呼び出すように修正
+- 全てのアクションで明示的に`render action: 'index'`を指定し、一貫性を確保
+- ページネーションの適用タイミングを統一（絞り込み後にページネーション）
 
 ### 変更されたファイル
-
 - M	README.md
 - M	app/controllers/staff/messages_controller.rb
 
@@ -35,7 +37,7 @@ index 5d11bd6..d9c1c78 100644
  + indexアクションの変更
  + リンクの設置
 ++ staff/messagesコントローラ
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/controllers/staff/messages_controller.rb b/app/controllers/staff/messages_controller.rb
@@ -43,7 +45,7 @@ index 8c8bddf..00b5e99 100644
 --- a/app/controllers/staff/messages_controller.rb
 +++ b/app/controllers/staff/messages_controller.rb
 @@ -3,27 +3,32 @@ class Staff::MessagesController < Staff::Base
- 
+
    def index
      @messages = Message.where(deleted: false).page(params[:page])
 -    if params[:tag_id]
@@ -53,7 +55,7 @@ index 8c8bddf..00b5e99 100644
      @messages = @messages.page(params[:page])
 +    render action: 'index'
    end
- 
+
    # GET
    def inbound
      @messages = CustomerMessage.where(deleted: false).page(params[:page])
@@ -61,7 +63,7 @@ index 8c8bddf..00b5e99 100644
 +    @messages = @messages.page(params[:page])
      render action: 'index'
    end
- 
+
    # GET
    def outbound
      @messages = StaffMessage.where(deleted: false).page(params[:page])
@@ -69,7 +71,7 @@ index 8c8bddf..00b5e99 100644
 +    @messages = @messages.page(params[:page])
      render action: 'index'
    end
- 
+
    # GET
    def deleted
      @messages = Message.where(deleted: true).page(params[:page])
@@ -77,7 +79,7 @@ index 8c8bddf..00b5e99 100644
 +    @messages = @messages.page(params[:page])
      render action: 'index'
    end
- 
+
 @@ -55,4 +60,11 @@ class Staff::MessagesController < Staff::Base
      end
      render text: 'OK'
@@ -90,18 +92,53 @@ index 8c8bddf..00b5e99 100644
 +    end
 +  end
  end
-
 ```
 
-### 構造変更
+### メッセージコントローラの構造
 
 ```plantuml
 @startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+title Staff::MessagesController - タグによる絞り込み機能
+
+skinparam backgroundColor white
+skinparam handwritten false
+
+class "Staff::MessagesController" {
+  +index()
+  +inbound()
+  +outbound()
+  +deleted()
+  +destroy()
+  +count()
+  +tag()
+  -narrow_down()
+}
+
+note right of "Staff::MessagesController"::narrow_down
+  共通化された絞り込みロジック
+  タグIDによるメッセージの絞り込みを行う
+end note
+
+actor "職員" as Staff
+Staff --> "Staff::MessagesController" : アクセス
+
+database "Messages" as DB
+
+"Staff::MessagesController" --> DB : クエリ
+
+rectangle "メッセージ一覧表示フロー" {
+  (1) --> (2) : 初期クエリ実行
+  (2) --> (3) : タグによる絞り込み
+  (3) --> (4) : ページネーション適用
+  (4) --> (5) : 結果表示
+}
+
+note bottom of "メッセージ一覧表示フロー"
+  全てのメッセージ一覧アクション
+  (index, inbound, outbound, deleted)で
+  同じフローを使用
+end note
+
 @enduml
 ```
 
@@ -139,7 +176,7 @@ index 289b68b..5d11bd6 100644
  + ルーティング
  + indexアクションの変更
 ++ リンクの設置
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/views/staff/messages/_links.html.erb b/app/views/staff/messages/_links.html.erb
@@ -164,11 +201,11 @@ index 7a46542..29fcdac 100644
 +++ b/app/views/staff/messages/index.html.erb
 @@ -11,6 +11,7 @@
  </section>
- 
+
  <section class="Section l-column Table">
 +  <%= render 'links'%>
    <%= paginate @messages %>
- 
+
    <table class="Table__body Table__body--listing StaffTable__body">
 diff --git a/app/views/staff/messages/show.html.erb b/app/views/staff/messages/show.html.erb
 index 3cbc59b..a2d7653 100644
@@ -176,7 +213,7 @@ index 3cbc59b..a2d7653 100644
 +++ b/app/views/staff/messages/show.html.erb
 @@ -4,6 +4,7 @@
  </section>
- 
+
  <section class="Section l-column Table StaffTable">
 +  <%= render 'links' %>
    <table class="Table__body Table__body--attributes StaffTable__body">
@@ -233,11 +270,11 @@ index abf077e..289b68b 100644
 --- a/README.md
 +++ b/README.md
 @@ -780,6 +780,7 @@ git push heroku master
- 
+
  #### タグによるメッセージの絞込
  + ルーティング
 ++ indexアクションの変更
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/assets/stylesheets/components/_tags.scss b/app/assets/stylesheets/components/_tags.scss
@@ -262,19 +299,19 @@ index 6a01807..1296dc4 100644
 @@ -83,6 +83,9 @@
  @import "./components/staffTable";
  @import "./components/customerTable";
- 
+
 +// タグ
 +@import "./components/tags";
 +
  //font-awesome
  @import "font-awesome";
- 
+
 diff --git a/app/controllers/staff/messages_controller.rb b/app/controllers/staff/messages_controller.rb
 index 7e3768d..8c8bddf 100644
 --- a/app/controllers/staff/messages_controller.rb
 +++ b/app/controllers/staff/messages_controller.rb
 @@ -3,6 +3,10 @@ class Staff::MessagesController < Staff::Base
- 
+
    def index
      @messages = Message.where(deleted: false).page(params[:page])
 +    if params[:tag_id]
@@ -282,7 +319,7 @@ index 7e3768d..8c8bddf 100644
 +    end
 +    @messages = @messages.page(params[:page])
    end
- 
+
    # GET
 diff --git a/app/views/staff/messages/_tags.html.erb b/app/views/staff/messages/_tags.html.erb
 new file mode 100644
@@ -307,7 +344,7 @@ index ceb696e..7a46542 100644
 +++ b/app/views/staff/messages/index.html.erb
 @@ -39,4 +39,6 @@
    </table>
- 
+
    <%= paginate @messages %>
 +
 +  <%= render 'tags' %>
@@ -357,13 +394,13 @@ index 0ab32e8..abf077e 100644
 @@ -778,6 +778,9 @@ git push heroku master
  + JavaScriptプログラムの改善
  + 照合順序の変更
- 
+
 +#### タグによるメッセージの絞込
 ++ ルーティング
 +
  #### 一意制約と排他的ロック
  #### 演習問題  
- 
+
 diff --git a/config/routes.rb b/config/routes.rb
 index e6360a5..3b44fdd 100644
 --- a/config/routes.rb
@@ -390,7 +427,7 @@ index e6360a5..3b44fdd 100644
 +      end
      end
    end
- 
+
 
 ```
 
@@ -420,9 +457,9 @@ index 9788eac..0154c4b 100644
 --- a/db/schema.rb
 +++ b/db/schema.rb
 @@ -12,7 +12,7 @@
- 
+
  ActiveRecord::Schema.define(version: 20170325081203) do
- 
+
 -  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -431,7 +468,7 @@ index 9788eac..0154c4b 100644
 @@ -33,7 +33,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -440,7 +477,7 @@ index 9788eac..0154c4b 100644
 @@ -43,7 +43,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "allowed_sources", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "IPアドレス制限" do |t|
 +  create_table "allowed_sources", force: :cascade, comment: "IPアドレス制限" do |t|
      t.string   "namespace",                  null: false, comment: "名前空間"
@@ -449,7 +486,7 @@ index 9788eac..0154c4b 100644
 @@ -55,7 +55,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -458,7 +495,7 @@ index 9788eac..0154c4b 100644
 @@ -84,7 +84,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "entries", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "申し込み" do |t|
 +  create_table "entries", force: :cascade, comment: "申し込み" do |t|
      t.integer  "program_id",                  null: false
@@ -467,7 +504,7 @@ index 9788eac..0154c4b 100644
 @@ -96,7 +96,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 -  create_table "message_tag_links", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグリンクテーブル" do |t|
 +  create_table "message_tag_links", force: :cascade, comment: "タグリンクテーブル" do |t|
      t.integer "message_id", null: false
@@ -476,7 +513,7 @@ index 9788eac..0154c4b 100644
 @@ -104,7 +104,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["tag_id"], name: "index_message_tag_links_on_tag_id", using: :btree
    end
- 
+
 -  create_table "messages", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "問い合わせ" do |t|
 +  create_table "messages", force: :cascade, comment: "問い合わせ" do |t|
      t.integer  "customer_id",                                   null: false
@@ -485,7 +522,7 @@ index 9788eac..0154c4b 100644
 @@ -129,7 +129,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["type", "staff_member_id"], name: "index_messages_on_type_and_staff_member_id", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
 +  create_table "phones", force: :cascade, comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -494,7 +531,7 @@ index 9788eac..0154c4b 100644
 @@ -144,7 +144,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "programs", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "プログラム" do |t|
 +  create_table "programs", force: :cascade, comment: "プログラム" do |t|
      t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
@@ -503,7 +540,7 @@ index 9788eac..0154c4b 100644
 @@ -158,7 +158,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["registrant_id"], name: "index_programs_on_registrant_id", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -512,7 +549,7 @@ index 9788eac..0154c4b 100644
 @@ -167,7 +167,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -521,7 +558,7 @@ index 9788eac..0154c4b 100644
 @@ -184,7 +184,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "tags", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグ" do |t|
 +  create_table "tags", force: :cascade, comment: "タグ" do |t|
      t.string   "value",      null: false
@@ -557,7 +594,7 @@ index 19e47e1..723f9f9 100644
 --- a/app/models/message.rb
 +++ b/app/models/message.rb
 @@ -69,7 +69,7 @@ class Message < ApplicationRecord
- 
+
    def add_tag(label)
      self.class.transaction do
 -      tag = Tag.find_by_created_at(value: label)
@@ -572,10 +609,10 @@ index 2ea53dd..9788eac 100644
 @@ -10,9 +10,9 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170318093830) do
 +ActiveRecord::Schema.define(version: 20170325081203) do
- 
+
 -  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -584,7 +621,7 @@ index 2ea53dd..9788eac 100644
 @@ -33,7 +33,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -593,7 +630,7 @@ index 2ea53dd..9788eac 100644
 @@ -43,7 +43,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "allowed_sources", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "IPアドレス制限" do |t|
 +  create_table "allowed_sources", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "IPアドレス制限" do |t|
      t.string   "namespace",                  null: false, comment: "名前空間"
@@ -602,7 +639,7 @@ index 2ea53dd..9788eac 100644
 @@ -55,7 +55,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -611,7 +648,7 @@ index 2ea53dd..9788eac 100644
 @@ -84,7 +84,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "entries", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "申し込み" do |t|
 +  create_table "entries", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "申し込み" do |t|
      t.integer  "program_id",                  null: false
@@ -620,7 +657,7 @@ index 2ea53dd..9788eac 100644
 @@ -96,7 +96,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 -  create_table "message_tag_links", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "タグリンクテーブル" do |t|
 +  create_table "message_tag_links", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグリンクテーブル" do |t|
      t.integer "message_id", null: false
@@ -629,7 +666,7 @@ index 2ea53dd..9788eac 100644
 @@ -104,7 +104,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["tag_id"], name: "index_message_tag_links_on_tag_id", using: :btree
    end
- 
+
 -  create_table "messages", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "問い合わせ" do |t|
 +  create_table "messages", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "問い合わせ" do |t|
      t.integer  "customer_id",                                   null: false
@@ -638,7 +675,7 @@ index 2ea53dd..9788eac 100644
 @@ -129,7 +129,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["type", "staff_member_id"], name: "index_messages_on_type_and_staff_member_id", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "電話" do |t|
 +  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -647,7 +684,7 @@ index 2ea53dd..9788eac 100644
 @@ -144,7 +144,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "programs", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "プログラム" do |t|
 +  create_table "programs", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "プログラム" do |t|
      t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
@@ -656,7 +693,7 @@ index 2ea53dd..9788eac 100644
 @@ -158,7 +158,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["registrant_id"], name: "index_programs_on_registrant_id", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -665,7 +702,7 @@ index 2ea53dd..9788eac 100644
 @@ -167,7 +167,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -674,7 +711,7 @@ index 2ea53dd..9788eac 100644
 @@ -184,7 +184,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "tags", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "タグ" do |t|
 +  create_table "tags", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグ" do |t|
      t.string   "value",      null: false
@@ -728,7 +765,7 @@ index 00b29d6..0ab32e8 100644
  + タグの追加・削除
  + JavaScriptプログラムの改善
 ++ 照合順序の変更
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/config/database.yml b/config/database.yml
@@ -775,9 +812,9 @@ index 1086b9a..2ea53dd 100644
 --- a/db/schema.rb
 +++ b/db/schema.rb
 @@ -12,7 +12,7 @@
- 
+
  ActiveRecord::Schema.define(version: 20170318093830) do
- 
+
 -  create_table "addresses", force: :cascade, comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -786,7 +823,7 @@ index 1086b9a..2ea53dd 100644
 @@ -33,7 +33,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -795,7 +832,7 @@ index 1086b9a..2ea53dd 100644
 @@ -43,7 +43,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "allowed_sources", force: :cascade, comment: "IPアドレス制限" do |t|
 +  create_table "allowed_sources", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "IPアドレス制限" do |t|
      t.string   "namespace",                  null: false, comment: "名前空間"
@@ -804,7 +841,7 @@ index 1086b9a..2ea53dd 100644
 @@ -55,7 +55,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -813,7 +850,7 @@ index 1086b9a..2ea53dd 100644
 @@ -84,7 +84,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "entries", force: :cascade, comment: "申し込み" do |t|
 +  create_table "entries", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "申し込み" do |t|
      t.integer  "program_id",                  null: false
@@ -822,7 +859,7 @@ index 1086b9a..2ea53dd 100644
 @@ -96,7 +96,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 -  create_table "message_tag_links", force: :cascade, comment: "タグリンクテーブル" do |t|
 +  create_table "message_tag_links", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "タグリンクテーブル" do |t|
      t.integer "message_id", null: false
@@ -831,7 +868,7 @@ index 1086b9a..2ea53dd 100644
 @@ -104,7 +104,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["tag_id"], name: "index_message_tag_links_on_tag_id", using: :btree
    end
- 
+
 -  create_table "messages", force: :cascade, comment: "問い合わせ" do |t|
 +  create_table "messages", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "問い合わせ" do |t|
      t.integer  "customer_id",                                   null: false
@@ -840,7 +877,7 @@ index 1086b9a..2ea53dd 100644
 @@ -129,7 +129,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["type", "staff_member_id"], name: "index_messages_on_type_and_staff_member_id", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, comment: "電話" do |t|
 +  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -849,7 +886,7 @@ index 1086b9a..2ea53dd 100644
 @@ -144,7 +144,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "programs", force: :cascade, comment: "プログラム" do |t|
 +  create_table "programs", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "プログラム" do |t|
      t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
@@ -858,7 +895,7 @@ index 1086b9a..2ea53dd 100644
 @@ -158,7 +158,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["registrant_id"], name: "index_programs_on_registrant_id", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -867,7 +904,7 @@ index 1086b9a..2ea53dd 100644
 @@ -167,7 +167,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -876,7 +913,7 @@ index 1086b9a..2ea53dd 100644
 @@ -184,7 +184,7 @@ ActiveRecord::Schema.define(version: 20170318093830) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "tags", force: :cascade, comment: "タグ" do |t|
 +  create_table "tags", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci", comment: "タグ" do |t|
      t.string   "value",      null: false
@@ -918,7 +955,7 @@ index fce025b..00b29d6 100644
  + タグの追加・削除インターフェース
  + タグの追加・削除
 ++ JavaScriptプログラムの改善
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/assets/javascripts/staff/messages.coffee b/app/assets/javascripts/staff/messages.coffee
@@ -927,7 +964,7 @@ index c6f7f19..85dbe8f 100644
 +++ b/app/assets/javascripts/staff/messages.coffee
 @@ -8,5 +8,5 @@ class Message
        window.setInterval(update_number_of_unprocessed_messages, 100 * 60)
- 
+
    update_number_of_unprocessed_messages = ->
 -    $.get window.paths.number_of_unprocessed_messages, (data) ->
 +    $.get window.path_for("count_staff_messages"), (data) ->
@@ -1012,7 +1049,7 @@ index 138dd5f..fce025b 100644
  + Tag-itのインストール
  + タグの追加・削除インターフェース
 ++ タグの追加・削除
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/assets/javascripts/staff/paths.coffee.erb b/app/assets/javascripts/staff/paths.coffee.erb
@@ -1031,7 +1068,7 @@ index 2df1d97..3024be0 100644
 --- a/app/assets/javascripts/staff/tag-it.coffee
 +++ b/app/assets/javascripts/staff/tag-it.coffee
 @@ -4,4 +4,15 @@ $(document).on "turbolinks:load", ->
- 
+
  class TagIt
    constructor: ->
 -    $("#tag-it").tagit()
@@ -1180,7 +1217,7 @@ index eb6ea81..138dd5f 100644
  + モデル間の関連付け
  + Tag-itのインストール
 ++ タグの追加・削除インターフェース
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/views/staff/messages/show.html.erb b/app/views/staff/messages/show.html.erb
@@ -1202,7 +1239,7 @@ index bfc7d1a..82cd9da 100644
 +      </td>
 +    </tr>
    </table>
- 
+
    <div class="tree"><%= p.tree %></div>
 
 ```
@@ -1278,7 +1315,7 @@ index 4da1b83..7d8acb2 100644
  gem 'momentjs-rails'
  gem 'bootstrap3-datetimepicker-rails'
 +gem 'tag-it-rails'
- 
+
 diff --git a/Gemfile.lock b/Gemfile.lock
 index 2610cc3..ac11a7f 100644
 --- a/Gemfile.lock
@@ -1310,7 +1347,7 @@ index 480e469..eb6ea81 100644
  + データベース設計
  + モデル間の関連付け
 ++ Tag-itのインストール
- 
+
  #### 一意制約と排他的ロック
  #### 演習問題  
 diff --git a/app/assets/javascripts/staff.js b/app/assets/javascripts/staff.js
@@ -1343,7 +1380,7 @@ index b0f45e1..6a01807 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -93,6 +93,8 @@
- 
+
  //jQuery
  @import "jquery-ui/datepicker";
 +@import "jquery-ui";
@@ -1353,4 +1390,3 @@ index b0f45e1..6a01807 100644
  // ===========================
 
 ```
-
