--- a/docs/journal/20170327.md
+++ b/docs/journal/20170327.md
@@ -2,9 +2,18 @@
 
 ## 概要
 
-2017-03-27の作業内容をまとめています。
+2017-03-27の作業内容をまとめています。このジャーナルでは、顧客向けメッセージ管理機能の拡張と改善を行いました。具体的には、顧客がメッセージを削除できる機能の追加、メッセージ詳細表示機能の実装、受信メッセージ一覧表示機能の実装などを行い、顧客とスタッフ間のコミュニケーション機能を強化しました。また、タグ付け機能における排他制御の問題を解決するための専用テーブルも実装しました。
 
-## コミット: 026976f
+## コミット: 026976f - 顧客によるメッセージ削除機能の実装
+
+### 概要
+顧客がメッセージを削除できる機能を実装しました。この機能により、顧客は受信したメッセージを必要に応じて削除することができます。実際には物理削除ではなく、`discarded`フラグを`true`に設定する論理削除を採用しています。
+
+### 技術的詳細
+- 顧客のメッセージ一覧画面に削除ボタンを追加
+- `destroy`アクションを実装し、メッセージの`discarded`フラグを更新
+- 一覧表示時に`discarded: false`の条件を追加して削除済みメッセージを非表示に
+- 削除確認ダイアログと成功時のフラッシュメッセージを追加
 
 ### メッセージ
 
@@ -20,6 +29,39 @@
 - M	config/locales/controllers/ja.yml
 - M	config/locales/views/ja.yml
 - M	config/routes.rb
+
+### 構造変更
+
+```plantuml
+@startuml
+title 顧客によるメッセージ削除機能
+
+actor "顧客" as Customer
+boundary "メッセージ一覧画面" as MessageList
+control "MessagesController" as Controller
+entity "StaffMessage" as Message
+database "Database" as DB
+
+Customer -> MessageList: 削除ボタンをクリック
+MessageList -> Controller: DELETE /messages/:id
+Controller -> Message: find(params[:id])
+Message -> Controller: メッセージオブジェクト
+Controller -> Message: update_column(:discarded, true)
+Message -> DB: 論理削除（discardedフラグ更新）
+Controller -> Customer: リダイレクト & フラッシュメッセージ表示
+
+note right of Message
+  物理削除ではなく論理削除を採用
+  discarded = true に設定
+end note
+
+note right of Controller
+  一覧表示時には
+  where(discarded: false)
+  の条件を追加
+end note
+@enduml
+```
 
 ### 変更内容
 
@@ -39,8 +81,8 @@ index 247365f..868fde6 100644
  + 問１
  + 問２
 ++ 問３
- 
- 
+
+
  **[⬆ back to top](#構成)**
 diff --git a/app/controllers/customer/messages_controller.rb b/app/controllers/customer/messages_controller.rb
 index f5e738a..2877f1e 100644
@@ -52,12 +94,12 @@ index f5e738a..2877f1e 100644
 -    @messages = current_customer.inbound_messages.page(params[:page])
 +    @messages = current_customer.inbound_messages.where(discarded: false).page(params[:page])
    end
- 
+
    def show
 @@ -38,6 +38,13 @@ class Customer::MessagesController < Customer::Base
      end
    end
- 
+
 +  def destroy
 +    message = StaffMessage.find(params[:id])
 +    message.update_column(:discarded, true)
@@ -90,7 +132,7 @@ index a67b2aa..4a4b989 100644
          flash_alert: '入力に誤りがあります。'
 +      destroy:
 +        flash_notice: 'メッセージを削除しました。'
- 
+
 diff --git a/config/locales/views/ja.yml b/config/locales/views/ja.yml
 index 761bdf3..7428b9e 100644
 --- a/config/locales/views/ja.yml
@@ -140,7 +182,17 @@ index 3270c80..66b0ef3 100644
 @enduml
 ```
 
-## コミット: 1ab342f
+## コミット: 1ab342f - メッセージ詳細表示機能の実装
+
+### 概要
+顧客がメッセージの詳細を閲覧できる機能を実装しました。これにより、顧客は受信したメッセージの全文や詳細情報を確認することができます。また、メッセージ一覧画面から詳細画面へのナビゲーションも改善しました。
+
+### 技術的詳細
+- `show`アクションを実装し、顧客の受信メッセージを取得して表示
+- メッセージ詳細表示用のビューテンプレートを新規作成
+- メッセージ一覧画面に詳細ページへのリンクを追加
+- スタイルの調整（Customer用のスタイルクラスを適用）
+- 共通のMessagePresenterを使用してコードの重複を削減
 
 ### メッセージ
 
@@ -158,6 +210,37 @@ index 3270c80..66b0ef3 100644
 - M	config/locales/views/ja.yml
 - M	config/routes.rb
 
+### 構造変更
+
+```plantuml
+@startuml
+title メッセージ詳細表示機能
+
+actor "顧客" as Customer
+boundary "メッセージ一覧画面" as MessageList
+boundary "メッセージ詳細画面" as MessageDetail
+control "MessagesController" as Controller
+entity "StaffMessage" as Message
+
+Customer -> MessageList: 詳細リンクをクリック
+MessageList -> Controller: GET /messages/:id
+Controller -> Message: current_customer.inbound_messages.find(params[:id])
+Message -> Controller: メッセージオブジェクト
+Controller -> MessageDetail: メッセージ情報を表示
+
+note right of Controller
+  セキュリティ対策として
+  current_customerに紐づく
+  メッセージのみ取得
+end note
+
+note right of MessageDetail
+  MessagePresenterを使用して
+  表示を整形
+end note
+@enduml
+```
+
 ### 変更内容
 
 ```diff
@@ -172,14 +255,14 @@ index a7d1c40..247365f 100644
 --- a/README.md
 +++ b/README.md
 @@ -790,6 +790,8 @@ git push heroku master
- 
+
  #### 演習問題  
  + 問１
 ++ 問２
 +
- 
+
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/app/controllers/customer/messages_controller.rb b/app/controllers/customer/messages_controller.rb
 index 5044849..f5e738a 100644
 --- a/app/controllers/customer/messages_controller.rb
@@ -187,7 +270,7 @@ index 5044849..f5e738a 100644
 @@ -3,6 +3,10 @@ class Customer::MessagesController < Customer::Base
      @messages = current_customer.inbound_messages.page(params[:page])
    end
- 
+
 +  def show
 +    @message = current_customer.inbound_messages.find(params[:id])
 +  end
@@ -204,10 +287,10 @@ index 130fd34..66ca706 100644
 -  <h1 class="Staff__title"><%= @title %></h1>
 +  <h1 class="Customer__title"><%= @title %></h1>
  </section>
- 
+
  <section class="Section l-column Table">
    <%= paginate @messages %>
- 
+
 -  <table class="Table__body Table__body--listing StaffTable__body">
 +  <table class="Table__body Table__body--listing CustomerTable__body">
      <tr class="Table__tr">
@@ -317,7 +400,18 @@ index a63affc..3270c80 100644
 @enduml
 ```
 
-## コミット: 346173e
+## コミット: 346173e - 顧客向けメッセージ一覧表示機能の実装
+
+### 概要
+顧客が受信したメッセージの一覧を表示する機能を実装しました。これにより、顧客はスタッフから送られたメッセージを一覧で確認できるようになります。また、メッセージ関連のコードをリファクタリングし、スタッフ向けと顧客向けで共通のプレゼンターを使用するように改善しました。
+
+### 技術的詳細
+- `index`アクションを実装し、顧客の受信メッセージを取得してページネーション付きで表示
+- 顧客モデルの`inbound_messages`関連付けを修正（`StaffMember`から`StaffMessage`に変更）
+- メッセージ一覧表示用のビューテンプレートを新規作成
+- 顧客ダッシュボードにメッセージ一覧へのリンクを追加
+- スタッフ専用のMessagePresenterを共通のMessagePresenterにリファクタリング
+- ルーティングを更新し、顧客がメッセージ一覧にアクセスできるように設定
 
 ### メッセージ
 
@@ -337,6 +431,40 @@ index a63affc..3270c80 100644
 - M	config/locales/views/ja.yml
 - M	config/routes.rb
 
+### 構造変更
+
+```plantuml
+@startuml
+title 顧客向けメッセージ一覧表示機能
+
+actor "顧客" as Customer
+boundary "ダッシュボード" as Dashboard
+boundary "メッセージ一覧画面" as MessageList
+control "MessagesController" as Controller
+entity "Customer" as CustomerModel
+entity "StaffMessage" as Message
+database "Database" as DB
+
+Customer -> Dashboard: メッセージ一覧リンクをクリック
+Dashboard -> Controller: GET /messages
+Controller -> CustomerModel: current_customer
+CustomerModel -> Message: inbound_messages.page(params[:page])
+Message -> DB: SELECT * FROM messages WHERE customer_id = ? AND type = 'StaffMessage'
+DB -> Controller: メッセージコレクション
+Controller -> MessageList: メッセージ一覧を表示
+
+note right of CustomerModel
+  inbound_messagesの関連付けを修正:
+  StaffMember → StaffMessage
+end note
+
+note right of MessageList
+  共通のMessagePresenterを使用して
+  表示を整形
+end note
+@enduml
+```
+
 ### 変更内容
 
 ```diff
@@ -352,12 +480,12 @@ index 267bd7f..a7d1c40 100644
 +++ b/README.md
 @@ -789,6 +789,7 @@ git push heroku master
  + 排他制御のための専用テーブルを作る
- 
+
  #### 演習問題  
 ++ 問１
- 
+
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/app/controllers/customer/messages_controller.rb b/app/controllers/customer/messages_controller.rb
 index 3b0c70e..5044849 100644
 --- a/app/controllers/customer/messages_controller.rb
@@ -381,7 +509,7 @@ index 1b01fa2..6c97b91 100644
    has_many :outbound_messages, class_name: 'CustomerMessage', foreign_key: 'customer_id'
 -  has_many :inbound_messages, class_name: 'StaffMember', foreign_key: 'customer_id'
 +  has_many :inbound_messages, class_name: 'StaffMessage', foreign_key: 'customer_id'
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 diff --git a/app/presenters/staff/message_presenter.rb b/app/presenters/message_presenter.rb
@@ -395,7 +523,7 @@ index 0a77e7d..207ec97 100644
 -class Staff::MessagePresenter < ModelPresenter
 +class MessagePresenter < ModelPresenter
    delegate :subject, :body, to: :object
- 
+
    def type
 diff --git a/app/views/customer/messages/index.html.erb b/app/views/customer/messages/index.html.erb
 new file mode 100644
@@ -528,7 +656,18 @@ index 3b44fdd..a63affc 100644
 @enduml
 ```
 
-## コミット: 6d6f908
+## コミット: 6d6f908 - タグ付け機能のための排他制御の実装
+
+### 概要
+タグの追加・削除処理における競合状態（race condition）を解決するため、排他制御のための専用テーブル（HashLock）を実装しました。これにより、複数のユーザーが同時に同じタグを操作した場合でも、データの整合性が保たれるようになります。
+
+### 技術的詳細
+- 排他制御用の`hash_locks`テーブルを作成
+- `HashLock`モデルを実装し、テーブル名・カラム名・キーの組み合わせによるロック機能を提供
+- メッセージのタグ追加・削除メソッドにロック処理を追加
+- MD5ハッシュの先頭2文字を使用して、256種類のロックキーを生成
+- シードデータとして256個のロックレコードを事前に作成
+- データベースのスキーマ設定を調整（照合順序の変更）
 
 ### メッセージ
 
@@ -548,6 +687,56 @@ index 3b44fdd..a63affc 100644
 - A	spec/factories/hash_locks.rb
 - A	spec/models/hash_lock_spec.rb
 
+### 構造変更
+
+```plantuml
+@startuml
+title タグ付け機能のための排他制御メカニズム
+
+actor "ユーザー1" as User1
+actor "ユーザー2" as User2
+control "Message#add_tag" as AddTag
+entity "HashLock" as HashLock
+entity "Tag" as Tag
+entity "MessageTagLink" as Link
+database "Database" as DB
+
+User1 -> AddTag: add_tag("important")
+User2 -> AddTag: add_tag("important")
+
+AddTag -> HashLock: acquire('tags', 'value', 'important')
+note right: MD5ハッシュの先頭2文字を使用\nDigest::MD5.hexdigest(value)[0,2]
+
+HashLock -> DB: SELECT FOR UPDATE
+note right: 排他的ロックを取得
+
+DB --> HashLock: ロック取得成功
+HashLock --> AddTag: ロック取得完了
+
+AddTag -> Tag: find_by(value: 'important')
+Tag --> AddTag: タグオブジェクト（または nil）
+
+alt タグが存在しない場合
+    AddTag -> Tag: create!(value: 'important')
+    Tag -> DB: INSERT
+end
+
+AddTag -> Link: message_tag_links.where(tag_id: tag.id).exists?
+Link --> AddTag: 関連付けの有無を確認
+
+alt 関連付けが存在しない場合
+    AddTag -> Link: message_tag_links.create!(tag_id: tag.id)
+    Link -> DB: INSERT
+end
+
+note across
+  トランザクション内で実行されるため、
+  全ての処理が成功するか、全て失敗するかのどちらか
+end note
+
+@enduml
+```
+
 ### 変更内容
 
 ```diff
@@ -563,13 +752,13 @@ index d9c1c78..267bd7f 100644
 +++ b/README.md
 @@ -785,6 +785,9 @@ git push heroku master
  + staff/messagesコントローラ
- 
+
  #### 一意制約と排他的ロック
 ++ 問題の所在
 ++ 排他制御のための専用テーブルを作る
 +
  #### 演習問題  
- 
+
  **[⬆ back to top](#構成)**
 diff --git a/app/models/hash_lock.rb b/app/models/hash_lock.rb
 new file mode 100644
@@ -608,7 +797,7 @@ index 723f9f9..3364e95 100644
 --- a/app/models/message.rb
 +++ b/app/models/message.rb
 @@ -69,6 +69,7 @@ class Message < ApplicationRecord
- 
+
    def add_tag(label)
      self.class.transaction do
 +      HashLock.acquire('tags','value',label)
@@ -616,7 +805,7 @@ index 723f9f9..3364e95 100644
        tag ||= Tag.create!(value: label)
        unless message_tag_links.where(tag_id: tag.id).exists?
 @@ -79,6 +80,7 @@ class Message < ApplicationRecord
- 
+
    def remove_tag(label)
      self.class.transaction do
 +      HashLock.acquire('tags','value',label)
@@ -648,10 +837,10 @@ index 0154c4b..27f7a1c 100644
 @@ -10,9 +10,9 @@
  #
  # It's strongly recommended that you check this file into your version control system.
- 
+
 -ActiveRecord::Schema.define(version: 20170325081203) do
 +ActiveRecord::Schema.define(version: 20170327081649) do
- 
+
 -  create_table "addresses", force: :cascade, comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -660,7 +849,7 @@ index 0154c4b..27f7a1c 100644
 @@ -33,7 +33,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -669,7 +858,7 @@ index 0154c4b..27f7a1c 100644
 @@ -43,7 +43,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "allowed_sources", force: :cascade, comment: "IPアドレス制限" do |t|
 +  create_table "allowed_sources", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "IPアドレス制限" do |t|
      t.string   "namespace",                  null: false, comment: "名前空間"
@@ -678,7 +867,7 @@ index 0154c4b..27f7a1c 100644
 @@ -55,7 +55,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -687,7 +876,7 @@ index 0154c4b..27f7a1c 100644
 @@ -84,7 +84,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "entries", force: :cascade, comment: "申し込み" do |t|
 +  create_table "entries", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "申し込み" do |t|
      t.integer  "program_id",                  null: false
@@ -696,7 +885,7 @@ index 0154c4b..27f7a1c 100644
 @@ -96,7 +96,16 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 -  create_table "message_tag_links", force: :cascade, comment: "タグリンクテーブル" do |t|
 +  create_table "hash_locks", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "排他制御" do |t|
 +    t.string   "table",      null: false, comment: "テーブル"
@@ -714,7 +903,7 @@ index 0154c4b..27f7a1c 100644
 @@ -104,7 +113,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["tag_id"], name: "index_message_tag_links_on_tag_id", using: :btree
    end
- 
+
 -  create_table "messages", force: :cascade, comment: "問い合わせ" do |t|
 +  create_table "messages", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "問い合わせ" do |t|
      t.integer  "customer_id",                                   null: false
@@ -723,7 +912,7 @@ index 0154c4b..27f7a1c 100644
 @@ -129,7 +138,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["type", "staff_member_id"], name: "index_messages_on_type_and_staff_member_id", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, comment: "電話" do |t|
 +  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -732,7 +921,7 @@ index 0154c4b..27f7a1c 100644
 @@ -144,7 +153,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "programs", force: :cascade, comment: "プログラム" do |t|
 +  create_table "programs", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "プログラム" do |t|
      t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
@@ -741,7 +930,7 @@ index 0154c4b..27f7a1c 100644
 @@ -158,7 +167,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["registrant_id"], name: "index_programs_on_registrant_id", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -750,7 +939,7 @@ index 0154c4b..27f7a1c 100644
 @@ -167,7 +176,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -759,7 +948,7 @@ index 0154c4b..27f7a1c 100644
 @@ -184,7 +193,7 @@ ActiveRecord::Schema.define(version: 20170325081203) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "tags", force: :cascade, comment: "タグ" do |t|
 +  create_table "tags", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグ" do |t|
      t.string   "value",      null: false
@@ -780,7 +969,7 @@ index beeaf0f..51e0dc6 100644
 --- a/db/seeds.rb
 +++ b/db/seeds.rb
 @@ -6,6 +6,15 @@
- 
+
  #   movies = Movie.create([{ name: 'Star Wars' }, { name: 'Lord of the Rings' }])
  #   Character.create(name: 'Luke', movie: movies.first)
 +common_table_names = %w(hash_locks)
@@ -863,4 +1052,3 @@ index 0000000..89576ad
 ' NewClass --> ExistingClass
 @enduml
 ```
-
