--- a/docs/journal/20170328.md
+++ b/docs/journal/20170328.md
@@ -2,7 +2,76 @@
 
 ## 概要
 
-2017-03-28の作業内容をまとめています。
+2017-03-28の作業内容をまとめています。このジャーナルでは、メッセージング機能の拡張として、顧客が問い合わせに対して返信できる機能の実装に関する作業を記録しています。
+
+## メッセージング機能の構成図
+
+```plantuml
+@startuml "Baukis-Kai メッセージング機能"
+!include <C4/C4_Component>
+
+Person(customer, "顧客", "システム利用者")
+Person(staff, "職員", "システム管理者")
+
+System_Boundary(messaging_system, "メッセージング機能") {
+    Component(message_model, "Message", "モデル", "メッセージの基底クラス")
+    Component(inbound_message, "InboundMessage", "モデル", "顧客からのメッセージ")
+    Component(outbound_message, "OutboundMessage", "モデル", "職員からのメッセージ")
+
+    Component(customer_messages_controller, "Customer::MessagesController", "コントローラ", "顧客側メッセージ管理")
+    Component(customer_replies_controller, "Customer::RepliesController", "コントローラ", "顧客側返信管理")
+    Component(staff_messages_controller, "Staff::MessagesController", "コントローラ", "職員側メッセージ管理")
+
+    Component(message_views, "メッセージビュー", "ビュー", "メッセージ表示画面")
+    Component(reply_views, "返信ビュー", "ビュー", "返信フォーム画面")
+    Component(confirm_views, "確認ビュー", "ビュー", "確認画面")
+}
+
+Rel(customer, customer_messages_controller, "メッセージ閲覧")
+Rel(customer, customer_replies_controller, "返信作成")
+Rel(staff, staff_messages_controller, "メッセージ管理")
+
+Rel(customer_messages_controller, message_model, "データ取得")
+Rel(customer_replies_controller, inbound_message, "返信作成")
+Rel(staff_messages_controller, message_model, "データ取得")
+Rel(staff_messages_controller, outbound_message, "返信作成")
+
+Rel(customer_messages_controller, message_views, "レンダリング")
+Rel(customer_replies_controller, reply_views, "レンダリング")
+Rel(customer_replies_controller, confirm_views, "確認画面表示")
+
+Rel(inbound_message, message_model, "継承")
+Rel(outbound_message, message_model, "継承")
+
+@enduml
+```
+
+## 作業内容
+
+### 顧客向け問い合わせ返信機能の実装
+
+顧客が職員からのメッセージに対して返信できる機能を実装しました。これにより、双方向のコミュニケーションが可能になり、顧客サービスの質が向上します。
+
+#### 変更点の概要
+
+1. 返信機能の追加
+   - 顧客が職員からのメッセージに返信できるコントローラを実装
+   - 返信フォームと確認画面のビューを作成
+   - 返信メッセージの表示機能を追加
+
+2. ルーティングの設定
+   - 顧客の返信機能に必要なルートを追加
+   - RESTfulなリソース設計に基づいたルーティング
+
+3. 多言語対応
+   - 日本語リソースファイルに返信機能関連の翻訳を追加
+
+#### 技術的詳細
+
+- 確認画面を含む2段階の送信プロセスを実装
+- 部分テンプレートを活用して共通部分を共有
+- メッセージの親子関係を活用した返信スレッドの管理
+- BEMに基づいたCSSクラス設計の継続的な適用
 
 ## コミット: a8091d0
 
@@ -101,9 +170,9 @@ index 868fde6..14a6731 100644
  + 問３
 -
 ++ 問４
- 
+
  **[⬆ back to top](#構成)**
- 
+
 diff --git a/app/controllers/customer/replies_controller.rb b/app/controllers/customer/replies_controller.rb
 new file mode 100644
 index 0000000..d6c2a7d
@@ -160,7 +229,7 @@ index 1fc6004..72fe615 100644
 +++ b/app/views/customer/messages/show.html.erb
 @@ -3,6 +3,9 @@
  </section>
- 
+
  <section class="Section l-column Table CustomerTable">
 +  <div class="Table__links">
 +    <%= link_to t('.reply'), new_customer_message_reply_path(@message), class:'btn btn-default' %>
@@ -279,7 +348,7 @@ index 4a4b989..97ff6e3 100644
 +        flash_notice: 'メッセージ返信しました。'
 +        flash_alert: '入力に誤りがあります。'
 +
- 
+
 diff --git a/config/locales/views/ja.yml b/config/locales/views/ja.yml
 index 7428b9e..94c8e8f 100644
 --- a/config/locales/views/ja.yml
@@ -343,9 +412,9 @@ index 27f7a1c..14ca97f 100644
 --- a/db/schema.rb
 +++ b/db/schema.rb
 @@ -12,7 +12,7 @@
- 
+
  ActiveRecord::Schema.define(version: 20170327081649) do
- 
+
 -  create_table "addresses", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "住所" do |t|
 +  create_table "addresses", force: :cascade, comment: "住所" do |t|
      t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
@@ -354,7 +423,7 @@ index 27f7a1c..14ca97f 100644
 @@ -33,7 +33,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city", using: :btree
    end
- 
+
 -  create_table "administrators", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "管理者" do |t|
 +  create_table "administrators", force: :cascade, comment: "管理者" do |t|
      t.string   "email",                           null: false, comment: "メールアドレス"
@@ -363,7 +432,7 @@ index 27f7a1c..14ca97f 100644
 @@ -43,7 +43,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
    end
- 
+
 -  create_table "allowed_sources", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "IPアドレス制限" do |t|
 +  create_table "allowed_sources", force: :cascade, comment: "IPアドレス制限" do |t|
      t.string   "namespace",                  null: false, comment: "名前空間"
@@ -372,7 +441,7 @@ index 27f7a1c..14ca97f 100644
 @@ -55,7 +55,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true, using: :btree
    end
- 
+
 -  create_table "customers", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "顧客" do |t|
 +  create_table "customers", force: :cascade, comment: "顧客" do |t|
      t.string   "email",            null: false, comment: "メールアドレス"
@@ -381,7 +450,7 @@ index 27f7a1c..14ca97f 100644
 @@ -84,7 +84,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["given_name_kana"], name: "index_customers_on_given_name_kana", using: :btree
    end
- 
+
 -  create_table "entries", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "申し込み" do |t|
 +  create_table "entries", force: :cascade, comment: "申し込み" do |t|
      t.integer  "program_id",                  null: false
@@ -390,7 +459,7 @@ index 27f7a1c..14ca97f 100644
 @@ -96,7 +96,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["program_id"], name: "index_entries_on_program_id", using: :btree
    end
- 
+
 -  create_table "hash_locks", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "排他制御" do |t|
 +  create_table "hash_locks", force: :cascade, comment: "排他制御" do |t|
      t.string   "table",      null: false, comment: "テーブル"
@@ -399,7 +468,7 @@ index 27f7a1c..14ca97f 100644
 @@ -105,7 +105,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["table", "column", "key"], name: "index_hash_locks_on_table_and_column_and_key", unique: true, using: :btree
    end
- 
+
 -  create_table "message_tag_links", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグリンクテーブル" do |t|
 +  create_table "message_tag_links", force: :cascade, comment: "タグリンクテーブル" do |t|
      t.integer "message_id", null: false
@@ -408,7 +477,7 @@ index 27f7a1c..14ca97f 100644
 @@ -113,7 +113,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["tag_id"], name: "index_message_tag_links_on_tag_id", using: :btree
    end
- 
+
 -  create_table "messages", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "問い合わせ" do |t|
 +  create_table "messages", force: :cascade, comment: "問い合わせ" do |t|
      t.integer  "customer_id",                                   null: false
@@ -417,7 +486,7 @@ index 27f7a1c..14ca97f 100644
 @@ -138,7 +138,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["type", "staff_member_id"], name: "index_messages_on_type_and_staff_member_id", using: :btree
    end
- 
+
 -  create_table "phones", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "電話" do |t|
 +  create_table "phones", force: :cascade, comment: "電話" do |t|
      t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
@@ -426,7 +495,7 @@ index 27f7a1c..14ca97f 100644
 @@ -153,7 +153,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["number_for_index"], name: "index_phones_on_number_for_index", using: :btree
    end
- 
+
 -  create_table "programs", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "プログラム" do |t|
 +  create_table "programs", force: :cascade, comment: "プログラム" do |t|
      t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
@@ -435,7 +504,7 @@ index 27f7a1c..14ca97f 100644
 @@ -167,7 +167,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["registrant_id"], name: "index_programs_on_registrant_id", using: :btree
    end
- 
+
 -  create_table "staff_events", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員イベント" do |t|
 +  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
      t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
@@ -444,7 +513,7 @@ index 27f7a1c..14ca97f 100644
 @@ -176,7 +176,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id", using: :btree
    end
- 
+
 -  create_table "staff_members", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "職員" do |t|
 +  create_table "staff_members", force: :cascade, comment: "職員" do |t|
      t.string   "email",                            null: false, comment: "メールアドレス"
@@ -453,7 +522,7 @@ index 27f7a1c..14ca97f 100644
 @@ -193,7 +193,7 @@ ActiveRecord::Schema.define(version: 20170327081649) do
      t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana", using: :btree
    end
- 
+
 -  create_table "tags", force: :cascade, options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", comment: "タグ" do |t|
 +  create_table "tags", force: :cascade, comment: "タグ" do |t|
      t.string   "value",      null: false
@@ -473,4 +542,3 @@ index 27f7a1c..14ca97f 100644
 ' NewClass --> ExistingClass
 @enduml
 ```
-
