--- a/docs/journal/20250424.md
+++ b/docs/journal/20250424.md
@@ -2,9 +2,29 @@
 
 ## 概要
 
-2025-04-24の作業内容をまとめています。
+2025-04-24の作業内容をまとめています。このジャーナルでは、システムの現状分析として「アーキテクチャ概要」と「ユースケース」の2つの重要なドキュメントを作成しました。これらのドキュメントは、Baukis-Kaiシステムの構造、機能、および利用パターンを包括的に説明し、開発チームや新しいメンバーがシステムを理解するための基盤となります。
 
-## コミット: 49163f7
+## コミット: 49163f7 - システムドキュメントの作成
+
+### 概要
+システムの現状分析として、アーキテクチャとユースケースに関する詳細なドキュメントを作成しました。これらのドキュメントは、システムの全体像を把握し、今後の開発や保守作業の指針となることを目的としています。
+
+### 技術的詳細
+- **アーキテクチャ概要**: システムの構造、層、コンポーネント間の関係を詳細に説明
+  - システム概要と主要機能
+  - 3つの主要サブシステム（スタッフ、顧客、管理者インターフェース）
+  - アプリケーション層構造（MVC拡張）
+  - 名前空間とインターフェース構造
+  - データモデルとその関連
+  - ビジネスフロー
+  - 認証・認可システム
+  - 配置アーキテクチャ
+  - 開発ガイドライン
+
+- **ユースケース**: システムの利用パターンを詳細に説明
+  - アクター（職員、顧客、管理者）の定義
+  - 各アクターのユースケース詳細
+  - ユースケース関連図
 
 ### メッセージ
 
@@ -990,7 +1010,7 @@ index 52f7251..55a3816 100644
  	"name": "Docker in Docker",
 -	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
  	"image": "baukis-kai",
- 
+
  	"features": {
 diff --git a/Dockerfile b/Dockerfile
 index 91daa36..c68b6cd 100644
@@ -1085,13 +1105,13 @@ index 91daa36..c68b6cd 100644
 -RUN apt-get install -y libssl1.0-dev
 -RUN ~/.rbenv/shims/gem install puma -v '3.6.0' --source 'https://rubygems.org/'
 +FROM baukis-kai
- 
+
  # Bundle install
  WORKDIR /srv
 @@ -92,4 +6,6 @@ COPY Gemfile /srv/Gemfile
  COPY Gemfile.lock /srv/Gemfile.lock
  RUN ~/.rbenv/shims/bundle install
- 
+
 -SHELL ["/bin/bash", "-c"]
 \ No newline at end of file
 +COPY . /srv
@@ -1205,14 +1225,14 @@ index 20b3b14..8067995 100644
 +++ b/README.md
 @@ -42,16 +42,12 @@ Baukis 改
     1. [検索フォーム](#検索フォーム)
- 
+
  ## アプリケーション環境構築
 -### Vagarntのセットアップ
 -```
 -vagrant up
 -vagrant ssh
 -```
- 
+
  ### Dockerのセットアップ
  ```
 -cd /vagrant/
@@ -1221,7 +1241,7 @@ index 20b3b14..8067995 100644
 +docker compose build
 +docker compose up -d
  ```
- 
+
  ### 追加Gemセットアップ
 diff --git a/docker-compose.yml b/docker-compose.yml
 index f15c0d7..1c4c872 100644
@@ -1272,7 +1292,7 @@ index f15c0d7..1c4c872 100644
 -      - web
 -    volumes:
 -      - ./nginx_default.conf:/etc/nginx/conf.d/default.conf
- 
+
    console:
      build:
        context: .
@@ -1322,7 +1342,7 @@ index 05ce7cf..40045d9 100644
 @@ -106,4 +106,6 @@ bower.json
  # Ignore Byebug command history file.
  .byebug_history
- 
+
 -public/assets/
 \ No newline at end of file
 +public/assets/
@@ -1451,7 +1471,7 @@ index 14a6731..20b3b14 100644
 -| vagrant        |1.8.7    |             |
  | docker         |1.12.5    |             |
  | docker-compose |1.8.0    |             |
- 
+
 diff --git a/Vagrantfile b/Vagrantfile
 deleted file mode 100644
 index b27838b..0000000
@@ -1705,11 +1725,11 @@ index 7d8acb2..40c2377 100644
 +++ b/Gemfile
 @@ -79,7 +79,7 @@ group :test do
  end
- 
+
  # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 -gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 +gem 'tzinfo-data'
- 
+
  gem 'font-awesome-rails'
  gem 'rails_12factor', group: :production
 @@ -94,5 +94,4 @@ gem 'email_validator', '~> 1.6'
@@ -1743,7 +1763,7 @@ index 544640b..c44d192 100644
    password: password
 -  host: 127.0.0.1
 +  host: <%= ENV.fetch("MYSQL_HOST", "127.0.0.1") %>
- 
+
  development:
    <<: *default
 diff --git a/config/environments/development.rb b/config/environments/development.rb
@@ -1752,7 +1772,7 @@ index 63bc608..cfacff4 100644
 +++ b/config/environments/development.rb
 @@ -53,9 +53,9 @@ Rails.application.configure do
    config.file_watcher = ActiveSupport::EventedFileUpdateChecker
- 
+
    config.baukis_kai = {
 -      staff: { host: '0.0.0.0', path: 'staff' },
 -      admin: { host: '0.0.0.0', path: 'admin' },
@@ -1762,7 +1782,7 @@ index 63bc608..cfacff4 100644
 +      customer: { host: '127.0.0.1', path: '' },
        restrict_ip_addresses: false
    }
- 
+
 diff --git a/docker-compose.yml b/docker-compose.yml
 index 52da61d..f15c0d7 100644
 --- a/docker-compose.yml
@@ -1813,4 +1833,3 @@ index 52da61d..f15c0d7 100644
 +    driver: local
 
 ```
-
