--- a/docs/journal/20250510.md
+++ b/docs/journal/20250510.md
@@ -2,7 +2,45 @@
 
 ## 概要
 
-2025-05-10の作業内容をまとめています。
+2025-05-10の作業内容をまとめています。このジャーナルでは、開発環境の改善とデータベーススキーマの最適化に関する作業を記録しています。
+
+## 開発環境構成図
+
+```plantuml
+@startuml "Baukis-Kai 開発環境構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(dev_env, "開発環境") {
+    Container(app, "アプリケーションコンテナ", "Ruby on Rails 7.2.2.1", "顧客管理システム")
+    Container(console, "作業コンテナ", "Ruby/AWS CLI/Terraform", "開発・運用ツール")
+    ContainerDb(db, "データベース", "MySQL 5.7", "アプリケーションデータ")
+}
+
+Rel(developer, app, "開発")
+Rel(developer, console, "運用作業")
+Rel(app, db, "データ操作", "ActiveRecord")
+Rel(console, db, "データ操作", "コマンドライン")
+
+@enduml
+```
+
+## 作業内容
+
+### 開発コンテナの改善
+
+開発環境の効率化と一貫性を確保するため、Docker環境の設定を見直しました。特に、作業用コンテナの追加とデータベーススキーマの最適化を行いました。
+
+#### 変更点の概要
+
+1. 作業用コンテナ（console）の追加
+   - AWS CLI、Terraform、Packerなどの運用ツールを含む
+   - 開発環境と本番環境の一貫性を確保
+
+2. データベーススキーマの最適化
+   - コメント部分の整理
+   - インデックス設定の統一
 
 ## コミット: 750fb96
 
@@ -31,9 +69,9 @@ index 14ca97f..04e130c 100644
 --- a/db/schema.rb
 +++ b/db/schema.rb
 @@ -12,203 +12,192 @@
- 
+
  ActiveRecord::Schema.define(version: 20170327081649) do
- 
+
 -  create_table "addresses", force: :cascade, comment: "住所" do |t|
 -    t.integer  "customer_id",                null: false, comment: "顧客への外部キー"
 -    t.string   "type",                       null: false, comment: "継承カラム"
@@ -71,7 +109,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["type", "customer_id"], name: "index_addresses_on_type_and_customer_id", unique: true
 +    t.index ["type", "prefecture", "city"], name: "index_addresses_on_type_and_prefecture_and_city"
    end
- 
+
 -  create_table "administrators", force: :cascade, comment: "管理者" do |t|
 -    t.string   "email",                           null: false, comment: "メールアドレス"
 -    t.string   "email_for_index",                 null: false, comment: "索引用メールアドレス"
@@ -87,7 +125,7 @@ index 14ca97f..04e130c 100644
 -    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true, using: :btree
 +    t.index ["email_for_index"], name: "index_administrators_on_email_for_index", unique: true
    end
- 
+
 -  create_table "allowed_sources", force: :cascade, comment: "IPアドレス制限" do |t|
 -    t.string   "namespace",                  null: false, comment: "名前空間"
 -    t.integer  "octet1",                     null: false, comment: "第１オクテット"
@@ -107,7 +145,7 @@ index 14ca97f..04e130c 100644
 -    t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true, using: :btree
 +    t.index ["namespace", "octet1", "octet2", "octet3", "octet4"], name: "index_allowed_sources_on_namespace_and_octets", unique: true
    end
- 
+
 -  create_table "customers", force: :cascade, comment: "顧客" do |t|
 -    t.string   "email",            null: false, comment: "メールアドレス"
 -    t.string   "email_for_index",  null: false, comment: "顧客用メールアドレス"
@@ -161,7 +199,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["gender", "family_name_kana", "given_name_kana"], name: "index_customers_on_gender_and_furigana"
 +    t.index ["given_name_kana"], name: "index_customers_on_given_name_kana"
    end
- 
+
 -  create_table "entries", force: :cascade, comment: "申し込み" do |t|
 +  create_table "entries", force: :cascade do |t|
      t.integer  "program_id",                  null: false
@@ -179,7 +217,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["program_id", "customer_id"], name: "index_entries_on_program_id_and_customer_id", unique: true
 +    t.index ["program_id"], name: "index_entries_on_program_id"
    end
- 
+
 -  create_table "hash_locks", force: :cascade, comment: "排他制御" do |t|
 -    t.string   "table",      null: false, comment: "テーブル"
 -    t.string   "column",     null: false, comment: "カラム"
@@ -193,7 +231,7 @@ index 14ca97f..04e130c 100644
 -    t.index ["table", "column", "key"], name: "index_hash_locks_on_table_and_column_and_key", unique: true, using: :btree
 +    t.index ["table", "column", "key"], name: "index_hash_locks_on_table_and_column_and_key", unique: true
    end
- 
+
 -  create_table "message_tag_links", force: :cascade, comment: "タグリンクテーブル" do |t|
 +  create_table "message_tag_links", force: :cascade do |t|
      t.integer "message_id", null: false
@@ -205,7 +243,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["message_id"], name: "index_message_tag_links_on_message_id"
 +    t.index ["tag_id"], name: "index_message_tag_links_on_tag_id"
    end
- 
+
 -  create_table "messages", force: :cascade, comment: "問い合わせ" do |t|
 +  create_table "messages", force: :cascade do |t|
      t.integer  "customer_id",                                   null: false
@@ -249,7 +287,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["type", "customer_id"], name: "index_messages_on_type_and_customer_id"
 +    t.index ["type", "staff_member_id"], name: "index_messages_on_type_and_staff_member_id"
    end
- 
+
 -  create_table "phones", force: :cascade, comment: "電話" do |t|
 -    t.integer  "customer_id",                      null: false, comment: "顧客への外部キー"
 -    t.integer  "address_id",                                    comment: "住所への外部キー"
@@ -275,7 +313,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["last_four_digits"], name: "index_phones_on_last_four_digits"
 +    t.index ["number_for_index"], name: "index_phones_on_number_for_index"
    end
- 
+
 -  create_table "programs", force: :cascade, comment: "プログラム" do |t|
 -    t.integer  "registrant_id",                            null: false, comment: "登録職員（外部キー）"
 -    t.string   "title",                                    null: false, comment: "タイトル"
@@ -299,7 +337,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["application_start_time"], name: "index_programs_on_application_start_time"
 +    t.index ["registrant_id"], name: "index_programs_on_registrant_id"
    end
- 
+
 -  create_table "staff_events", force: :cascade, comment: "職員イベント" do |t|
 -    t.integer  "staff_member_id", null: false, comment: "職員レコードへの外部キー"
 -    t.string   "type",            null: false, comment: "イベントタイプ"
@@ -315,7 +353,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["staff_member_id", "created_at"], name: "index_staff_events_on_staff_member_id_and_created_at"
 +    t.index ["staff_member_id"], name: "index_staff_events_on_staff_member_id"
    end
- 
+
 -  create_table "staff_members", force: :cascade, comment: "職員" do |t|
 -    t.string   "email",                            null: false, comment: "メールアドレス"
 -    t.string   "email_for_index",                  null: false, comment: "索引用メールアドレス"
@@ -345,7 +383,7 @@ index 14ca97f..04e130c 100644
 +    t.index ["email_for_index"], name: "index_staff_members_on_email_for_index", unique: true
 +    t.index ["family_name_kana", "given_name_kana"], name: "index_staff_members_on_family_name_kana_and_given_name_kana"
    end
- 
+
 -  create_table "tags", force: :cascade, comment: "タグ" do |t|
 +  create_table "tags", force: :cascade do |t|
      t.string   "value",      null: false
@@ -354,7 +392,7 @@ index 14ca97f..04e130c 100644
 -    t.index ["value"], name: "index_tags_on_value", unique: true, using: :btree
 +    t.index ["value"], name: "index_tags_on_value", unique: true
    end
- 
+
 -  add_foreign_key "addresses", "customers"
 -  add_foreign_key "entries", "customers"
 -  add_foreign_key "entries", "programs"
@@ -396,7 +434,7 @@ index d6064ce..60075e0 100644
      depends_on:
        - db
      stdin_open: true
- 
+
  volumes:
    mysql-db:
 -    driver: local
@@ -534,4 +572,3 @@ index 1c4c872..d6064ce 100644
        MYSQL_PORT: 3306
 
 ```
-
