--- a/docs/journal/20250608.md
+++ b/docs/journal/20250608.md
@@ -2,7 +2,52 @@
 
 ## 概要
 
-2025-06-08の作業内容をまとめています。
+2025-06-08の作業内容をまとめています。このジャーナルでは、アプリケーションのリリース準備に関する作業を記録しています。主に、バージョン情報の更新とビューテンプレートの修正が行われました。
+
+## リリース準備構成図
+
+```plantuml
+@startuml "Baukis-Kai リリース準備"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(release_prep, "リリース準備") {
+    Container(docs, "ドキュメント", "README.md", "バージョン情報更新")
+
+    System_Boundary(views, "ビューテンプレート") {
+        Container(admin_views, "管理者ビュー", "ERB", "フッターと管理画面")
+        Container(staff_views, "職員ビュー", "ERB", "フッターとトップページ")
+        Container(customer_views, "顧客ビュー", "ERB", "フッター")
+    }
+}
+
+Rel(developer, docs, "更新")
+Rel(developer, admin_views, "修正")
+Rel(developer, staff_views, "修正")
+Rel(developer, customer_views, "修正")
+
+@enduml
+```
+
+## 作業内容
+
+### リリース準備
+
+アプリケーションのリリースに向けて、ドキュメントとビューテンプレートの更新を行いました。特に、最新の技術スタック情報への更新と、ユーザーインターフェースの改善に焦点を当てました。
+
+#### 変更点の概要
+
+1. README.mdの更新
+   - Ruby バージョンを 3.4.0 から 3.4.4 に更新
+   - Rails 5 から Rails 7 へのアップグレード情報を追加
+   - Docker バージョン情報の更新
+
+2. ビューテンプレートの修正
+   - 管理者、職員、顧客向けのフッターを更新
+   - 管理者と職員のトップページを更新
+   - 著作権表示の年を更新
+   - お知らせ情報の追加
 
 ## コミット: 3d82042
 
@@ -37,7 +82,7 @@ index 118d3f7..ce5f121 100644
 +| ruby           | 3.4.4   |             |
  | rails          | 7.2.2.1 |             |
  | docker         | 28.1.1  |             |
- 
+
 
 ```
 
@@ -69,7 +114,7 @@ index 0c30af0..118d3f7 100644
 @@ -5,13 +5,14 @@ Baukis 改
  # 目的 #
  [実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)をRails5での実装及びフロント部分にモダンCSS設計(BEM)を組み込む
- 
+
 +Rails5からRails7にアップグレードする
 +
  # 前提 #
@@ -80,7 +125,7 @@ index 0c30af0..118d3f7 100644
 -| docker         | 1.12.5  |             |
 -| docker-compose | 1.8.0   |             |
 +| docker         | 28.1.1  |             |
- 
+
  # 構成 #
  1. [アプリケーション環境構築](#アプリケーション環境構築)
 
@@ -215,10 +260,10 @@ index 7c335bc..0c30af0 100644
  ===================
 -[![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![Code Climate](https://codeclimate.com/github/k2works/baukis-kai/badges/gpa.svg)](https://codeclimate.com/github/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt)
 +[![GitHub Actions](https://github.com/k2works/baukis-kai/actions/workflows/CI.yml/badge.svg)](https://github.com/k2works/baukis-kai/actions) [![Code Climate](https://codeclimate.com/github/k2works/baukis-kai/badges/gpa.svg)](https://codeclimate.com/github/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt)
- 
+
  # 目的 #
  [実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)をRails5での実装及びフロント部分にモダンCSS設計(BEM)を組み込む
- 
+
  # 前提 #
  | ソフトウェア   | バージョン   | 備考        |
 -|:---------------|:-------------|:------------|
@@ -231,7 +276,7 @@ index 7c335bc..0c30af0 100644
 +| rails          | 7.2.2.1 |             |
 +| docker         | 1.12.5  |             |
 +| docker-compose | 1.8.0   |             |
- 
+
  # 構成 #
  1. [アプリケーション環境構築](#アプリケーション環境構築)
 @@ -61,6 +61,7 @@ docker compose up -d
@@ -239,9 +284,9 @@ index 7c335bc..0c30af0 100644
  + RSpecの初期設定
  + Factory Girlの初期設定
 ++ Factory Botに変更
- 
+
  **[⬆ back to top](#構成)**
- 
+
 
 ```
 
@@ -267,7 +312,7 @@ Author: k2works <kakimomokuri@gmail.com>
 Date:   Sun Jun 8 11:10:20 2025 +0900
 
     Merge branch 'master' into develop
-    
+
     # Conflicts:
     #       .gitignore
 
@@ -305,7 +350,7 @@ index 2414e30..6342b22 100644
 --- a/app/controllers/staff/customers_controller.rb
 +++ b/app/controllers/staff/customers_controller.rb
 @@ -22,7 +22,7 @@ class Staff::CustomersController < Staff::Base
- 
+
    def create
      @customer_form = Staff::CustomerForm.new
 -    @customer_form.assign_attributes(params.require(:form))
@@ -314,7 +359,7 @@ index 2414e30..6342b22 100644
        flash.notice = t('.flash_notice')
        redirect_to action: 'index'
 @@ -34,7 +34,7 @@ class Staff::CustomersController < Staff::Base
- 
+
    def update
      @customer_form = Staff::CustomerForm.new(Customer.find(params[:id]))
 -    @customer_form.assign_attributes(params.require(:form))
@@ -327,7 +372,7 @@ index af0ff3d..c002f20 100644
 --- a/app/forms/staff/customer_form.rb
 +++ b/app/forms/staff/customer_form.rb
 @@ -6,14 +6,14 @@ class Staff::CustomerForm
- 
+
    def initialize(customer = nil)
      @customer = customer
 -    @customer ||= Customer.new(gender: 'male')
@@ -345,7 +390,7 @@ index af0ff3d..c002f20 100644
        @customer.home_address.phones.build
      end
 @@ -24,12 +24,13 @@ class Staff::CustomerForm
- 
+
    def assign_attributes(params = {})
      @params = params
 -    self.inputs_home_address = params[:inputs_home_address] == '1'
@@ -353,9 +398,9 @@ index af0ff3d..c002f20 100644
 +
 +    self.inputs_home_address = (params[:inputs_home_address] == '1')
 +    self.inputs_work_address = (params[:inputs_work_address] == '1')
- 
+
      customer.assign_attributes(customer_params)
- 
+
 -    phones = phone_params(:customer)[:phones] || {}
 +    phones = phone_params(:customer).fetch(:phones)
      customer.personal_phones.size.times do |index|
@@ -364,7 +409,7 @@ index af0ff3d..c002f20 100644
 @@ -42,7 +43,7 @@ class Staff::CustomerForm
      if inputs_home_address
        customer.home_address.assign_attributes(home_address_params)
- 
+
 -      phones = phone_params(:home_address)[:phones] || {}
 +      phones = phone_params(:home_address).fetch(:phones)
        customer.home_address.phones.size.times do |index|
@@ -377,7 +422,7 @@ index af0ff3d..c002f20 100644
 +
      if inputs_work_address
        customer.work_address.assign_attributes(work_address_params)
- 
+
 -      phones = phone_params(:work_address)[:phones] || {}
 +      phones = phone_params(:work_address).fetch(:phones)
        customer.work_address.phones.size.times do |index|
@@ -386,7 +431,7 @@ index af0ff3d..c002f20 100644
 @@ -71,46 +73,31 @@ class Staff::CustomerForm
      end
    end
- 
+
 -  private
 -  def customer_params
 -    @params.require(:customer).permit(
@@ -402,7 +447,7 @@ index af0ff3d..c002f20 100644
 +  def save
 +    customer.save
    end
- 
+
 -  def home_address_params
 -    @params.require(:home_address).permit(
 -                                     :postal_code,
@@ -417,7 +462,7 @@ index af0ff3d..c002f20 100644
 +      :family_name, :given_name, :family_name_kana, :given_name_kana,
 +      :birthday, :gender)
    end
- 
+
 -  def work_address_params
 -    @params.require(:work_address).permit(
 -                                      :postal_code,
@@ -438,7 +483,7 @@ index af0ff3d..c002f20 100644
 +      :postal_code, :prefecture, :city, :address1, :address2,
 +      :company_name, :division_name)
    end
- 
+
 -  def phone_params(record_name)
 -    @params.require(record_name).permit(phones: [ :number, :primary ])
 -  rescue ActionController::ParameterMissing
@@ -458,14 +503,14 @@ index 503bf41..44772e3 100644
 +++ b/app/models/address.rb
 @@ -30,7 +30,10 @@ class Address < ApplicationRecord
    include StringNormalizer
- 
+
    belongs_to :customer
 -  has_many :phones, -> { order(:id) }, dependent: :destroy, autosave: true
 +  has_many :phones,
 +           -> { order(:id) },
 +           dependent: :destroy,
 +           autosave: true
- 
+
    before_validation do
      self.postal_code = normalize_as_postal_code(postal_code)
 @@ -49,8 +52,7 @@ class Address < ApplicationRecord
@@ -475,7 +520,7 @@ index 503bf41..44772e3 100644
 -    日本国外
 -  )
 +    日本国外)
- 
+
    validates :postal_code, format: { with: /\A\d{7}\z/, allow_blank: true }
    validates :prefecture, inclusion: { in: PREFECTURE_NAMES, allow_blank: true }
 diff --git a/app/models/customer.rb b/app/models/customer.rb
@@ -492,7 +537,7 @@ index 9497b11..d61ffce 100644
    include EmailHolder
    include PersonalNameHolder
    include PasswordHolder
- 
+
    has_many :addresses, dependent: :destroy
 -  has_one :home_address, class_name: 'HomeAddress', autosave: true
 -  has_one :work_address, class_name: 'WorkAddress', autosave: true
@@ -509,7 +554,7 @@ index 9497b11..d61ffce 100644
 +           -> { where(address_id: nil).order(:id) },
 +           class_name: 'Phone',
 +           autosave: true
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 -      after: Date.new(1900,1,1),
@@ -519,7 +564,7 @@ index 9497b11..d61ffce 100644
 +    before: ->(obj) { Date.today },
 +    allow_blank: true
    }
- 
+
    before_save do
 @@ -64,4 +62,4 @@ class Customer < ApplicationRecord
        self.birth_mday = birthday.mday
@@ -535,12 +580,12 @@ index 94e92f9..ea574df 100644
 @@ -23,20 +23,19 @@
  class Phone < ApplicationRecord
    include StringNormalizer
- 
+
 -  belongs_to :customer
 -  belongs_to :address
 +  belongs_to :customer, optional: true
 +  belongs_to :address, optional: true
- 
+
    before_validation do
      self.number = normalize_as_phone_number(number)
      self.number_for_index = number.gsub(/\D/, '') if number
@@ -548,11 +593,11 @@ index 94e92f9..ea574df 100644
 -      self.last_four_digits = number_for_index[-4, 4]
 -    end
    end
- 
+
    before_create do
      self.customer = address.customer if address
    end
- 
+
 -  validates :number, presence: true, format: { with: /\A\+?\d+(-\d+)*\z/, allow_blank: true }
 -end
 +  validates :number,
@@ -567,17 +612,17 @@ index 0d14c3f..8cd2548 100644
 @@ -26,44 +26,48 @@ given_names = %w{
    亀子:カメコ:kameko
  }
- 
+
 -company_names = %w(OIAX ABC XYZ)
 +company_names = %w(BURDOCK CARROT SPINACH)
- 
+
  10.times do |n|
    10.times do |m|
 -    fn = family_names[n].split(':')
 -    gn = given_names[m].split(':')
 +    fn = family_names[n].split(":")
 +    gn = given_names[m].split(":")
- 
+
      c = Customer.create!(
 -        email: "#{fn[2]}.#{gn[2]}-#{n}@example.jp",
 -        family_name: fn[0],
@@ -651,4 +696,3 @@ index 0d14c3f..8cd2548 100644
 ' NewClass --> ExistingClass
 @enduml
 ```
-
