--- a/docs/journal/20250609.md
+++ b/docs/journal/20250609.md
@@ -2,7 +2,49 @@
 
 ## 概要
 
-2025-06-09の作業内容をまとめています。
+2025-06-09の作業内容をまとめています。このジャーナルでは、プロジェクトのドキュメント改善、特にREADMEファイルの更新と構造化に関する作業を記録しています。
+
+## ドキュメント構造図
+
+```plantuml
+@startuml "Baukis-Kai ドキュメント構造"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(docs, "ドキュメント") {
+    Container(readme, "README.md", "マークダウン", "プロジェクト概要ドキュメント")
+
+    System_Boundary(sections, "主要セクション") {
+        Container(specs, "仕様", "マークダウン", "基本仕様・ユースケース・コアモデル")
+        Container(setup, "環境構築", "マークダウン", "アプリケーション環境構築手順")
+        Container(deploy, "配置", "マークダウン", "デプロイメント手順")
+        Container(dev, "開発", "マークダウン", "アプリケーション開発ガイド")
+    }
+}
+
+Rel(developer, readme, "参照・更新")
+Rel(readme, specs, "含む")
+Rel(readme, setup, "含む")
+Rel(readme, deploy, "含む")
+Rel(readme, dev, "含む")
+
+@enduml
+```
+
+## 作業内容
+
+### ドキュメント改善
+
+プロジェクトの理解と利用を容易にするため、READMEファイルの大幅な改善を行いました。特に、Quick Start手順の追加、仕様セクションの拡充、および全体構造の整理に焦点を当てました。
+
+#### 変更点の概要
+
+1. Quick Start手順の追加（Docker環境での起動方法）
+2. 仕様セクションの追加（基本仕様、ユースケース、コアモデル）
+3. 構成セクションの整理と更新
+4. 古い環境構築手順の削除（Vagrant関連）
+5. CI/CD関連の記述をCircleCIからGitHub Actionsに更新
 
 ## コミット: cf20bcc
 
@@ -32,7 +74,7 @@ index ce5f121..5406c95 100644
 @@ -14,16 +14,28 @@ Rails5からRails7にアップグレードする
  | rails          | 7.2.2.1 |             |
  | docker         | 28.1.1  |             |
- 
+
 +# Quick Start #
 +
 +```
@@ -64,7 +106,7 @@ index ce5f121..5406c95 100644
 @@ -42,15 +54,142 @@ Rails5からRails7にアップグレードする
     1. [フォームオブジェクト](#フォームオブジェクト)
     1. [検索フォーム](#検索フォーム)
- 
+
 -## アプリケーション環境構築
 -
 -### Dockerのセットアップ
@@ -203,22 +245,21 @@ index ce5f121..5406c95 100644
 ++sent_at: datetime
 +}
  ```
- 
+
 +
 +## アプリケーション環境構築
 +
  ### 追加Gemセットアップ
- 
+
  ### その他の準備作業
 @@ -74,7 +213,7 @@ heroku create baukis-kai
  git push heroku master
  ```
- 
+
 -### CircleCIセットアップ
 +### GitHubActionセットアップ
- 
+
  **[⬆ back to top](#構成)**
  ## アプリケーション開発
 
 ```
-
