--- a/docs/journal/20250610.md
+++ b/docs/journal/20250610.md
@@ -2,7 +2,59 @@
 
 ## 概要
 
-2025-06-10の作業内容をまとめています。
+2025-06-10の作業内容をまとめています。このジャーナルでは、E2Eテスト環境の構築と実装に関する作業を記録しています。
+
+## システム構成図
+
+```plantuml
+@startuml "Baukis-Kai テスト環境構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(test_env, "テスト環境") {
+    Container(rails_app, "Rails アプリケーション", "Ruby on Rails 7.2.2.1", "顧客管理システム")
+    Container(chrome, "Chrome", "ブラウザ", "E2Eテスト用ブラウザ")
+    ContainerDb(db, "テストデータベース", "MySQL", "テスト用データを格納")
+}
+
+Rel(developer, rails_app, "開発・テスト実行")
+Rel(rails_app, chrome, "E2Eテスト実行", "Capybara + Selenium")
+Rel(rails_app, db, "データ操作", "ActiveRecord")
+
+@enduml
+```
+
+## 作業内容
+
+### E2Eテスト環境の構築
+
+E2Eテスト（End-to-End テスト）は、アプリケーションの全体的な機能を検証するために重要です。今回の作業では、Capybaraとselenium-webdriverを使用したE2Eテスト環境を整備しました。
+
+#### 変更点の概要
+
+1. テスト用の設定ファイルの修正
+2. テストデータのファクトリ設定の更新
+3. プログラム管理機能のE2Eテストの実装
+
+#### 技術的詳細
+
+```plantuml
+@startuml "E2Eテスト構成"
+package "テストフレームワーク" {
+  [RSpec] --> [Capybara]
+  [Capybara] --> [Selenium WebDriver]
+  [Selenium WebDriver] --> [Chrome]
+}
+
+package "テストデータ" {
+  [FactoryBot] --> [テストデータベース]
+}
+
+[テストコード] --> [RSpec]
+[テストコード] --> [FactoryBot]
+@enduml
+```
 
 ## コミット: 75931b2
 
@@ -63,7 +115,7 @@ index 68decf9..6dc2a58 100644
 --- a/spec/factories/entries.rb
 +++ b/spec/factories/entries.rb
 @@ -19,6 +19,9 @@
- 
+
  FactoryBot.define do
    factory :entry do
 -    
@@ -79,7 +131,7 @@ index 413731f..190110a 100644
 +++ b/spec/features/staff/program_management_spec.rb
 @@ -1,35 +1,82 @@
  require 'rails_helper'
- 
+
 -feature 'プログラム管理機能', :performace do
 +feature '職員によるプログラム管理' do
    include FeaturesSpecHelper
@@ -88,7 +140,7 @@ index 413731f..190110a 100644
 +  let!(:program) { create(:program, registrant: staff_member) }
 +  let(:customer) { create(:customer) }
 +  let!(:entry) { create(:entry, program: program, customer: customer) }
- 
+
    before do
 -    20.times do |n|
 -      p  = create(:program, application_start_time: n.days.ago.midnight)
@@ -101,7 +153,7 @@ index 413731f..190110a 100644
      switch_namespace(:staff)
      login_as_staff_member(staff_member)
    end
- 
+
 -  scenario 'プログラム一覧' do |example|
 +  scenario '職員がプログラム一覧を表示する' do
      visit staff_programs_path
@@ -116,7 +168,7 @@ index 413731f..190110a 100644
 +    expect(page).to have_content(program.title)
 +    expect(page).to have_content(program.description)
 +  end
- 
+
 -    elapsed = Benchmark.realtime do
 -      100.times do
 -        visit staff_programs_path
@@ -138,13 +190,13 @@ index 413731f..190110a 100644
 +    fill_in I18n.t('activerecord.attributes.program.max_number_of_participants'), with: '10'
 +
 +    click_button I18n.t('staff.programs.new.create')
- 
+
 -    write_to_performance_log(example, elapsed)
 -    expect(elapsed).to be < 100.0
 +    expect(page).to have_css('.Flash__notice', text: I18n.t('staff.programs.create.flash_notice'))
 +    expect(Program.find_by(title: 'New Program')).to be_present
    end
- 
+
 +  scenario '職員がプログラムを編集する' do
 +    visit staff_programs_path
 +    click_link I18n.t('staff.programs.form.edit')
@@ -208,7 +260,7 @@ index 0cf4a1e..c6d8421 100644
 +++ b/app/controllers/customer/programs_controller.rb
 @@ -4,6 +4,6 @@ class Customer::ProgramsController < Customer::Base
    end
- 
+
    def show
 -    @program = Program.published.find(params[:id])
 +    @program = Program.published.find_by(params[:id])
@@ -219,7 +271,7 @@ index 8341e2d..a2230b8 100644
 --- a/spec/features/customer/program_management_spec.rb
 +++ b/spec/features/customer/program_management_spec.rb
 @@ -19,50 +19,37 @@ feature '顧客によるプログラム管理' do
- 
+
    scenario '顧客がプログラム詳細を閲覧する' do
      visit customer_programs_path
 -    click_link program.title
@@ -230,7 +282,7 @@ index 8341e2d..a2230b8 100644
 +    expect(page).to have_content(program.title)
      expect(page).to have_content(program.description)
    end
- 
+
    scenario '顧客がプログラムを予約する' do
      visit customer_program_path(program)
 -    click_link I18n.t('customer.programs.show.apply')
@@ -238,12 +290,12 @@ index 8341e2d..a2230b8 100644
 -    fill_in I18n.t('activerecord.attributes.entry.remarks'), with: 'テスト予約'
 -    click_button I18n.t('customer.entries.new.submit')
 +    click_button I18n.t('customer.programs.show.apply')
-     
+
 -    expect(page).to have_css('.notice', text: I18n.t('customer.entries.create.notice'))
 +    expect(page).to have_css('.Flash__notice', text: I18n.t('customer.entries.create.flash_notice'))
      expect(Entry.find_by(program: program, customer: customer)).to be_present
    end
- 
+
    scenario '顧客が予約をキャンセルする' do
 -    entry = create(:entry, program: program, customer: customer)
 -    
@@ -261,7 +313,7 @@ index 8341e2d..a2230b8 100644
 +    expect(page).to have_css('.Flash__notice', text: I18n.t('customer.entries.cancel.flash_notice'))
 +    expect(Entry.find_by(program: program, customer: customer).canceled).to be true
    end
- 
+
    scenario '顧客が予約期間外のプログラムを予約しようとする' do
 -    closed_program = create(:program, application_start_time: 10.days.from_now, application_end_time: 20.days.from_now)
 -    
@@ -273,14 +325,14 @@ index 8341e2d..a2230b8 100644
 +    Program.delete_all
 +    closed_program = create(:program, application_start_time: 20.days.ago, application_end_time: 10.days.ago)
 +    visit customer_programs_path
- 
+
 -  scenario '顧客が定員超過のプログラムを予約しようとする' do
 -    full_program = create(:program, application_start_time: 2.days.ago, application_end_time: 2.days.from_now, max_number_of_participants: 1)
 -    create(:entry, program: full_program) # Fill the program
 -    
 -    visit customer_program_path(full_program)
 +    visit customer_program_path(closed_program)
-     
+
 -    expect(page).not_to have_link(I18n.t('customer.programs.show.apply'))
 -    expect(page).to have_content(I18n.t('customer.programs.show.full'))
 +    expect(page).to have_button(I18n.t('customer.programs.show.closed'), disabled: true)
@@ -328,27 +380,27 @@ index 8d89046..51eb39c 100644
 --- "a/docs/\343\203\246\343\203\274\343\202\271\343\202\261\343\203\274\343\202\271.md"
 +++ "b/docs/\343\203\246\343\203\274\343\202\271\343\202\261\343\203\274\343\202\271.md"
 @@ -2,58 +2,58 @@
- 
+
  ## 1. 概要
- 
+
 -このドキュメントはBaukis-Kaiシステムの主要なユースケースを定義します。システムは主に3つのユーザータイプ（スタッフ、顧客、管理者）向けの機能を提供しています。
 +このドキュメントはBaukis-Kaiシステムの主要なユースケースを定義します。システムは主に3つのユーザータイプ（職員、顧客、管理者）向けの機能を提供しています。
- 
+
  ## 2. アクター定義
- 
+
  システムには以下の主要なアクターが存在します：
- 
+
 -1. **スタッフ**: 顧客情報管理、プログラム管理、顧客とのコミュニケーションを担当する組織の従業員
 +1. **職員**: 顧客情報管理、プログラム管理、顧客とのコミュニケーションを担当する組織の従業員
  2. **顧客**: サービスを利用する個人またはグループ
 -3. **管理者**: システム全体とスタッフアカウントを管理する権限を持つユーザー
 +3. **管理者**: システム全体と職員アカウントを管理する権限を持つユーザー
- 
+
 -## 3. スタッフのユースケース
 +## 3. 職員のユースケース
- 
+
  ### 3.1. アカウント管理
- 
+
  | ユースケースID | S-001 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフログイン |
@@ -364,7 +416,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - 認証失敗: エラーメッセージを表示<br>- アカウント停止中: アクセス拒否メッセージを表示 |
 -| 事後条件 | スタッフがシステムにログインした状態になる |
 +| 事後条件 | 職員がシステムにログインした状態になる |
- 
+
  | ユースケースID | S-002 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフログアウト |
@@ -380,7 +432,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | なし |
 -| 事後条件 | スタッフがログアウト状態になる |
 +| 事後条件 | 職員がログアウト状態になる |
- 
+
  | ユースケースID | S-003 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフアカウント情報更新 |
@@ -396,9 +448,9 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す |
 -| 事後条件 | スタッフの情報が更新される |
 +| 事後条件 | 職員の情報が更新される |
- 
+
  ### 3.2. 顧客管理
- 
+
  | ユースケースID | S-004 |
  | ------------- | ----- |
  | ユースケース名 | 顧客情報登録 |
@@ -516,7 +568,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す |
  | 事後条件 | 返信が顧客に送信される |
 @@ -222,13 +222,13 @@
- 
+
  | ユースケースID | C-008 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフへの問い合わせ送信 |
@@ -530,7 +582,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す |
 -| 事後条件 | メッセージがスタッフに送信される |
 +| 事後条件 | メッセージが職員に送信される |
- 
+
  | ユースケースID | C-009 |
  | ------------- | ----- |
 @@ -244,11 +244,11 @@
@@ -545,16 +597,16 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す                  |
 -| 事後条件 | 返信がスタッフに送信される                                     |
 +| 事後条件 | 返信が職員に送信される                                     |
- 
- 
+
+
  ## 5. 管理者のユースケース
 @@ -275,62 +275,52 @@
  | 代替フロー | なし |
  | 事後条件 | 管理者がログアウト状態になる |
- 
+
 -### 5.2. スタッフ管理
 +### 5.2. 職員管理
- 
+
  | ユースケースID | A-003 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフアカウント作成 |
@@ -568,7 +620,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す<br>- メールアドレス重複: エラーメッセージを表示 |
 -| 事後条件 | 新規スタッフアカウントが作成される |
 +| 事後条件 | 新規職員アカウントが作成される |
- 
+
  | ユースケースID | A-004 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフアカウント編集 |
@@ -583,7 +635,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す |
 -| 事後条件 | スタッフ情報が更新される |
 +| 事後条件 | 職員情報が更新される |
- 
+
  | ユースケースID | A-005 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフアカウント停止/再開 |
@@ -598,7 +650,7 @@ index 8d89046..51eb39c 100644
  | 代替フロー | なし |
 -| 事後条件 | スタッフアカウントの状態が変更される |
 +| 事後条件 | 職員アカウントの状態が変更される |
- 
+
  | ユースケースID | A-006 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフイベントログ確認 |
@@ -613,9 +665,9 @@ index 8d89046..51eb39c 100644
  | 代替フロー | - ログなし: ログがない旨のメッセージを表示 |
 -| 事後条件 | スタッフのアクティビティログが表示される |
 +| 事後条件 | 職員のアクティビティログが表示される |
- 
+
  ### 5.3. システム管理
- 
+
  | ユースケースID | A-007 |
  | ------------- | ----- |
 -| ユースケース名 | システム設定管理 |
@@ -634,7 +686,7 @@ index 8d89046..51eb39c 100644
 @@ -339,50 +329,6 @@
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す |
  | 事後条件 | アクセス制限設定が更新される |
- 
+
 -## 6. システム間ユースケース
 -
 -| ユースケースID | SYS-001 |
@@ -680,18 +732,18 @@ index 8d89046..51eb39c 100644
 -| 事後条件 | データバックアップが作成される |
 -
  ## 8. ユースケース関連図
- 
+
  以下は、Baukis-Kaiシステムの主要なユースケースとアクター間の関係を示すUML図です。
 @@ -401,15 +347,14 @@ skinparam usecase {
    ActorFontColor black
  }
- 
+
 -actor "スタッフ" as Staff
 +actor "職員" as Staff
  actor "顧客" as Customer
  actor "管理者" as Admin
 -actor "システム" as System
- 
+
 -rectangle "スタッフのユースケース" {
 -  usecase "スタッフログイン" as S001
 -  usecase "スタッフログアウト" as S002
@@ -711,7 +763,7 @@ index 8d89046..51eb39c 100644
 +  usecase "職員への問い合わせ送信" as C008
    usecase "問い合わせ履歴確認" as C009
  }
- 
+
  rectangle "管理者のユースケース" {
    usecase "管理者ログイン" as A001
    usecase "管理者ログアウト" as A002
@@ -737,12 +789,12 @@ index 8d89046..51eb39c 100644
 -  usecase "システム監視" as NF001
 -  usecase "データバックアップ" as NF002
  }
- 
+
  Staff --> S001
 @@ -468,15 +401,15 @@ Staff --> S010
  Staff --> S011
  Staff --> S012
- 
+
 -Customer --> C001
 -Customer --> C002
 -Customer --> C003
@@ -761,7 +813,7 @@ index 8d89046..51eb39c 100644
 +C007 <-- Customer
 +C008 <-- Customer
 +C009 <-- Customer
- 
+
  Admin --> A001
  Admin --> A002
 @@ -484,14 +417,7 @@ Admin --> A003
@@ -776,7 +828,7 @@ index 8d89046..51eb39c 100644
 -System --> SYS001
 -System --> SYS002
 -System --> NF002
- 
+
  S010 ..> C009 : <<extend>>
  S011 ..> C008 : <<extend>>
 
@@ -809,7 +861,7 @@ index 18c6b9f..4561273 100644
 +++ b/spec/features/staff/message_management_spec.rb
 @@ -1,6 +1,6 @@
  require 'rails_helper'
- 
+
 -feature 'スタッフによるメッセージ管理' do
 +feature '職員によるメッセージ管理' do
    include FeaturesSpecHelper
@@ -818,27 +870,27 @@ index 18c6b9f..4561273 100644
 @@ -18,24 +18,24 @@ feature 'スタッフによるメッセージ管理' do
      login_as_staff_member(staff_member)
    end
- 
+
 -  scenario 'スタッフがメッセージ一覧を表示する' do
 +  scenario '職員がメッセージ一覧を表示する' do
      visit staff_messages_path
      expect(page).to have_css('h1', text: I18n.t('staff.messages.index.title_index'))
      expect(page).to have_content('Hello')
    end
- 
+
 -  scenario 'スタッフが問い合わせ一覧を表示する' do
 +  scenario '職員が問い合わせ一覧を表示する' do
      visit inbound_staff_messages_path
      expect(page).to have_css('h1', text: I18n.t('staff.messages.index.title_inbound'))
      expect(page).to have_content('Hello')
    end
- 
+
 -  scenario 'スタッフが返信一覧を表示する' do
 +  scenario '職員が返信一覧を表示する' do
      visit outbound_staff_messages_path
      expect(page).to have_css('h1', text: I18n.t('staff.messages.index.title_outbound'))
    end
- 
+
 -  scenario 'スタッフが顧客からのメッセージに返信する' do
 +  scenario '職員が顧客からのメッセージに返信する' do
      visit staff_message_path(root_message)
@@ -847,12 +899,12 @@ index 18c6b9f..4561273 100644
 @@ -50,7 +50,7 @@ feature 'スタッフによるメッセージ管理' do
      expect(StaffMessage.find_by(subject: 'Re: Hello', staff_member: staff_member)).to be_present
    end
- 
+
 -  scenario 'スタッフが問い合わせを削除する' do
 +  scenario '職員が問い合わせを削除する' do
      visit staff_message_path(root_message)
      expect(page).to have_css('h1', text: 'メッセージ詳細')
- 
+
 
 ```
 
@@ -883,7 +935,7 @@ index 763d243..18c6b9f 100644
 +++ b/spec/features/staff/message_management_spec.rb
 @@ -1,34 +1,66 @@
  require 'rails_helper'
- 
+
 -feature 'メッセージ管理機能' do
 +feature 'スタッフによるメッセージ管理' do
    include FeaturesSpecHelper
@@ -904,12 +956,12 @@ index 763d243..18c6b9f 100644
 +  let!(:reply2) { create(:staff_message, parent: message1, staff_member: staff_member) }
 +  let!(:reply3) { create(:staff_message, parent: message1, staff_member: staff_member) }
 +  let!(:message3) { create(:customer_message, parent: reply3, customer: customer) }
- 
+
    before do
      switch_namespace(:staff)
      login_as_staff_member(staff_member)
    end
- 
+
 -  scenario 'メッセージツリーの表示', :performance do |example|
 -    visit staff_message_path(message1)
 +  scenario 'スタッフがメッセージ一覧を表示する' do
@@ -948,7 +1000,7 @@ index 763d243..18c6b9f 100644
 +    visit staff_message_path(root_message)
      expect(page).to have_css('h1', text: 'メッセージ詳細')
 -    expect(page).to have_css('li a', text: 'Hello')
- 
+
 -    elapsed = Benchmark.realtime do
 -      100.times do
 -        visit staff_message_path(message1)
@@ -958,7 +1010,7 @@ index 763d243..18c6b9f 100644
 +    within("tr", text: root_message.subject) do
 +      click_link I18n.t('staff.messages.index.delete')
      end
- 
+
 -    write_to_performance_log(example, elapsed)
 -    expect(elapsed).to be < 100.0
 +    expect(page).to have_css('.Flash__notice', text: I18n.t('staff.messages.destroy.flash_notice'))
@@ -1007,7 +1059,7 @@ index 00b5e99..815a060 100644
 +
 +    redirect_back(fallback_location: staff_message_path)
    end
- 
+
    # POST/DELETE
 diff --git a/config/locales/controllers/ja.yml b/config/locales/controllers/ja.yml
 index 97ff6e3..4d16ae0 100644
@@ -1029,16 +1081,16 @@ index 41923d3..8d89046 100644
 @@ -218,7 +218,7 @@
  | 代替フロー | - キャンセル期限超過: キャンセルできない旨のメッセージを表示 |
  | 事後条件 | 予約がキャンセルされる |
- 
+
 -### 4.3. メッセージング
 +### 4.3. 問い合わせ
- 
+
  | ユースケースID | C-008 |
  | ------------- | ----- |
 @@ -240,6 +240,17 @@
  | 代替フロー | - メッセージなし: メッセージがない旨のメッセージを表示 |
  | 事後条件 | メッセージ履歴が表示される |
- 
+
 +| ユースケースID | C-010                                             |
 +| ------------- |---------------------------------------------------|
 +| ユースケース名 | 問い合わせ返信                                           |
@@ -1051,7 +1103,7 @@ index 41923d3..8d89046 100644
 +
 +
  ## 5. 管理者のユースケース
- 
+
  ### 5.1. アカウント管理
 diff --git a/spec/features/admin/staff_management_spec.rb b/spec/features/admin/staff_management_spec.rb
 index a816337..d7c215e 100644
@@ -1140,7 +1192,7 @@ index 2877f1e..8c521f1 100644
 +
 +    redirect_back(fallback_location: customer_root_path)
    end
- 
+
    private
 diff --git a/app/models/message.rb b/app/models/message.rb
 index f9c8853..e54ddaa 100644
@@ -1148,7 +1200,7 @@ index f9c8853..e54ddaa 100644
 +++ b/app/models/message.rb
 @@ -31,7 +31,7 @@
  #
- 
+
  class Message < ApplicationRecord
 -  belongs_to :customer
 +  belongs_to :customer, optional: true
@@ -1162,10 +1214,10 @@ index 2989e6a..41923d3 100644
 @@ -110,11 +110,11 @@
  | 代替フロー | - 参加者なし: 参加者がいない旨のメッセージを表示 |
  | 事後条件 | 参加者のステータスが更新される |
- 
+
 -### 3.4. メッセージング
 +### 3.4. 問い合わせ
- 
+
  | ユースケースID | S-010 |
  | ------------- | ----- |
 -| ユースケース名 | 顧客へのメッセージ送信 |
@@ -1174,7 +1226,7 @@ index 2989e6a..41923d3 100644
  | 説明 | スタッフが顧客にメッセージを送信する |
  | 事前条件 | スタッフがログイン済み、顧客が登録済み |
 @@ -124,7 +124,7 @@
- 
+
  | ユースケースID | S-011 |
  | ------------- | ----- |
 -| ユースケース名 | 顧客からのメッセージ確認 |
@@ -1183,7 +1235,7 @@ index 2989e6a..41923d3 100644
  | 説明 | スタッフが顧客からのメッセージを確認する |
  | 事前条件 | スタッフがログイン済み、顧客からメッセージが送信済み |
 @@ -134,7 +134,7 @@
- 
+
  | ユースケースID | S-012 |
  | ------------- | ----- |
 -| ユースケース名 | メッセージ返信 |
@@ -1192,7 +1244,7 @@ index 2989e6a..41923d3 100644
  | 説明 | スタッフが顧客のメッセージに返信する |
  | 事前条件 | スタッフがログイン済み、顧客からメッセージが送信済み |
 @@ -222,7 +222,7 @@
- 
+
  | ユースケースID | C-008 |
  | ------------- | ----- |
 -| ユースケース名 | スタッフへのメッセージ送信 |
@@ -1201,7 +1253,7 @@ index 2989e6a..41923d3 100644
  | 説明 | 顧客がスタッフにメッセージを送信する |
  | 事前条件 | 顧客がログイン済み |
 @@ -232,7 +232,7 @@
- 
+
  | ユースケースID | C-009 |
  | ------------- | ----- |
 -| ユースケース名 | メッセージ履歴確認 |
@@ -1220,7 +1272,7 @@ index 2989e6a..41923d3 100644
 +  usecase "顧客からの問い合わせ確認" as S011
 +  usecase "問い合わせ返信" as S012
  }
- 
+
  rectangle "顧客のユースケース" {
 @@ -418,8 +418,8 @@ rectangle "顧客のユースケース" {
    usecase "プログラム閲覧" as C005
@@ -1231,7 +1283,7 @@ index 2989e6a..41923d3 100644
 +  usecase "スタッフへの問い合わせ送信" as C008
 +  usecase "問い合わせ履歴確認" as C009
  }
- 
+
  rectangle "管理者のユースケース" {
 diff --git a/spec/factories/messages.rb b/spec/factories/messages.rb
 index f3b7548..20757bc 100644
@@ -1252,7 +1304,7 @@ index 91972d9..20f3550 100644
 +++ b/spec/features/customer/message_management_spec.rb
 @@ -11,59 +11,58 @@ feature '顧客によるメッセージ管理' do
    end
- 
+
    scenario '顧客がスタッフにメッセージを送信する' do
 -    visit customer_messages_path
 -    click_link I18n.t('customer.messages.index.new')
@@ -1264,12 +1316,12 @@ index 91972d9..20f3550 100644
 -    select staff_member.family_name + staff_member.given_name, from: I18n.t('activerecord.attributes.message.staff_member_id')
      click_button I18n.t('customer.messages.new.submit')
 +    click_button I18n.t('customer.messages.confirm.update')
-     
+
 -    expect(page).to have_css('.notice', text: I18n.t('customer.messages.create.notice'))
 +    expect(page).to have_css('.Flash__notice', text: I18n.t('customer.messages.create.flash_notice'))
      expect(Message.find_by(subject: 'テストメッセージ', customer: customer)).to be_present
    end
- 
+
    scenario '顧客がメッセージ履歴を確認する' do
      # Create a message from customer to staff
 -    message = create(:message, customer: customer, staff_member: staff_member)
@@ -1277,7 +1329,7 @@ index 91972d9..20f3550 100644
      # Create a reply from staff to customer
 -    create(:reply, message: message, staff_member: staff_member)
 +    create(:staff_message, parent: message, staff_member: staff_member)
-     
+
      visit customer_messages_path
 -    click_link message.subject
 -    
@@ -1289,7 +1341,7 @@ index 91972d9..20f3550 100644
 +    expect(page).to have_content(message.subject)
 +    expect(page).to have_content(message.body.to_s.delete("\n"))
    end
- 
+
 -  scenario '顧客がメッセージを検索する' do
 -    create(:message, customer: customer, staff_member: staff_member, subject: '問い合わせ')
 -    create(:message, customer: customer, staff_member: staff_member, subject: '予約について')
@@ -1316,7 +1368,7 @@ index 91972d9..20f3550 100644
 +    expect(page).to have_css('.Flash__notice', text: I18n.t('customer.replies.create.flash_notice'))
 +    expect(Message.find_by(subject: '回答テストメッセージ', customer: customer)).to be_present
    end
- 
+
 -  scenario '顧客がメッセージにタグを付ける' do
 -    tag = create(:tag, value: 'テストタグ')
 -    
@@ -1395,7 +1447,7 @@ index d61ffce..03b7ec8 100644
 +  has_many :messages
 +  has_many :outbound_messages, class_name: 'CustomerMessage', foreign_key: 'customer_id'
 +  has_many :inbound_messages, class_name: 'StaffMessage', foreign_key: 'customer_id'
- 
+
    validates :gender, inclusion: { in: %w(male female), allow_blank: true }
    validates :birthday, date: {
 
@@ -1444,7 +1496,7 @@ index aeee4d3..2989e6a 100644
 @@ -328,16 +328,6 @@
  | 代替フロー | - バリデーションエラー: エラーメッセージを表示し再編集を促す |
  | 事後条件 | アクセス制限設定が更新される |
- 
+
 -| ユースケースID | A-009 |
 -| ------------- | ----- |
 -| ユースケース名 | タグ管理 |
@@ -1456,7 +1508,7 @@ index aeee4d3..2989e6a 100644
 -| 事後条件 | タグ設定が更新される |
 -
  ## 6. システム間ユースケース
- 
+
  | ユースケースID | SYS-001 |
 diff --git a/spec/features/admin/account_management_spec.rb b/spec/features/admin/account_management_spec.rb
 index 6d43ea4..919a2c1 100644
@@ -1464,27 +1516,27 @@ index 6d43ea4..919a2c1 100644
 +++ b/spec/features/admin/account_management_spec.rb
 @@ -17,15 +17,15 @@ feature '管理者によるアカウント管理' do
      end
- 
+
      expect(current_path).to eq(admin_root_path)
 -    expect(page).to have_content(administrator.email)
 +    expect(page).to have_content("ログインしました")
    end
- 
+
    scenario '管理者がログアウトする' do
      login_as_administrator(administrator)
      click_link I18n.t('admin.shared.header.logout')
-     
+
 -    expect(current_path).to eq(admin_login_path)
 -    expect(page).to have_css('.notice', text: I18n.t('admin.sessions.destroy.notice'))
 +    expect(current_path).to eq(admin_root_path)
 +    expect(page).to have_content("ログアウトしました")
    end
- 
+
    scenario '管理者が無効なパスワードでログインを試みる' do
 @@ -36,7 +36,6 @@ feature '管理者によるアカウント管理' do
        click_button I18n.t('admin.sessions.new.submit')
      end
- 
+
 -    expect(current_path).to eq(admin_login_path)
 -    expect(page).to have_css('.alert', text: I18n.t('admin.sessions.create.alert'))
 +    expect(current_path).to eq(admin_session_path)
@@ -1497,12 +1549,12 @@ index ff3e2aa..a816337 100644
 +++ b/spec/features/admin/staff_management_spec.rb
 @@ -10,54 +10,55 @@ feature '管理者によるスタッフ管理' do
    end
- 
+
    scenario '管理者が新規スタッフアカウントを作成する' do
 -    click_link I18n.t('admin.staff_members.index.new')
 +    click_link I18n.t('admin.top.dashboard.admin_staff_members')
 +    first('a', text: I18n.t('admin.staff_members.index.new')).click
-     
+
      fill_in I18n.t('activerecord.attributes.staff_member.email'), with: 'test@example.com'
      fill_in I18n.t('activerecord.attributes.staff_member.family_name'), with: '試験'
      fill_in I18n.t('activerecord.attributes.staff_member.given_name'), with: '太郎'
@@ -1513,28 +1565,28 @@ index ff3e2aa..a816337 100644
 +    fill_in I18n.t('activerecord.attributes.staff_member.hashed_password'), with: 'password'
 +    fill_in I18n.t('activerecord.attributes.staff_member.start_date'), with: Date.today.strftime('%Y-%m-%d')
 +    click_button I18n.t('admin.staff_members.new.create')
- 
+
 -    expect(page).to have_css('.notice', text: I18n.t('admin.staff_members.create.notice'))
 +    expect(page).to have_css('.Flash__notice', text: '職員アカウントを新規登録しました。')
      expect(StaffMember.find_by(email: 'test@example.com')).to be_present
    end
- 
+
    scenario '管理者がスタッフアカウントを編集する' do
      staff_member = create(:staff_member)
      visit admin_staff_members_path
 -    click_link staff_member.family_name + staff_member.given_name
- 
+
 -    click_link I18n.t('admin.staff_members.show.edit')
 +    first('a', text: I18n.t('admin.staff_members.index.edit')).click
      fill_in I18n.t('activerecord.attributes.staff_member.email'), with: 'edited@example.com'
 -    click_button I18n.t('admin.staff_members.edit.submit')
 +    click_button I18n.t('admin.staff_members.edit.update')
- 
+
 -    expect(page).to have_css('.notice', text: I18n.t('admin.staff_members.update.notice'))
 +    expect(page).to have_css('.Flash__notice', text: '職員アカウントを更新しました。')
      expect(staff_member.reload.email).to eq('edited@example.com')
    end
- 
+
    scenario '管理者がスタッフアカウントを停止する' do
      staff_member = create(:staff_member)
      visit admin_staff_members_path
@@ -1542,7 +1594,7 @@ index ff3e2aa..a816337 100644
 -    within("#staff_member_#{staff_member.id}") do
 -      click_link I18n.t('admin.staff_members.index.suspend')
 -    end
- 
+
 -    expect(page).to have_css('.notice', text: I18n.t('admin.staff_members.suspend.notice'))
 +    first('a', text: I18n.t('admin.staff_members.index.edit')).click
 +    check I18n.t('activerecord.attributes.staff_member.suspended')
@@ -1551,7 +1603,7 @@ index ff3e2aa..a816337 100644
 +    expect(page).to have_css('.Flash__notice', text: '職員アカウントを更新しました。')
      expect(staff_member.reload.suspended).to be_truthy
    end
- 
+
    scenario '管理者がスタッフアカウントを再開する' do
      staff_member = create(:staff_member, suspended: true)
      visit admin_staff_members_path
@@ -1559,7 +1611,7 @@ index ff3e2aa..a816337 100644
 -    within("#staff_member_#{staff_member.id}") do
 -      click_link I18n.t('admin.staff_members.index.resume')
 -    end
- 
+
 -    expect(page).to have_css('.notice', text: I18n.t('admin.staff_members.resume.notice'))
 +    first('a', text: I18n.t('admin.staff_members.index.edit')).click
 +    uncheck I18n.t('activerecord.attributes.staff_member.suspended')
@@ -1577,7 +1629,7 @@ index 88c77fd..ca56786 100644
 @@ -15,51 +15,22 @@ feature '管理者によるシステム管理' do
      staff_member.events.create!(type: 'logged_in')
      staff_member.events.create!(type: 'logged_out')
-     
+
 -    visit admin_staff_member_path(staff_member)
 -    click_link I18n.t('admin.staff_members.show.events')
 -    
@@ -1587,7 +1639,7 @@ index 88c77fd..ca56786 100644
 -    expect(page).to have_selector('table.staff-events tbody tr', count: 2)
 +    expect(page).to have_selector('table.Table__body tr.Table__tr', count: 3)
    end
- 
+
    scenario '管理者がIPアドレス制限を設定する' do
      visit admin_allowed_sources_path
 -    click_link I18n.t('admin.allowed_sources.index.new')
@@ -1603,7 +1655,7 @@ index 88c77fd..ca56786 100644
 -    expect(page).to have_css('.notice', text: I18n.t('admin.allowed_sources.create.notice'))
 -    expect(AllowedSource.find_by(octet1: 192, octet2: 168, octet3: 1, octet4: 0, wildcard: true)).to be_present
 -  end
- 
+
 -  scenario '管理者がタグを管理する' do
 -    visit admin_tags_path
 -    click_link I18n.t('admin.tags.index.new')
@@ -1671,13 +1723,13 @@ index bd111bc..cd000d0 100644
  require 'capybara/rspec'
  require 'selenium-webdriver'
 +require 'capybara-screenshot/rspec'
- 
+
  # Chrome Headless設定
  Capybara.register_driver :selenium_chrome_headless do |app|
 @@ -49,6 +50,10 @@ Capybara.default_max_wait_time = 5
  Capybara.server_host = '0.0.0.0'
  Capybara.server_port = 3001
- 
+
 +# スクリーンショット設定
 +Capybara::Screenshot.autosave_on_failure = true
 +Capybara::Screenshot.prune_strategy = :keep_last_run
@@ -1716,7 +1768,7 @@ index 3364e95..f9c8853 100644
 --- a/app/models/message.rb
 +++ b/app/models/message.rb
 @@ -32,9 +32,9 @@
- 
+
  class Message < ApplicationRecord
    belongs_to :customer
 -  belongs_to :staff_member
@@ -1727,7 +1779,7 @@ index 3364e95..f9c8853 100644
 +  belongs_to :parent, class_name: 'Message', foreign_key: 'parent_id', optional: true
    has_many :message_tag_links, dependent: :destroy
    has_many :tags, -> { order(:value)}, through: :message_tag_links
- 
+
 diff --git a/spec/models/customer_message_spec.rb b/spec/models/customer_message_spec.rb
 new file mode 100644
 index 0000000..a51f646
@@ -2223,7 +2275,7 @@ index 8aac7ee..2ce6bbe 100644
 +++ b/spec/features/staff/customer_management_spec.rb
 @@ -1,7 +1,6 @@
  require 'rails_helper'
- 
+
 -# 職員による顧客管理
 -feature 'Customer management by staff' do
 +feature '職員による顧客管理' do
@@ -2233,7 +2285,7 @@ index 8aac7ee..2ce6bbe 100644
 @@ -11,8 +10,7 @@ feature 'Customer management by staff' do
      login_as_staff_member(staff_member)
    end
- 
+
 -  # 職員が顧客（基本情報のみ）を登録する
 -  scenario 'Employees register customers (only basic information)' do
 +  scenario '職員が顧客（基本情報のみ）を登録する' do
@@ -2243,37 +2295,37 @@ index 8aac7ee..2ce6bbe 100644
 @@ -33,8 +31,7 @@ feature 'Customer management by staff' do
      expect(new_customer.work_address).to be_nil
    end
- 
+
 -  # 職員が顧客、自宅住所、勤務先を更新する
 -  scenario 'Staff update customer, home address, work place' do
 +  scenario '職員が顧客、自宅住所、勤務先を更新する' do
      click_link I18n.t('staff.top.dashboard.staff_customers')
      first('table.Table__body--listing').click_link I18n.t('staff.customers.index.edit')
- 
+
 @@ -53,8 +50,7 @@ feature 'Customer management by staff' do
      expect(customer.work_address.company_name).to eq('テスト')
    end
- 
+
 -  # 職員が顧客、自宅住所、勤務先を登録する
 -  scenario 'Employees register customer, home address, work place' do
 +  scenario '職員が顧客、自宅住所、勤務先を登録する' do
      click_link I18n.t('staff.top.dashboard.staff_customers')
      first('.Table__links').click_link I18n.t('staff.customers.index.new')
- 
+
 @@ -94,8 +90,7 @@ feature 'Customer management by staff' do
      expect(new_customer.work_address.company_name).to eq('テスト')
    end
- 
+
 -  # 職員が生年月日と自宅の郵便番号に無効な値を入力する
 -  scenario 'Employees enter invalid values for birth date and home postal code' do
 +  scenario '職員が生年月日と自宅の郵便番号に無効な値を入力する' do
      click_link I18n.t('staff.top.dashboard.staff_customers')
      first('table.Table__body--listing').click_link I18n.t('staff.customers.index.edit')
- 
+
 @@ -109,8 +104,7 @@ feature 'Customer management by staff' do
      expect(page).to have_css('.has-error span.help-block')
    end
- 
+
 -  # 職員が勤務先データのない既存顧客に会社名の情報を追加する
 -  scenario 'Staff add company name information to existing customers that do not have work data' do
 +  scenario '職員が勤務先データのない既存顧客に会社名の情報を追加する' do
@@ -2293,7 +2345,7 @@ index 99935f2..0f97a6a 100644
 +++ b/spec/features/staff/phone_management_spec.rb
 @@ -1,7 +1,6 @@
  require 'rails_helper'
- 
+
 -# 職員による顧客電話番号管理
 -feature 'Customer telephone number management by staff' do
 +feature '職員による顧客電話番号管理' do
@@ -2303,33 +2355,33 @@ index 99935f2..0f97a6a 100644
 @@ -11,8 +10,7 @@ feature 'Customer telephone number management by staff' do
      login_as_staff_member(staff_member)
    end
- 
+
 -  # 職員が顧客の電話番号を追加する
 -  scenario "The staff adds the customer's phone number" do
 +  scenario '職員が顧客の電話番号を追加する' do
      click_link I18n.t('staff.top.dashboard.staff_customers')
      first('table.Table__body--listing').click_link I18n.t('staff.customers.index.edit')
- 
+
 @@ -25,8 +23,7 @@ feature 'Customer telephone number management by staff' do
      expect(customer.personal_phones[0].number).to eq('090-9999-9999')
    end
- 
+
 -  # 職員が顧客の自宅電話番号を追加する
 -  scenario "The staff adds the customer's home phone number" do
 +  scenario '職員が顧客の自宅電話番号を追加する' do
      click_link I18n.t('staff.top.dashboard.staff_customers')
      first('table.Table__body--listing').click_link I18n.t('staff.customers.index.edit')
- 
+
 @@ -39,8 +36,7 @@ feature 'Customer telephone number management by staff' do
      expect(customer.home_address.phones[0].number).to eq('090-9999-9999')
    end
- 
+
 -  # 職員が顧客の勤務先電話番号を追加する
 -  scenario "The staff adds the customer's work phone number" do
 +  scenario '職員が顧客の勤務先電話番号を追加する' do
      click_link I18n.t('staff.top.dashboard.staff_customers')
      first('table.Table__body--listing').click_link I18n.t('staff.customers.index.edit')
- 
+
 @@ -52,4 +48,4 @@ feature 'Customer telephone number management by staff' do
      expect(customer.work_address.phones.size).to eq(1)
      expect(customer.work_address.phones[0].number).to eq('03-9999-9999')
@@ -2343,7 +2395,7 @@ index 9131037..413731f 100644
 +++ b/spec/features/staff/program_management_spec.rb
 @@ -1,7 +1,6 @@
  require 'rails_helper'
- 
+
 -# プログラム管理機能
 -feature 'Program management function', :performace do
 +feature 'プログラム管理機能', :performace do
@@ -2353,20 +2405,19 @@ index 9131037..413731f 100644
 @@ -19,8 +18,7 @@ feature 'Program management function', :performace do
      login_as_staff_member(staff_member)
    end
- 
+
 -  # プログラム一覧
 -  scenario 'Program list' do |example|
 +  scenario 'プログラム一覧' do |example|
      visit staff_programs_path
      expect(page).to have_css('h1', text: I18n.t('staff.programs.index.title'))
- 
+
 @@ -34,4 +32,4 @@ feature 'Program management function', :performace do
      expect(elapsed).to be < 100.0
    end
- 
+
 -end
 \ No newline at end of file
 +end
 
 ```
-
