--- a/docs/journal/20250612.md
+++ b/docs/journal/20250612.md
@@ -2,7 +2,101 @@
 
 ## 概要
 
-2025-06-12の作業内容をまとめています。
+2025-06-12の作業内容をまとめています。このジャーナルでは、開発環境の改善とデバッグ効率化のための設定、およびドキュメントの修正に関する作業を記録しています。
+
+## システム構成図
+
+```plantuml
+@startuml "Baukis-Kai 開発環境構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(dev_env, "開発環境") {
+    Container(vscode, "Visual Studio Code", "IDE", "コード編集・デバッグ")
+    Container(docker, "Docker", "コンテナ環境", "アプリケーション実行環境")
+
+    System_Boundary(docker_containers, "Docker Containers") {
+        Container(app_container, "アプリケーションコンテナ", "Ruby on Rails", "本番環境")
+        Container(console_container, "コンソールコンテナ", "Ruby on Rails", "開発環境")
+        ContainerDb(db_dev, "開発用DB", "MySQL", "開発用データ")
+        ContainerDb(db_prd, "本番用DB", "PostgreSQL", "本番用データ")
+    }
+}
+
+Rel(developer, vscode, "コード編集・デバッグ")
+Rel(vscode, docker, "実行・デバッグ")
+Rel(docker, docker_containers, "コンテナ管理")
+Rel(app_container, db_prd, "データ操作")
+Rel(console_container, db_dev, "データ操作")
+
+@enduml
+```
+
+## 作業内容
+
+### Visual Studio Code開発環境の改善
+
+開発効率を向上させるために、Visual Studio Codeの設定を改善しました。特に、デバッグ設定とRuby開発環境の整備に焦点を当てました。
+
+#### 変更点の概要
+
+1. VSCode用のlaunch.json設定ファイルの更新
+2. Rubyデバッグ設定の追加
+3. RSpecテスト実行用のbinstubの追加
+
+#### 技術的詳細
+
+```plantuml
+@startuml "VSCode開発環境設定"
+package "VSCode設定" {
+  [launch.json] --> [Rails Server Debug]
+  [launch.json] --> [RSpec Debug]
+  [launch.json] --> [Attach Debug]
+}
+
+package "Ruby環境" {
+  [bin/bundle] --> [Bundler]
+  [bin/rspec] --> [RSpec]
+  [bin/rspec] --> [Bundler]
+}
+
+[開発者] --> [launch.json]
+[開発者] --> [bin/rspec]
+@enduml
+```
+
+### Docker環境の改善
+
+アプリケーションの実行環境をより本番に近い形で構築するため、Docker環境の設定を更新しました。
+
+#### 変更点の概要
+
+1. docker-compose.ymlの更新（PostgreSQLの追加）
+2. 環境変数の整理と統一
+3. データベース設定の改善
+
+#### 技術的詳細
+
+```plantuml
+@startuml "Docker環境構成"
+node "Docker Compose" {
+  [app] --> [db_prd]
+  [console] --> [db_dev]
+}
+
+database "PostgreSQL" {
+  [db_prd]
+}
+
+database "MySQL" {
+  [db_dev]
+}
+
+[app] : 本番環境
+[console] : 開発環境
+@enduml
+```
 
 ## コミット: 8dc2f88
 
@@ -432,7 +526,7 @@ index 5406c95..70683ae 100644
 @@ -564,8 +564,8 @@ git push heroku master
  + updateアクション
  + destroyアクション
- 
+
 -### String Parameters
 -#### String Parameters
 +### Strong Parameters
@@ -578,11 +672,11 @@ index 40045d9..ee66fe4 100644
  /.bundle
  /vendor/bundle
 +.gem_rbs_collection
- 
+
  # these should all be checked in to normalize the environment:
  # Gemfile.lock, .ruby-version, .ruby-gemset
 @@ -108,4 +109,4 @@ bower.json
- 
+
  public/assets/
  .idea/
 -*.iml
@@ -604,7 +698,7 @@ index 1b2c8a0..c42297f 100644
 +  password: <%= ENV.fetch("DB_PASSWORD", "password") %>
 +  host: <%= ENV.fetch("DB_HOST", "127.0.0.1") %>
 +  database: <%= ENV.fetch("DB_DATABASE", "bauki-kai_development") %>
- 
+
  # Warning: The database defined as "test" will be erased and
  # re-generated from your development database when you run "rake".
 @@ -28,10 +28,10 @@ test:
@@ -619,7 +713,7 @@ index 1b2c8a0..c42297f 100644
 +  password: <%= ENV.fetch("DB_PASSWORD", "password") %>
 +  host: <%= ENV.fetch("DB_HOST", "127.0.0.1") %>
 +  database: "app_test"
- 
+
  # As with config/secrets.yml, you never want to store sensitive information,
  # like your database password, in your source code. If your source code is
 @@ -58,8 +58,8 @@ production:
@@ -634,7 +728,7 @@ index 1b2c8a0..c42297f 100644
 +  password: <%= ENV.fetch("DB_PASSWORD", "password") %>
 +  host: <%= ENV.fetch("DB_HOST", "127.0.0.1") %>
 +  database: <%= ENV.fetch("DB_DATABASE", "bauki-kai_production") %>
- 
+
 diff --git a/docker-compose.yml b/docker-compose.yml
 index d9c992c..101dc00 100644
 --- a/docker-compose.yml
@@ -679,7 +773,7 @@ index d9c992c..101dc00 100644
        - 3306:3306
      volumes:
        - mysql-db:/var/lib/mysql
- 
+
 +  db_prd:
 +    image: postgres:17
 +    environment:
@@ -718,7 +812,7 @@ index d9c992c..101dc00 100644
      ports:
 -      - "3333:3000"
 +      - "3000:3000"
- 
+
  volumes:
    mysql-db:
 -    driver: local
@@ -728,4 +822,3 @@ index d9c992c..101dc00 100644
 +    driver: local
 
 ```
-
