--- a/docs/journal/20170111.md
+++ b/docs/journal/20170111.md
@@ -2,7 +2,110 @@
 
 ## 概要
 
-2017-01-11の作業内容をまとめています。
+2017-01-11の作業内容をまとめています。このジャーナルでは、プロジェクトの基本構成、開発環境のセットアップ、およびデプロイメント設定に関する作業を記録しています。
+
+## プロジェクト構成図
+
+```plantuml
+@startuml "Baukis-Kai プロジェクト構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(project, "Baukis-Kai プロジェクト") {
+    Container(app, "Railsアプリケーション", "Ruby on Rails 5.0.1", "顧客管理システム")
+
+    System_Boundary(env, "環境設定") {
+        Container(dev_env, "開発環境", "Docker/Vagrant", "ローカル開発環境")
+        Container(test_env, "テスト環境", "RSpec/Factory Girl", "自動テスト環境")
+        Container(prod_env, "本番環境", "Heroku", "クラウドデプロイメント")
+    }
+
+    System_Boundary(ci_cd, "CI/CD") {
+        Container(circle_ci, "CircleCI", "継続的インテグレーション", "自動ビルド・テスト")
+        Container(heroku, "Heroku", "PaaS", "アプリケーションホスティング")
+    }
+}
+
+Rel(developer, app, "開発")
+Rel(developer, dev_env, "利用")
+Rel(app, test_env, "テスト実行")
+Rel(app, circle_ci, "コード変更をプッシュ")
+Rel(circle_ci, heroku, "自動デプロイ")
+Rel(heroku, prod_env, "デプロイ")
+
+@enduml
+```
+
+## 作業内容
+
+### プロジェクト基本構成の設定
+
+プロジェクトの基本構成を整備し、開発からデプロイまでのワークフローを確立しました。これにより、効率的な開発プロセスと一貫した環境での動作確認が可能になります。
+
+#### 変更点の概要
+
+1. プロジェクト構成の整理
+   - READMEの構造化
+   - 各セクションの詳細化
+   - 開発手順の明確化
+
+2. 開発環境の整備
+   - 追加Gemのセットアップ
+   - テスト環境の構築（RSpec, Factory Girl）
+   - 国際化対応の設定
+
+3. デプロイメント設定
+   - Herokuデプロイの設定
+   - CircleCIによる継続的インテグレーションの設定
+
+### 開発・テスト環境の技術スタック
+
+```plantuml
+@startuml "Baukis-Kai 技術スタック"
+package "フロントエンド" {
+  [SCSS]
+  [JavaScript]
+  [jQuery]
+  [CoffeeScript]
+}
+
+package "バックエンド" {
+  [Ruby 2.4.0]
+  [Rails 5.0.1]
+}
+
+package "データベース" {
+  [MySQL] #lightblue
+  [PostgreSQL] #lightgreen
+  [SQLite] #lightyellow
+}
+
+package "テスト" {
+  [RSpec]
+  [Factory Girl]
+  [Capybara]
+}
+
+package "デプロイ" {
+  [Heroku]
+  [CircleCI]
+}
+
+[Ruby 2.4.0] --> [Rails 5.0.1]
+[Rails 5.0.1] --> [MySQL] : 開発環境
+[Rails 5.0.1] --> [SQLite] : テスト環境
+[Rails 5.0.1] --> [PostgreSQL] : 本番環境
+[Rails 5.0.1] --> [RSpec]
+[RSpec] --> [Factory Girl]
+[RSpec] --> [Capybara]
+[Rails 5.0.1] --> [SCSS]
+[Rails 5.0.1] --> [JavaScript]
+[JavaScript] --> [jQuery]
+[JavaScript] --> [CoffeeScript]
+[CircleCI] --> [Heroku] : 自動デプロイ
+@enduml
+```
 
 ## コミット: 2a33184
 
@@ -31,14 +134,14 @@ index c4e067d..a0fc0b4 100644
 +++ b/README.md
 @@ -3,6 +3,7 @@ Baukis 改
  [![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt) 
- 
+
  # 目的 #
 +[実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)をRails5での実装及びフロント部分にモダンCSS設計(BEM)を組み込む
- 
+
  # 前提 #
  | ソフトウェア   | バージョン   | 備考        |
 @@ -15,8 +16,31 @@ Baukis 改
- 
+
  # 構成 #
  1. [アプリケーション環境構築](#アプリケーション環境構築)
 +   1. [Vagarntのセットアップ](#Vagarntのセットアップ)
@@ -66,11 +169,11 @@ index c4e067d..a0fc0b4 100644
 +   1. [Capybra](#Capybara)
 +   1. [フォームオブジェクト](#フォームオブジェクト)
 +   1. [検索フォーム](#検索フォーム)
-    
+
  ## アプリケーション環境構築
  ### Vagarntのセットアップ
 @@ -57,6 +81,23 @@ git push heroku master
- 
+
  **[⬆ back to top](#構成)**
  ## アプリケーション開発
 +### ビジュアルデザイン
@@ -90,7 +193,7 @@ index c4e067d..a0fc0b4 100644
 +### フォームオブジェクト
 +### 検索フォーム
 +**[⬆ back to top](#構成)**
- 
+
  # 参照 #
 -
 ++ [実践Ruby on Rails 4 現場のプロから学ぶ本格Webプログラミング](https://www.amazon.co.jp/%E5%AE%9F%E8%B7%B5Ruby-Rails-4-%E7%8F%BE%E5%A0%B4%E3%81%AE%E3%83%97%E3%83%AD%E3%81%8B%E3%82%89%E5%AD%A6%E3%81%B6%E6%9C%AC%E6%A0%BCWeb%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%BB%92%E7%94%B0/dp/4844335928)
@@ -124,7 +227,7 @@ index 742bdff..c4e067d 100644
 +++ b/README.md
 @@ -14,6 +14,10 @@ Baukis 改
  | docker-compose |1.8.0    |             |
- 
+
  # 構成 #
 +1. [アプリケーション環境構築](#アプリケーション環境構築)
 +1. [アプリケーション配置](#アプリケーション配置)
@@ -136,19 +239,19 @@ index 742bdff..c4e067d 100644
 @@ -39,6 +43,8 @@ docker-compose build
  + RSpecの初期設定
  + Factory Girlの初期設定
- 
+
 +**[⬆ back to top](#構成)**
 +
  ## アプリケーション配置
- 
+
  ### Herokuセットアップ
 @@ -49,6 +55,7 @@ git push heroku master
- 
+
  ### CircleCIセットアップ
- 
+
 +**[⬆ back to top](#構成)**
  ## アプリケーション開発
- 
+
  # 参照 #
 
 ```
@@ -183,17 +286,17 @@ index 2eb5bb5..742bdff 100644
  Baukis 改
  ===================
 +[![CircleCI Build Status](https://circleci.com/gh/circleci/circleci-docs.svg?style=shield)](https://circleci.com/gh/k2works/baukis-kai) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)](https://raw.githubusercontent.com/k2works/baukis-kai/master/MIT-LICENSE.txt) 
- 
+
  # 目的 #
- 
+
 @@ -46,6 +47,8 @@ heroku create baukis-kai
  git push heroku master
  ```
- 
+
 +### CircleCIセットアップ
 +
  ## アプリケーション開発
- 
+
  # 参照 #
 diff --git a/circle.yml b/circle.yml
 new file mode 100644
@@ -239,7 +342,7 @@ index 4652a91..a71748d 100644
 @@ -1,4 +1,5 @@
  source 'https://rubygems.org'
 +ruby '2.4.0'
- 
+
  git_source(:github) do |repo_name|
    repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
 diff --git a/README.md b/README.md
@@ -249,11 +352,11 @@ index 8fe9719..2eb5bb5 100644
 @@ -38,10 +38,15 @@ docker-compose build
  + RSpecの初期設定
  + Factory Girlの初期設定
- 
+
 -## アプリケーション開発
 -
  ## アプリケーション配置
- 
+
 -# 参照 #
 +### Herokuセットアップ
 +```bash
@@ -262,7 +365,7 @@ index 8fe9719..2eb5bb5 100644
 +```
 +
 +## アプリケーション開発
- 
+
  # 参照 #
 +
 
@@ -337,13 +440,13 @@ index 3ee6927..8fe9719 100644
 @@ -34,6 +34,10 @@ docker-compose build
  + ジェネレータの設定
  + アプリケーション実行URLの設定
- 
+
 +### テスト環境のセットアップ
 ++ RSpecの初期設定
 ++ Factory Girlの初期設定
 +
  ## アプリケーション開発
- 
+
  ## アプリケーション配置
 diff --git a/spec/rails_helper.rb b/spec/rails_helper.rb
 new file mode 100644
@@ -575,9 +678,9 @@ index 6f0b160..3ee6927 100644
 --- a/README.md
 +++ b/README.md
 @@ -28,6 +28,12 @@ docker-compose build
- 
+
  ### 追加Gemセットアップ
- 
+
 +### その他の準備作業
 ++ ライセンス文書の作成
 ++ タイムゾーンとロケールの設定
@@ -585,7 +688,7 @@ index 6f0b160..3ee6927 100644
 ++ アプリケーション実行URLの設定
 +
  ## アプリケーション開発
- 
+
  ## アプリケーション配置
 diff --git a/config/environments/development.rb b/config/environments/development.rb
 index 6f71970..ae94b97 100644
@@ -607,7 +710,7 @@ index 66be215..a736dfc 100644
 --- a/config/environments/production.rb
 +++ b/config/environments/production.rb
 @@ -83,4 +83,10 @@ Rails.application.configure do
- 
+
    # Do not dump schema after migrations.
    config.active_record.dump_schema_after_migration = false
 +
@@ -723,7 +826,7 @@ index 649a89f..4652a91 100644
 +  gem 'factory_girl_rails'
 +  gem 'debase'
  end
- 
+
  group :development do
 +  gem 'mysql2', '>= 0.3.18', '< 0.5'
    # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
@@ -751,7 +854,7 @@ index 649a89f..4652a91 100644
 +  gem 'shoulda-matchers', '~> 2.6.2'
 +  gem 'capybara-screenshot'
  end
- 
+
  # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
  gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 +
@@ -944,10 +1047,10 @@ index 8710da6..22b35e1 100644
 +    xpath (2.0.0)
 +      nokogiri (~> 1.3)
 +    yard (0.9.7)
- 
+
  PLATFORMS
    ruby
- 
+
  DEPENDENCIES
 +  annotate
 +  better_errors
@@ -989,7 +1092,7 @@ index 8710da6..22b35e1 100644
    uglifier (>= 1.3.0)
    web-console (>= 3.3.0)
 +  yard
- 
+
  BUNDLED WITH
     1.13.7
 diff --git a/README.md b/README.md
@@ -999,11 +1102,11 @@ index 3c0f78e..6f0b160 100644
 @@ -26,6 +26,7 @@ cd /vagrant/
  docker-compose build
  ```
- 
+
 +### 追加Gemセットアップ
- 
+
  ## アプリケーション開発
- 
+
 diff --git a/baukis-kai.iml b/baukis-kai.iml
 index 45e13de..e1c054c 100644
 --- a/baukis-kai.iml
@@ -1122,7 +1225,7 @@ index 3018451..b097f5f 100644
 -  host: localhost
 +  password: password
 +  host: 127.0.0.1
- 
+
  development:
    <<: *default
 @@ -25,8 +25,10 @@ development:
@@ -1135,7 +1238,7 @@ index 3018451..b097f5f 100644
 +  pool: 5
 +  timeout: 5000
 +  database: db/test.sqlite3
- 
+
  # As with config/secrets.yml, you never want to store sensitive information,
  # like your database password, in your source code. If your source code is
 @@ -48,7 +50,14 @@ test:
@@ -1179,4 +1282,3 @@ index 0000000..52ab025
 +end
 
 ```
-
