--- a/docs/journal/20170123.md
+++ b/docs/journal/20170123.md
@@ -2,7 +2,60 @@
 
 ## 概要
 
-2017-01-23の作業内容をまとめています。
+2017-01-23の作業内容をまとめています。このジャーナルでは、ユーザーインターフェースの改善とデプロイ環境の設定に関する作業を記録しています。主にログインフォームのレスポンシブ対応とHerokuデプロイのためのデータベース設定を行いました。
+
+## デプロイとレスポンシブ対応の構成図
+
+```plantuml
+@startuml "Baukis-Kai デプロイとレスポンシブ対応"
+!include <C4/C4_Component>
+
+Person(user, "ユーザー", "モバイル/デスクトップ")
+Person(developer, "開発者", "アプリケーション管理者")
+
+System_Boundary(app_system, "アプリケーションシステム") {
+    Component(login_form, "ログインフォーム", "ビュー", "レスポンシブ対応UI")
+    Component(i18n, "国際化", "設定", "メッセージ翻訳")
+    Component(database_config, "データベース設定", "設定", "環境別DB接続")
+    Component(seed_data, "シードデータ", "初期データ", "環境別初期データ")
+}
+
+System_Ext(heroku, "Heroku", "PaaS", "本番環境")
+
+Rel(user, login_form, "アクセス")
+Rel(login_form, i18n, "メッセージ取得")
+Rel(developer, heroku, "デプロイ")
+Rel(heroku, database_config, "接続設定参照")
+Rel(heroku, seed_data, "初期データ読み込み")
+
+@enduml
+```
+
+## 作業内容
+
+### ユーザーインターフェースの改善とデプロイ環境の設定
+
+ユーザーインターフェースの改善とデプロイ環境の設定を行いました。ログインフォームをモバイルデバイスでも使いやすくするためのレスポンシブ対応と、Herokuへのデプロイに必要なデータベース設定を実施しました。
+
+#### 変更点の概要
+
+1. ログインフォームのレスポンシブ対応
+   - モバイル表示時の幅を自動調整するメディアクエリの追加
+   - スマートフォン向けのレイアウト最適化
+
+2. 国際化対応の不具合修正
+   - ログインフォームのメッセージ表示問題を解決
+   - YAMLファイルの構造修正
+
+3. Herokuデプロイのための設定
+   - データベース接続設定の環境変数対応
+   - 本番環境用シードデータの追加
+
+#### 技術的詳細
+
+- メディアクエリを使用したレスポンシブデザインの実装
+- YAMLファイルの構造修正によるi18n不具合の解決
+- 環境変数を活用した本番環境データベース接続設定
 
 ## コミット: 12ae098
 
@@ -30,7 +83,7 @@ index c635be9..72fc3e8 100644
 --- a/app/assets/stylesheets/pages/_login.scss
 +++ b/app/assets/stylesheets/pages/_login.scss
 @@ -6,6 +6,9 @@
- 
+
  .Login {
    width: 400px;
 +  @include mq-sp {
@@ -114,7 +167,7 @@ index 0c508ef..0c4a245 100644
 -  port: 5432
 +  url: <%= ENV['DATABASE_URL'] %>
 +  port: <%= ENV['PORT'] %>
- 
+
 diff --git a/db/seed/production/administrators.rb b/db/seed/production/administrators.rb
 new file mode 100644
 index 0000000..61dc988
@@ -203,4 +256,3 @@ index 830cc01..96aa3d6 100644
 \ No newline at end of file
 
 ```
-
