--- a/docs/journal/20170124.md
+++ b/docs/journal/20170124.md
@@ -2,7 +2,68 @@
 
 ## 概要
 
-2017-01-24の作業内容をまとめています。
+2017-01-24の作業内容をまとめています。このジャーナルでは、ルーティング機能の実装に関する作業を記録しています。主にホスト名による制約とパス設定、顧客向けルーティングの追加を行いました。
+
+## ルーティング構成図
+
+```plantuml
+@startuml "Baukis-Kai ルーティング構成"
+!include <C4/C4_Component>
+
+Person(staff, "職員", "内部ユーザー")
+Person(admin, "管理者", "システム管理者")
+Person(customer, "顧客", "外部ユーザー")
+
+System_Boundary(routing_system, "ルーティングシステム") {
+    Component(routes, "Routes", "設定", "config/routes.rb")
+    Component(constraints, "制約", "設定", "ホスト名・パス制約")
+    Component(staff_routes, "職員ルート", "ルーティング", "staff/*")
+    Component(admin_routes, "管理者ルート", "ルーティング", "admin/*")
+    Component(customer_routes, "顧客ルート", "ルーティング", "/*")
+    Component(error_routes, "エラールート", "ルーティング", "errors/*")
+}
+
+System_Ext(production, "本番環境", "Heroku", "環境変数による設定")
+
+Rel(staff, constraints, "アクセス")
+Rel(admin, constraints, "アクセス")
+Rel(customer, constraints, "アクセス")
+
+Rel(constraints, staff_routes, "振り分け")
+Rel(constraints, admin_routes, "振り分け")
+Rel(constraints, customer_routes, "振り分け")
+Rel(constraints, error_routes, "不一致時")
+
+Rel(routes, production, "環境設定参照")
+
+@enduml
+```
+
+## 作業内容
+
+### ルーティング機能の実装
+
+アプリケーションのルーティング機能を実装するため、ホスト名による制約とパス設定、顧客向けルーティングの追加を行いました。これにより、同一アプリケーション内で職員、管理者、顧客向けの異なるインターフェースを提供できるようになりました。
+
+#### 変更点の概要
+
+1. ホスト名による制約の実装
+   - 環境ごとのホスト名設定
+   - 職員・管理者・顧客向けの異なるホスト名とパス設定
+
+2. 顧客向けルーティングの追加
+   - 顧客用のルートパスの設定
+   - 顧客向け機能へのルーティング設定
+
+3. ルーティングテストの追加
+   - 各種ルーティングの動作確認テスト
+   - 制約機能のテスト
+
+#### 技術的詳細
+
+- `constraints`を使用したホスト名による制約の実装
+- 環境変数を活用した本番環境のURL設定
+- RSpecを使用したルーティングテストの実装
 
 ## コミット: 5403c7a
 
@@ -31,7 +92,7 @@ index a736dfc..383c65c 100644
 +++ b/config/environments/production.rb
 @@ -85,8 +85,8 @@ Rails.application.configure do
    config.active_record.dump_schema_after_migration = false
- 
+
    config.baukis_kai = {
 -      staff: { host: ENV["PRD_URL"] , path: '' },
 +      staff: { host: ENV["PRD_URL"] , path: 'staff' },
@@ -70,11 +131,11 @@ index 9044bc9..d55146e 100644
 --- a/README.md
 +++ b/README.md
 @@ -413,6 +413,7 @@ git push heroku master
- 
+
  #### 演習問題
  + ルーティングテスト追加
 ++ 顧客ルーティング追加
- 
+
  ### レコードの表示、新規作成、更新、削除
  ### String Parameters
 diff --git a/config/routes.rb b/config/routes.rb
@@ -84,7 +145,7 @@ index 832d9a0..40f135b 100644
 @@ -51,11 +51,13 @@ Rails.application.routes.draw do
      end
    end
- 
+
 -  namespace :customer, path: '' do
 -    root 'top#index'
 -    get 'article/index'
@@ -98,7 +159,7 @@ index 832d9a0..40f135b 100644
 +      get 'campaign_submit', to: 'campaign#submit'
 +    end
    end
- 
+
    root 'errors#routing_error'
 
 ```
@@ -132,10 +193,10 @@ index d1777b6..9044bc9 100644
 +++ b/README.md
 @@ -412,6 +412,7 @@ git push heroku master
  + ルーティングのテスト
- 
+
  #### 演習問題
 ++ ルーティングテスト追加
- 
+
  ### レコードの表示、新規作成、更新、削除
  ### String Parameters
 diff --git a/config/routes.rb b/config/routes.rb
@@ -164,7 +225,7 @@ index ea44667..cad8334 100644
 @@ -20,6 +20,15 @@ describe 'Routes' do
                                       )
    end
- 
+
 +  # 顧客トップページ
 +  it 'should route customer top page' do
 +    expect(get: 'http://baukis-kai.example.com').to route_to(
@@ -212,15 +273,15 @@ index 2cb0fbe..d1777b6 100644
  + Rails.application.config
  + ホスト名による制約
 ++ ルーティングのテスト
- 
+
  #### 演習問題
- 
+
 diff --git a/config/environments/test.rb b/config/environments/test.rb
 index 30587ef..27275c7 100644
 --- a/config/environments/test.rb
 +++ b/config/environments/test.rb
 @@ -39,4 +39,10 @@ Rails.application.configure do
- 
+
    # Raises error for missing translations
    # config.action_view.raise_on_missing_translations = true
 +
@@ -306,13 +367,13 @@ index fb26e50..2cb0fbe 100644
 --- a/README.md
 +++ b/README.md
 @@ -408,6 +408,7 @@ git push heroku master
- 
+
  #### 制約
  + Rails.application.config
 ++ ホスト名による制約
- 
+
  #### 演習問題
- 
+
 diff --git a/config/routes.rb b/config/routes.rb
 index 1218c0c..9964be8 100644
 --- a/config/routes.rb
@@ -372,16 +433,16 @@ index 1218c0c..9964be8 100644
 +#                     root GET    /                             errors#routing_error
 +#                          GET    /*anything(.:format)          errors#routing_error
  #
- 
+
  Rails.application.routes.draw do
 -  get 'errors/routing_error'
 +  config = Rails.application.config.baukis_kai
- 
+
    concern :session_path do
      get    'login'   => 'sessions#new', as: :login
      resource :session, only: [:create, :destroy]
    end
- 
+
 -  namespace :staff do
 -    root   'top#index'
 -    concerns :session_path
@@ -393,7 +454,7 @@ index 1218c0c..9964be8 100644
 +      resource :account, execpt: [:new, :create, :destroy]
 +    end
    end
- 
+
 -  namespace :admin do
 -    root 'top#index'
 -    concerns :session_path
@@ -405,7 +466,7 @@ index 1218c0c..9964be8 100644
 +      resources :staff_members, only: [:index, :new, :create], path: 'staff'
 +    end
    end
- 
+
    namespace :customer, path: '' do
 
 ```
@@ -438,12 +499,12 @@ index 00db3d2..fb26e50 100644
 +++ b/README.md
 @@ -407,6 +407,8 @@ git push heroku master
  + resourceメソッドのオプション
- 
+
  #### 制約
 ++ Rails.application.config
 +
  #### 演習問題
- 
+
  ### レコードの表示、新規作成、更新、削除
 diff --git a/config/environments/development.rb b/config/environments/development.rb
 index 4b808ab..c6f4df0 100644
@@ -451,7 +512,7 @@ index 4b808ab..c6f4df0 100644
 +++ b/config/environments/development.rb
 @@ -53,9 +53,9 @@ Rails.application.configure do
    config.file_watcher = ActiveSupport::EventedFileUpdateChecker
- 
+
    config.baukis_kai = {
 -      staff: { host: '0.0.0.0', path: '' },
 +      staff: { host: '0.0.0.0', path: 'staff' },
@@ -459,7 +520,7 @@ index 4b808ab..c6f4df0 100644
 -      customer: { host: '0.0.0.0', path: 'mypage' }
 +      customer: { host: '0.0.0.0', path: '' }
    }
- 
+
    config.middleware.insert_after ActionDispatch::Static, Rack::LiveReload
 
 ```
@@ -495,7 +556,7 @@ index b6694f4..00db3d2 100644
  + 単数リソースの６つの基本アクション
  + resourceメソッド
 ++ resourceメソッドのオプション
- 
+
  #### 制約
  #### 演習問題
 diff --git a/config/routes.rb b/config/routes.rb
@@ -503,21 +564,21 @@ index 3f94d16..1218c0c 100644
 --- a/config/routes.rb
 +++ b/config/routes.rb
 @@ -33,14 +33,13 @@ Rails.application.routes.draw do
- 
+
    concern :session_path do
      get    'login'   => 'sessions#new', as: :login
 -    post   'session' => 'sessions#create', as: :session
 -    delete 'session' => 'sessions#destroy'
 +    resource :session, only: [:create, :destroy]
    end
- 
+
    namespace :staff do
      root   'top#index'
      concerns :session_path
 -    resource :account
 +    resource :account, execpt: [:new, :create, :destroy]
    end
- 
+
    namespace :admin do
 
 ```
@@ -550,14 +611,14 @@ index 7b39947..b6694f4 100644
 +++ b/README.md
 @@ -402,6 +402,9 @@ git push heroku master
  + resourcesメソッドのオプション
- 
+
  #### 単数リソース
 ++ 単数リソースの６つの基本アクション
 ++ resourceメソッド
 +
  #### 制約
  #### 演習問題
- 
+
 diff --git a/config/routes.rb b/config/routes.rb
 index f9f3ff6..3f94d16 100644
 --- a/config/routes.rb
@@ -582,7 +643,7 @@ index f9f3ff6..3f94d16 100644
      concerns :session_path
 +    resource :account
    end
- 
+
    namespace :admin do
 
 ```
@@ -618,7 +679,7 @@ index fcd1b36..7b39947 100644
  + resourcesメソッド
  + リンクの設置
 ++ resourcesメソッドのオプション
- 
+
  #### 単数リソース
  #### 制約
 diff --git a/config/routes.rb b/config/routes.rb
@@ -672,7 +733,7 @@ index e6e2bde..f9f3ff6 100644
 +#                     root GET    /                               errors#routing_error
 +#                          GET    /*anything(.:format)            errors#routing_error
  #
- 
+
  Rails.application.routes.draw do
 @@ -43,7 +38,7 @@ Rails.application.routes.draw do
    namespace :admin do
@@ -681,7 +742,7 @@ index e6e2bde..f9f3ff6 100644
 -    resources :staff_members
 +    resources :staff_members, only: [:index, :new, :create], path: 'staff'
    end
- 
+
    namespace :customer, path: '' do
 
 ```
@@ -721,7 +782,7 @@ index 92952df..fcd1b36 100644
  + resourcesメソッド
 -
 ++ リンクの設置
- 
+
  #### 単数リソース
  #### 制約
 diff --git a/app/assets/stylesheets/pages/_dashboard.scss b/app/assets/stylesheets/pages/_dashboard.scss
@@ -831,7 +892,7 @@ index 73bb55e..92952df 100644
 +++ b/README.md
 @@ -395,6 +395,11 @@ git push heroku master
  + 名前空間
- 
+
  #### リソースベースのルーティング
 ++ ７つの基本アクション
 ++ ルーティングの分類
@@ -889,7 +950,7 @@ index 34803eb..e6e2bde 100644
 +#                     root GET    /                                       errors#routing_error
 +#                          GET    /*anything(.:format)                    errors#routing_error
  #
- 
+
  Rails.application.routes.draw do
 @@ -35,6 +43,7 @@ Rails.application.routes.draw do
    namespace :admin do
@@ -897,7 +958,7 @@ index 34803eb..e6e2bde 100644
      concerns :session_path
 +    resources :staff_members
    end
- 
+
    namespace :customer, path: '' do
 
 ```
@@ -941,7 +1002,7 @@ index 356cf15..73bb55e 100644
 --- a/README.md
 +++ b/README.md
 @@ -391,6 +391,9 @@ git push heroku master
- 
+
  ### ルーティング
  #### ルーティングの基礎知識
 ++ アクション単位のルーティング
@@ -1248,10 +1309,10 @@ index 59a0d54..34803eb 100644
 +#                     root GET    /                               errors#routing_error
 +#                          GET    /*anything(.:format)            errors#routing_error
  #
- 
+
  Rails.application.routes.draw do
    get 'errors/routing_error'
- 
+
 -  namespace :staff do
 -    root   'top#index'
 +  concern :session_path do
@@ -1259,7 +1320,7 @@ index 59a0d54..34803eb 100644
      post   'session' => 'sessions#create', as: :session
      delete 'session' => 'sessions#destroy'
    end
- 
+
 +  namespace :staff do
 +    root   'top#index'
 +    concerns :session_path
@@ -1272,7 +1333,7 @@ index 59a0d54..34803eb 100644
 -    delete 'session' => 'sessions#destroy'
 +    concerns :session_path
    end
- 
+
 -  namespace :customer do
 +  namespace :customer, path: '' do
      root 'top#index'
@@ -1320,7 +1381,7 @@ index d8e0b6e..356cf15 100644
 +++ b/README.md
 @@ -390,6 +390,12 @@ git push heroku master
  + i18nの設定と適用
- 
+
  ### ルーティング
 +#### ルーティングの基礎知識
 +#### リソースベースのルーティング
@@ -1591,4 +1652,3 @@ index 7d95f8d..9a38e68 100644
      <LOAD_PATH number="0" />
 
 ```
-
