--- a/docs/journal/20170127.md
+++ b/docs/journal/20170127.md
@@ -2,7 +2,31 @@
 
 ## 概要
 
-2017-01-27の作業内容をまとめています。
+2017-01-27の作業内容をまとめています。この日は管理者による職員アカウント管理機能の実装を進め、CRUD操作の基本となるアクションを実装しました。
+
+### 関連ユースケース
+
+- **A-003**: 職員アカウント作成 - 管理者が新規職員アカウントを作成する
+- **A-004**: 職員アカウント編集 - 管理者が既存の職員アカウント情報を編集する
+
+### システム構成上の位置づけ
+
+この実装は管理者インターフェースの一部であり、システムアーキテクチャにおける以下の部分に関連しています：
+
+```plantuml
+@startuml "職員アカウント管理機能の実装"
+actor "管理者" as Admin
+rectangle "管理者インターフェース" {
+  [Admin::StaffMembersController] as Controller
+  [StaffMember] as Model
+  [Views] as Views
+}
+
+Admin --> Controller : 操作
+Controller --> Model : CRUD操作
+Controller --> Views : レンダリング
+@enduml
+```
 
 ## コミット: 4ac6dee
 
@@ -19,6 +43,10 @@ editアクション #6
 - M	app/controllers/admin/staff_members_controller.rb
 - M	app/views/admin/staff_members/_form.html.erb
 - A	app/views/admin/staff_members/edit.html.erb
+
+### 概要
+
+このコミットでは、職員アカウント管理機能の編集機能（editアクション）を実装しました。既存の職員情報を編集するためのフォームとコントローラアクションが追加されています。これはユースケース**A-004**（職員アカウント編集）の一部を実現するものです。
 
 ### 変更内容
 
@@ -38,9 +66,9 @@ index 43f1b68..b870c87 100644
  + showアクション
  + newアクション
 ++ editアクション
- 
+
  #### 管理者による職員アカウント管理機能（後編）
- 
+
 diff --git a/app/assets/stylesheets/components/_appForm.scss b/app/assets/stylesheets/components/_appForm.scss
 index 3512925..65bcc4e 100644
 --- a/app/assets/stylesheets/components/_appForm.scss
@@ -115,13 +143,26 @@ index 0000000..322228d
 
 ### 構造変更
 
+このコミットでは、職員編集機能のためのビューとコントローラアクションが追加されました。
+
 ```plantuml
-@startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+@startuml "職員編集機能"
+actor "管理者" as Admin
+rectangle "Admin::StaffMembersController" {
+  [edit] as EditAction
+}
+database "Database" {
+  [StaffMember]
+}
+rectangle "Views" {
+  [edit.html.erb]
+  [_form.html.erb]
+}
+
+Admin --> EditAction : アクセス
+EditAction --> StaffMember : 職員データ取得
+EditAction --> edit.html.erb : レンダリング
+edit.html.erb --> _form.html.erb : 部分テンプレート
 @enduml
 ```
 
@@ -142,6 +183,10 @@ newアクション #6
 - A	app/views/admin/staff_members/_form.html.erb
 - A	app/views/admin/staff_members/new.html.erb
 
+### 概要
+
+このコミットでは、職員アカウント管理機能の新規作成機能（newアクション）を実装しました。新しい職員を登録するためのフォームとコントローラアクションが追加されています。また、フォームのスタイルを定義するための_appForm.scssファイルも作成されました。これはユースケース**A-003**（職員アカウント作成）の一部を実現するものです。
+
 ### 変更内容
 
 ```diff
@@ -160,9 +205,9 @@ index 5f4ca3d..43f1b68 100644
  + indexアクション
  + showアクション
 ++ newアクション
- 
+
  #### 管理者による職員アカウント管理機能（後編）
- 
+
 diff --git a/app/assets/stylesheets/components/_appForm.scss b/app/assets/stylesheets/components/_appForm.scss
 new file mode 100644
 index 0000000..3512925
@@ -217,11 +262,11 @@ index 42ba8dc..741293f 100644
 --- a/app/assets/stylesheets/main.scss
 +++ b/app/assets/stylesheets/main.scss
 @@ -69,6 +69,7 @@
- 
+
  // フォーム
  @import "./components/form";
 +@import "./components/appForm";
- 
+
  //font-awesome
  @import "font-awesome";
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
@@ -305,13 +350,27 @@ index 0000000..2bfa195
 
 ### 構造変更
 
+このコミットでは、職員新規登録機能のためのビューとコントローラアクションが追加されました。また、フォームのスタイルを定義するCSSも実装されています。
+
 ```plantuml
-@startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+@startuml "職員新規登録機能"
+actor "管理者" as Admin
+rectangle "Admin::StaffMembersController" {
+  [new] as NewAction
+}
+rectangle "Views" {
+  [new.html.erb]
+  [_form.html.erb]
+}
+rectangle "Stylesheets" {
+  [_appForm.scss]
+}
+
+Admin --> NewAction : アクセス
+NewAction --> new.html.erb : レンダリング
+new.html.erb --> _form.html.erb : 部分テンプレート
+_appForm.scss ..> new.html.erb : スタイル適用
+_appForm.scss ..> _form.html.erb : スタイル適用
 @enduml
 ```
 
@@ -327,6 +386,10 @@ showアクション #6
 
 - M	README.md
 - M	app/controllers/admin/staff_members_controller.rb
+
+### 概要
+
+このコミットでは、職員アカウント管理機能の詳細表示機能（showアクション）を実装しました。ただし、実際の実装では詳細表示ページは作成せず、編集ページにリダイレクトする形式を採用しています。これにより、詳細表示と編集を一元化し、ユーザーインターフェースをシンプルにしています。これはユースケース**A-004**（職員アカウント編集）の一部を実現するものです。
 
 ### 変更内容
 
@@ -346,9 +409,9 @@ index 122dfdf..5f4ca3d 100644
  + 準備作業
  + indexアクション
 ++ showアクション
- 
+
  #### 管理者による職員アカウント管理機能（後編）
- 
+
 diff --git a/app/controllers/admin/staff_members_controller.rb b/app/controllers/admin/staff_members_controller.rb
 index 0d7a7c2..77506f7 100644
 --- a/app/controllers/admin/staff_members_controller.rb
@@ -368,13 +431,22 @@ index 0d7a7c2..77506f7 100644
 
 ### 構造変更
 
+このコミットでは、職員詳細表示機能のためのコントローラアクションが追加されましたが、実際には編集ページへのリダイレクトを行う実装となっています。
+
 ```plantuml
-@startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+@startuml "職員詳細表示機能"
+actor "管理者" as Admin
+rectangle "Admin::StaffMembersController" {
+  [show] as ShowAction
+  [edit] as EditAction
+}
+database "Database" {
+  [StaffMember]
+}
+
+Admin --> ShowAction : アクセス
+ShowAction --> StaffMember : 職員データ取得
+ShowAction --> EditAction : リダイレクト
 @enduml
 ```
 
@@ -395,6 +467,10 @@ indexアクション #6
 - A	app/views/admin/staff_members/index.html.erb
 - M	config/routes.rb
 
+### 概要
+
+このコミットでは、職員アカウント管理機能の一覧表示機能（indexアクション）を実装しました。職員の一覧を表示するためのテーブルスタイルとビューテンプレートが追加されています。また、ルーティングも更新され、職員管理のための全RESTfulアクションが有効になりました。これはユースケース**A-003**と**A-004**の基盤となる機能を提供するものです。
+
 ### 変更内容
 
 ```diff
@@ -413,9 +489,9 @@ index 02f72a7..122dfdf 100644
  #### 管理者による職員アカウント管理機能（前編）
  + 準備作業
 ++ indexアクション
- 
+
  #### 管理者による職員アカウント管理機能（後編）
- 
+
 diff --git a/app/assets/stylesheets/components/common/_table.scss b/app/assets/stylesheets/components/common/_table.scss
 new file mode 100644
 index 0000000..bf7656b
@@ -482,7 +558,7 @@ index c3e124a..42ba8dc 100644
 @@ -47,6 +47,9 @@
  // エラー
  @import "./components/common/errors";
- 
+
 +// テーブル
 +@import "./components/common/table";
 +
@@ -561,19 +637,37 @@ index 40f135b..7133f04 100644
 +      resources :staff_members, path: 'staff'
      end
    end
- 
+
 
 ```
 
 ### 構造変更
 
+このコミットでは、職員一覧表示機能のためのビューとコントローラアクション、およびテーブルスタイルが追加されました。また、ルーティングも更新され、職員管理のための全RESTfulアクションが有効になりました。
+
 ```plantuml
-@startuml
-' このコミットによる構造変更を表すダイアグラムをここに追加してください
-' 例:
-' class NewClass
-' class ExistingClass
-' NewClass --> ExistingClass
+@startuml "職員一覧表示機能"
+actor "管理者" as Admin
+rectangle "Admin::StaffMembersController" {
+  [index] as IndexAction
+}
+database "Database" {
+  [StaffMember]
+}
+rectangle "Views" {
+  [index.html.erb]
+}
+rectangle "Stylesheets" {
+  [_table.scss]
+}
+rectangle "Routes" {
+  [resources :staff_members]
+}
+
+Admin --> IndexAction : アクセス
+IndexAction --> StaffMember : 職員データ取得
+IndexAction --> index.html.erb : レンダリング
+_table.scss ..> index.html.erb : スタイル適用
+resources :staff_members --> IndexAction : ルーティング
 @enduml
 ```
-
