--- a/docs/journal/20250611.md
+++ b/docs/journal/20250611.md
@@ -2,7 +2,67 @@
 
 ## 概要
 
-2025-06-11の作業内容をまとめています。
+2025-06-11の作業内容をまとめています。このジャーナルでは、E2Eテスト環境の構築と設定の改善、およびリリース準備に関する作業を記録しています。
+
+## システム構成図
+
+```plantuml
+@startuml "Baukis-Kai CI/CD環境構成"
+!include <C4/C4_Container>
+
+Person(developer, "開発者", "アプリケーション開発者")
+
+System_Boundary(ci_env, "CI/CD環境") {
+    Container(github_actions, "GitHub Actions", "CI/CDパイプライン", "自動テスト・デプロイ")
+    Container(chrome, "Chrome", "ブラウザ", "E2Eテスト用ブラウザ")
+    ContainerDb(db, "テストデータベース", "MySQL", "テスト用データを格納")
+}
+
+System_Boundary(app_env, "アプリケーション環境") {
+    Container(rails_app, "Rails アプリケーション", "Ruby on Rails 7.2.2.1", "顧客管理システム")
+}
+
+Rel(developer, github_actions, "コードプッシュ")
+Rel(github_actions, chrome, "E2Eテスト実行")
+Rel(github_actions, db, "テストデータ操作")
+Rel(github_actions, rails_app, "デプロイ")
+
+@enduml
+```
+
+## 作業内容
+
+### E2Eテスト環境の改善
+
+前日に引き続き、E2Eテスト環境の構築と改善を行いました。特に、GitHub Actionsでの自動テスト実行のためのセットアップを強化しました。
+
+#### 変更点の概要
+
+1. GitHub Actions設定ファイルの更新（Chromeのセットアップ追加）
+2. Dockerfileの更新（Chrome関連ライブラリの追加）
+3. Capybara設定の分離と改善
+
+#### 技術的詳細
+
+```plantuml
+@startuml "E2Eテスト環境改善"
+package "CI環境" {
+  [GitHub Actions] --> [Chrome Setup]
+  [Chrome Setup] --> [Selenium WebDriver]
+}
+
+package "Docker環境" {
+  [Dockerfile] --> [Chrome Libraries]
+  [Chrome Libraries] --> [Selenium WebDriver]
+}
+
+package "テスト設定" {
+  [rails_helper.rb] --> [capybara_config.rb]
+  [capybara_config.rb] --> [Selenium WebDriver]
+}
+
+@enduml
+```
 
 ## コミット: 589b060
 
@@ -85,7 +145,7 @@ index 28b8976..c08a853 100644
 +++ b/spec/features/staff/program_management_spec.rb
 @@ -1,6 +1,6 @@
  require 'rails_helper'
- 
+
 -feature '職員によるプログラム管理', type: :system do
 +feature '職員によるプログラム管理' do
    include FeaturesSpecHelper
@@ -93,20 +153,20 @@ index 28b8976..c08a853 100644
    let(:staff_member) { create(:staff_member) }
 @@ -65,13 +65,14 @@ feature '職員によるプログラム管理', type: :system do
      all('a', text: I18n.t('staff.programs.form.delete')).last.click
- 
+
      # JavaScriptアラートを受け入れる
 -    page.driver.browser.switch_to.alert.accept
 +    # page.driver.browser.switch_to.alert.accept
- 
+
      expect(page).to have_css('.Flash__notice', text: I18n.t('staff.programs.destroy.flash_notice'))
      expect(Program.find_by(id: program_without_entries.id)).to be_nil
    end
- 
+
 -  scenario '職員がエントリーを管理する' do
 +  # type: :system指定時の挙動が不安定なので JavaScriptを使うE2Eテストは除外
 +  xscenario '職員がエントリーを管理する' do
      visit staff_program_path(program)
- 
+
      find("input[type='checkbox'].isApproved[data-entry-id='#{entry.id}']").click
 
 ```
@@ -140,7 +200,7 @@ index a71f2b1..90efec6 100644
 @@ -36,6 +36,9 @@ jobs:
            bundle exec rake db:create RAILS_ENV=test
            bundle exec rake db:migrate RAILS_ENV=test
- 
+
 +      - uses: browser-actions/setup-chrome@latest
 +      - run: chrome --version
 +
@@ -154,7 +214,7 @@ index c2c6661..96177e8 100644
 @@ -131,6 +131,24 @@ echo "Checking for OpenSSL configs:"
  find /usr -name "openssl-*.cnf"
  EOF
- 
+
 +# Chrome関連のライブラリ
 +RUN apt-get update && \
 +    apt-get install -y \
@@ -175,7 +235,7 @@ index c2c6661..96177e8 100644
 +
  # パスの設定
  ENV PATH="/root/.rbenv/shims:$PATH"
- 
+
 
 ```
 
@@ -244,9 +304,9 @@ index 17ff930..c2c6661 100644
 -            vim \
              && apt-get clean \
              && rm -rf /var/lib/apt/lists/*
- 
+
 @@ -144,3 +136,4 @@ ENV PATH="/root/.rbenv/shims:$PATH"
- 
+
  # 作業ディレクトリの設定
  WORKDIR /srv
 +
@@ -257,7 +317,7 @@ index da3a27d..09c97a9 100644
 @@ -7,54 +7,6 @@ require 'spec_helper'
  require 'rspec/rails'
  # Add additional requires below this line. Rails is not loaded until this point!
- 
+
 -# Capybara とSelenium WebDriverの設定
 -require 'capybara/rails'
 -require 'capybara/rspec'
@@ -403,7 +463,7 @@ index cad8334..2438582 100644
                                           action: 'index'
                                       )
 @@ -13,8 +13,8 @@ describe 'Routes' do
- 
+
    # 管理者ログインフォーム
    it 'should route administrator login form' do
 -    expect(get: 'http://baukis-kai.example.com/admin/login').to route_to(
@@ -414,7 +474,7 @@ index cad8334..2438582 100644
                                           action: 'new'
                                       )
 @@ -22,8 +22,8 @@ describe 'Routes' do
- 
+
    # 顧客トップページ
    it 'should route customer top page' do
 -    expect(get: 'http://baukis-kai.example.com').to route_to(
@@ -499,14 +559,14 @@ index 944d710..edae2fd 100644
 -  webdrivers
    webrick
    yard
- 
+
 diff --git a/config/environments/test.rb b/config/environments/test.rb
 index dc2c3b7..ea99a73 100644
 --- a/config/environments/test.rb
 +++ b/config/environments/test.rb
 @@ -48,8 +48,8 @@ Rails.application.configure do
    # config.action_view.raise_on_missing_translations = true
- 
+
    config.baukis_kai = {
 -      staff: { host: 'baukis-kai.example.com', path: 'staff' },
 -      admin: { host: 'baukis-kai.example.com', path: 'admin' },
@@ -522,7 +582,7 @@ index 190110a..28b8976 100644
 +++ b/spec/features/staff/program_management_spec.rb
 @@ -1,6 +1,6 @@
  require 'rails_helper'
- 
+
 -feature '職員によるプログラム管理' do
 +feature '職員によるプログラム管理', type: :system do
    include FeaturesSpecHelper
@@ -530,28 +590,28 @@ index 190110a..28b8976 100644
    let(:staff_member) { create(:staff_member) }
 @@ -20,8 +20,7 @@ feature '職員によるプログラム管理' do
    end
- 
+
    scenario '職員がプログラム詳細を表示する' do
 -    visit staff_programs_path
 -    click_link I18n.t('staff.programs.form.show')
 +    visit staff_program_path(program)
- 
+
      expect(page).to have_content(program.title)
      expect(page).to have_content(program.description)
 @@ -49,8 +48,7 @@ feature '職員によるプログラム管理' do
    end
- 
+
    scenario '職員がプログラムを編集する' do
 -    visit staff_programs_path
 -    click_link I18n.t('staff.programs.form.edit')
 +    visit edit_staff_program_path(program)
- 
+
      fill_in I18n.t('activerecord.attributes.program.title'), with: 'Updated Program'
      click_button I18n.t('staff.programs.edit.update')
 @@ -66,6 +64,9 @@ feature '職員によるプログラム管理' do
- 
+
      all('a', text: I18n.t('staff.programs.form.delete')).last.click
- 
+
 +    # JavaScriptアラートを受け入れる
 +    page.driver.browser.switch_to.alert.accept
 +
@@ -567,7 +627,7 @@ index cd000d0..da3a27d 100644
  Capybara.server_host = '0.0.0.0'
  Capybara.server_port = 3001
 +Capybara.app_host = 'http://127.0.0.1:3001'
- 
+
  # スクリーンショット設定
  Capybara::Screenshot.autosave_on_failure = true
 diff --git a/spec/support/features_spec_helper.rb b/spec/support/features_spec_helper.rb
@@ -584,8 +644,7 @@ index aac0165..5d2f87c 100644
 +    # パスプレフィックスを設定（必要な場合）
 +    # Capybara.app_host = "http://localhost:3001/#{config[namespace][:path]}"
    end
- 
+
    def login_as_staff_member(staff_member, password = 'pw')
 
 ```
-
